Use words for numbers as appropriately

--- a/tex/p017.tex
+++ b/tex/p017.tex
@@ -32,7 +32,7 @@
 \vs p017 1:9 \pc From time to time, great conclaves take place on these Paradise satellites of the Spirit. Trinitized sons assigned to these worlds, together with the ascenders who have attained Paradise, assemble with the spirit personalities of the Third Source and Centre in the reunions of the struggles and triumphs of the ascendant career. The Supreme Executives always preside over such fraternal gatherings.
 \vs p017 1:10 Once in each Paradise millennium the Seven Supreme Executives vacate their seats of authority and go to Paradise, where they hold their millennial conclave of universal greeting and well\hyp{}wishing to the intelligent hosts of creation. This eventful occasion takes place in the immediate presence of Majeston, the chief of all reflective spirit groups. And they are thus able to communicate simultaneously with all their associates in the grand universe through the unique functioning of universal reflectivity.
 \usection{Majeston --- Chief of Reflectivity}
-\vs p017 2:1 The Reflective Spirits are of divine Trinity origin. There are 50 of these unique and somewhat mysterious beings. 7 of these extraordinary personalities were created at a time, and each such creative episode was effected by a liaison of the Paradise Trinity and one of the Seven Master Spirits.
+\vs p017 2:1 The Reflective Spirits are of divine Trinity origin. There are 50 of these unique and somewhat mysterious beings. Seven of these extraordinary personalities were created at a time, and each such creative episode was effected by a liaison of the Paradise Trinity and one of the Seven Master Spirits.
 \vs p017 2:2 This momentous transaction, occurring in the dawn of time, represents the initial effort of the Supreme Creator Personalities, represented by the Master Spirits, to function as cocreators with the Paradise Trinity. This union of the creative power of the Supreme Creators with the creative potentials of the Trinity is the very source of the actuality of the Supreme Being. Therefore, when the cycle of reflective creation had run its course, when each of the Seven Master Spirits had found perfect creative synchrony with the Paradise Trinity, when the 49\ts{th} Reflective Spirit had personalized, then a new and far\hyp{}reaching reaction occurred in the Deity Absolute which imparted new personality prerogatives to the Supreme Being and culminated in the personalization of Majeston, the reflectivity chief and Paradise centre of all the work of the 49 Reflective Spirits and their associates throughout the universe of universes.
 \vs p017 2:3 Majeston is a true person, the personal and infallible centre of reflectivity phenomena in all seven superuniverses of time and space. He maintains permanent Paradise headquarters near the centre of all things at the rendezvous of the Seven Master Spirits. He is concerned solely with the co\hyp{}ordination and maintenance of the reflectivity service in the far\hyp{}flung creation; he is not otherwise involved in the administration of universe affairs.
 \vs p017 2:4 Majeston is not included in our catalogue of Paradise personalities because he is the only existing personality of divinity created by the Supreme Being in functional liaison with the Deity Absolute. He is a person, but he is exclusively and apparently automatically concerned with this one phase of universe economy; he does not now function in any personal capacity with relation to other (nonreflective) orders of universe personalities.
@@ -51,7 +51,7 @@
 \vs p017 3:10 \pc During the present universe age the space range of the extra\hyp{}Paradise reflectivity service seems to be limited by the periphery of the seven superuniverses. Otherwise, the function of this service seems to be independent of time and space. It appears to be independent of all known subabsolute universe circuits.
 \vs p017 3:11 On the headquarters of each superuniverse the reflective organization acts as a segregated unit; but on certain special occasions, under the direction of Majeston, all seven may and do act in universal unison, as in the event of the jubilee occasioned by the settling of an entire local universe in light and life and at the times of the millennial greetings of the Seven Supreme Executives.
 \usection{The Reflective Image Aids}
-\vs p017 4:1 The 49 Reflective Image Aids were created by the Reflective Spirits, and there are just 7 Aids on the headquarters of each superuniverse. The first creative act of the seven Reflective Spirits of Uversa was the production of their seven Image Aids, each Reflective Spirit creating his own Aid. The Image Aids are, in certain attributes and characteristics, perfect reproductions of their Reflective Mother Spirits; they are virtual duplications minus the attribute of reflectivity. They are true images and constantly function as the channel of communication between the Reflective Spirits and the superuniverse authorities. The Image Aids are not merely assistants; they are actual representations of their respective Spirit ancestors; they are \bibemph{images,} and they are true to their name.
+\vs p017 4:1 The 49 Reflective Image Aids were created by the Reflective Spirits, and there are just seven Aids on the headquarters of each superuniverse. The first creative act of the seven Reflective Spirits of Uversa was the production of their seven Image Aids, each Reflective Spirit creating his own Aid. The Image Aids are, in certain attributes and characteristics, perfect reproductions of their Reflective Mother Spirits; they are virtual duplications minus the attribute of reflectivity. They are true images and constantly function as the channel of communication between the Reflective Spirits and the superuniverse authorities. The Image Aids are not merely assistants; they are actual representations of their respective Spirit ancestors; they are \bibemph{images,} and they are true to their name.
 \vs p017 4:2 The Reflective Spirits themselves are true personalities but of such an order as to be incomprehensible to material beings. Even on a superuniverse headquarters sphere they require the assistance of their Image Aids in all personal intercourse with the Ancients of Days and their associates. In contacts between the Image Aids and the Ancients of Days, sometimes one Aid functions acceptably, while on other occasions two, three, four, or even all seven are required for the full and proper presentation of the communication entrusted to their transmission. Likewise, the messages of the Image Aids are variously received by one, two, or all three Ancients of Days, as the content of the communication may require.
 \vs p017 4:3 The Image Aids serve forever by the sides of their ancestral Spirits, and they have at their disposal an unbelievable host of helper seconaphim. The Image Aids do not directly function in connection with the training worlds of ascending mortals. They are closely associated with the intelligence service of the universal scheme of mortal progression, but you will not personally come in contact with them when you sojourn in the Uversa schools because these seemingly personal beings are devoid of will; they do not exercise the power of choice. They are true images, wholly reflective of the personality and mind of the individual Spirit ancestor. As a class, ascending mortals do not intimately contact with reflectivity. Always some being of the reflective nature will be interposed between you and the actual operation of the service.
 \usection{The Seven Spirits of the Circuits}
