--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -34,7 +34,7 @@
 \vs p029 2:10 \ublistelem{1.}\bibnobreakspace \bibemph{Supreme Centre Supervisors.} These seven co\hyp{}ordinates and associates of the Supreme Power Directors are the regulators of the master energy circuits of the grand universe. Each centre supervisor is headquartered on one of the special worlds of the Seven Supreme Executives, and they work in close association with these co\hyp{}ordinators of general universe affairs.
 \vs p029 2:11 The Supreme Power Directors and the Supreme Centre Supervisors function both as individuals and conjointly with regard to all cosmic phenomena below the levels of “gravity energy.” When acting in liaison, these 14 beings are to universe power what the Seven Supreme Executives are to general universe affairs, and what the Seven Master Spirits are to the cosmic mind.
 \vs p029 2:12 \ublistelem{2.}\bibnobreakspace \bibemph{Havona Centres.} Before the creation of the universes of time and space, power centres were not required in Havona, but ever since these far\hyp{}distant times, 1,000,000 have functioned in the central creation, each centre having the supervision of 1,000 Havona worlds. Here in the divine universe there is perfection of energy control, a condition not existing elsewhere. Perfection of energy regulation is the ultimate goal of all the power centres and the physical controllers of space.
-\vs p029 2:13 \ublistelem{3.}\bibnobreakspace \bibemph{Superuniverse Centres.} Occupying an enormous area on the capital sphere of each of the seven superuniverses are 1,000 power centres of the 3\ts{rd} order. Three currents of primary energy of 10 segregations each come in to these power centres, but 7 specialized and well\hyp{}directed, though imperfectly controlled, circuits of power go forth from their seat of united action. This is the electronic organization of universe power.
+\vs p029 2:13 \ublistelem{3.}\bibnobreakspace \bibemph{Superuniverse Centres.} Occupying an enormous area on the capital sphere of each of the seven superuniverses are 1,000 power centres of the 3\ts{rd} order. Three currents of primary energy of 10 segregations each come in to these power centres, but seven specialized and well\hyp{}directed, though imperfectly controlled, circuits of power go forth from their seat of united action. This is the electronic organization of universe power.
 \vs p029 2:14 All energy is circuited in the Paradise cycle, but the Universe Power Directors \bibemph{direct} the force\hyp{}energies of nether Paradise as they find them modified in the space functions of the central and superuniverses, converting and directing these energies into channels of useful and constructive application. There is a difference between Havona energy and the energies of the superuniverses. The power charge of a superuniverse consists of 3 phases of energy of 10 segregations each. This threefold energy charge spreads throughout the space of the grand universe; it is like a vast moving ocean of energy which engulfs and bathes the whole of each of the seven supercreations.
 \vs p029 2:15 The electronic organization of universe power functions in seven phases and discloses varying response to local or linear gravity. This sevenfold circuit proceeds from the superuniverse power centres and pervades each supercreation. Such specialized currents of time and space are definite and localized energy movements initiated and directed for specific purposes, much as the Gulf Stream functions as a circumscribed phenomenon in the midst of the Atlantic Ocean.
 \vs p029 2:16 \ublistelem{4.}\bibnobreakspace \bibemph{Local Universe Centres.} On the headquarters of each local universe are stationed 100 power centres of the 4\ts{th} order. They function to downstep and otherwise to modify the seven power circuits emanating from superuniverse headquarters, thus making them applicable to the services of the constellations and systems. The local astronomical catastrophes of space are of passing concern to these power centres; they are engaged in the orderly dispatch of effective energy to the subsidiary constellations and systems. They are of great assistance to the Creator Sons during the later times of universe organization and energy mobilization. These centres are able to provide intensified lanes of energy useful for interplanetary communication between important inhabited points. Such a \bibemph{lane} or \bibemph{line} of energy, sometimes also called an energy path, is a direct circuit of energy from one power centre to another power centre or from one physical controller to another controller. It is an individualized stream of power and stands in contrast to the free space movements of undifferentiated energy.
@@ -51,8 +51,8 @@
 \vs p029 3:7 The power centres utilize vast mechanisms and co\hyp{}ordinations of a material order in liaison with the living mechanisms of the various segregated energy concentrations. Each individual power centre is constituted in exactly 1,000,000 units of functional control, and these energy\hyp{}modifying units are not stationary as are the vital organs of man’s physical body; these “vital organs” of power regulation are mobile and truly kaleidoscopic in associative possibilities.
 \vs p029 3:8 It is utterly beyond my ability to explain the manner in which these living beings encompass the manipulation and regulation of the master circuits of universe energy. To undertake to inform you further concerning the size and function of these gigantic and almost perfectly efficient power centres, would only add to your confusion and consternation. They are both living and “personal,” but they are beyond your comprehension.
 \vs p029 3:9 \pc Outside of Havona the Supreme Power Centres function only on especially constructed (architectural) spheres or on otherwise suitably constituted space bodies. The architectural worlds are so constructed that the living power centres can act as selective switches to directionize, modify, and concentrate the energies of space as they pour over these spheres. They could not so function on an ordinary evolutionary sun or planet. Certain groups are also concerned in the heating and other material necessities of these special headquarters worlds. And though it is beyond the scope of Urantia knowledge, I may state that these orders of living power personalities have much to do with the distribution of the light that shines without heat. They do not produce this phenomenon, but they are concerned with its dissemination and directionization.
-\vs p029 3:10 \pc The power centres and their subordinate controllers are assigned to the working of all of the physical energies of organized space. They work with the 3 basic currents of 10 energies each. That is the energy charge of organized space; and organized space is their domain. The Universe Power Directors have nothing whatever to do with those tremendous actions of force which are now taking place outside the present boundaries of the seven superuniverses.
-\vs p029 3:11 The power centres and controllers exert perfect control over only 7 of the 10 forms of energy contained in each basic universe current; those forms which are partly or wholly exempt from their control must represent the unpredictable realms of energy manifestation dominated by the Unqualified Absolute. If they exert an influence upon the primordial forces of this Absolute, we are not cognizant of such functions, though there is some slight evidence which would warrant the opinion that certain of the physical controllers are sometimes automatically reactive to certain impulses of the Universal Absolute.
+\vs p029 3:10 \pc The power centres and their subordinate controllers are assigned to the working of all of the physical energies of organized space. They work with the three basic currents of ten energies each. That is the energy charge of organized space; and organized space is their domain. The Universe Power Directors have nothing whatever to do with those tremendous actions of force which are now taking place outside the present boundaries of the seven superuniverses.
+\vs p029 3:11 The power centres and controllers exert perfect control over only seven of the ten forms of energy contained in each basic universe current; those forms which are partly or wholly exempt from their control must represent the unpredictable realms of energy manifestation dominated by the Unqualified Absolute. If they exert an influence upon the primordial forces of this Absolute, we are not cognizant of such functions, though there is some slight evidence which would warrant the opinion that certain of the physical controllers are sometimes automatically reactive to certain impulses of the Universal Absolute.
 \vs p029 3:12 These living power mechanisms are not consciously related to the master universe energy overcontrol of the Unqualified Absolute, but we surmise that their entire and almost perfect scheme of power direction is in some unknown manner subordinated to this supergravity presence. In any local energy situation the centres and controllers exert near\hyp{}supremacy, but they are always conscious of the superenergy presence and the unrecognizable performance of the Unqualified Absolute.
 \usection{The Master Physical Controllers}
 \vs p029 4:1 These beings are the mobile subordinates of the Supreme Power Centres. The physical controllers are endowed with capabilities of individuality metamorphosis of such a nature that they can engage in a remarkable variety of autotransport, being able to traverse local space at velocities approaching the flight of Solitary Messengers. But like all other space traversers they require the assistance of both their fellows and certain other types of beings in overcoming the action of gravity and the resistance of inertia in departing from a material sphere.
@@ -74,7 +74,7 @@
 \vs p029 4:17 These directors alternate periods of executive service in the minor sectors with equal periods of inspection service to the realms of space. At least one acting inspector is always present in each local system, maintaining headquarters on its capital sphere. They keep the whole vast living energy aggregation in harmonious synchrony.
 \vs p029 4:18 \ublistelem{2.}\bibnobreakspace \bibemph{Mechanical Controllers.} These are the exceedingly versatile and mobile assistants of the associate power directors. Trillions upon trillions of them are commissioned in Ensa, your minor sector. These beings are called mechanical controllers because they are so completely dominated by their superiors, so fully subservient to the will of the associate power directors. Nevertheless they are, themselves, very intelligent, and their work, though mechanical and matter\hyp{}of\hyp{}fact in nature, is skillfully performed.
 \vs p029 4:19 Of all the Master Physical Controllers assigned to the inhabited worlds, the mechanical controllers are by far the most powerful. Possessing the living endowment of antigravity in excess of all other beings, each controller has a gravity resistance equalled only by enormous spheres revolving at tremendous velocity. 10 of these controllers are now stationed on Urantia, and one of their most important planetary activities is to facilitate the departure of seraphic transports. In so functioning, all 10 of the mechanical controllers act in unison while a battery of 1,000 energy transmitters provides the initial momentum for the seraphic departure.
-\vs p029 4:20 The mechanical controllers are competent to directionize the flow of energy and to facilitate its concentration into the specialized currents or circuits. These mighty beings have much to do with the segregation, directionization, and intensification of the physical energies and with the equalization of the pressures of the interplanetary circuits. They are expert in the manipulation of 21 of the 30 physical energies of space, constituting the power charge of a superuniverse. They are also able to accomplish much towards the management and control of 6 of the 9 more subtle forms of physical energy. By placing these controllers in proper technical relationship to each other and to certain of the power centres, the associate power directors are enabled to effect unbelievable changes in power adjustment and energy control.
+\vs p029 4:20 The mechanical controllers are competent to directionize the flow of energy and to facilitate its concentration into the specialized currents or circuits. These mighty beings have much to do with the segregation, directionization, and intensification of the physical energies and with the equalization of the pressures of the interplanetary circuits. They are expert in the manipulation of 21 of the 30 physical energies of space, constituting the power charge of a superuniverse. They are also able to accomplish much towards the management and control of six of the nine more subtle forms of physical energy. By placing these controllers in proper technical relationship to each other and to certain of the power centres, the associate power directors are enabled to effect unbelievable changes in power adjustment and energy control.
 \vs p029 4:21 The Master Physical Controllers often function in batteries of hundreds, thousands, and even millions and by varying their positions and formations are able to effect energy control in a collective as well as an individual capacity. As requirements vary, they can upstep and accelerate the energy volume and movement or detain, condense, and retard the energy currents. They influence energy and power transformations somewhat as so\hyp{}called catalytic agents augment chemical reactions. They function by inherent ability and in co\hyp{}operation with the Supreme Power Centres.
 \vs p029 4:22 \ublistelem{3.}\bibnobreakspace \bibemph{Energy Transformers.} The number of these beings in a superuniverse is unbelievable. There are almost 1,000,000 in Satania alone, and the usual quota is 100 for each inhabited world.
 \vs p029 4:23 The energy transformers are the conjoint creation of the Seven Supreme Power Directors and the Seven Centre\fnst{In 1955 text ``Central'', but there is no mention of the Seven \bibemph{Central} Supervisors anywhere in the text and there are multiple references to the Seven \bibemph{Centre} Supervisors; the primary description of them is given at \bibref[29:2.10]{p029 2:10}.} Supervisors. They are among the more personal orders of physical controllers, and except when an associate power director is present on an inhabited world, the transformers are in command. They are the planetary inspectors of all departing seraphic transports. All classes of celestial life can utilize the less personal orders of the physical controllers only by liaison with the more personal orders of the associate directors and the energy transformers.
