--- a/tex/p031.tex
+++ b/tex/p031.tex
@@ -60,26 +60,26 @@
 \vs p031 7:5 One of us holds the opinion that this vacant place in the corps will be filled by some type of being of origin in the new universe of their future service; the other inclines to the belief that this place will be occupied by some type of Paradise personality not yet created, eventuated, or trinitized. But we will most likely await the entrance of the finaliters upon their 7\ts{th} stage of spirit attainment before we really know.
 \usection{The Transcendentalers}
 \vs p031 8:1 Part of the perfected mortal’s experience on Paradise as a finaliter consists in the effort to achieve comprehension of the nature and function of more than one thousand groups of the transcendental supercitizens of Paradise, eventuated beings of absonite attributes. In their association with these superpersonalities, the ascendant finaliters receive great assistance from the helpful guidance of numerous orders of transcendental ministers who are assigned to the task of introducing the evolved finaliters to their new Paradise brethren. The entire order of the Transcendentalers live in the west of Paradise in a vast area which they exclusively occupy.
-\vs p031 8:2 In the discussion of Transcendentalers we are restricted, not only by the limitations of human comprehension, but also by the terms of the mandate governing these disclosures concerning the personalities of Paradise. These beings are in no way connected with the mortal ascent to Havona. The vast host of the Paradise Transcendentalers have nothing whatever to do with the affairs of either Havona or the 7 superuniverses, being concerned only with the superadministration of the affairs of the master universe.
+\vs p031 8:2 In the discussion of Transcendentalers we are restricted, not only by the limitations of human comprehension, but also by the terms of the mandate governing these disclosures concerning the personalities of Paradise. These beings are in no way connected with the mortal ascent to Havona. The vast host of the Paradise Transcendentalers have nothing whatever to do with the affairs of either Havona or the seven superuniverses, being concerned only with the superadministration of the affairs of the master universe.
 \vs p031 8:3 You, being a creature, can conceive of a Creator, but you can hardly comprehend that there exists an enormous and diversified aggregation of intelligent beings who are neither Creators nor creatures. These Transcendentalers create no beings, neither were they ever created. In speaking of their origin, in order to avoid using a new term --- an arbitrary and meaningless designation --- we deem it best to say that Transcendentalers simply \bibemph{eventuate.} The Deity Absolute may well have been concerned in their origin and may be implicated in their destiny, but these unique beings are not now dominated by the Deity Absolute. They are subject to God the Ultimate, and their present Paradise sojourn is in every way Trinity supervised and directed.
 \vs p031 8:4 Although all mortals who attain Paradise frequently fraternize with the Transcendentalers as they do with the Paradise Citizens, it develops that man’s first serious contact with a Transcendentaler occurs on that eventful occasion when, as a member of a new finaliter group, the mortal ascender stands in the finaliter receiving circle as the Trinity oath of eternity is administered by the chief of Transcendentalers, the presiding head of the Architects of the Master Universe.
 \usection{Architects of the Master Universe}
 \vs p031 9:1 The Architects of the Master Universe are the governing corps of the Paradise Transcendentalers. This governing corps numbers 28,011 personalities possessing master minds, superb spirits, and supernal absonites. The presiding officer of this magnificent group, the senior Master Architect, is the co\hyp{}ordinating head of all Paradise intelligences below the level of Deity.
-\vs p031 9:2 The 16\ts{th} proscription of the mandate authorizing these narratives says: “If deemed wise, the existence of the Architects of the Master Universe and their associates may be disclosed, but their origin, nature, and destiny may not be fully revealed.” We may, however, inform you that these Master Architects exist in 7 levels of the absonite. These 7 groups are classified as follows:
+\vs p031 9:2 The 16\ts{th} proscription of the mandate authorizing these narratives says: “If deemed wise, the existence of the Architects of the Master Universe and their associates may be disclosed, but their origin, nature, and destiny may not be fully revealed.” We may, however, inform you that these Master Architects exist in seven levels of the absonite. These seven groups are classified as follows:
 \vs p031 9:3 \ublistelem{1.}\bibnobreakspace \bibemph{The Paradise Level.} Only the senior or first\hyp{}eventuated Architect functions on this highest level of the absonite. This ultimate personality --- neither Creator nor creature --- eventuated in the dawn of eternity and now functions as the exquisite co\hyp{}ordinator of Paradise and its 21 worlds of associated activities.
 \vs p031 9:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Havona Level.} The second Architect eventuation yielded three master planners and absonite administrators, and they have always been devoted to the co\hyp{}ordination of the one billion perfect spheres of the central universe. Paradise tradition asserts that these three Architects, with the counsel of the pre\hyp{}eventuated senior Architect, contributed to the planning of Havona, but we really do not know.
-\vs p031 9:5 \ublistelem{3.}\bibnobreakspace \bibemph{The Superuniverse Level.} The third absonite level embraces the 7 Master Architects of the 7 superuniverses, who now, as a group, spend about equal time in the company of the Seven Master Spirits on Paradise and with the Seven Supreme Executives on the 7 special worlds of the Infinite Spirit. They are the superco\hyp{}ordinators of the grand universe.
-\vs p031 9:6 \ublistelem{4.}\bibnobreakspace \bibemph{The Primary Space Level.} This group numbers 70 Architects, and we conjecture that they are concerned with the ultimate plans for the first universe of outer space, now mobilizing beyond the borders of the present 7 superuniverses.
+\vs p031 9:5 \ublistelem{3.}\bibnobreakspace \bibemph{The Superuniverse Level.} The third absonite level embraces the seven Master Architects of the seven superuniverses, who now, as a group, spend about equal time in the company of the Seven Master Spirits on Paradise and with the Seven Supreme Executives on the seven special worlds of the Infinite Spirit. They are the superco\hyp{}ordinators of the grand universe.
+\vs p031 9:6 \ublistelem{4.}\bibnobreakspace \bibemph{The Primary Space Level.} This group numbers 70 Architects, and we conjecture that they are concerned with the ultimate plans for the first universe of outer space, now mobilizing beyond the borders of the present seven superuniverses.
 \vs p031 9:7 \ublistelem{5.}\bibnobreakspace \bibemph{The Secondary Space Level.} This fifth corps of Architects numbers 490, and again we conjecture that they must be concerned with the second universe of outer space, where already our physicists have detected definite energy mobilizations.
 \vs p031 9:8 \ublistelem{6.}\bibnobreakspace \bibemph{The Tertiary Space Level.} This sixth group of Master Architects numbers 3,430, and we likewise infer that they may be occupied with the gigantic plans for the third universe of outer space.
 \vs p031 9:9 \ublistelem{7.}\bibnobreakspace \bibemph{The Quartan Space Level.} This, the final and largest corps, consists of 24,010 Master Architects, and if our former conjectures are valid, it must be related to the fourth and last of the ever\hyp{}increasing\hyp{}sized universes of outer space.
-\vs p031 9:10 \pc These 7 groups of Master Architects total 28,011 universe planners. On Paradise there is a tradition that far back in eternity there was attempted the eventuation of the 28,012\ts{th} Master Architect, but that this being failed to absonitize, experiencing personality seizure by the Universal Absolute. It is possible that the ascending series of the Master Architects attained the limit of absonity in the 28,011\ts{th} Architect, and that the 28,012\ts{th} attempt encountered the mathematical level of the presence of the Absolute. In other words, at the 28,012\ts{th} eventuation level the quality of absonity equivalated to the level of the Universal and attained the value of the Absolute.
-\vs p031 9:11 \pc In their functional organization the three supervising Architects of Havona act as associate assistants to the solitary Paradise Architect. The 7 Architects of the superuniverses act as co\hyp{}ordinates of the 3 supervisors of Havona. The 70 planners of the universes of the primary outer space level are at present serving as associate assistants to the 7 Architects of the 7 superuniverses.
+\vs p031 9:10 \pc These seven groups of Master Architects total 28,011 universe planners. On Paradise there is a tradition that far back in eternity there was attempted the eventuation of the 28,012\ts{th} Master Architect, but that this being failed to absonitize, experiencing personality seizure by the Universal Absolute. It is possible that the ascending series of the Master Architects attained the limit of absonity in the 28,011\ts{th} Architect, and that the 28,012\ts{th} attempt encountered the mathematical level of the presence of the Absolute. In other words, at the 28,012\ts{th} eventuation level the quality of absonity equivalated to the level of the Universal and attained the value of the Absolute.
+\vs p031 9:11 \pc In their functional organization the three supervising Architects of Havona act as associate assistants to the solitary Paradise Architect. The seven Architects of the superuniverses act as co\hyp{}ordinates of the 3 supervisors of Havona. The 70 planners of the universes of the primary outer space level are at present serving as associate assistants to the seven Architects of the seven superuniverses.
 \vs p031 9:12 The Architects of the Master Universe have at their disposal numerous groups of assistants and helpers, including two vast orders of force organizers, the primary eventuated and the associate transcendental. These Master Force Organizers are not to be confused with the power directors, who are germane to the grand universe.
 \vs p031 9:13 All beings produced by the union of the children of time and eternity, such as the trinitized offspring of the finaliters and the Paradise Citizens, become wards of the Master Architects. But of all other creatures or entities revealed as functioning in the present organized universes, only Solitary Messengers and Inspired Trinity Spirits maintain any organic association with the Transcendentalers and the Architects of the Master Universe.
 \vs p031 9:14 The Master Architects contribute technical approval of the assignment of the Creator Sons to their space sites for the organization of the local universes. There is a very close association between the Master Architects and the Paradise Creator Sons, and while this relationship is unrevealed, you have been informed of the association of the Architects and the grand universe Supreme Creators in the relationship of the first experiential Trinity. These two groups, together with the evolving and experiential Supreme Being, constitute the Trinity Ultimate of transcendental values and master universe meanings.
 \usection{The Ultimate Adventure}
-\vs p031 10:1 The senior Master Architect has the oversight of the 7 Corps of the Finality, and they are:
+\vs p031 10:1 The senior Master Architect has the oversight of the seven Corps of the Finality, and they are:
 \vs p031 10:2 \ublistelem{1.}\bibnobreakspace The Corps of Mortal Finaliters.
 \vs p031 10:3 \ublistelem{2.}\bibnobreakspace The Corps of Paradise Finaliters.
 \vs p031 10:4 \ublistelem{3.}\bibnobreakspace The Corps of Trinitized Finaliters.
@@ -87,8 +87,8 @@
 \vs p031 10:6 \ublistelem{5.}\bibnobreakspace The Corps of Havona Finaliters.
 \vs p031 10:7 \ublistelem{6.}\bibnobreakspace The Corps of Transcendental Finaliters.
 \vs p031 10:8 \ublistelem{7.}\bibnobreakspace The Corps of Unrevealed Sons of Destiny.
-\vs p031 10:9 Each of these destiny corps has a presiding head, and the 7 constitute the Supreme Council of Destiny on Paradise; and during the present universe age Grandfanda is the chief of this supreme body of universe assignment for the children of ultimate destiny.
-\vs p031 10:10 The gathering together of these 7 finaliter corps signifies reality mobilization of potentials, personalities, minds, spirits, absonites, and experiential actualities that probably transcend even the future master universe functions of the Supreme Being. These 7 finaliter corps probably signify the present activity of the Ultimate Trinity engaged in mustering the forces of the finite and the absonite in preparation for inconceivable developments in the universes of outer space. Nothing like this mobilization has taken place since the near times of eternity when the Paradise Trinity similarly mobilized the then existing personalities of Paradise and Havona and commissioned them as administrators and rulers of the projected 7 superuniverses of time and space. The 7 finaliter corps represent the divinity response of the grand universe to the future needs of the undeveloped potentials in the outer universes of future\hyp{}eternal activities.
+\vs p031 10:9 Each of these destiny corps has a presiding head, and the seven constitute the Supreme Council of Destiny on Paradise; and during the present universe age Grandfanda is the chief of this supreme body of universe assignment for the children of ultimate destiny.
+\vs p031 10:10 The gathering together of these seven finaliter corps signifies reality mobilization of potentials, personalities, minds, spirits, absonites, and experiential actualities that probably transcend even the future master universe functions of the Supreme Being. These seven finaliter corps probably signify the present activity of the Ultimate Trinity engaged in mustering the forces of the finite and the absonite in preparation for inconceivable developments in the universes of outer space. Nothing like this mobilization has taken place since the near times of eternity when the Paradise Trinity similarly mobilized the then existing personalities of Paradise and Havona and commissioned them as administrators and rulers of the projected seven superuniverses of time and space. The seven finaliter corps represent the divinity response of the grand universe to the future needs of the undeveloped potentials in the outer universes of future\hyp{}eternal activities.
 \vs p031 10:11 We venture the forecast of future and greater outer universes of inhabited worlds, new spheres peopled with new orders of exquisite and unique beings, a material universe sublime in its ultimacy, a vast creation lacking in only one important detail --- the presence of actual \bibemph{finite experience} in the universal life of ascendant existence. Such a universe will come into being under a tremendous experiential handicap: the deprivation of participation in the evolution of the Almighty Supreme. These outer universes will all enjoy the matchless ministry and supernal overcontrol of the Supreme Being, but the very fact of his active presence precludes their participation in the actualization of the Supreme Deity.
 \vs p031 10:12 During the present universe age the evolving personalities of the grand universe suffer many difficulties due to the incomplete actualization of the sovereignty of God the Supreme, but we are all sharing the unique experience of his evolution. We evolve in him and he evolves in us. Sometime in the eternal future the evolution of Supreme Deity will become a completed fact of universe history, and the opportunity to participate in this wonderful experience will have passed from the stage of cosmic action.
 \vs p031 10:13 But those of us who have acquired this unique experience during the youth of the universe will treasure it throughout all future eternity. And many of us speculate that it may be the mission of the gradually accumulating reserves of the ascendant and perfected mortals of the Corps of the Finality, in association with the other six similarly recruiting corps, to administer these outer universes in an effort to compensate their experiential deficiencies in not having participated in the time\hyp{}space evolution of the Supreme Being.
