--- a/tex/p033.tex
+++ b/tex/p033.tex
@@ -56,7 +56,7 @@
 \vs p033 6:9 The day in Satania, as reckoned on Jerusem, is a little less (1 hour, 4 minutes, 15 seconds) than three days of Urantia time. These times are generally known as Salvington or universe time, and Satania or system time. Standard time is universe time.
 \usection{The Courts of Nebadon}
 \vs p033 7:1 The Master Son, Michael, is supremely concerned with but three things: creation, sustenance, and ministry. He does not personally participate in the judicial work of the universe. Creators never sit in judgment on their creatures; that is the exclusive function of creatures of high training and actual creature experience.
-\vs p033 7:2 The entire judicial mechanism of Nebadon is under the supervision of Gabriel. The high courts, located on Salvington, are occupied with problems of general universe import and with the appellate cases coming up from the system tribunals. There are 70 branches of these universe courts, and they function in 7 divisions of 10 sections each. In all matters of adjudication there presides a dual magistracy consisting of one judge of perfection antecedents and one magistrate of ascendant experience.
+\vs p033 7:2 The entire judicial mechanism of Nebadon is under the supervision of Gabriel. The high courts, located on Salvington, are occupied with problems of general universe import and with the appellate cases coming up from the system tribunals. There are 70 branches of these universe courts, and they function in seven divisions of ten sections each. In all matters of adjudication there presides a dual magistracy consisting of one judge of perfection antecedents and one magistrate of ascendant experience.
 \vs p033 7:3 As regards jurisdiction, the local universe courts are limited in the following matters:
 \vs p033 7:4 \ublistelem{1.}\bibnobreakspace The administration of the local universe is concerned with creation, evolution, maintenance, and ministry. The universe tribunals are, therefore, denied the right to pass upon those cases involving the question of eternal life and death. This has no reference to natural death as it obtains on Urantia, but if the question of the right of continued existence, life eternal, comes up for adjudication, it must be referred to the tribunals of Orvonton, and if decided adversely to the individual, all sentences of extinction are carried out upon the orders, and through the agencies, of the rulers of the supergovernment.
 \vs p033 7:5 \ublistelem{2.}\bibnobreakspace The default or defection of any of the Local Universe Sons of God which jeopardizes their status and authority as Sons is never adjudicated in the tribunals of a Son; such a misunderstanding would be immediately carried to the superuniverse courts.
