--- a/tex/p034.tex
+++ b/tex/p034.tex
@@ -35,19 +35,19 @@
 \vs p034 4:1 There are three distinct spirit circuits in the local universe of Nebadon:
 \vs p034 4:2 \ublistelem{1.}\bibnobreakspace The bestowal spirit of the Creator Son, the Comforter, the Spirit of Truth.
 \vs p034 4:3 \ublistelem{2.}\bibnobreakspace The spirit circuit of the Divine Minister, the Holy Spirit.
-\vs p034 4:4 \ublistelem{3.}\bibnobreakspace The intelligence\hyp{}ministry circuit, including the more or less unified activities but diverse functioning of the 7 adjutant mind\hyp{}spirits.
+\vs p034 4:4 \ublistelem{3.}\bibnobreakspace The intelligence\hyp{}ministry circuit, including the more or less unified activities but diverse functioning of the seven adjutant mind\hyp{}spirits.
 \vs p034 4:5 \pc The Creator Sons are endowed with a spirit of universe presence in many ways analogous to that of the Seven Master Spirits of Paradise. This is the Spirit of Truth which is poured out upon a world by a bestowal Son after he receives spiritual title to such a sphere. This bestowed Comforter is the spiritual force which ever draws all truth seekers towards Him who is the personification of truth in the local universe. This spirit is an inherent endowment of the Creator Son, emerging from his divine nature just as the master circuits of the grand universe are derived from the personality presences of the Paradise Deities.
 \vs p034 4:6 The Creator Son may come and go; his personal presence may be in the local universe or elsewhere; yet the Spirit of Truth functions undisturbed, for this divine presence, while derived from the personality of the Creator Son, is functionally centred in the person of the Divine Minister.
 \vs p034 4:7 The Universe Mother Spirit, however, never leaves the local universe headquarters world. The spirit of the Creator Son may and does function independently of the personal presence of the Son, but not so with her personal spirit. The Holy Spirit of the Divine Minister would become nonfunctional if her personal presence should be removed from Salvington. Her spirit presence seems to be fixed on the universe headquarters world, and it is this very fact that enables the spirit of the Creator Son to function independently of the whereabouts of the Son. The Universe Mother Spirit acts as the universe focus and centre of the Spirit of Truth as well as of her own personal influence, the Holy Spirit.
 \vs p034 4:8 \pc The Creator Father\hyp{}Son and the Creative Mother Spirit both contribute variously to the mind endowment of their local universe children. But the Creative Spirit does not bestow mind until she is endowed with personal prerogatives.
 \vs p034 4:9 The superevolutionary orders of personality in a local universe are endowed with the local universe type of the superuniverse pattern of mind. The human and the subhuman orders of evolutionary life are endowed with the adjutant spirit types of mind ministration.
-\vs p034 4:10 \pc The 7 adjutant mind\hyp{}spirits are the creation of the Divine Minister of a local universe. These mind\hyp{}spirits are similar in character but diverse in power, and all partake alike of the nature of the Universe Spirit, although they are hardly regarded as personalities apart from their Mother Creator. The 7 adjutants have been given the following names: the spirit of \bibemph{wisdom,} the spirit of \bibemph{worship,} the spirit of \bibemph{counsel,} the spirit of \bibemph{knowledge,} the spirit of \bibemph{courage,} the spirit of \bibemph{understanding,} the spirit of \bibemph{intuition ---} of quick perception.
-\vs p034 4:11 \pc These are the “7 spirits of God,” “like lamps burning before the throne,” which the prophet saw in the symbols of vision. But he did not see the seats of the four and twenty sentinels about these 7 adjutant mind\hyp{}spirits. This record represents the confusion of two presentations, one pertaining to the universe headquarters and the other to the system capital. The seats of the four and twenty elders are on Jerusem, the headquarters of your local system of inhabited worlds.
+\vs p034 4:10 \pc The seven adjutant mind\hyp{}spirits are the creation of the Divine Minister of a local universe. These mind\hyp{}spirits are similar in character but diverse in power, and all partake alike of the nature of the Universe Spirit, although they are hardly regarded as personalities apart from their Mother Creator. The seven adjutants have been given the following names: the spirit of \bibemph{wisdom,} the spirit of \bibemph{worship,} the spirit of \bibemph{counsel,} the spirit of \bibemph{knowledge,} the spirit of \bibemph{courage,} the spirit of \bibemph{understanding,} the spirit of \bibemph{intuition ---} of quick perception.
+\vs p034 4:11 \pc These are the “seven spirits of God,” “like lamps burning before the throne,” which the prophet saw in the symbols of vision. But he did not see the seats of the four and twenty sentinels about these seven adjutant mind\hyp{}spirits. This record represents the confusion of two presentations, one pertaining to the universe headquarters and the other to the system capital. The seats of the four and twenty elders are on Jerusem, the headquarters of your local system of inhabited worlds.
 \vs p034 4:12 But it was of Salvington that John wrote: “And out of the throne proceeded lightnings and thunderings and voices” --- the universe broadcasts to the local systems. He also envisaged the directional control creatures of the local universe, the living compasses of the headquarters world. This directional control in Nebadon is maintained by the four control creatures of Salvington, who operate over the universe currents and are ably assisted by the first functioning mind\hyp{}spirit, the adjutant of intuition, the spirit of “quick understanding.” But the description of these four creatures --- called beasts --- has been sadly marred; they are of unparalleled beauty and exquisite form.
 \vs p034 4:13 The four points of the compass are universal and inherent in the life of Nebadon. All living creatures possess bodily units which are sensitive and responsive to these directional currents. These creature creations are duplicated on down through the universe to the individual planets and, in conjunction with the magnetic forces of the worlds, so activate the hosts of microscopic bodies in the animal organism that these direction cells ever point north and south. Thus is the sense of orientation forever fixed in the living beings of the universe. This sense is not wholly wanting as a conscious possession by mankind. These bodies were first observed on Urantia about the time of this narration.
 \usection{The Ministry of the Spirit}
 \vs p034 5:1 The Divine Minister co\hyp{}operates with the Creator Son in the formulation of life and the creation of new orders of beings up to the time of his 7\ts{th} bestowal and, subsequently, after his elevation to the full sovereignty of the universe, continues to collaborate with the Son and the Son’s bestowed spirit in the further work of world ministry and planetary progression.
-\vs p034 5:2 On the inhabited worlds the Spirit begins the work of evolutionary progression, starting with the lifeless material of the realm, first endowing vegetable life, then the animal organisms, then the first orders of human existence; and each succeeding impartation contributes to the further unfolding of the evolutionary potential of planetary life from the initial and primitive stages to the appearance of will creatures. This labour of the Spirit is largely effected through the 7 adjutants, the spirits of promise, the unifying and co\hyp{}ordinating spirit\hyp{}mind of the evolving planets, ever and unitedly leading the races of men towards higher ideas and spiritual ideals.
+\vs p034 5:2 On the inhabited worlds the Spirit begins the work of evolutionary progression, starting with the lifeless material of the realm, first endowing vegetable life, then the animal organisms, then the first orders of human existence; and each succeeding impartation contributes to the further unfolding of the evolutionary potential of planetary life from the initial and primitive stages to the appearance of will creatures. This labour of the Spirit is largely effected through the seven adjutants, the spirits of promise, the unifying and co\hyp{}ordinating spirit\hyp{}mind of the evolving planets, ever and unitedly leading the races of men towards higher ideas and spiritual ideals.
 \vs p034 5:3 \pc Mortal man first experiences the ministry of the Spirit in conjunction with mind when the purely animal mind of evolutionary creatures develops reception capacity for the adjutants of worship and of wisdom. This ministry of the 6\ts{th} and 7\ts{th} adjutants indicates mind evolution crossing the threshold of spiritual ministry. And immediately are such minds of worship\hyp{} and wisdom\hyp{}function included in the spiritual circuits of the Divine Minister.
 \vs p034 5:4 When mind is thus endowed with the ministry of the Holy Spirit, it possesses the capacity for (consciously or unconsciously) choosing the spiritual presence of the Universal Father --- the Thought Adjuster. But it is not until a bestowal Son has liberated the Spirit of Truth for planetary ministry to all mortals that all normal minds are automatically prepared for the reception of the Thought Adjusters. The Spirit of Truth works as one with the presence of the spirit of the Divine Minister. This dual spirit liaison hovers over the worlds, seeking to teach truth and to spiritually enlighten the minds of men, to inspire the souls of the creatures of the ascending races, and to lead the peoples dwelling on the evolutionary planets ever towards their Paradise goal of divine destiny.
 \vs p034 5:5 Though the Spirit of Truth is poured out upon all flesh, this spirit of the Son is almost wholly limited in function and power by man’s personal reception of that which constitutes the sum and substance of the mission of the bestowal Son. The Holy Spirit is partly independent of human attitude and partially conditioned by the decisions and co\hyp{}operation of the will of man. Nevertheless, the ministry of the Holy Spirit becomes increasingly effective in the sanctification and spiritualization of the inner life of those mortals who the more fully \bibemph{obey} the divine leadings.
