--- a/tex/p038.tex
+++ b/tex/p038.tex
@@ -26,7 +26,7 @@
 \usection{Unrevealed Angels}
 \vs p038 3:1 Numerous orders of spirit beings function\tunemarkup{pgauraone}{\linebreak} throughout the domains of the local universe that are unrevealed to mortals because they are in no manner connected with the evolutionary plan of Paradise ascension. In this paper the word “angel” is purposely limited to the designation of those seraphic and associated offspring of the Universe Mother Spirit who are so largely concerned with the operation of the plans of mortal survival. There serve in the local universe six other orders of related beings, the unrevealed angels, who are not in any specific manner connected with those universe activities pertaining to the Paradise ascent of evolutionary mortals. These six groups of angelic associates are never called seraphim, neither are they referred to as ministering spirits. These personalities are wholly occupied with the administrative and other affairs of Nebadon, engagements which are in no way related to man’s progressive career of spiritual ascent and perfection attainment.
 \usection{The Seraphic Worlds}
-\vs p038 4:1 The 9\ts{th} group of 7 primary spheres in the Salvington circuit are the worlds of the seraphim. Each of these worlds has 6 tributary satellites, whereon are the special schools devoted to all phases of seraphic training. While the seraphim have access to all 49 worlds comprising this group of Salvington spheres, they exclusively occupy only the 1\ts{st} cluster of 7. The remaining 6 clusters are occupied by the 6 orders of angelic associates unrevealed on Urantia; each such group maintains headquarters on one of these 6 primary worlds and carries on specialized activities on the 6 tributary satellites. Each angelic order has free access to all the worlds of these 7 diverse groups.
+\vs p038 4:1 The 9\ts{th} group of seven primary spheres in the Salvington circuit are the worlds of the seraphim. Each of these worlds has six tributary satellites, whereon are the special schools devoted to all phases of seraphic training. While the seraphim have access to all 49 worlds comprising this group of Salvington spheres, they exclusively occupy only the 1\ts{st} cluster of seven. The remaining six clusters are occupied by the six orders of angelic associates unrevealed on Urantia; each such group maintains headquarters on one of these six primary worlds and carries on specialized activities on the six tributary satellites. Each angelic order has free access to all the worlds of these seven diverse groups.
 \vs p038 4:2 These headquarters worlds are among the magnificent\tunemarkup{pgnexus10}{\linebreak} realms of Nebadon; the seraphic estates are characterized by both beauty and vastness. Here each seraphim has a real home, and “home” means the domicile of two seraphim; they live in pairs.
 \vs p038 4:3 \pc Though not male and female as are the Material Sons and the mortal races, seraphim are negative and positive. In the majority of assignments it requires two angels to accomplish the task. When they are not encircuited, they can work alone; neither do they require complements of being when stationary. Ordinarily they retain their original complements of being, but not necessarily. Such associations are primarily necessitated by function; they are not characterized by sex emotion, though they are exceedingly personal and truly affectionate.
 \vs p038 4:4 Besides designated homes, seraphim also have group, company, battalion, and unit headquarters. They forgather for reunions every millennium and are all present in accordance with the time of their creation. If a seraphim bears responsibilities which forbid absence from duty, she alternates attendance with her complement, being relieved by a seraphim of another birth date. Each seraphic partner is thereby present at least every other reunion.
@@ -42,7 +42,7 @@
 \usection{Cherubim and Sanobim}
 \vs p038 7:1 In all essential endowments cherubim and sanobim are similar to seraphim. They have the same origin but not always the same destiny. They are wonderfully intelligent, marvellously efficient, touchingly affectionate, and almost human. They are the lowest order of angels, hence all the nearer of kin to the more progressive types of human beings on the evolutionary worlds.
 \vs p038 7:2 Cherubim and sanobim are inherently associated, functionally united. One is an energy positive personality; the other, energy negative. The right\hyp{}hand deflector, or positively charged angel, is the cherubim --- the senior or controlling personality. The left\hyp{}hand deflector, or negatively charged angel, is the sanobim --- the complement of being. Each type of angel is very limited in solitary function; hence they usually serve in pairs. When serving independently of their seraphic directors, they are more than ever dependent on mutual contact and always function together.
-\vs p038 7:3 \pc Cherubim and sanobim are the faithful and efficient aids of the seraphic ministers, and all 7 orders of seraphim are provided with these subordinate assistants. Cherubim and sanobim serve for ages in these capacities, but they do not accompany seraphim on assignments beyond the confines of the local universe.
+\vs p038 7:3 \pc Cherubim and sanobim are the faithful and efficient aids of the seraphic ministers, and all seven orders of seraphim are provided with these subordinate assistants. Cherubim and sanobim serve for ages in these capacities, but they do not accompany seraphim on assignments beyond the confines of the local universe.
 \vs p038 7:4 The cherubim and sanobim are the routine spirit workers on the individual worlds of the systems. On a nonpersonal assignment and in an emergency, they may serve in the place of a seraphic pair, but they never function, even temporarily, as attending angels to human beings; that is an exclusive seraphic privilege.
 \vs p038 7:5 \pc When assigned to a planet, cherubim enter the local courses of training, including a study of planetary usages and languages. The ministering spirits of time are all bilingual, speaking the language of the local universe of their origin and that of their native superuniverse. By study in the schools of the realms they acquire additional tongues. Cherubim and sanobim, like seraphim and all other orders of spirit beings, are continuously engaged in efforts at self\hyp{}improvement. Only such as the subordinate beings of power control and energy direction are incapable of progression; all creatures having actual or potential personality volition seek new achievements.
 \vs p038 7:6 \pc Cherubim and sanobim are by nature very near the morontia level of existence, and they prove to be most efficient in the borderland work of the physical, morontial, and spiritual domains. These children of the local universe Mother Spirit are characterized by “fourth creatures” much as are the Havona Servitals and the conciliating commissions. Every fourth cherubim and every fourth sanobim are quasi\hyp{}material, very definitely resembling the morontia level of existence.
@@ -53,15 +53,15 @@
 \vs p038 8:3 \ublistelem{2.}\bibnobreakspace \bibemph{Mid\hyp{}phase Cherubim.} All cherubim and sanobim are not equal in ascension potential, and these are the inherently limited beings of the angelic creations. Most of them will remain cherubim and sanobim, although the more gifted individuals may achieve limited seraphic service.
 \vs p038 8:4 \ublistelem{3.}\bibnobreakspace \bibemph{Morontia Cherubim.} These “fourth creatures” of the angelic orders always retain their quasi\hyp{}material characteristics. They will continue on as cherubim and sanobim, together with a majority of their mid\hyp{}phase brethren, pending the completed factualization of the Supreme Being.
 \vs p038 8:5 \pc While the second and third groups are somewhat limited in growth potential, the ascension candidates may attain the heights of universal seraphic service. Many of the more experienced of these cherubim are attached to the seraphic guardians of destiny and are thus placed in direct line for advancement to the status of Mansion World Teachers when deserted by their seraphic seniors. Guardians of destiny do not have cherubim and sanobim as helpers when their mortal wards attain the morontia life. And when other types of evolutionary seraphim are granted clearance for Seraphington and Paradise, they must forsake their former subordinates when they pass out of the confines of Nebadon. Such deserted cherubim and sanobim are usually embraced by the Universe Mother Spirit, thus achieving a level equivalent to that of a Mansion World Teacher in the attainment of seraphic status.
-\vs p038 8:6 When, as Mansion World Teachers, the once\hyp{}embraced cherubim and sanobim have long served on the morontia spheres, from the lowest to the highest, and when their corps on Salvington is overrecruited, the Bright and Morning Star summons these faithful servants of the creatures of time to appear in his presence. The oath of personality transformation is administered; and thereupon, in groups of 7,000, these advanced and senior cherubim and sanobim are re\hyp{}embraced by the Universe Mother Spirit. From this second embrace they emerge as full\hyp{}fledged seraphim. Henceforth, the full and complete career of a seraphim, with all of its Paradise possibilities, is open to such reborn cherubim and sanobim. Such angels may be assigned as guardians of destiny to some mortal being, and if the mortal ward attains survival, then do they become eligible for advancement to Seraphington and the 7 circles of seraphic attainment, even to Paradise and the Corps of the Finality.
+\vs p038 8:6 When, as Mansion World Teachers, the once\hyp{}embraced cherubim and sanobim have long served on the morontia spheres, from the lowest to the highest, and when their corps on Salvington is overrecruited, the Bright and Morning Star summons these faithful servants of the creatures of time to appear in his presence. The oath of personality transformation is administered; and thereupon, in groups of 7,000, these advanced and senior cherubim and sanobim are re\hyp{}embraced by the Universe Mother Spirit. From this second embrace they emerge as full\hyp{}fledged seraphim. Henceforth, the full and complete career of a seraphim, with all of its Paradise possibilities, is open to such reborn cherubim and sanobim. Such angels may be assigned as guardians of destiny to some mortal being, and if the mortal ward attains survival, then do they become eligible for advancement to Seraphington and the seven circles of seraphic attainment, even to Paradise and the Corps of the Finality.
 \usection{The Midway Creatures}
 \vs p038 9:1 The midway creatures have a threefold classification: They are properly classified with the ascending Sons of God; they are factually grouped with the orders of permanent citizenship, while they are functionally reckoned with the ministering spirits of time because of their intimate and effective association with the angelic hosts in the work of serving mortal man on the individual worlds of space.
 \vs p038 9:2 These unique creatures appear on the majority of the inhabited worlds and are always found on the decimal or life\hyp{}experiment planets, such as Urantia. Midwayers are of two types --- primary and secondary --- and they appear by the following techniques:
 \vs p038 9:3 \ublistelem{1.}\bibnobreakspace \bibemph{Primary Midwayers,} the more spiritual group, are a somewhat standardized order of beings who are uniformly derived from the modified ascendant\hyp{}mortal staffs of the Planetary Princes. The number of primary midway creatures is always 50,000, and no planet enjoying their ministry has a larger group.
 \vs p038 9:4 \ublistelem{2.}\bibnobreakspace \bibemph{Secondary Midwayers,} the more material group of these creatures, vary greatly in numbers on the different worlds, though the average is around 50,000. They are variously derived from the planetary biologic uplifters, the Adams and Eves, or from their immediate progeny. There are no less than 24 diverse techniques involved in the production of these secondary midway creatures on the evolutionary worlds of space. The mode of origin for this group on Urantia was unusual and extraordinary.
 \vs p038 9:5 \pc Neither of these groups is an evolutionary accident; both are essential features in the predetermined plans of the universe architects, and their appearance on the evolving worlds at the opportune juncture is in accordance with the original designs and developmental plans of the supervising Life Carriers.
-\vs p038 9:6 Primary midwayers are energized intellectually and spiritually by the angelic technique and are uniform in intellectual status. The 7 adjutant mind\hyp{}spirits make no contact with them; and only the 6\ts{th} and the 7\ts{th}, the spirit of worship and the spirit of wisdom, are able to minister to the secondary group.
-\vs p038 9:7 Secondary midwayers are physically energized by the Adamic technique, spiritually encircuited by the seraphic, and intellectually endowed with the morontia transition type of mind. They are divided into 4 physical types, 7 orders spiritually, and 12 levels of intellectual response to the joint ministry of the last two adjutant spirits and the morontia mind. These diversities determine their differential of activity and of planetary assignment.
+\vs p038 9:6 Primary midwayers are energized intellectually and spiritually by the angelic technique and are uniform in intellectual status. The seven adjutant mind\hyp{}spirits make no contact with them; and only the 6\ts{th} and the 7\ts{th}, the spirit of worship and the spirit of wisdom, are able to minister to the secondary group.
+\vs p038 9:7 Secondary midwayers are physically energized by the Adamic technique, spiritually encircuited by the seraphic, and intellectually endowed with the morontia transition type of mind. They are divided into four physical types, seven orders spiritually, and twelve levels of intellectual response to the joint ministry of the last two adjutant spirits and the morontia mind. These diversities determine their differential of activity and of planetary assignment.
 \vs p038 9:8 Primary midwayers resemble angels more than mortals; the secondary orders are much more like human beings. Each renders invaluable assistance to the other in the execution of their manifold planetary assignments. The primary ministers can achieve liaison co\hyp{}operation with both morontia\hyp{} and spirit\hyp{}energy controllers and mind circuiters. The secondary group can establish working connections only with the physical controllers and the material\hyp{}circuit manipulators. But since each order of midwayer can establish perfect synchrony of contact with the other, either group is thereby able to achieve practical utilization of the entire energy gamut extending from the gross physical power of the material worlds up through the transition phases of universe energies to the higher spirit\hyp{}reality forces of the celestial realms.
 \vs p038 9:9 The gap between the material and spiritual worlds is perfectly bridged by the serial association of mortal man, secondary midwayer, primary midwayer, morontia cherubim, mid\hyp{}phase cherubim, and seraphim. In the personal experience of an individual mortal these diverse levels are undoubtedly more or less unified and made personally meaningful by the unobserved and mysterious operations of the divine Thought Adjuster.
 \vs p038 9:10 \pc On normal worlds the primary midwayers maintain their service as the intelligence corps and as celestial entertainers in behalf of the Planetary Prince, while the secondary ministers continue their co\hyp{}operation with the Adamic regime of furthering the cause of progressive planetary civilization. In case of the defection of the Planetary Prince and the failure of the Material Son, as occurred on Urantia, the midway creatures become the wards of the System Sovereign and serve under the directing guidance of the acting custodian of the planet. But on only three other worlds in Satania do these beings function as one group under unified leadership as do the united midway ministers of Urantia.
