--- a/tex/p039.tex
+++ b/tex/p039.tex
@@ -9,7 +9,7 @@
 \uminitoc{Seraphic Destiny}
 \uminitoc{The Corps of Seraphic Completion}
 \author{Melchizedek}
-\vs p039 0:1 As far as we are cognizant, the Infinite Spirit, as personalized on the local universe headquarters, intends to produce uniformly perfect seraphim, but for some unknown reason these seraphic offspring are very diverse. This diversity may be a result of the unknown interposition of evolving experiential Deity; if so, we cannot prove it. But we do observe that, when seraphim have been subjected to educational tests and training discipline, they unfailingly and distinctly classify into the following 7 groups:
+\vs p039 0:1 As far as we are cognizant, the Infinite Spirit, as personalized on the local universe headquarters, intends to produce uniformly perfect seraphim, but for some unknown reason these seraphic offspring are very diverse. This diversity may be a result of the unknown interposition of evolving experiential Deity; if so, we cannot prove it. But we do observe that, when seraphim have been subjected to educational tests and training discipline, they unfailingly and distinctly classify into the following seven groups:
 \vs p039 0:2 \ublistelem{1.}\bibnobreakspace Supreme Seraphim.
 \vs p039 0:3 \ublistelem{2.}\bibnobreakspace Superior Seraphim.
 \vs p039 0:4 \ublistelem{3.}\bibnobreakspace Supervisor Seraphim.
@@ -17,11 +17,11 @@
 \vs p039 0:6 \ublistelem{5.}\bibnobreakspace Planetary Helpers.
 \vs p039 0:7 \ublistelem{6.}\bibnobreakspace Transition Ministers.
 \vs p039 0:8 \ublistelem{7.}\bibnobreakspace Seraphim of the Future.
-\vs p039 0:9 \pc To say that any one seraphim is inferior to an angel of any other group would hardly be true. Nevertheless every angel is at first service\hyp{}limited to the group of original and inherent classification. My seraphic associate in the preparation of this statement, Manotia, is a supreme seraphim and onetime functioned only as a supreme seraphim. By application and devoted service she has, one by one, achieved all 7 of the seraphic services, having functioned in well\hyp{}nigh every avenue of activity open to a seraphim, and now holds the commission of associate chief of seraphim on Urantia.
+\vs p039 0:9 \pc To say that any one seraphim is inferior to an angel of any other group would hardly be true. Nevertheless every angel is at first service\hyp{}limited to the group of original and inherent classification. My seraphic associate in the preparation of this statement, Manotia, is a supreme seraphim and onetime functioned only as a supreme seraphim. By application and devoted service she has, one by one, achieved all seven of the seraphic services, having functioned in well\hyp{}nigh every avenue of activity open to a seraphim, and now holds the commission of associate chief of seraphim on Urantia.
 \vs p039 0:10 Human beings sometimes find it hard to understand that a created capacity for higher\hyp{}level ministry does not necessarily imply ability to function on relatively lower service levels. Man begins life as a helpless infant; hence every mortal attainment must embrace all experiential prerequisites; seraphim have no such preadult life --- no childhood. They are, however, experiential creatures, and by experience and through additional education they can augment their divine and inherent endowment of ability by the experiential acquirement of functional skill in one or more of the seraphic services.
 \vs p039 0:11 After being commissioned, seraphim are assigned to the reserves of their inherent group. Those of planetary and administrator status often serve for long periods as originally classified, but the higher the inherent function level, the more persistently do the angelic ministers seek assignment to the lower orders of universe service. Especially do they desire assignment to the reserves of the planetary helpers, and if successful they enrol in the celestial schools attached to the headquarters of the Planetary Prince of some evolutionary world. Here they begin the study of the languages, history, and local habits of the races of mankind. Seraphim must acquire knowledge and gain experience much as do human beings. They are not far removed from you in certain personality attributes. And they all crave to start at the bottom, on the lowest possible level of ministry; thus may they hope to achieve the highest possible level of experiential destiny.
 \usection{Supreme Seraphim}
-\vs p039 1:1 These seraphim are the highest of the 7 revealed orders of local universe angels. They function in 7 groups, each of which is closely associated with the angelic ministers of the Seraphic Corps of Completion.
+\vs p039 1:1 These seraphim are the highest of the seven revealed orders of local universe angels. They function in seven groups, each of which is closely associated with the angelic ministers of the Seraphic Corps of Completion.
 \vs p039 1:2 \ublistelem{1.}\bibnobreakspace \bibemph{Son\hyp{}Spirit Ministers.} The first group of the supreme seraphim are assigned to the service of the high Sons and Spirit\hyp{}origin beings resident and functioning in the local universe. This group of angelic ministers also serve the Universe Son and the Universe Spirit and are closely affiliated with the intelligence corps of the Bright and Morning Star, the universe chief executive of the united wills of the Creator Son and the Creative Spirit.
 \vs p039 1:3 Being of assignment to the high Sons and Spirits, these seraphim are naturally associated with the far\hyp{}flung services of the Paradise Avonals, the divine offspring of the Eternal Son and the Infinite Spirit. The Paradise Avonals are always attended on all magisterial and bestowal missions by this high and experienced order of seraphim, who are at such times devoted to organizing and administering the special work connected with the termination of one planetary dispensation and the inauguration of a new age. But they are not concerned in the work of adjudication which might be incidental to such a change in dispensations.
 \vs p039 1:4 \pc \bibemph{Bestowal Attendants.} Paradise Avonals, but not Creator Sons, when on a bestowal mission are always accompanied by a corps of 144 bestowal attendants. These 144 angels are the chiefs of all other Son\hyp{}Spirit ministers who may be associated with a bestowal mission. There might possibly be legions of angels subject to the command of an incarnated Son of God on a planetary bestowal, but all these seraphim would be organized and directed by the 144 bestowal attendants. Higher orders of angels, supernaphim and seconaphim, might also form a part of the attending host, and though their missions are distinct from those of the seraphim, all these activities would be co\hyp{}ordinated by the bestowal attendants.
@@ -33,15 +33,15 @@
 \vs p039 1:10 \ublistelem{3.}\bibnobreakspace \bibemph{Universe Orientators.} These are the true friends and postgraduate counsellors of all those ascending creatures who are pausing for the last time on Salvington, in their universe of origin, as they stand on the brink of the spirit adventure stretching out before them in the vast superuniverse of Orvonton. And at such a time many an ascender has a feeling which mortals could understand only by comparison with the human emotion of nostalgia. Behind lie the realms of achievement, realms grown familiar by long service and morontia attainment; ahead lies the challenging mystery of a greater and vaster universe.
 \vs p039 1:11 It is the task of the universe orientators to facilitate the passage of the ascending pilgrims from the attained to the unattained level of universe service, to help these pilgrims in making those kaleidoscopic adjustments in the comprehension of meanings and values inherent in the realization that a first\hyp{}stage spirit being stands, not at the end and climax of the local universe morontia ascent, but rather at the very bottom of the long ladder of spiritual ascent to the Universal Father on Paradise.
 \vs p039 1:12 Many of the Seraphington graduates, members of the Seraphic Corps of Completion who are associated with these seraphim, engage in extensive teaching in certain Salvington schools concerned with the preparation of the creatures of Nebadon for the relationships of the next universe age.
-\vs p039 1:13 \ublistelem{4.}\bibnobreakspace \bibemph{The Teaching Counsellors.} These angels are the invaluable assistants of the spiritual teaching corps of the local universe. Teaching counsellors are secretaries to all orders of teachers, from the Melchizedeks and the Trinity Teacher Sons down to the morontia mortals who are assigned as helpers to those of their kind who are just behind them in the scale of ascendant life. You will first \bibemph{see} these associate teaching seraphim on some one of the 7 mansion worlds surrounding Jerusem.
-\vs p039 1:14 These seraphim become associates of the division chiefs of the numerous educational and training institutions of the local universes, and they are attached in large numbers to the faculties of the 7 training worlds of the local systems and of the 70 educational spheres of the constellations. These ministrations extend on down to the individual worlds. Even the true and consecrated teachers of time are assisted, and often attended, by these counsellors of the supreme seraphim.
+\vs p039 1:13 \ublistelem{4.}\bibnobreakspace \bibemph{The Teaching Counsellors.} These angels are the invaluable assistants of the spiritual teaching corps of the local universe. Teaching counsellors are secretaries to all orders of teachers, from the Melchizedeks and the Trinity Teacher Sons down to the morontia mortals who are assigned as helpers to those of their kind who are just behind them in the scale of ascendant life. You will first \bibemph{see} these associate teaching seraphim on some one of the seven mansion worlds surrounding Jerusem.
+\vs p039 1:14 These seraphim become associates of the division chiefs of the numerous educational and training institutions of the local universes, and they are attached in large numbers to the faculties of the seven training worlds of the local systems and of the 70 educational spheres of the constellations. These ministrations extend on down to the individual worlds. Even the true and consecrated teachers of time are assisted, and often attended, by these counsellors of the supreme seraphim.
 \vs p039 1:15 The fourth creature bestowal of the Creator Son was in the likeness of a teaching counsellor of the supreme seraphim of Nebadon.
 \vs p039 1:16 \ublistelem{5.}\bibnobreakspace \bibemph{Directors of Assignment.} A body of 144 supreme seraphim is elected from time to time by the angels serving on the evolutionary and on the architectural spheres of creature habitation. This is the highest angelic council on any sphere, and it co\hyp{}ordinates the self\hyp{}directed phases of seraphic service and assignment. These angels preside over all seraphic assemblies pertaining to the line of duty or the call to worship.
 \vs p039 1:17 \ublistelem{6.}\bibnobreakspace \bibemph{The Recorders.} These are the official recorders for the supreme seraphim. Many of these high angels were born with their gifts fully developed; others have qualified for their positions of trust and responsibility by diligent application to study and faithful performance of similar duties while attached to lower or less responsible orders.
 \vs p039 1:18 \ublistelem{7.}\bibnobreakspace \bibemph{Unattached Ministers.} Large numbers of unattached seraphim of the supreme order are self\hyp{}directed servers on the architectural spheres and on the inhabited planets. Such ministers voluntarily meet the differential of demand for the service of the supreme seraphim, thus constituting the general reserve of this order.
 \usection{Superior Seraphim}
 \vs p039 2:1 Superior seraphim receive their name, not because they are in any sense qualitatively superior to other orders of angels, but because they are in charge of the higher activities of a local universe. Very many of the first two groups of this seraphic corps are attainment seraphim, angels who have served in all phases of training and have returned to a glorified assignment as directors of their kind in the spheres of their earlier activities. Being a young universe, Nebadon does not have many of this order.
-\vs p039 2:2 The superior seraphim function in the following 7 groups:
+\vs p039 2:2 The superior seraphim function in the following seven groups:
 \vs p039 2:3 \ublistelem{1.}\bibnobreakspace \bibemph{The Intelligence Corps.} These seraphim belong to the personal staff of Gabriel, the Bright and Morning Star. They range the local universe gathering the information of the realms for his guidance in the councils of Nebadon. They are the intelligence corps of the mighty hosts over which Gabriel presides as vicegerent of the Master Son. These seraphim are not directly affiliated with either the systems or the constellations, and their information pours in direct to Salvington upon a continuous, direct, and independent circuit.
 \vs p039 2:4 The intelligence corps of the various local universes can and do intercommunicate but only within a given superuniverse. There is a differential of energy which effectively segregates the business and transactions of the various supergovernments. One superuniverse can ordinarily communicate with another superuniverse only through the provisions and facilities of the Paradise clearinghouse.
 \vs p039 2:5 \ublistelem{2.}\bibnobreakspace \bibemph{The Voice of Mercy.} Mercy is the keynote of seraphic service and angelic ministry. It is therefore fitting that there should be a corps of angels who, in a special manner, portray mercy. These seraphim are the real mercy ministers of the local universes. They are the inspired leaders who foster the higher impulses and holier emotions of men and angels. The directors of these legions are now always completion seraphim who are also graduate guardians of mortal destiny; that is, each angelic pair has guided at least one soul of animal origin during the life in the flesh and has subsequently traversed the circles of Seraphington and has been mustered into the Seraphic Corps of Completion.
@@ -78,7 +78,7 @@
 \vs p039 4:5 It is not the mission of these angels to defeat or to delay justice but rather to ensure that unerring justice is dealt out with generous mercy in fairness to all creatures. These seraphim often function on the local worlds, commonly appearing before the referee trios of the conciliating commissions --- the courts for minor misunderstandings. Many who at one time served as justice guides in the lower realms later appear as Voices of Mercy in the higher spheres and on Salvington.
 \vs p039 4:6 In the Lucifer rebellion in Satania very few of the justice guides were lost, but more than one quarter of the other administrator seraphim and of the lower orders of seraphic ministers were misled and deluded by the sophistries of unbridled personal liberty.
 \vs p039 4:7 \ublistelem{3.}\bibnobreakspace \bibemph{Interpreters of Cosmic Citizenship.} When ascending mortals have completed the mansion world training, the first student apprenticeship in the universe career, they are permitted to enjoy the transient satisfactions of relative maturity --- citizenship on the system capital. While the attainment of each ascendant goal is a factual achievement, in the larger sense such goals are simply milestones on the long ascending path to Paradise. But however relative such successes may be, no evolutionary creature is ever denied the full though transient satisfaction of goal attainment. Ever and anon there is a pause in the Paradise ascent, a short breathing spell, during which universe horizons stand still, creature status is stationary, and the personality tastes the sweetness of goal fulfilment.
-\vs p039 4:8 The first of such periods in the career of a mortal ascender occurs on the capital of a local system. During this pause you will, as a citizen of Jerusem, attempt to express in creature life those things which you have acquired during the eight preceding life experiences --- embracing Urantia and the 7 mansion worlds.
+\vs p039 4:8 The first of such periods in the career of a mortal ascender occurs on the capital of a local system. During this pause you will, as a citizen of Jerusem, attempt to express in creature life those things which you have acquired during the eight preceding life experiences --- embracing Urantia and the seven mansion worlds.
 \vs p039 4:9 The seraphic interpreters of cosmic citizenship guide the new citizens of the system capitals and quicken their appreciation of the responsibilities of universe government. These seraphim are also closely associated with the Material Sons in the system administration, while they portray the responsibility and morality of cosmic citizenship to the material mortals on the inhabited worlds.
 \vs p039 4:10 \ublistelem{4.}\bibnobreakspace \bibemph{Quickeners of Morality.} On the mansion worlds you begin to learn self\hyp{}government for the benefit of all concerned. Your mind learns co\hyp{}operation, learns how to plan with other and wiser beings. On the system headquarters the seraphic teachers will further quicken your appreciation of cosmic morality --- of the interactions of liberty and loyalty.
 \vs p039 4:11 What is loyalty? It is the fruit of an intelligent appreciation of universe brotherhood; one could not take so much and give nothing. As you ascend the personality scale, first you learn to be loyal, then to love, then to be filial, and then may you be free; but not until you are a finaliter, not until you have attained perfection of loyalty, can you self\hyp{}realize finality of liberty.
@@ -108,7 +108,7 @@
 \vs p039 5:16 \ublistelem{6.}\bibnobreakspace \bibemph{The Recorders.} These are the custodians of the major affairs of the planet as it functions as a part of the system, and as it is related to, and concerned in, the universe government. They function in the recording of planetary affairs but are not concerned with matters of individual life and existence.
 \vs p039 5:17 \ublistelem{7.}\bibnobreakspace \bibemph{The Reserves.} The Satania reserve corps of the planetary seraphim is maintained on Jerusem in close association with the reserves of the Material Sons. These abundant reserves repletely provide for every phase of the manifold activities of this seraphic order. These angels are also the personal message bearers of the local systems. They serve transition mortals, angels, and the Material Sons as well as others domiciled on the system headquarters. While Urantia is, at present, outside the spiritual circuits of Satania and Norlatiadek, you are otherwise in intimate touch with interplanetary affairs, for these messengers from Jerusem frequently come to this world as to all the other spheres of the system.
 \usection{Transition Ministers}
-\vs p039 6:1 As their name might suggest, seraphim of transitional ministry serve wherever they can contribute to creature transition from the material to the spiritual estate. These angels serve from the inhabited worlds to the system capitals, but those in Satania at present direct their greatest efforts toward the education of the surviving mortals on the 7 mansion worlds. This ministry is diversified in accordance with the following 7 orders of assignment:
+\vs p039 6:1 As their name might suggest, seraphim of transitional ministry serve wherever they can contribute to creature transition from the material to the spiritual estate. These angels serve from the inhabited worlds to the system capitals, but those in Satania at present direct their greatest efforts toward the education of the surviving mortals on the seven mansion worlds. This ministry is diversified in accordance with the following seven orders of assignment:
 \vs p039 6:2 \ublistelem{1.}\bibnobreakspace Seraphic Evangels.
 \vs p039 6:3 \ublistelem{2.}\bibnobreakspace Racial Interpreters.
 \vs p039 6:4 \ublistelem{3.}\bibnobreakspace Mind Planners.
@@ -127,7 +127,7 @@
 \vs p039 8:4 \ublistelem{2.}\bibnobreakspace To be summoned to Seraphington. Under certain conditions seraphim are commanded on high; in other circumstances angels sometimes achieve Paradise in a much shorter time than mortals. But no matter how fitted any seraphic pair may be, they cannot initiate departure for Seraphington or elsewhere. None but successful destiny guardians can be sure of proceeding to Paradise by a progressive path of evolutionary ascent. All others must patiently await the arrival of the Paradise messengers of the tertiary supernaphim who come with the summons commanding them to appear on high.
 \vs p039 8:5 \ublistelem{3.}\bibnobreakspace To attain Paradise by the evolutionary mortal technique. The supreme choice of seraphim in the career of time is the post of guardian angel in order that they may attain the career of finality and be qualified for assignment to the eternal spheres of seraphic service. Such personal guides of the children of time are called guardians of destiny, signifying that they guard mortal creatures in the path of divine destiny, and that in so doing they are determining their own high destiny.
 \vs p039 8:6 Guardians of destiny are drawn from the ranks of the more experienced angelic personalities of all orders of seraphim who have qualified for this service. All surviving mortals of Adjuster\hyp{}fusion destiny have temporary guardians assigned, and these associates may become permanently attached when mortal survivors attain the requisite intellectual and spiritual development. Before mortal ascenders leave the mansion worlds, they all have permanent seraphic associates. This group of ministering spirits is discussed in connection with the Urantia narratives.
-\vs p039 8:7 \pc It is not possible for angels to attain God from the human level of origin, for they are created a “little higher than you”; but it has been wisely arranged that, while they cannot possibly start up from the very bottom, the spiritual lowlands of mortal existence, they may go down to those who do start from the bottom and pilot such creatures, step by step, world by world, to the portals of Havona. When mortal ascenders leave Uversa to begin the circles of Havona, those guardians of attachment subsequent to the life in the flesh will bid their pilgrim associates a temporary farewell while they journey to Seraphington, the angelic destination of the grand universe. Here will these guardians attempt, and undoubtedly achieve, the 7 circles of seraphic light.
+\vs p039 8:7 \pc It is not possible for angels to attain God from the human level of origin, for they are created a “little higher than you”; but it has been wisely arranged that, while they cannot possibly start up from the very bottom, the spiritual lowlands of mortal existence, they may go down to those who do start from the bottom and pilot such creatures, step by step, world by world, to the portals of Havona. When mortal ascenders leave Uversa to begin the circles of Havona, those guardians of attachment subsequent to the life in the flesh will bid their pilgrim associates a temporary farewell while they journey to Seraphington, the angelic destination of the grand universe. Here will these guardians attempt, and undoubtedly achieve, the seven circles of seraphic light.
 \vs p039 8:8 Many, but not all, of those seraphim assigned as destiny guardians during the material life accompany their mortal associates through the Havona circles, and certain other seraphim pass through the circuits of the central universe in a way that is wholly different from the mortal ascent. But irrespective of the route of ascent, all evolutionary seraphim traverse Seraphington, and the majority pass through this experience instead of the Havona circuits.
 \vs p039 8:9 \pc Seraphington is the destiny sphere for angels, and their attainment of this world is quite different from the experiences of the mortal pilgrims on Ascendington. Angels are not absolutely sure of their eternal future until they have attained Seraphington. No angel attaining Seraphington has ever been known to go astray; sin will never find response in the heart of a seraphim of completion.
 \vs p039 8:10 The graduates of Seraphington are variously assigned: Destiny guardians of Havona\hyp{}circle experience usually enter the Mortal Finaliter Corps. Other guardians, having passed their Havona separation tests, frequently rejoin their mortal associates on Paradise, and some become the everlasting associates of the mortal finaliters, while others enter the various nonmortal finaliter corps, and many are mustered into the Corps of Seraphic Completion.
