--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -38,7 +38,7 @@
 \vs p042 2:11 \ublistelem{a.}\bibnobreakspace \bibemph{Puissant energy.} This is the powerful\hyp{}directional, mass\hyp{}movemented, mighty\hyp{}tensioned, and forcible\hyp{}reacting energy --- gigantic energy systems set in motion by the activities of the primary force organizers. This primary or puissant energy is not at first definitely responsive to the Paradise\hyp{}gravity pull though probably yielding an aggregate\hyp{}mass or space\hyp{}directional response to the collective group of absolute influences operative from the nether side of Paradise. When energy emerges to the level of initial response to the circular and absolute\hyp{}gravity grasp of Paradise, the primary force organizers give way to the functioning of their secondary associates.
 \vs p042 2:12 \ublistelem{b.}\bibnobreakspace \bibemph{Gravity energy.} The now\hyp{}appearing gravity\hyp{}responding energy carries the potential of universe power and becomes the active ancestor of all universe matter. This secondary or gravity energy is the product of the energy elaboration resulting from the pressure\hyp{}presence and the tension\hyp{}trends set up by the Associate Transcendental Master Force Organizers. In response to the work of these force manipulators, space\hyp{}energy rapidly passes from the puissant to the gravity stage, thus becoming directly responsive to the circular grasp of Paradise (absolute) gravity while disclosing a certain potential for sensitivity to the linear\hyp{}gravity pull inherent in the soon appearing material mass of the electronic and the postelectronic stages of energy and matter. Upon the appearance of gravity response, the Associate Master Force Organizers may retire from the energy cyclones of space provided the Universe Power Directors are assignable to that field of action.
 \vs p042 2:13 \pc We are quite uncertain regarding the exact causes of the early stages of force evolution, but we recognize the intelligent action of the Ultimate in both levels of emergent\hyp{}energy manifestation. Puissant and gravity energies, when regarded collectively, are spoken of on Uversa as ULTIMATA.
-\vs p042 2:14 \ublistelem{4.}\bibnobreakspace \bibemph{Universe power.} Space\hyp{}force has been changed into space\hyp{}energy and thence into the energy of gravity control. Thus has physical energy been ripened to that point where it can be directed into channels of power and made to serve the manifold purposes of the universe Creators. This work is carried on by the versatile directors, centres, and controllers of physical energy in the grand universe --- the organized and inhabited creations. These Universe Power Directors assume the more or less complete control of 21 of the 30 phases of energy constituting the present energy system of the 7 superuniverses. This domain of power\hyp{}energy\hyp{}matter is the realm of the intelligent activities of the Sevenfold, functioning under the time\hyp{}space overcontrol of the Supreme.
+\vs p042 2:14 \ublistelem{4.}\bibnobreakspace \bibemph{Universe power.} Space\hyp{}force has been changed into space\hyp{}energy and thence into the energy of gravity control. Thus has physical energy been ripened to that point where it can be directed into channels of power and made to serve the manifold purposes of the universe Creators. This work is carried on by the versatile directors, centres, and controllers of physical energy in the grand universe --- the organized and inhabited creations. These Universe Power Directors assume the more or less complete control of 21 of the 30 phases of energy constituting the present energy system of the seven superuniverses. This domain of power\hyp{}energy\hyp{}matter is the realm of the intelligent activities of the Sevenfold, functioning under the time\hyp{}space overcontrol of the Supreme.
 \vs p042 2:15 On Uversa we refer to the realm of universe power as GRAVITA.
 \vs p042 2:16 \ublistelem{5.}\bibnobreakspace \bibemph{Havona energy.} In concept this narrative has been moving Paradiseward as transmuting space\hyp{}force has been followed, level by level, to the working level of the energy\hyp{}power of the universes of time and space. Continuing Paradiseward, there is next encountered a pre\hyp{}existent phase of energy which is characteristic of the central universe. Here the evolutionary cycle seems to turn back upon itself; energy\hyp{}power now seems to begin to swing back towards force, but force of a nature very unlike that of space potency and primordial force. Havona energy systems are not dual; they are triune. This is the existential energy domain of the Conjoint Actor, functioning in behalf of the Paradise Trinity.
 \vs p042 2:17 On Uversa these energies of Havona are known as TRIATA.
@@ -46,7 +46,7 @@
 \vs p042 2:19 \ublistelem{7.}\bibnobreakspace \bibemph{Monota.} Energy is close of kin to divinity when it is Paradise energy. We incline to the belief that monota is the living, nonspirit energy of Paradise --- an eternity counterpart of the living, spirit energy of the Original Son --- hence the nonspiritual energy system of the Universal Father.
 \vs p042 2:20 We cannot differentiate the \bibemph{nature} of Paradise spirit and Paradise monota; they are apparently alike. They have different names, but you can hardly be told very much about a reality whose spiritual and whose nonspiritual manifestations are distinguishable only by \bibemph{name.}
 \vs p042 2:21 \pc We know that finite creatures can attain the worship experience of the Universal Father through the ministry of God the Sevenfold and the Thought Adjusters, but we doubt that any subabsolute personality, even power directors, can comprehend the energy infinity of the First Great Source and Centre. One thing is certain: If the power directors are conversant with the technique of the metamorphosis of space\hyp{}force, they do not reveal the secret to the rest of us. It is my opinion that they do not fully comprehend the function of the force organizers.
-\vs p042 2:22 These power directors themselves are energy catalysers; that is, they cause energy to segment, organize, or assemble in unit formation by their presence. And all this implies that there must be something inherent in energy which causes it thus to function in the presence of these power entities. The Nebadon Melchizedeks long since denominated the phenomenon of the transmutation of cosmic force into universe power as one of the 7 “infinities of divinity.” And that is as far as you will advance on this point during your local universe ascension.
+\vs p042 2:22 These power directors themselves are energy catalysers; that is, they cause energy to segment, organize, or assemble in unit formation by their presence. And all this implies that there must be something inherent in energy which causes it thus to function in the presence of these power entities. The Nebadon Melchizedeks long since denominated the phenomenon of the transmutation of cosmic force into universe power as one of the seven “infinities of divinity.” And that is as far as you will advance on this point during your local universe ascension.
 \vs p042 2:23 \pc Notwithstanding our inability fully to comprehend the origin, nature, and transmutations of cosmic force, we are fully conversant with all phases of emergent\hyp{}energy behaviour from the times of its direct and unmistakable response to the action of Paradise gravity --- about the time of the beginning of the function of the superuniverse power directors.
 \usection{Classification of Matter}
 \vs p042 3:1 Matter in all universes, excepting in the central universe, is identical. Matter in its physical properties depends on the revolutionary rates of its component members, the number and size of the revolving members, their distance from the nuclear body or the space content of matter, as well as on the presence of certain forces as yet undiscovered on Urantia.
@@ -83,7 +83,7 @@
 \vs p042 5:3 \ublistelem{1.}\bibnobreakspace \bibemph{Infraultimatonic rays ---} the borderland revolutions of ultimatons as they begin to assume definite form. This is the 1\ts{st} stage of emergent energy in which wavelike phenomena can be detected and measured.
 \vs p042 5:4 \ublistelem{2.}\bibnobreakspace \bibemph{Ultimatonic rays.} The assembly of energy into the minute spheres of the ultimatons occasions vibrations in the content of space which are discernible and measurable. And long before physicists ever discover the ultimaton, they will undoubtedly detect the phenomena of these rays as they shower in upon Urantia. These short and powerful rays represent the initial activity of the ultimatons as they are slowed down to that point where they veer towards the electronic organization of matter. As the ultimatons aggregate into electrons, condensation occurs with a consequent storage of energy.
 \vs p042 5:5 \ublistelem{3.}\bibnobreakspace \bibemph{The short space rays.} These are the shortest of all purely electronic vibrations and represent the preatomic stage of this form of matter. These rays require extraordinarily high or low temperatures for their production. There are two sorts of these space rays: one attendant upon the birth of atoms and the other indicative of atomic disruption. They emanate in the largest quantities from the densest plane of the superuniverse, the Milky Way, which is also the densest plane of the outer universes.
-\vs p042 5:6 \ublistelem{4.}\bibnobreakspace \bibemph{The electronic stage.} This stage of energy is the basis of all materialization in the 7 superuniverses. When electrons pass from higher to lower energy levels of orbital revolution, quanta are always given off. Orbital shifting of electrons results in the ejection or the absorption of very definite and uniform measurable particles of light\hyp{}energy, while the individual electron always gives up a particle of light\hyp{}energy when subjected to collision. Wavelike energy manifestations also attend upon the performances of the positive bodies and the other members of the electronic stage.
+\vs p042 5:6 \ublistelem{4.}\bibnobreakspace \bibemph{The electronic stage.} This stage of energy is the basis of all materialization in the seven superuniverses. When electrons pass from higher to lower energy levels of orbital revolution, quanta are always given off. Orbital shifting of electrons results in the ejection or the absorption of very definite and uniform measurable particles of light\hyp{}energy, while the individual electron always gives up a particle of light\hyp{}energy when subjected to collision. Wavelike energy manifestations also attend upon the performances of the positive bodies and the other members of the electronic stage.
 \vs p042 5:7 \ublistelem{5.}\bibnobreakspace \bibemph{Gamma rays ---} those emanations which characterize the spontaneous dissociation of atomic matter. The best illustration of this form of electronic activity is in the phenomena associated with radium disintegration.
 \vs p042 5:8 \ublistelem{6.}\bibnobreakspace \bibemph{The X\hyp{}ray group.} The next step in the slowing down of the electron yields the various forms of solar X\hyp{}rays together with artificially generated X\hyp{}rays. The electronic charge creates an electric field; movement gives rise to an electric current; the current produces a magnetic field. When an electron is suddenly stopped, the resultant electromagnetic commotion produces the X\hyp{}ray; the X\hyp{}ray is \bibemph{that} disturbance. The solar X\hyp{}rays are identical with those which are mechanically generated for exploring the interior of the human body except that they are a trifle longer.
 \vs p042 5:9 \ublistelem{7.}\bibnobreakspace \bibemph{The ultraviolet} or chemical rays of sunlight and the various mechanical productions.
@@ -132,9 +132,9 @@
 \vs p042 10:1 The endless sweep of relative cosmic reality,\fnst{In 1955 text no comma after ``reality''.} from the absoluteness of Paradise monota to the absoluteness of space potency, is suggestive of certain evolutions of relationship in the nonspiritual realities of the First Source and Centre --- those realities which are concealed in space potency, revealed in monota, and provisionally disclosed on intervening cosmic levels. This eternal cycle of energy, being circuited in the Father of universes, is absolute and, being absolute, is expansile in neither fact nor value; nevertheless the Primal Father is even now --- as always --- self\hyp{}realizing of an ever\hyp{}expanding arena of time\hyp{}space, and of time\hyp{}space\hyp{}transcended, meanings, an arena of changing relationships wherein energy\hyp{}matter is being progressively subjected to the overcontrol of living and divine spirit through the experiential striving of living and personal mind.
 \vs p042 10:2 The universal nonspiritual energies are reassociated in the living systems of non\hyp{}Creator minds on various levels, certain of which may be depicted as follows:
 \vs p042 10:3 \ublistelem{1.}\bibnobreakspace \bibemph{Preadjutant\hyp{}spirit minds.} This level of mind is nonexperiencing and on the inhabited worlds is ministered by the Master Physical Controllers. This is mechanical mind, the nonteachable intellect of the most primitive forms of material life, but the nonteachable mind functions on many levels beside that of primitive planetary life.
-\vs p042 10:4 \ublistelem{2.}\bibnobreakspace \bibemph{Adjutant\hyp{}spirit minds.} This is the ministry of a local universe Mother Spirit functioning through her 7 adjutant mind\hyp{}spirits on the teachable (nonmechanical) level of material mind. On this level material mind is experiencing: as subhuman (animal) intellect in the first 5 adjutants; as human (moral) intellect in the 7 adjutants; as superhuman (midwayer) intellect in the last 2 adjutants.
+\vs p042 10:4 \ublistelem{2.}\bibnobreakspace \bibemph{Adjutant\hyp{}spirit minds.} This is the ministry of a local universe Mother Spirit functioning through her seven adjutant mind\hyp{}spirits on the teachable (nonmechanical) level of material mind. On this level material mind is experiencing: as subhuman (animal) intellect in the first 5 adjutants; as human (moral) intellect in the seven adjutants; as superhuman (midwayer) intellect in the last 2 adjutants.
 \vs p042 10:5 \ublistelem{3.}\bibnobreakspace \bibemph{Evolving morontia minds ---} the expanding consciousness of evolving personalities in the local universe ascending careers. This is the bestowal of the local universe Mother Spirit in liaison with the Creator Son. This mind level connotes the organization of the morontia type of life vehicle, a synthesis of the material and the spiritual which is effected by the Morontia Power Supervisors of a local universe. Morontia mind functions differentially in response to the 570 levels of morontia life, disclosing increasing associative capacity with the cosmic mind on the higher levels of attainment. This is the evolutionary course of mortal creatures, but mind of a nonmorontia order is also bestowed by a Universe Son and a Universe Spirit upon the nonmorontia children of the local creations.
-\vs p042 10:6 \pc \bibemph{The cosmic mind.} This is the sevenfold diversified mind of time and space, one phase of which is ministered by each of the Seven Master Spirits to one of the 7 superuniverses. The cosmic mind encompasses all finite\hyp{}mind levels and co\hyp{}ordinates experientially with the evolutionary\hyp{}deity levels of the Supreme Mind and transcendentally with the existential levels of absolute mind --- the direct circuits of the Conjoint Actor.
+\vs p042 10:6 \pc \bibemph{The cosmic mind.} This is the sevenfold diversified mind of time and space, one phase of which is ministered by each of the Seven Master Spirits to one of the seven superuniverses. The cosmic mind encompasses all finite\hyp{}mind levels and co\hyp{}ordinates experientially with the evolutionary\hyp{}deity levels of the Supreme Mind and transcendentally with the existential levels of absolute mind --- the direct circuits of the Conjoint Actor.
 \vs p042 10:7 On Paradise, mind is absolute; in Havona, absonite; in Orvonton, finite. Mind always connotes the presence\hyp{}activity of living ministry plus varied energy systems, and this is true of all levels and of all kinds of mind. But beyond the cosmic mind it becomes increasingly difficult to portray the relationships of mind to nonspiritual energy. Havona mind is subabsolute but superevolutionary; being existential\hyp{}experiential, it is nearer the absonite than any other concept revealed to you. Paradise mind is beyond human understanding; it is existential, nonspatial, and nontemporal. Nevertheless, all of these levels of mind are overshadowed by the universal presence of the Conjoint Actor --- by the mind\hyp{}gravity grasp of the God of mind on Paradise.
 \usection{Universe Mechanisms}
 \vs p042 11:1 In the evaluation and recognition of mind it should be remembered that the universe is neither mechanical nor magical; it is a creation of mind and a mechanism of law. But while in practical application the laws of nature operate in what seems to be the dual realms of the physical and the spiritual, in reality they are one. The First Source and Centre is the primal cause of all materialization and at the same time the first and final Father of all spirits. The Paradise Father appears personally in the extra\hyp{}Havona universes only as pure energy and pure spirit --- as the Thought Adjusters and other similar fragmentations.
@@ -155,7 +155,7 @@
 \vs p042 12:7 \ublistelem{6.}\bibnobreakspace Achievement of spirit levels.
 \vs p042 12:8 \ublistelem{7.}\bibnobreakspace The accomplishment of divine destinies --- supreme, ultimate, and absolute.
 \vs p042 12:9 \pc Mind is always creative. The mind endowment of an individual animal, mortal, morontian, spirit ascender, or finality attainer is always competent to produce a suitable and serviceable body for the living creature identity. But the presence phenomenon of a personality or the pattern of an identity, as such, is not a manifestation of energy, either physical, mindal, or spiritual. The personality form is the \bibemph{pattern} aspect of a living being; it connotes the \bibemph{arrangement} of energies, and this, plus life and motion, is the \bibemph{mechanism} of creature existence.
-\vs p042 12:10 Even spirit beings have form, and these spirit forms (patterns) are real. Even the highest type of spirit personalities have forms --- personality presences in every sense analogous to Urantia mortal bodies. Nearly all beings encountered in the 7 superuniverses are possessed of forms. But there are a few exceptions to this general rule: Thought Adjusters appear to be without form until after fusion with the surviving souls of their mortal associates. Solitary Messengers, Inspired Trinity Spirits, Personal Aids of the Infinite Spirit, Gravity Messengers, Transcendental Recorders, and certain others are also without discoverable form. But these are typical of the exceptional few; the great majority have bona fide personality forms, forms which are individually characteristic, and which are recognizable and personally distinguishable.
+\vs p042 12:10 Even spirit beings have form, and these spirit forms (patterns) are real. Even the highest type of spirit personalities have forms --- personality presences in every sense analogous to Urantia mortal bodies. Nearly all beings encountered in the seven superuniverses are possessed of forms. But there are a few exceptions to this general rule: Thought Adjusters appear to be without form until after fusion with the surviving souls of their mortal associates. Solitary Messengers, Inspired Trinity Spirits, Personal Aids of the Infinite Spirit, Gravity Messengers, Transcendental Recorders, and certain others are also without discoverable form. But these are typical of the exceptional few; the great majority have bona fide personality forms, forms which are individually characteristic, and which are recognizable and personally distinguishable.
 \vs p042 12:11 The liaison of the cosmic mind and the ministry of the adjutant mind\hyp{}spirits evolve a suitable physical tabernacle for the evolving human being. Likewise does the morontia mind individualize the morontia form for all mortal survivors. As the mortal body is personal and characteristic for every human being, so will the morontia form be highly individual and adequately characteristic of the creative mind which dominates it. No two morontia forms are any more alike than any two human bodies. The Morontia Power Supervisors sponsor, and the attending seraphim provide, the undifferentiated morontia material wherewith the morontia life can begin to work. And after the morontia life it will be found that spirit forms are equally diverse, personal, and characteristic of their respective spirit\hyp{}mind indwellers.
 \vs p042 12:12 \pc On a material world you think of a body as having a spirit, but we regard the spirit as having a body. The material eyes are truly the windows of the spirit\hyp{}born soul. The spirit is the architect, the mind is the builder, the body is the material building.
 \vs p042 12:13 \pc Physical, spiritual, and mindal energies, as such and in their pure states, do not fully interact as actuals of the phenomenal universes. On Paradise the three energies are co\hyp{}ordinate, in Havona co\hyp{}ordinated, while in the universe levels of finite activities there must be encountered all ranges of material, mindal, and spiritual dominance. In nonpersonal situations of time and space, physical energy seems to predominate, but it also appears that the more nearly spirit\hyp{}mind function approaches divinity of purpose and supremacy of action, the more nearly does the spirit phase become dominant; that on the ultimate level spirit\hyp{}mind may become all but completely dominant. On the absolute level spirit certainly is dominant. And from there on out through the realms of time and space, wherever a divine spirit reality is present, whenever a real spirit\hyp{}mind is functioning, there always tends to be produced a material or physical counterpart of that spirit reality.
