--- a/tex/p045.tex
+++ b/tex/p045.tex
@@ -7,20 +7,20 @@
 \uminitoc{Adamic Training of Ascenders}
 \uminitoc{The Melchizedek Schools}
 \author{Melchizedek}
-\vs p045 0:1 The administrative centre of Satania consists of a cluster of architectural spheres, 57 in number --- Jerusem itself, the 7 major satellites, and the 49 subsatellites. Jerusem, the system capital, is almost 100 times the size of Urantia, although its gravity is a trifle less. Jerusem’s major satellites are the 7 transition worlds, each of which is about 10 times as large as Urantia, while the 7 subsatellites of these transition spheres are just about the size of Urantia.
-\vs p045 0:2 The 7 mansion worlds are the 7 subsatellites of transition world number one.
+\vs p045 0:1 The administrative centre of Satania consists of a cluster of architectural spheres, 57 in number --- Jerusem itself, the seven major satellites, and the 49 subsatellites. Jerusem, the system capital, is almost 100 times the size of Urantia, although its gravity is a trifle less. Jerusem’s major satellites are the seven transition worlds, each of which is about 10 times as large as Urantia, while the seven subsatellites of these transition spheres are just about the size of Urantia.
+\vs p045 0:2 The seven mansion worlds are the seven subsatellites of transition world number one.
 \vs p045 0:3 This entire system of 57 architectural worlds is independently lighted, heated, watered, and energized by the co\hyp{}ordination of the Satania Power Centre and the Master Physical Controllers in accordance with the established technique of the physical organization and arrangement of these specially created spheres. They are also physically cared for and otherwise maintained by the native spornagia.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[angle=90,width=\tunemarkup{pgkoboaurahd}{0.7}\tunemarkup{pgnexus10}{0.8}\columnwidth]{images/JERUSEM-700.jpg}\caption{Jerusem by Gary Tonge}\end{figure}}
 \usection{Transitional Culture Worlds}
-\vs p045 1:1 The 7 major worlds swinging around Jerusem are generally known as the transitional culture spheres. Their rulers are designated from time to time by the Jerusem supreme executive council. These spheres are numbered and named as follows:
-\vs p045 1:2 \pc \bibemph{Number 1. The Finaliter World.} This is the headquarters of the finaliter corps of the local system and is surrounded by the receiving worlds, the 7 mansion worlds, dedicated so fully to the scheme of mortal ascension. The finaliter world is accessible to the inhabitants of all 7 mansion worlds. Transport seraphim carry ascending personalities back and forth on these pilgrimages, which are designed to cultivate their faith in the ultimate destiny of transition mortals. Although the finaliters and their structures are not ordinarily perceptible to morontia vision, you will be more than thrilled, from time to time, when the energy transformers and the Morontia Power Supervisors enable you momentarily to glimpse these high spirit personalities who have actually completed the Paradise ascension, and who have returned to the very worlds where you are beginning this long journey, as the pledge of assurance that you may and can complete the stupendous undertaking. All mansion world sojourners go to the finaliter sphere at least once a year for these assemblies of finaliter visualization.
-\vs p045 1:3 \pc \bibemph{Number 2. The Morontia World.} This planet is the headquarters of the supervisors of morontia life and is surrounded by the 7 spheres whereon the morontia chiefs train their associates and helpers, both morontia beings and ascending mortals.
-\vs p045 1:4 In passing through the 7 mansion worlds, you will also progress through these cultural and social spheres of increasing morontia contact. When you advance from the first to the second mansion world, you will become eligible for a visitor’s permit to transitional headquarters number two, the morontia world, and so on. And when present on any one of these six cultural spheres, you may, on invitation, become a visitor and observer on any of the 7 surrounding worlds of associated group activities.
-\vs p045 1:5 \pc \bibemph{Number 3. The Angelic World.} This is the headquarters of all the seraphic hosts engaged in system activities and is surrounded by the 7 worlds of angelic training and instruction. These are the seraphic social spheres.
-\vs p045 1:6 \pc \bibemph{Number 4. The Superangel World.} This sphere is the Satania home of the Brilliant Evening Stars and a vast concourse of co\hyp{}ordinate and near\hyp{}co\hyp{}ordinate beings. The 7 satellites of this world are assigned to the 7 major groups of these unnamed celestial beings.
-\vs p045 1:7 \pc \bibemph{Number 5. The World of the Sons.} This planet is the headquarters of the divine Sons of all orders, including the creature\hyp{}trinitized sons. The surrounding 7 worlds are devoted to certain individual groupings of these divinely related sons.
-\vs p045 1:8 \pc \bibemph{Number 6. The World of the Spirit.} This sphere serves as the system rendezvous of the high personalities of the Infinite Spirit. Its 7 surrounding satellites are assigned to individual groups of these diverse orders. But on transition world number six there is no representation of the Spirit, neither is such a presence to be observed on the system capitals; the Divine Minister of Salvington is \bibemph{everywhere} in Nebadon.
+\vs p045 1:1 The seven major worlds swinging around Jerusem are generally known as the transitional culture spheres. Their rulers are designated from time to time by the Jerusem supreme executive council. These spheres are numbered and named as follows:
+\vs p045 1:2 \pc \bibemph{Number 1. The Finaliter World.} This is the headquarters of the finaliter corps of the local system and is surrounded by the receiving worlds, the seven mansion worlds, dedicated so fully to the scheme of mortal ascension. The finaliter world is accessible to the inhabitants of all seven mansion worlds. Transport seraphim carry ascending personalities back and forth on these pilgrimages, which are designed to cultivate their faith in the ultimate destiny of transition mortals. Although the finaliters and their structures are not ordinarily perceptible to morontia vision, you will be more than thrilled, from time to time, when the energy transformers and the Morontia Power Supervisors enable you momentarily to glimpse these high spirit personalities who have actually completed the Paradise ascension, and who have returned to the very worlds where you are beginning this long journey, as the pledge of assurance that you may and can complete the stupendous undertaking. All mansion world sojourners go to the finaliter sphere at least once a year for these assemblies of finaliter visualization.
+\vs p045 1:3 \pc \bibemph{Number 2. The Morontia World.} This planet is the headquarters of the supervisors of morontia life and is surrounded by the seven spheres whereon the morontia chiefs train their associates and helpers, both morontia beings and ascending mortals.
+\vs p045 1:4 In passing through the seven mansion worlds, you will also progress through these cultural and social spheres of increasing morontia contact. When you advance from the first to the second mansion world, you will become eligible for a visitor’s permit to transitional headquarters number two, the morontia world, and so on. And when present on any one of these six cultural spheres, you may, on invitation, become a visitor and observer on any of the seven surrounding worlds of associated group activities.
+\vs p045 1:5 \pc \bibemph{Number 3. The Angelic World.} This is the headquarters of all the seraphic hosts engaged in system activities and is surrounded by the seven worlds of angelic training and instruction. These are the seraphic social spheres.
+\vs p045 1:6 \pc \bibemph{Number 4. The Superangel World.} This sphere is the Satania home of the Brilliant Evening Stars and a vast concourse of co\hyp{}ordinate and near\hyp{}co\hyp{}ordinate beings. The seven satellites of this world are assigned to the seven major groups of these unnamed celestial beings.
+\vs p045 1:7 \pc \bibemph{Number 5. The World of the Sons.} This planet is the headquarters of the divine Sons of all orders, including the creature\hyp{}trinitized sons. The surrounding seven worlds are devoted to certain individual groupings of these divinely related sons.
+\vs p045 1:8 \pc \bibemph{Number 6. The World of the Spirit.} This sphere serves as the system rendezvous of the high personalities of the Infinite Spirit. Its seven surrounding satellites are assigned to individual groups of these diverse orders. But on transition world number six there is no representation of the Spirit, neither is such a presence to be observed on the system capitals; the Divine Minister of Salvington is \bibemph{everywhere} in Nebadon.
 \vs p045 1:9 \pc \bibemph{Number 7. The World of the Father.} This is the silent sphere of the system. No group of beings is domiciled on it. The great temple of light occupies a central place, but no one can be discerned therein. All beings of all the system worlds are welcomed as worshippers.
-\vs p045 1:10 The 7 satellites surrounding the Father’s world are variously utilized in the different systems. In Satania they are now used as the detention spheres for the interned groups of the Lucifer rebellion. The constellation capital, Edentia, has no analogous prison worlds; the few seraphim and cherubim who went over to the rebels in the Satania rebellion have been long since confined on these isolation worlds of Jerusem.
+\vs p045 1:10 The seven satellites surrounding the Father’s world are variously utilized in the different systems. In Satania they are now used as the detention spheres for the interned groups of the Lucifer rebellion. The constellation capital, Edentia, has no analogous prison worlds; the few seraphim and cherubim who went over to the rebels in the Satania rebellion have been long since confined on these isolation worlds of Jerusem.
 \vs p045 1:11 As a sojourner on the 7\ts{th} mansion world, you have access to the 7\ts{th} transition world, the sphere of the Universal Father, and are also permitted to visit the Satania prison worlds surrounding this planet, whereon are now confined Lucifer and the majority of those personalities who followed him in rebellion against Michael. And this sad spectacle has been observable during these recent ages and will continue to serve as a solemn warning to all Nebadon until the Ancients of Days shall adjudicate the sin of Lucifer and his fallen associates who rejected the salvation proffered by Michael, their universe Father.
 \usection{The System Sovereign}
 \vs p045 2:1 The chief executive of a local system of inhabited worlds is a primary Lanonandek Son, the System Sovereign. In our local universe these sovereigns are entrusted with large executive responsibilities, unusual personal prerogatives. Not all universes, even in Orvonton, are so organized as to permit the System Sovereigns to exercise such unusually wide powers of personal discretion in the direction of system affairs. But in all the history of Nebadon these untrammelled executives have exhibited disloyalty only three times. The Lucifer rebellion in the system of Satania was the last and the most widespread of all.
@@ -30,7 +30,7 @@
 \vs p045 2:5 Once a week, every 10 days on Jerusem, the Sovereign holds a conclave with some one group of the various orders of personalities domiciled on the headquarters world. These are the charmingly informal hours of Jerusem, and they are never\hyp{}to\hyp{}be\hyp{}forgotten occasions. On Jerusem there exists the utmost fraternity between all the various orders of beings and between each of these groups and the System Sovereign.
 \vs p045 2:6 These unique assemblages occur on the sea of glass, the great gathering field of the system capital. They are purely social and spiritual occasions; nothing pertaining to the planetary administration or even to the ascendant plan is ever discussed. Ascending mortals come together at these times merely to enjoy themselves and to meet their fellow Jerusemites. Those groups which are not being entertained by the Sovereign at these weekly relaxations meet at their own headquarters.
 \usection{The System Government}
-\vs p045 3:1 The chief executive of a local system, the System Sovereign, is always supported by two or three Lanonandek Sons, who function as first and second assistants. But at the present time the system of Satania is administered by a staff of 7 Lanonandeks:
+\vs p045 3:1 The chief executive of a local system, the System Sovereign, is always supported by two or three Lanonandek Sons, who function as first and second assistants. But at the present time the system of Satania is administered by a staff of seven Lanonandeks:
 \vs p045 3:2 \ublistelem{1.}\bibnobreakspace \bibemph{The System Sovereign ---} Lanaforge, number 2,709 of the primary order and successor to the apostate Lucifer.
 \vs p045 3:3 \ublistelem{2.}\bibnobreakspace \bibemph{The first assistant Sovereign ---} Mansurotia, number 17,841 of the tertiary Lanonandeks. He was dispatched to Satania along with Lanaforge.
 \vs p045 3:4 \ublistelem{3.}\bibnobreakspace \bibemph{The second assistant Sovereign ---} Sadib, number 271,402 of the tertiary order. Sadib also came to Satania with Lanaforge.
@@ -38,7 +38,7 @@
 \vs p045 3:6 \ublistelem{5.}\bibnobreakspace \bibemph{The system recorder ---} Vilton, secretary of the Lanonandek ministry of Satania, number 374 of the third order. Vilton was a member of the original Lanaforge group.
 \vs p045 3:7 \ublistelem{6.}\bibnobreakspace \bibemph{The bestowal director ---} Fortant, number 319,847 of the reserves of the secondary Lanonandeks and temporary director of all universe activities transplanted to Jerusem since Michael’s bestowal on Urantia. Fortant has been attached to the staff of Lanaforge for 1900 years of Urantia time.
 \vs p045 3:8 \ublistelem{7.}\bibnobreakspace \bibemph{The high counsellor ---} Hanavard, number 67 of the primary Lanonandek Sons and a member of the high corps of universe counsellors and co\hyp{}ordinators. He functions as acting chairman of the executive council of Satania. Hanavard is the 12\ts{th} of this order so to serve on Jerusem since the Lucifer rebellion.
-\vs p045 3:9 \pc This executive group of 7 Lanonandeks constitutes the expanded emergency administration made necessary by the exigencies of the Lucifer rebellion. There are only minor courts on Jerusem since the system is the unit of administration, not adjudication, but the Lanonandek administration is supported by the Jerusem executive council, the supreme advisory body of Satania. This council consists of 12 members:
+\vs p045 3:9 \pc This executive group of seven Lanonandeks constitutes the expanded emergency administration made necessary by the exigencies of the Lucifer rebellion. There are only minor courts on Jerusem since the system is the unit of administration, not adjudication, but the Lanonandek administration is supported by the Jerusem executive council, the supreme advisory body of Satania. This council consists of 12 members:
 \vs p045 3:10 \ublistelem{1.}\bibnobreakspace Hanavard, the Lanonandek chairman.
 \vs p045 3:11 \ublistelem{2.}\bibnobreakspace Lanaforge, the System Sovereign.
 \vs p045 3:12 \ublistelem{3.}\bibnobreakspace Mansurotia, the first assistant Sovereign.
@@ -53,7 +53,7 @@
 \vs p045 3:21 \ublistelem{12.}\bibnobreakspace The acting head of the corps of ascending mortals.
 \vs p045 3:22 \pc This council periodically chooses three members to represent the local system on the supreme council at universe headquarters, but this representation is suspended by rebellion. Satania now has an observer at the headquarters of the local universe, but since the bestowal of Michael the system has resumed the election of 10 members to the Edentia legislature.
 \usection{The Four and Twenty Counsellors}
-\vs p045 4:1 At the centre of the 7 angelic residential circles on Jerusem is located the headquarters of the Urantia advisory council, the four and twenty counsellors. John the Revelator called them the four and twenty elders: “And round about the throne were four and twenty seats, and upon the seats I saw four and twenty elders sitting, clothed in white raiment.” The throne in the centre of this group is the judgment seat of the presiding archangel, the throne of the resurrection roll call of mercy and justice for all Satania. This judgment seat has always been on Jerusem, but the 24 surrounding seats were placed in position no more than 1900 years ago, soon after Christ Michael was elevated to the full sovereignty of Nebadon. These four and twenty counsellors are his personal agents on Jerusem, and they have authority to represent the Master Son in all matters concerning the roll calls of Satania and in many other phases of the scheme of mortal ascension on the isolated worlds of the system. They are the designated agents for executing the special requests of Gabriel and the unusual mandates of Michael.
+\vs p045 4:1 At the centre of the seven angelic residential circles on Jerusem is located the headquarters of the Urantia advisory council, the four and twenty counsellors. John the Revelator called them the four and twenty elders: “And round about the throne were four and twenty seats, and upon the seats I saw four and twenty elders sitting, clothed in white raiment.” The throne in the centre of this group is the judgment seat of the presiding archangel, the throne of the resurrection roll call of mercy and justice for all Satania. This judgment seat has always been on Jerusem, but the 24 surrounding seats were placed in position no more than 1900 years ago, soon after Christ Michael was elevated to the full sovereignty of Nebadon. These four and twenty counsellors are his personal agents on Jerusem, and they have authority to represent the Master Son in all matters concerning the roll calls of Satania and in many other phases of the scheme of mortal ascension on the isolated worlds of the system. They are the designated agents for executing the special requests of Gabriel and the unusual mandates of Michael.
 \vs p045 4:2 These 24 counsellors have been recruited from the 8 Urantia races, and the last of this group were assembled at the time of the resurrection roll call of Michael, 1900 years ago. This Urantia advisory council is made up of the following members:
 \vs p045 4:3 \ublistelem{1.}\bibnobreakspace \bibemph{Onagar,} the master mind of the pre\hyp{}Planetary Prince age, who directed his fellows in the worship of “The Breath Giver.”
 \vs p045 4:4 \ublistelem{2.}\bibnobreakspace \bibemph{Mansant,} the great teacher of the post\hyp{}Planetary Prince age on Urantia, who pointed his fellows to the veneration of “The Great Light.”
@@ -85,7 +85,7 @@
 \usection{Adamic Training of Ascenders}
 \vs p045 6:1 The Material Sons and Daughters, together with their children, present an engaging spectacle which never fails to arouse the curiosity and intrigue the attention of all ascending mortals. They are so similar to your own material sex races that you both find much of common interest to engage your thoughts and occupy your seasons of fraternal contact.
 \vs p045 6:2 Mortal survivors spend much of their leisure on the system capital observing and studying the life habits and conduct of these superior semiphysical sex creatures, for these citizens of Jerusem are the immediate sponsors and mentors of the mortal survivors from the time they attain citizenship on the headquarters world until they take leave for Edentia.
-\vs p045 6:3 On the 7 mansion worlds ascending mortals are afforded ample opportunities for compensating any and all experiential deprivations suffered on their worlds of origin, whether due to inheritance, environment, or unfortunate premature termination of the career in the flesh. This is in every sense true except in the mortal sex life and its attendant adjustments. Thousands of mortals reach the mansion worlds without having benefited particularly from the disciplines derived from fairly average sex relations on their native spheres. The mansion world experience can provide little opportunity for compensating these very personal deprivations. Sex experience in a physical sense is past for these ascenders, but in close association with the Material Sons and Daughters, both individually and as members of their families, these sex\hyp{}deficient mortals are enabled to compensate the social, intellectual, emotional, and spiritual aspects of their deficiency. Thus are all those humans whom circumstances or bad judgment deprived of the benefits of advantageous sex association on the evolutionary worlds, here on the system capitals afforded full opportunity to acquire these essential mortal experiences in close and loving association with the supernal Adamic sex creatures of permanent residence on the system capitals.
+\vs p045 6:3 On the seven mansion worlds ascending mortals are afforded ample opportunities for compensating any and all experiential deprivations suffered on their worlds of origin, whether due to inheritance, environment, or unfortunate premature termination of the career in the flesh. This is in every sense true except in the mortal sex life and its attendant adjustments. Thousands of mortals reach the mansion worlds without having benefited particularly from the disciplines derived from fairly average sex relations on their native spheres. The mansion world experience can provide little opportunity for compensating these very personal deprivations. Sex experience in a physical sense is past for these ascenders, but in close association with the Material Sons and Daughters, both individually and as members of their families, these sex\hyp{}deficient mortals are enabled to compensate the social, intellectual, emotional, and spiritual aspects of their deficiency. Thus are all those humans whom circumstances or bad judgment deprived of the benefits of advantageous sex association on the evolutionary worlds, here on the system capitals afforded full opportunity to acquire these essential mortal experiences in close and loving association with the supernal Adamic sex creatures of permanent residence on the system capitals.
 \vs p045 6:4 \pc No surviving mortal, midwayer, or seraphim may ascend to Paradise, attain the Father, and be mustered into the Corps of the Finality without having passed through that sublime experience of achieving parental relationship to an evolving child of the worlds or some other experience analogous and equivalent thereto. The relationship of child and parent is fundamental to the essential concept of the Universal Father and his universe children. Therefore does such an experience become indispensable to the experiential training of all ascenders.
 \vs p045 6:5 The ascending midway creatures and the evolutionary seraphim must pass through this parenthood experience in association with the Material Sons and Daughters of the system headquarters. Thus do such nonreproducing ascenders obtain the experience of parenthood by assisting the Jerusem Adams and Eves in rearing and training their progeny.
 \vs p045 6:6 All mortal survivors who have not experienced parenthood on the evolutionary worlds must also obtain this necessary training while sojourning in the homes of the Jerusem Material Sons and as parental associates of these superb fathers and mothers. This is true except in so far as such mortals have been able to compensate their deficiencies on the system nursery located on the first transitional\hyp{}culture world of Jerusem.
@@ -93,7 +93,7 @@
 \vs p045 6:8 Mansion world students who have one or more children in the probationary nursery on the finaliters’ world, and who are deficient in essential parental experience, may apply for a Melchizedek permit which will effect their temporary transfer from ascension duties on the mansion worlds to the finaliter world, where they are granted opportunity to function as associate parents to their own and other children. This service of parental ministry may be later accredited on Jerusem as the fulfilment of one half of the training which such ascenders are required to undergo in the families of the Material Sons and Daughters.
 \vs p045 6:9 The probation nursery itself is supervised by one thousand couples of Material Sons and Daughters, volunteers from the Jerusem colony of their order. They are immediately assisted by about an equal number of volunteer midsonite parental groups who stop off here to render this service on their way from the midsonite world of Satania to the unrevealed destiny on their special worlds of reservation among the finaliter spheres of Salvington.
 \usection{The Melchizedek Schools}
-\vs p045 7:1 The Melchizedeks are the directors of that large corps of instructors --- partially spiritualized will creatures and others --- who function so acceptably on Jerusem and its associated worlds but especially on the 7 mansion worlds. These are the detention planets, where those mortals who fail to achieve fusion with their indwelling Adjusters during the life in the flesh are rehabilitated in transient form to receive further help and to enjoy extended opportunity for continuing their strivings for spiritual attainment, those very efforts which were prematurely interrupted by death. Or if, for any other reason of hereditary handicap, unfavourable environment, or conspiracy of circumstances, this soul attainment was not completed, no matter what the reason, all who are true of purpose and worthy in spirit find themselves, as themselves, present on the continuing planets, where they must learn to master the essentials of the eternal career, to possess themselves of traits which they could not, or did not, acquire during the lifetime in the flesh.
+\vs p045 7:1 The Melchizedeks are the directors of that large corps of instructors --- partially spiritualized will creatures and others --- who function so acceptably on Jerusem and its associated worlds but especially on the seven mansion worlds. These are the detention planets, where those mortals who fail to achieve fusion with their indwelling Adjusters during the life in the flesh are rehabilitated in transient form to receive further help and to enjoy extended opportunity for continuing their strivings for spiritual attainment, those very efforts which were prematurely interrupted by death. Or if, for any other reason of hereditary handicap, unfavourable environment, or conspiracy of circumstances, this soul attainment was not completed, no matter what the reason, all who are true of purpose and worthy in spirit find themselves, as themselves, present on the continuing planets, where they must learn to master the essentials of the eternal career, to possess themselves of traits which they could not, or did not, acquire during the lifetime in the flesh.
 \vs p045 7:2 The Brilliant Evening Stars (and their unnamed co\hyp{}ordinates) frequently serve as teachers in the various educational enterprises of the universe, including those sponsored by the Melchizedeks. Also do the Trinity Teacher Sons collaborate, and they impart the touches of Paradise perfection to these progressive training schools. But all these activities are not exclusively devoted to the advancement of ascending mortals; many are equally occupied with the progressive training of the native spirit personalities of Nebadon.
 \vs p045 7:3 The Melchizedek Sons conduct upward of 30 different educational centres on Jerusem. These training schools begin with the college of self\hyp{}evaluation and end with the schools of Jerusem citizenship, wherein the Material Sons and Daughters join with the Melchizedeks and others in their supreme effort to qualify the mortal survivors for the assumption of the high responsibilities of representative government. The entire universe is organized and administered on the \bibemph{representative} plan. Representative government is the divine ideal of self\hyp{}government among nonperfect beings.
 \vs p045 7:4 Every 100 years of universe time each system selects its 10 representatives to sit in the constellation legislature. They are chosen by the Jerusem council of one thousand, an elective body charged with the duty of representing the system groups in all such delegated or appointive matters. All representatives or other delegates are selected by the council of one thousand electors, and they must be graduates of the highest school of the Melchizedek College of Administration, as also are all of those who constitute this group of one thousand electors. This school is fostered by the Melchizedeks, latterly assisted by the finaliters.
