--- a/tex/p046.tex
+++ b/tex/p046.tex
@@ -10,7 +10,7 @@
 \author{Archangel}
 \vs p046 0:1 Jerusem, the headquarters of Satania, is an average capital of a local system, and aside from numerous irregularities occasioned by the Lucifer rebellion and the bestowal of Michael on Urantia, it is typical of similar spheres. Your local system has passed through some stormy experiences, but it is at present being administered most efficiently, and as the ages pass, the results of disharmony are being slowly but surely eradicated. Order and good will are being restored, and the conditions on Jerusem are more and more approaching the heavenly status of your traditions, for the system headquarters is truly the heaven visualized by the majority of XX century religious believers.
 \usection{Physical Aspects of Jerusem}
-\vs p046 1:1 Jerusem is divided into 1,000 latitudinal sectors and 10,000 longitudinal zones. The sphere has 7 major capitals and 70 minor administrative centres. The 7 sectional capitals are concerned with diverse activities, and the System Sovereign is present in each at least once a year.
+\vs p046 1:1 Jerusem is divided into 1,000 latitudinal sectors and 10,000 longitudinal zones. The sphere has seven major capitals and 70 minor administrative centres. The seven sectional capitals are concerned with diverse activities, and the System Sovereign is present in each at least once a year.
 \vs p046 1:2 \pc The standard mile of Jerusem is equivalent to about 11 Urantia km\index{Measures of distance, etc.!Measures of distance!Jerusem mile $\approx$ 11\,km}. The standard weight, the “gradant,”\index{Measures of distance, etc.!Measures of mass!gradant $\approx$ 283 grams} is built up through the decimal system from the mature ultimaton\fnst{This suggests that there is no need for the concept of \bibemph{amount of substance} or the equivalent of our Avogadro's number on Jerusem. It should be recalled that on Urantia the concept of the ``amount of substance'' exists because the unit of mass is not defined as a multiple of some elementary such unit, unlike the metre and second. And the accuracy with which the mass can be measured differs from that of the number of structural elements (electrons, ions, molecules, atoms etc). But on Jerusem, the mass is defined in the same way as our metre and second, i.e. as multiple of an elementary unit.} and represents almost exactly 283 grams\fnst{Thus the mass of the mature ultimaton can be written as $2.8349523125 \times 10^{-N}$\,kg, where $N$ is a natural number. I think that $N=8$, i.e. ultimaton has the mass close to the value of \bibemph{Planck mass}.} of your weight. The Satania day equals 3 days of Urantia time, less 1 hour, 4 minutes, and 15 seconds,\index{Measures of distance, etc.!Measures of time!Satania day $\approx$ 254637\,s $=$ 2\,d 22\,h 43\,m 57\,s.}\fnst{Assuming the length of \bibemph{sidereal} day to be 86164.0905\,s gives the length of Satania day of 254637.2715\,s $\approx$ 2 days 22 hours 43 minutes and 57 seconds.} that being the time of the axial revolution of Jerusem. The system year consists of 100 Jerusem days. The time of the system is broadcast by the master chronoldeks.
 \vs p046 1:3 \pc The energy of Jerusem is superbly controlled and circulates about the sphere in the zone channels, which are directly fed from the energy charges of space and expertly administered by the Master Physical Controllers. The natural resistance to the passage of these energies through the physical channels of conduction yields the heat required for the production of the equable temperature of Jerusem. The full\hyp{}light temperature is maintained at about 21\,°C, while during the period of light recession it falls to a little lower than 10\,°C.
 \vs p046 1:4 \pc The lighting system of Jerusem should not be so difficult for you to comprehend. There are no days and nights, no seasons of heat and cold. The power transformers maintain 100,000 centres from which rarefied energies are projected upward through the planetary atmosphere, undergoing certain changes, until they reach the electric air\hyp{}ceiling of the sphere; and then these energies are reflected back and down as a gentle, sifting, and even light of about the intensity of Urantia sunlight when the sun is shining overhead at 10:00.
@@ -18,7 +18,7 @@
 \vs p046 1:6 The gases which reflect this light\hyp{}energy from the Jerusem upper ionosphere back to the ground are very similar to those in the Urantia upper air belts which are concerned with the auroral phenomena of your so\hyp{}called northern lights, although these are produced by different causes. On Urantia it is this same gas shield which prevents the escape of the terrestrial broadcast waves, reflecting them earthward when they strike this gas belt in their direct outward flight. In this way broadcasts are held near the surface as they journey through the air around your world.
 \vs p046 1:7 This lighting of the sphere is uniformly maintained for 75\% of the Jerusem day, and then there is a gradual recession until, at the time of minimum illumination, the light is about that of your full moon on a clear night. This is the quiet hour for all Jerusem. Only the broadcast\hyp{}receiving stations are in operation during this period of rest and rehabilitation.
 \vs p046 1:8 \pc Jerusem receives faint light from several near\hyp{}by suns --- a sort of brilliant starlight --- but it is not dependent on them; worlds like Jerusem are not subject to the vicissitudes of sun disturbances, neither are they confronted with the problem of a cooling or dying sun.
-\vs p046 1:9 The 7 transitional study worlds and their 49 satellites are heated, lighted, energized, and watered by the Jerusem technique.
+\vs p046 1:9 The seven transitional study worlds and their 49 satellites are heated, lighted, energized, and watered by the Jerusem technique.
 \usection{Physical Features of Jerusem}
 \vs p046 2:1 On Jerusem you will miss the rugged mountain ranges of Urantia and other evolved worlds since there are neither earthquakes nor rainfalls, but you will enjoy the beauteous highlands and other unique variations of topography and landscape. Enormous areas of Jerusem are preserved in a “natural state,” and the grandeur of such districts is quite beyond the powers of human imagination.
 \vs p046 2:2 There are thousands upon thousands of small lakes but no raging rivers nor expansive oceans. There is no rainfall, neither storms nor blizzards, on any of the architectural worlds, but there is the daily precipitation of the condensation of moisture during the time of lowest temperature attending the light recession. (The dew point is higher on a 3\hyp{}gas world than on a 2\hyp{}gas planet like Urantia.) The physical plant life and the morontia world of living things both require moisture, but this is largely supplied by the subsoil system of circulation which extends all over the sphere, even up to the very tops of the highlands. This water system is not entirely subsurface, for there are many canals interconnecting the sparkling lakes of Jerusem.
@@ -53,9 +53,9 @@
 \vs p046 5:6 \ublistelem{5.}\bibnobreakspace The circles of the assigned ascending mortals, including the midway creatures.
 \vs p046 5:7 \ublistelem{6.}\bibnobreakspace The circles of the courtesy colonies.
 \vs p046 5:8 \ublistelem{7.}\bibnobreakspace The circles of the Corps of the Finality.
-\vs p046 5:9 \pc Each of these residential groupings consists of 7 concentric and successively elevated circles. They are all constructed along the same lines but are of different sizes and are fashioned of differing materials. They are all surrounded by far\hyp{}reaching enclosures, which mount up to form extensive promenades entirely encompassing every group of 7 concentric circles.
+\vs p046 5:9 \pc Each of these residential groupings consists of seven concentric and successively elevated circles. They are all constructed along the same lines but are of different sizes and are fashioned of differing materials. They are all surrounded by far\hyp{}reaching enclosures, which mount up to form extensive promenades entirely encompassing every group of seven concentric circles.
 \vs p046 5:10 \ublistelem{1.}\bibnobreakspace \bibemph{Circles of the Sons of God.} Though the Sons of God possess a social planet of their own, one of the transitional\hyp{}culture worlds, they also occupy these extensive domains on Jerusem. On their transitional\hyp{}culture world the ascending mortals freely mingle with all orders of divine sonship. There you will personally know and love these Sons, but their social life is largely confined to this special world and its satellites. In the Jerusem circles, however, these various groups of sonship may be observed at work. And since morontia vision is of enormous range, you can walk about on the Sons’ promenades and overlook the intriguing activities of their numerous orders.
-\vs p046 5:11 These 7 circles of the Sons are concentric and successively elevated so that each of the outer and larger circles overlooks the inner and smaller ones, each being surrounded by a public promenade wall. These walls are constructed of crystal gems of gleaming brightness and are so elevated as to overlook all of their respective residential circles. The many gates --- from 50 to 150,000 --- which penetrate each of these walls consist of single pearly crystals.
+\vs p046 5:11 These seven circles of the Sons are concentric and successively elevated so that each of the outer and larger circles overlooks the inner and smaller ones, each being surrounded by a public promenade wall. These walls are constructed of crystal gems of gleaming brightness and are so elevated as to overlook all of their respective residential circles. The many gates --- from 50 to 150,000 --- which penetrate each of these walls consist of single pearly crystals.
 \vs p046 5:12 The 1\ts{st} circle of the domain of the Sons is occupied by the Magisterial Sons and their personal staffs. Here centre all of the plans and immediate activities of the bestowal and adjudicational services of these juridical Sons. It is also through this centre that the Avonals of the system maintain contact with the universe.
 \vs p046 5:13 The 2\ts{nd} circle is occupied by the Trinity Teacher Sons. In this sacred domain the Daynals and their associates carry forward the training of the newly arrived primary Teacher Sons. And in all of this work they are ably assisted by a division of certain co\hyp{}ordinates of the Brilliant Evening Stars. The creature\hyp{}trinitized sons occupy a sector of the Daynal circle. The Trinity Teacher Sons come the nearest to being the personal representatives of the Universal Father in a local system; they are at least Trinity\hyp{}origin beings. This 2\ts{nd} circle is a domain of extraordinary interest to all the peoples of Jerusem.
 \vs p046 5:14 The 3\ts{rd} circle is devoted to the Melchizedeks. Here the system chiefs reside and supervise the almost endless activities of these versatile Sons. From the first of the mansion worlds on through all the Jerusem career of ascending mortals, the Melchizedeks are foster fathers and ever\hyp{}present advisers. It would not be amiss to say that they are the dominant influence on Jerusem aside from the ever\hyp{}present activities of the Material Sons and Daughters.
@@ -64,17 +64,17 @@
 \vs p046 5:17 The 6\ts{th} circle is the tarrying place of the system Life Carriers. All orders of these Sons are here assembled, and from here they go forth on their world assignments.
 \vs p046 5:18 The 7\ts{th} circle is the rendezvous of the ascending sons, those assigned mortals who may be temporarily functioning on the system headquarters, together with their seraphic consorts. All ex\hyp{}mortals above the status of Jerusem citizens and below that of finaliters are reckoned as belonging to the group having its headquarters in this circle.
 \vs p046 5:19 These circular reservations of the Sons occupy an enormous area, and until 1900 years ago there existed a great open space at its centre. This central region is now occupied by the Michael memorial, completed some 500 years ago. 495 years ago, when this temple was dedicated, Michael was present in person, and all Jerusem heard the touching story of the Master Son’s bestowal on Urantia, the least of Satania. The Michael memorial is now the centre of all activities embraced in the modified management of the system occasioned by Michael’s bestowal, including most of the more recently transplanted Salvington activities. The memorial staff consists of over 1,000,000 personalities.
-\vs p046 5:20 \ublistelem{2.}\bibnobreakspace \bibemph{The circles of the angels.} Like the residential area of the Sons, these circles of the angels consist of 7 concentric and successively elevated circles, each overlooking the inner areas.
+\vs p046 5:20 \ublistelem{2.}\bibnobreakspace \bibemph{The circles of the angels.} Like the residential area of the Sons, these circles of the angels consist of seven concentric and successively elevated circles, each overlooking the inner areas.
 \vs p046 5:21 \pc The 1\ts{st} circle of the angels is occupied by the Higher Personalities of the Infinite Spirit who may be stationed on the headquarters world --- Solitary Messengers and their associates. The 2\ts{nd} circle is dedicated to the messenger hosts, Technical Advisers, companions, inspectors, and recorders as they may chance to function on Jerusem from time to time. The 3\ts{rd} circle is held by the ministering spirits of the higher orders and groupings.
 \vs p046 5:22 The 4\ts{th} circle is held by the administrator seraphim, and the seraphim serving in a local system like Satania are an “innumerable host of angels.” The 5\ts{th} circle is occupied by the planetary seraphim, while the 6\ts{th} is the home of the transition ministers. The 7\ts{th} circle is the tarrying sphere of certain unrevealed orders of seraphim. The recorders of all these groups of angels do not sojourn with their fellows, being domiciled in the Jerusem temple of records. All records are preserved in triplicate in this threefold hall of archives. On a system headquarters, records are always preserved in material, in morontia, and in spirit form.
-\vs p046 5:23 These 7 circles are surrounded by the exhibit panorama of Jerusem, 5,000 standard miles in circumference, which is devoted to the presentation of the advancing status of the peopled worlds of Satania and is constantly revised so as to truly represent up\hyp{}to\hyp{}date conditions on the individual planets. I doubt not that this vast promenade overlooking the circles of the angels will be the first sight of Jerusem to claim your attention when you are permitted extended leisure on your earlier visits.
+\vs p046 5:23 These seven circles are surrounded by the exhibit panorama of Jerusem, 5,000 standard miles in circumference, which is devoted to the presentation of the advancing status of the peopled worlds of Satania and is constantly revised so as to truly represent up\hyp{}to\hyp{}date conditions on the individual planets. I doubt not that this vast promenade overlooking the circles of the angels will be the first sight of Jerusem to claim your attention when you are permitted extended leisure on your earlier visits.
 \vs p046 5:24 These exhibits are in charge of the native life of Jerusem, but they are assisted by the ascenders from the various Satania worlds who are tarrying on Jerusem en route to Edentia. The portrayal of planetary conditions and world progress is effected by many methods, some known to you, but mostly by techniques unknown on Urantia. These exhibits occupy the outer edge of this vast wall. The remainder of the promenade is almost entirely open, being highly and magnificently embellished.
 \vs p046 5:25 \ublistelem{3.}\bibnobreakspace \bibemph{The circles of the Universe Aids} have the headquarters of the Evening Stars situated in the enormous central space. Here is located the system headquarters of Galantia, the associate head of this powerful group of superangels, being the first commissioned of all the ascendant Evening Stars. This is one of the most magnificent of all the administrative sectors of Jerusem, even though it is among the more recent constructions. This centre is 50 miles in diameter. The Galantia headquarters is a monolithic cast crystal, wholly transparent. These material\hyp{}morontia crystals are greatly appreciated by both morontia and material beings. The created Evening Stars exert their influence all over Jerusem, being possessed of such extrapersonality attributes. The entire world has been rendered spiritually fragrant since so many of their activities were transferred here from Salvington.
 \vs p046 5:26 \ublistelem{4.}\bibnobreakspace \bibemph{The circles of the Master Physical Controllers.} The various orders of the Master Physical Controllers are concentrically arranged around the vast temple of power, wherein presides the power chief of the system in association with the chief of the Morontia Power Supervisors. This temple of power is one of two sectors on Jerusem where ascending mortals and midway creatures are not permitted. The other one is the dematerializing sector in the area of the Material Sons, a series of laboratories wherein the transport seraphim transform material beings into a state quite like that of the morontia order of existence.
 \vs p046 5:27 \ublistelem{5.}\bibnobreakspace \bibemph{The circles of the ascending mortals.} The central area of the circles of the ascending mortals is occupied by a group of 619 planetary memorials representative of the inhabited worlds of the system, and these structures periodically undergo extensive changes. It is the privilege of the mortals from each world to agree, from time to time, upon certain of the alterations or additions to their planetary memorials. Many changes are even now being made in the Urantia structures. The centre of these 619 temples is occupied by a working model of Edentia and its many worlds of ascendant culture. This model is 40 miles in diameter and is an actual reproduction of the Edentia system, true to the original in every detail.
 \vs p046 5:28 Ascenders enjoy their Jerusem services and take pleasure in observing the techniques of other groups. Everything done in these various circles is open to the full observation of all Jerusem.
 \vs p046 5:29 The activities of such a world are of 3 distinct varieties: work, progress, and play. Stated otherwise, they are: service, study, and relaxation. The composite activities consist of social intercourse, group entertainment, and divine worship. There is great educational value in mingling with diverse groups of personalities, orders very different from one’s own fellows.
-\vs p046 5:30 \ublistelem{6.}\bibnobreakspace \bibemph{The circles of the courtesy colonies.} The 7 circles of the courtesy colonies are graced by 3 enormous structures: the vast astronomic observatory of Jerusem, the gigantic art gallery of Satania, and the immense assembly hall of the reversion directors, the theatre of morontia activities devoted to rest and recreation.
+\vs p046 5:30 \ublistelem{6.}\bibnobreakspace \bibemph{The circles of the courtesy colonies.} The seven circles of the courtesy colonies are graced by 3 enormous structures: the vast astronomic observatory of Jerusem, the gigantic art gallery of Satania, and the immense assembly hall of the reversion directors, the theatre of morontia activities devoted to rest and recreation.
 \vs p046 5:31 The celestial artisans direct the spornagia and provide the host of creative decorations and monumental memorials which abound in every place of public assembly. The studios of these artisans are among the largest and most beautiful of all the matchless structures of this wonderful world. The other courtesy colonies maintain extensive and beautiful headquarters. Many of these buildings are constructed wholly of crystal gems. All the architectural worlds abound in crystals and the so\hyp{}called precious metals.
 \vs p046 5:32 \ublistelem{7.}\bibnobreakspace \bibemph{The circles of the finaliters} have a unique structure at the centre. And this same vacant temple is found on every system headquarters world throughout Nebadon. This edifice on Jerusem is sealed with the insignia of Michael, and it bears this inscription: “Undedicated to the seventh stage of spirit --- to the eternal assignment.” Gabriel placed the seal on this temple of mystery, and none but Michael can or may break the seal of sovereignty affixed by the Bright and Morning Star. Some day you shall look upon this silent temple, even though you may not penetrate its mystery.
 \vs p046 5:33 \pc \bibemph{Other Jerusem circles:} In addition to these residential circles there are on Jerusem numerous additional designated abodes.
