--- a/tex/p048.tex
+++ b/tex/p048.tex
@@ -13,7 +13,7 @@
 \vs p048 0:3 Always this morontia transition intervenes between the mortal estate and the subsequent spirit status of surviving human beings. This intermediate state of universe progress differs markedly in the various local creations, but in intent and purpose they are all quite similar. The arrangement of the mansion and higher morontia worlds in Nebadon is fairly typical of the morontia transition regimes in this part of Orvonton.
 \usection{Morontia Materials}
 \vs p048 1:1 The morontia realms are the local universe liaison spheres between the material and spiritual levels of creature existence. This morontia life has been known on Urantia since the early days of the Planetary Prince. From time to time this transition state has been taught to mortals, and the concept, in distorted form, has found a place in present\hyp{}day religions.
-\vs p048 1:2 The morontia spheres are the transition phases of mortal ascension through the progression worlds of the local universe. Only the 7 worlds surrounding the finaliters’ sphere of the local systems are called mansion worlds, but all 56 of the system transition abodes, in common with the higher spheres around the constellations and the universe headquarters, are called morontia worlds. These creations partake of the physical beauty and the morontia grandeur of the local universe headquarters spheres.
+\vs p048 1:2 The morontia spheres are the transition phases of mortal ascension through the progression worlds of the local universe. Only the seven worlds surrounding the finaliters’ sphere of the local systems are called mansion worlds, but all 56 of the system transition abodes, in common with the higher spheres around the constellations and the universe headquarters, are called morontia worlds. These creations partake of the physical beauty and the morontia grandeur of the local universe headquarters spheres.
 \vs p048 1:3 All of these worlds are architectural spheres, and they have just double the number of elements of the evolved planets. Such made\hyp{}to\hyp{}order worlds not only abound in the heavy metals and crystals, having 100 physical elements, but likewise have exactly 100 forms of a unique energy organization called \bibemph{morontia material.} The Master Physical Controllers and the Morontia Power Supervisors are able so to modify the revolutions of the primary units of matter and at the same time so to transform these associations of energy as to create this new substance.
 \vs p048 1:4 \pc The early morontia life in the local systems is very much like that of your present material world, becoming less physical and more truly morontial on the constellation study worlds. And as you advance to the Salvington spheres, you increasingly attain spiritual levels.
 \vs p048 1:5 The Morontia Power Supervisors are able to effect a union of material and of spiritual energies, thereby organizing a morontia form of materialization which is receptive to the superimposition of a controlling spirit. When you traverse the morontia life of Nebadon, these same patient and skillful Morontia Power Supervisors will successively provide you with 570 morontia bodies, each one a phase of your progressive transformation. From the time of leaving the material worlds until you are constituted a first\hyp{}stage spirit on Salvington, you will undergo just 570 separate and ascending morontia changes. 8 of these occur in the system, 71 in the constellation, and 491 during the sojourn on the spheres of Salvington.
@@ -47,7 +47,7 @@
 \vs p048 2:25 \ublistelem{7.}\bibnobreakspace \bibemph{Associate Registrars.} The morontia world has its own recorders, who serve in association with the spirit recorders in the supervision and custody of the records and other data indigenous to the morontia creations. The morontia records are available to all orders of personalities.
 \vs p048 2:26 All morontia transition realms are accessible alike to material and spirit beings. As morontia progressors you will remain in full contact with the material world and with material personalities, while you will increasingly discern and fraternize with spirit beings; and by the time of departure from the morontia regime, you will have seen all orders of spirits with the exception of a few of the higher types, such as Solitary Messengers.
 \usection{Morontia Companions}
-\vs p048 3:1 These hosts of the mansion and morontia worlds are the offspring of a local universe Mother Spirit. They are created from age to age in groups of 100,000, and in Nebadon there are at present over $7 \times 10^{10}$ of these unique beings.
+\vs p048 3:1 These hosts of the mansion and morontia worlds are the offspring of a local universe Mother Spirit. They are created from age to age in groups of 100,000, and in Nebadon there are at present over seventy billion of these unique beings.
 \vs p048 3:2 Morontia Companions are trained for service by the Melchizedeks on a special planet near Salvington; they do not pass through the central Melchizedek schools. In service they range from the lowest mansion worlds of the systems to the highest study spheres of Salvington, but they are seldom encountered on the inhabited worlds. They serve under the general supervision of the Sons of God and under the immediate direction of the Melchizedeks.
 \vs p048 3:3 The Morontia Companions maintain\tunemarkup{pgkoboaurahd}{\linebreak} 10,000 headquarters in a local universe --- on each of the first mansion worlds of the local systems. They are almost wholly a self\hyp{}governing order and are, in general, an intelligent and loyal group of beings; but every now and then, in connection with certain unfortunate celestial upheavals, they have been known to go astray. Thousands of these useful creatures were lost during the times of the Lucifer rebellion in Satania. Your local system now has its full quota of these beings, the loss of the Lucifer rebellion having only recently been made up.
 \vs p048 3:4 \pc There are two distinct types of Morontia Companions; one type is aggressive, the other retiring, but otherwise they are equal in status. They are not sex creatures, but they manifest a touchingly beautiful affection for one another. And while they are hardly companionate in the material (human) sense, they are very close of kin to the human races in the order of creature existence. The midway creatures of the worlds are your nearest of kin; then come the morontia cherubim, and after them the Morontia Companions.
