--- a/tex/p050.tex
+++ b/tex/p050.tex
@@ -46,7 +46,7 @@
 \usection{Progressive Civilization}
 \vs p050 5:1 The loyal princes of the inhabited worlds are permanently attached to the planets of their original assignment. Paradise Sons and their dispensations may come and go, but a successful Planetary Prince continues on as the ruler of his realm. His work is quite independent of the missions of the higher Sons, being designed to foster the development of planetary civilization.
 \vs p050 5:2 The progress of civilization is hardly alike on any two planets. The details of the unfoldment of mortal evolution are very different on numerous dissimilar worlds. Notwithstanding these many diversifications of planetary development along physical, intellectual, and social lines, all evolutionary spheres progress in certain well\hyp{}defined directions.
-\vs p050 5:3 Under the benign rule of a Planetary Prince, augmented by the Material Sons and punctuated by the periodic missions of the Paradise Sons, the mortal races on an average world of time and space will successively pass through the following 7 developmental epochs:
+\vs p050 5:3 Under the benign rule of a Planetary Prince, augmented by the Material Sons and punctuated by the periodic missions of the Paradise Sons, the mortal races on an average world of time and space will successively pass through the following seven developmental epochs:
 \vs p050 5:4 \ublistelem{1.}\bibnobreakspace \bibemph{The nutrition epoch.} The prehuman creatures and the dawn races of primitive man are chiefly concerned with food problems. These evolving beings spend their waking hours either in seeking food or in fighting, offensively or defensively. The food quest is paramount in the minds of these early ancestors of subsequent civilization.
 \vs p050 5:5 \ublistelem{2.}\bibnobreakspace \bibemph{The security age.} Just as soon as the primitive hunter can spare any time from the search for food, he turns this leisure to augmenting his security. More and more attention is devoted to the technique of war. Homes are fortified, and the clans are solidified by mutual fear and by the inculcation of hate for foreign groups. Self\hyp{}preservation is a pursuit which always follows self\hyp{}maintenance.
 \vs p050 5:6 \ublistelem{3.}\bibnobreakspace \bibemph{The material\hyp{}comfort era.} After food problems have been partially solved and some degree of security has been attained, the additional leisure is utilized to promote personal comfort. Luxury vies with necessity in occupying the centre of the stage of human activities. Such an age is all too often characterized by tyranny, intolerance, gluttony, and drunkenness. The weaker elements of the races incline towards excesses and brutality. Gradually these pleasure\hyp{}seeking weaklings are subjugated by the more strong and truth\hyp{}loving elements of the advancing civilization.
