--- a/tex/p051.tex
+++ b/tex/p051.tex
@@ -37,12 +37,12 @@
 \usection{The Six Evolutionary Races}
 \vs p051 4:1 The race of dominance during the early ages of the inhabited worlds is the red man, who ordinarily is the first to attain human levels of development. But while the red man is the senior race of the planets, the succeeding coloured peoples begin to make their appearances very early in the age of mortal emergence.
 \vs p051 4:2 The earlier races are somewhat superior to the later; the red man stands far above the indigo --- black --- race. The Life Carriers impart the full bestowal of the living energies to the initial or red race, and each succeeding evolutionary manifestation of a distinct group of mortals represents variation at the expense of the original endowment. Even mortal stature tends to decrease from the red man down to the indigo race, although on Urantia unexpected strains of giantism appeared among the green and orange peoples.
-\vs p051 4:3 On those worlds having all 6 evolutionary races the superior peoples are the 1\ts{st}, 3\ts{rd}, and 5\ts{th} races --- the red, the yellow, and the blue. The evolutionary races thus alternate in capacity for intellectual growth and spiritual development, the 2\ts{nd}, 4\ts{th}, and 6\ts{th} being somewhat less endowed. These secondary races are the peoples that are missing on certain worlds; they are the ones that have been exterminated on many others. It is a misfortune on Urantia that you so largely lost your superior blue men, except as they persist in your amalgamated “white race.” The loss of your orange and green stocks is not of such serious concern.
-\vs p051 4:4 The evolution of 6 --- or of 3 --- coloured races, while seeming to deteriorate the original endowment of the red man, provides certain very desirable variations in mortal types and affords an otherwise unattainable expression of diverse human potentials. These modifications are beneficial to the progress of mankind as a whole provided they are subsequently upstepped by the imported Adamic or violet race. On Urantia this usual plan of amalgamation was not extensively carried out, and this failure to execute the plan of race evolution makes it impossible for you to understand very much about the status of these peoples on an average inhabited planet by observing the remnants of these early races on your world.
+\vs p051 4:3 On those worlds having all six evolutionary races the superior peoples are the 1\ts{st}, 3\ts{rd}, and 5\ts{th} races --- the red, the yellow, and the blue. The evolutionary races thus alternate in capacity for intellectual growth and spiritual development, the 2\ts{nd}, 4\ts{th}, and 6\ts{th} being somewhat less endowed. These secondary races are the peoples that are missing on certain worlds; they are the ones that have been exterminated on many others. It is a misfortune on Urantia that you so largely lost your superior blue men, except as they persist in your amalgamated “white race.” The loss of your orange and green stocks is not of such serious concern.
+\vs p051 4:4 The evolution of six --- or of three --- coloured races, while seeming to deteriorate the original endowment of the red man, provides certain very desirable variations in mortal types and affords an otherwise unattainable expression of diverse human potentials. These modifications are beneficial to the progress of mankind as a whole provided they are subsequently upstepped by the imported Adamic or violet race. On Urantia this usual plan of amalgamation was not extensively carried out, and this failure to execute the plan of race evolution makes it impossible for you to understand very much about the status of these peoples on an average inhabited planet by observing the remnants of these early races on your world.
 \vs p051 4:5 \pc In the early days of racial development there is a slight tendency for the red, the yellow, and the blue men to interbreed; there is a similar tendency for the orange, green, and indigo races to intermingle.
 \vs p051 4:6 The more backward humans are usually employed as labourers by the more progressive races. This accounts for the origin of slavery on the planets during the early ages. The orange men are usually subdued by the red and reduced to the status of servants --- sometimes exterminated. The yellow and red men often fraternize, but not always. The yellow race usually enslaves the green, while the blue man subdues the indigo. These races of primitive men think no more of utilizing the services of their backward fellows in compulsory labour than Urantians would of buying and selling horses and cattle.
 \vs p051 4:7 On most normal worlds involuntary servitude does not survive the dispensation of the Planetary Prince, although mental defectives and social delinquents are often still compelled to perform involuntary labour. But on all normal spheres this sort of primitive slavery is abolished soon after the arrival of the imported violet or Adamic race.
-\vs p051 4:8 These 6 evolutionary races are destined to be blended and exalted by amalgamation with the progeny of the Adamic uplifters. But before these peoples are blended, the inferior and unfit are largely eliminated. The Planetary Prince and the Material Son, with other suitable planetary authorities, pass upon the fitness of the reproducing strains. The difficulty of executing such a radical program on Urantia consists in the absence of competent judges to pass upon the biologic fitness or unfitness of the individuals of your world races. Notwithstanding this obstacle, it seems that you ought to be able to agree upon the biologic disfellowshipping of your more markedly unfit, defective, degenerate, and antisocial stocks.
+\vs p051 4:8 These six evolutionary races are destined to be blended and exalted by amalgamation with the progeny of the Adamic uplifters. But before these peoples are blended, the inferior and unfit are largely eliminated. The Planetary Prince and the Material Son, with other suitable planetary authorities, pass upon the fitness of the reproducing strains. The difficulty of executing such a radical program on Urantia consists in the absence of competent judges to pass upon the biologic fitness or unfitness of the individuals of your world races. Notwithstanding this obstacle, it seems that you ought to be able to agree upon the biologic disfellowshipping of your more markedly unfit, defective, degenerate, and antisocial stocks.
 \usection{Racial Amalgamation ---\\Bestowal of the Adamic Blood}
 \vs p051 5:1 When a Planetary Adam and Eve arrive on an inhabited world, they have been fully instructed by their superiors as to the best way to effect the improvement of the existing races of intelligent beings. The plan of procedure is not uniform; much is left to the judgment of the ministering pair, and mistakes are not infrequent, especially on disordered, insurrectionary worlds, such as Urantia.
 \vs p051 5:2 Usually the violet peoples do not begin to amalgamate with the planetary natives until their own group numbers over 1,000,000. But in the meantime the staff of the Planetary Prince proclaims that the children of the Gods have come down, as it were, to be one with the races of men; and the people eagerly look forward to the day when announcement will be made that those who have qualified as belonging to the superior racial strains may proceed to the Garden of Eden and be there chosen by the sons and daughters of Adam as the evolutionary fathers and mothers of the new and blended order of mankind.
@@ -57,7 +57,7 @@
 \vs p051 6:3 Think what it would mean on your world if somewhere in the Levant there were a world centre of civilization, a great planetary university of culture, which had functioned uninterruptedly for 37,000 years. And again, pause to consider how the moral authority of even such an ancient centre would be reinforced were there situated not far\hyp{}distant still another and older headquarters of celestial ministry whose traditions would exert a cumulative force of 500,000 years of integrated evolutionary influence. It is custom which eventually spreads the ideals of Eden to a whole world.
 \vs p051 6:4 The schools of the Planetary Prince are primarily concerned with philosophy, religion, morals, and the higher intellectual and artistic achievements. The garden schools of Adam and Eve are usually devoted to practical arts, fundamental intellectual training, social culture, economic development, trade relations, physical efficiency, and civil government. Eventually these world centres amalgamate, but this actual affiliation sometimes does not occur until the times of the first Magisterial Son.
 \vs p051 6:5 \pc The continuing existence of the Planetary Adam and Eve, together with the pure\hyp{}line nucleus of the violet race, imparts that stability of growth to Edenic culture by virtue of which it comes to act upon the civilization of a world with the compelling force of tradition. In these immortal Material Sons and Daughters we encounter the last and the indispensable link connecting God with man, bridging the almost infinite gulf between the eternal Creator and the lowest finite personalities of time. Here is a being of high origin who is physical, material, even a sex creature like Urantia mortals, one who can see and comprehend the invisible Planetary Prince and interpret him to the mortal creatures of the realm, for the Material Sons and Daughters are able to see all of the lower orders of spirit beings; they visualize the Planetary Prince and his entire staff, visible and invisible.
-\vs p051 6:6 With the passing of centuries, through the amalgamation of their progeny with the races of men, this same Material Son and Daughter become accepted as the common ancestors of mankind, the common parents of the now blended descendants of the evolutionary races. It is intended that mortals who start out from an inhabited world have the experience of recognizing 7 fathers:
+\vs p051 6:6 With the passing of centuries, through the amalgamation of their progeny with the races of men, this same Material Son and Daughter become accepted as the common ancestors of mankind, the common parents of the now blended descendants of the evolutionary races. It is intended that mortals who start out from an inhabited world have the experience of recognizing seven fathers:
 \vs p051 6:7 \ublistelem{1.}\bibnobreakspace The biologic father --- the father in the flesh.
 \vs p051 6:8 \ublistelem{2.}\bibnobreakspace The father of the realm --- the Planetary Adam.
 \vs p051 6:9 \ublistelem{3.}\bibnobreakspace The father of the spheres --- the System Sovereign.
