--- a/tex/p056.tex
+++ b/tex/p056.tex
@@ -13,7 +13,7 @@
 \vs p056 0:1 God is unity. Deity is universally co\hyp{}ordinated. The universe of universes is one vast integrated mechanism which is absolutely controlled by one infinite mind. The physical, intellectual, and spiritual domains of universal creation are divinely correlated. The perfect and imperfect are truly interrelated, and therefore may the finite evolutionary creature ascend to Paradise in obedience to the Universal Father’s mandate: “Be you perfect, even as I am perfect.”
 \vs p056 0:2 The diverse levels of creation are all unified in the plans and administration of the Architects of the Master Universe. To the circumscribed minds of time\hyp{}space mortals the universe may present many problems and situations which apparently portray disharmony and indicate absence of effective co\hyp{}ordination; but those of us who are able to observe wider stretches of universal phenomena, and who are more experienced in this art of detecting the basic unity which underlies creative diversity and of discovering the divine oneness which overspreads all this functioning of plurality, better perceive the divine and single purpose exhibited in all these manifold manifestations of universal creative energy.
 \usection{Physical Co\hyp{}ordination}
-\vs p056 1:1 The physical or material creation is not infinite, but it is perfectly co\hyp{}ordinated. There are force, energy, and power, but they are all one in origin. The 7 superuniverses are seemingly dual; the central universe, triune; but Paradise is of single constitution. And Paradise is the actual source of all material universes --- past, present, and future. But this cosmic derivation is an \bibemph{eternity} event; at no \bibemph{time ---} past, present, or future --- does either space or the material cosmos come forth from the nuclear Isle of Light. As the cosmic source, Paradise functions prior to space and before time; hence would its derivations seem to be orphaned in time and space did they not emerge through the Unqualified Absolute, their ultimate repository in space and their revealer and regulator in time.
+\vs p056 1:1 The physical or material creation is not infinite, but it is perfectly co\hyp{}ordinated. There are force, energy, and power, but they are all one in origin. The seven superuniverses are seemingly dual; the central universe, triune; but Paradise is of single constitution. And Paradise is the actual source of all material universes --- past, present, and future. But this cosmic derivation is an \bibemph{eternity} event; at no \bibemph{time ---} past, present, or future --- does either space or the material cosmos come forth from the nuclear Isle of Light. As the cosmic source, Paradise functions prior to space and before time; hence would its derivations seem to be orphaned in time and space did they not emerge through the Unqualified Absolute, their ultimate repository in space and their revealer and regulator in time.
 \vs p056 1:2 \pc The Unqualified Absolute upholds the physical universe, while the Deity Absolute motivates the exquisite overcontrol of all material reality; and both Absolutes are functionally unified by the Universal Absolute. This cohesive correlation of the material universe is best understood by all personalities --- material, morontia, absonite, or spiritual --- by the observation of the gravity response of all bona fide material reality to the gravity centring on nether Paradise.
 \vs p056 1:3 Gravity unification is universal and unvarying; pure\hyp{}energy response is likewise universal and inescapable. Pure energy (primordial force) and pure spirit are wholly preresponsive to gravity. These primal forces, inhering in the Absolutes, are personally controlled by the Universal Father; hence does all gravity centre in the personal presence of the Paradise Father of pure energy and pure spirit and in his supermaterial abode.
 \vs p056 1:4 \pc Pure energy is the ancestor of all relative, nonspirit functional realities, while pure spirit is the potential of the divine and directive overcontrol of all basic energy systems. And these realities, so diverse as manifested throughout space and as observed in the motions of time, are both centred in the person of the Paradise Father. In him they are one --- must be unified --- because God is one. The Father’s personality is absolutely unified.
@@ -32,7 +32,7 @@
 \vs p056 3:6 Spirit must always and ultimately become threefold in expression and Trinity\hyp{}unified in final realization. Spirit originates from one source through a threefold expression; and in finality it must and does attain its full realization in that divine unification which is experienced in finding God --- oneness with divinity --- in eternity, and by means of the ministry of the cosmic mind of the infinite expression of the eternal word of the Father’s universal thought.
 \usection{Personality Unification}
 \vs p056 4:1 The Universal Father is a divinely unified personality; hence will all his ascendant children who are carried to Paradise by the rebound momentum of the Thought Adjusters, who went forth from Paradise to indwell material mortals in obedience to the Father’s mandate, likewise be fully unified personalities ere they reach Havona.
-\vs p056 4:2 Personality inherently reaches out to unify all constituent realities. The infinite personality of the First Source and Centre, the Universal Father, unifies all 7 constituent Absolutes of Infinity; and the personality of mortal man, being an exclusive and direct bestowal of the Universal Father, likewise possesses the potential of unifying the constituent factors of the mortal creature. Such unifying creativity of all creature personality is a birthmark of its high and exclusive source and is further evidential of its unbroken contact with this same source through the personality circuit, by means of which the personality of the creature maintains direct and sustaining contact with the Father of all personality on Paradise.
+\vs p056 4:2 Personality inherently reaches out to unify all constituent realities. The infinite personality of the First Source and Centre, the Universal Father, unifies all seven constituent Absolutes of Infinity; and the personality of mortal man, being an exclusive and direct bestowal of the Universal Father, likewise possesses the potential of unifying the constituent factors of the mortal creature. Such unifying creativity of all creature personality is a birthmark of its high and exclusive source and is further evidential of its unbroken contact with this same source through the personality circuit, by means of which the personality of the creature maintains direct and sustaining contact with the Father of all personality on Paradise.
 \vs p056 4:3 Notwithstanding that God is manifest from the domains of the Sevenfold up through supremacy and ultimacy to God the Absolute, the personality circuit, centring on Paradise and in the person of God the Father, provides for the complete and perfect unification of all these diverse expressions of divine personality so far as concerns all creature personalities on all levels of intelligent existence and in all the realms of the perfect, perfected, and perfecting universes.
 \vs p056 4:4 \pc While God is to and in the universes all that we have portrayed, nevertheless, to you and to all other God\hyp{}knowing creatures he is one, your Father and their Father. To personality God cannot be plural. God is Father to each of his creatures, and it is literally impossible for any child to have more than one father.
 \vs p056 4:5 Philosophically, cosmically, and with reference to differential levels and locations of manifestation, you may and perforce must conceive of the functioning of plural Deities and postulate the existence of plural Trinities; but in the worshipful experience of the personal contact of every worshipping personality throughout the master universe, God is one; and that unified and personal Deity is our Paradise parent, God the Father, the bestower, conservator, and Father of all personalities from mortal man on the inhabited worlds to the Eternal Son on the central Isle of Light.
@@ -43,8 +43,8 @@
 \vs p056 5:4 \pc On Paradise and in the central universe, Deity unity is a fact of existence. Throughout the evolving universes of time and space, Deity unity is an achievement.
 \usection{Unification of Evolutionary Deity}
 \vs p056 6:1 When the three eternal persons of Deity function as undivided Deity in the Paradise Trinity, they achieve perfect unity; likewise, when they create, either associatively or severally, their Paradise progeny exhibit the characteristic unity of divinity. And this divinity of purpose manifested by the Supreme Creators and Rulers of the time\hyp{}space domains eventuates in the unifying power potential of the sovereignty of experiential supremacy which, in the presence of the impersonal energy unity of the universe, constitutes a reality tension that can be resolved only through adequate unification with the experiential personality realities of experiential Deity.
-\vs p056 6:2 The personality realities of the Supreme Being come forth from the Paradise Deities and on the pilot world of the outer Havona circuit unify with the power prerogatives of the Almighty Supreme coming up from the Creator divinities of the grand universe. God the Supreme as a person existed in Havona before the creation of the 7 superuniverses, but he functioned only on spiritual levels. The evolution of the Almighty power of Supremacy by diverse divinity synthesis in the evolving universes eventuated in a new power presence of Deity which co\hyp{}ordinated with the spiritual person of the Supreme in Havona by means of the Supreme Mind, which concomitantly translated from the potential resident in the infinite mind of the Infinite Spirit to the active functional mind of the Supreme Being.
-\vs p056 6:3 \pc The material\hyp{}minded creatures of the evolutionary worlds of the 7 superuniverses can comprehend Deity unity only as it is evolving in this power\hyp{}personality synthesis of the Supreme Being. On any level of existence God cannot exceed the conceptual capacity of the beings who live on such a level. Mortal man must, through the recognition of truth, the appreciation of beauty, and the worship of goodness, evolve the recognition of a God of love and then progress through ascending deity levels to the comprehension of the Supreme. Deity, having been thus grasped as unified in power, can then be personalized in spirit to creature understanding and attainment.
+\vs p056 6:2 The personality realities of the Supreme Being come forth from the Paradise Deities and on the pilot world of the outer Havona circuit unify with the power prerogatives of the Almighty Supreme coming up from the Creator divinities of the grand universe. God the Supreme as a person existed in Havona before the creation of the seven superuniverses, but he functioned only on spiritual levels. The evolution of the Almighty power of Supremacy by diverse divinity synthesis in the evolving universes eventuated in a new power presence of Deity which co\hyp{}ordinated with the spiritual person of the Supreme in Havona by means of the Supreme Mind, which concomitantly translated from the potential resident in the infinite mind of the Infinite Spirit to the active functional mind of the Supreme Being.
+\vs p056 6:3 \pc The material\hyp{}minded creatures of the evolutionary worlds of the seven superuniverses can comprehend Deity unity only as it is evolving in this power\hyp{}personality synthesis of the Supreme Being. On any level of existence God cannot exceed the conceptual capacity of the beings who live on such a level. Mortal man must, through the recognition of truth, the appreciation of beauty, and the worship of goodness, evolve the recognition of a God of love and then progress through ascending deity levels to the comprehension of the Supreme. Deity, having been thus grasped as unified in power, can then be personalized in spirit to creature understanding and attainment.
 \vs p056 6:4 While ascending mortals achieve power comprehension of the Almighty on the capitals of the superuniverses and personality comprehension of the Supreme on the outer circuits of Havona, they do not actually find the Supreme Being as they are destined to find the Paradise Deities. Even the finaliters, sixth\hyp{}stage spirits, have not found the Supreme Being, nor are they likely to until they have achieved seventh\hyp{}stage\hyp{}spirit status, and until the Supreme has become actually functional in the activities of the future outer universes.
 \vs p056 6:5 But when ascenders find the Universal Father as the 7\ts{th} level of God the Sevenfold, they have attained the personality of the First Person of \bibemph{all} deity levels of personal relationships with universe creatures.
 \usection{Universal Evolutionary Repercussions}
@@ -54,9 +54,9 @@
 \vs p056 7:4 \pc It should be noted that ascending mortals may experience the impersonal presence of successive levels of Deity long before they become sufficiently spiritual and adequately educated to attain experiential personal recognition of, and contact with, these Deities as personal beings.
 \vs p056 7:5 Each new evolutionary attainment within a sector of creation, as well as every new invasion of space by divinity manifestations, is attended by simultaneous expansions of Deity functional\hyp{}revelation within the then existing and previously organized units of all creation. This new invasion of the administrative work of the universes and their component units may not always appear to be executed exactly in accordance with the technique herewith outlined because it is the practice to send forth advance groups of administrators to prepare the way for the subsequent and successive eras of new administrative overcontrol. Even God the Ultimate foreshadows his transcendental overcontrol of the universes during the later stages of a local universe settled in light and life.
 \vs p056 7:6 It is a fact that, as the creations of time and space are progressively settled in evolutionary status, there is observed a new and fuller functioning of God the Supreme concomitant with a corresponding withdrawing of the first three manifestations of God the Sevenfold. If and when the grand universe becomes settled in light and life, what then will be the future function of the Creator\hyp{}Creative manifestations of God the Sevenfold if God the Supreme assumes direct control of these creations of time and space? Are these organizers and pioneers of the time\hyp{}space universes to be liberated for similar activities in outer space? We do not know, but we speculate much concerning these and related matters.
-\vs p056 7:7 \pc As the frontiers of experiential Deity are extended out into the domains of the Unqualified Absolute, we envision the activity of God the Sevenfold during the earlier evolutionary epochs of these creations of the future. We are not all in agreement respecting the future status of the Ancients of Days and the superuniverse Master Spirits. Neither do we know whether or not the Supreme Being will therein function as in the 7 superuniverses. But we all conjecture that the Michaels, the Creator Sons, are destined to function in these outer universes. Some hold that the future ages will witness some closer form of union between the associated Creator Sons and Divine Ministers; it is even possible that such a creator union might eventuate in some new expression of associate\hyp{}creator identity of an ultimate nature. But we really know nothing about these possibilities of the unrevealed future.
+\vs p056 7:7 \pc As the frontiers of experiential Deity are extended out into the domains of the Unqualified Absolute, we envision the activity of God the Sevenfold during the earlier evolutionary epochs of these creations of the future. We are not all in agreement respecting the future status of the Ancients of Days and the superuniverse Master Spirits. Neither do we know whether or not the Supreme Being will therein function as in the seven superuniverses. But we all conjecture that the Michaels, the Creator Sons, are destined to function in these outer universes. Some hold that the future ages will witness some closer form of union between the associated Creator Sons and Divine Ministers; it is even possible that such a creator union might eventuate in some new expression of associate\hyp{}creator identity of an ultimate nature. But we really know nothing about these possibilities of the unrevealed future.
 \vs p056 7:8 We do know, however, that in the universes of time and space, God the Sevenfold provides a progressive approach to the Universal Father, and that this evolutionary approach is experientially unified in God the Supreme. We might conjecture that such a plan must prevail in the outer universes; on the other hand,\fnst{In 1955 text no comma after ``hand''.} the new orders of beings that may sometime inhabit these universes may be able to approach Deity on ultimate levels and by absonite techniques. In short, we have not the slightest concept of what technique of deity approach may become operative in the future universes of outer space.
-\vs p056 7:9 Nevertheless, we deem that the perfected superuniverses will in some way become a part of the Paradise\hyp{}ascension careers of those beings who may inhabit these outer creations. It is quite possible that in that future age we may witness outer\hyp{}spacers approaching Havona through the 7 superuniverses, administered by God the Supreme with or without the collaboration of the Seven Master Spirits.
+\vs p056 7:9 Nevertheless, we deem that the perfected superuniverses will in some way become a part of the Paradise\hyp{}ascension careers of those beings who may inhabit these outer creations. It is quite possible that in that future age we may witness outer\hyp{}spacers approaching Havona through the seven superuniverses, administered by God the Supreme with or without the collaboration of the Seven Master Spirits.
 \usection{The Supreme Unifier}
 \vs p056 8:1 The Supreme Being has a threefold function in the experience of mortal man: First, he is the unifier of time\hyp{}space divinity, God the Sevenfold; second, he is the maximum of Deity which finite creatures can actually comprehend; third, he is mortal man’s only avenue of approach to the transcendental experience of consorting with absonite mind, eternal spirit, and Paradise personality.
 \vs p056 8:2 Ascendant finaliters, having been born in the local universes, nurtured in the superuniverses, and trained in the central universe, embrace in their personal experiences the full potential of the comprehension of the time\hyp{}space divinity of God the Sevenfold unifying in the Supreme. Finaliters serve successively in superuniverses other than those of nativity, thereby superimposing experience upon experience until the fullness of the sevenfold diversity of possible creature experience has been encompassed. Through the ministry of the indwelling Adjusters the finaliters are enabled to \bibemph{find} the Universal Father, but it is by these techniques of experience that such finaliters come really to \bibemph{know} the Supreme Being, and they are destined to the service and the \bibemph{revelation} of this Supreme Deity in and to the future universes of outer space.
@@ -96,7 +96,7 @@
 \vs p056 10:16 All insight into the relations of the parts to any given whole requires an understanding grasp of the relation of all parts to that whole; and in the universe this means the relation of created parts to the Creative Whole. Deity thus becomes the transcendental, even the infinite, goal of universal and eternal attainment.
 \vs p056 10:17 \pc Universal beauty is the recognition of the reflection of the Isle of Paradise in the material creation, while eternal truth is the special ministry of the Paradise Sons who not only bestow themselves upon the mortal races but even pour out their Spirit of Truth upon all peoples. Divine goodness is more fully shown forth in the loving ministry of the manifold personalities of the Infinite Spirit. But love, the sum total of these three qualities, is man’s perception of God as his spirit Father.
 \vs p056 10:18 Physical matter is the time\hyp{}space shadow of the Paradise energy\hyp{}shining of the absolute Deities. Truth meanings are the mortal\hyp{}intellect repercussions of the eternal word of Deity --- the time\hyp{}space comprehension of supreme concepts. The goodness values of divinity are the merciful ministries of the spirit personalities of the Universal, the Eternal, and the Infinite to the time\hyp{}space finite creatures of the evolutionary spheres.
-\vs p056 10:19 These meaningful reality values of divinity are blended in the Father’s relation with each personal creature as divine love. They are co\hyp{}ordinated in the Son and his Sons as divine mercy. They manifest their qualities through the Spirit and his spirit children as divine ministry, the portrayal of loving mercy to the children of time. These three divinities are primarily manifested by the Supreme Being as power\hyp{}personality synthesis. They are variously shown forth by God the Sevenfold in 7 differing associations of divine meanings and values on 7 ascending levels.
+\vs p056 10:19 These meaningful reality values of divinity are blended in the Father’s relation with each personal creature as divine love. They are co\hyp{}ordinated in the Son and his Sons as divine mercy. They manifest their qualities through the Spirit and his spirit children as divine ministry, the portrayal of loving mercy to the children of time. These three divinities are primarily manifested by the Supreme Being as power\hyp{}personality synthesis. They are variously shown forth by God the Sevenfold in seven differing associations of divine meanings and values on seven ascending levels.
 \vs p056 10:20 \pc To finite man truth, beauty, and goodness embrace the full revelation of divinity reality. As this love\hyp{}comprehension of Deity finds spiritual expression in the lives of God\hyp{}knowing mortals, there are yielded the fruits of divinity: intellectual peace, social progress, moral satisfaction, spiritual joy, and cosmic wisdom. The advanced mortals on a world in the 7\ts{th} stage of light and life have learned that love is the greatest thing in the universe --- and they know that God is love.
 \vs p056 10:21 \pc Love is the desire to do good to others.
 \vsetoff
