--- a/tex/p059.tex
+++ b/tex/p059.tex
@@ -12,7 +12,7 @@
 \vs p059 0:4 \ublistelem{3.}\bibnobreakspace \bibemph{The marine\hyp{}life era} covers the next\tunemarkup{pgauraone}{\linebreak} 250,000,000 years and is best known to you as the \bibemph{Paleozoic.}
 \vs p059 0:5 \ublistelem{4.}\bibnobreakspace \bibemph{The early land\hyp{}life era} extends over the next 100,000,000 years and is known as the \bibemph{Mesozoic.}
 \vs p059 0:6 \ublistelem{5.}\bibnobreakspace \bibemph{The mammalian era} occupies the last\tunemarkup{pgauraone}{\linebreak} 50,000,000 years. This recent\hyp{}times era is known as the \bibemph{Cenozoic.}
-\vs p059 0:7 \pc The marine\hyp{}life era thus covers about one quarter of your planetary history. It may be subdivided into 6 long periods, each characterized by certain well\hyp{}defined developments in both the geologic realms and the biologic domains.
+\vs p059 0:7 \pc The marine\hyp{}life era thus covers about one quarter of your planetary history. It may be subdivided into six long periods, each characterized by certain well\hyp{}defined developments in both the geologic realms and the biologic domains.
 \vs p059 0:8 As this era begins, the sea bottoms, the extensive continental shelves, and the numerous shallow near\hyp{}shore basins are covered with prolific vegetation. The more simple and primitive forms of animal life have already developed from preceding vegetable organisms, and the early animal organisms have gradually made their way along the extensive coast lines of the various land masses until the many inland seas are teeming with primitive marine life. Since so few of these early organisms had shells, not many have been preserved as fossils. Nevertheless the stage is set for the opening chapters of that great “stone book” of the life\hyp{}record preservation which was so methodically laid down during the succeeding ages.
 \vs p059 0:9 The continent of North America is wonderfully rich in the fossil\hyp{}bearing deposits of the entire marine\hyp{}life era. The very first and oldest layers are separated from the later strata of the preceding period by extensive erosion deposits which clearly segregate these two stages of planetary development.
 \usection{Early Marine Life in the Shallow Seas\\The Trilobite Age}
