--- a/tex/p061.tex
+++ b/tex/p061.tex
@@ -20,7 +20,7 @@
 \vs p061 1:7 \ublistelem{4.}\bibnobreakspace Utilize increased agility in escaping from enemies.
 \vs p061 1:8 \ublistelem{5.}\bibnobreakspace Apply superior intelligence to environmental adjustment and adaptation.
 \vs p061 1:9 \pc \bibemph{45,000,000} years ago the continental backbones were elevated in association with a very general sinking of the coast lines. Mammalian life was evolving rapidly. A small reptilian, egg\hyp{}laying type of mammal flourished, and the ancestors of the later kangaroos roamed Australia. Soon there were small horses, fleet\hyp{}footed rhinoceroses, tapirs with proboscises, primitive pigs, squirrels, lemurs, opossums, and several tribes of monkeylike animals. They were all small, primitive, and best suited to living among the forests of the mountain regions. A large ostrichlike land bird developed to a height of 10\,m and laid an egg $22\times 33$\,cm. These were the ancestors of the later gigantic passenger birds that were so highly intelligent, and that onetime transported human beings through the air.
-\vs p061 1:10 The mammals of the early Cenozoic lived on land, under the water, in the air, and among the treetops. They had from 1 to 11 pairs of mammary glands, and all were covered with considerable hair. In common with the later appearing orders, they developed two successive sets of teeth and possessed large brains in comparison to body size. But among them all no modern forms existed.
+\vs p061 1:10 The mammals of the early Cenozoic lived on land, under the water, in the air, and among the treetops. They had from one to eleven pairs of mammary glands, and all were covered with considerable hair. In common with the later appearing orders, they developed two successive sets of teeth and possessed large brains in comparison to body size. But among them all no modern forms existed.
 \vs p061 1:11 \pc \bibemph{40,000,000} years ago the land areas of the Northern Hemisphere began to elevate, and this was followed by new extensive land deposits and other terrestrial activities, including lava flows, warping, lake formation, and erosion.
 \vs p061 1:12 During the latter part of this epoch most of Europe was submerged. Following a slight land rise the continent was covered by lakes and bays. The Arctic Ocean, through the Ural depression, ran south to connect with the Mediterranean Sea as it was then expanded northward, the highlands of the Alps, Carpathians, Apennines, and Pyrenees being up above the water as islands of the sea. The Isthmus of Panama was up; the Atlantic and Pacific Oceans were separated. North America was connected with Asia by the Bering Strait land bridge and with Europe by way of Greenland and Iceland. The earth circuit of land in northern latitudes was broken only by the Ural Straits, which connected the arctic seas with the enlarged Mediterranean.
 \vs p061 1:13 Considerable foraminiferal limestone was deposited in European waters. Today this same stone is elevated to a height of 3\,km in the Alps, 4.8\,km in the Himalayas, and 6\,km in Tibet. The chalk deposits of this period are found along the coasts of Africa and Australia, on the west coast of South America, and about the West Indies.
