--- a/tex/p063.tex
+++ b/tex/p063.tex
@@ -27,7 +27,7 @@
 \vs p063 3:1 It was almost two years from the night of the twins’ departure from home before their first child was born. They named him Sontad; and Sontad was the first creature to be born on Urantia who was wrapped in protective coverings at the time of birth. The human race had begun, and with this new evolution there appeared the instinct properly to care for the increasingly enfeebled infants which would characterize the progressive development of mind of the intellectual order as contrasted with the more purely animal type.
 \vs p063 3:2 Andon and Fonta had 19 children in all, and they lived to enjoy the association of almost 50 grandchildren and half a dozen great\hyp{}grandchildren. The family was domiciled in four adjoining rock shelters, or semicaves, three of which were interconnected by hallways which had been excavated in the soft limestone with flint tools devised by Andon’s children.
 \vs p063 3:3 These early Andonites evinced a very marked clannish spirit; they hunted in groups and never strayed very far from the homesite. They seemed to realize that they were an isolated and unique group of living beings and should therefore avoid becoming separated. This feeling of intimate kinship was undoubtedly due to the enhanced mind ministry of the adjutant spirits.
-\vs p063 3:4 \pc Andon and Fonta laboured incessantly for the nurture and uplift of the clan. They lived to the age of 42, when both were killed at the time of an earthquake by the falling of an overhanging rock. 5 of their children and 11 grandchildren perished with them, and almost a score of their descendants suffered serious injuries.
+\vs p063 3:4 \pc Andon and Fonta laboured incessantly for the nurture and uplift of the clan. They lived to the age of 42, when both were killed at the time of an earthquake by the falling of an overhanging rock. Five of their children and eleven grandchildren perished with them, and almost a score of their descendants suffered serious injuries.
 \vs p063 3:5 Upon the death of his parents, Sontad, despite a seriously injured foot, immediately assumed the leadership of the clan and was ably assisted by his wife, his eldest sister. Their first task was to roll up stones to effectively entomb their dead parents, brothers, sisters, and children. Undue significance should not attach to this act of burial. Their ideas of survival after death were very vague and indefinite, being largely derived from their fantastic and variegated dream life.
 \vs p063 3:6 \pc This family of Andon and Fonta held together until the 20\ts{th} generation, when combined food competition and social friction brought about the beginning of dispersion.
 \usection{The Andonic Clans}
