--- a/tex/p064.tex
+++ b/tex/p064.tex
@@ -8,7 +8,7 @@
 \uminitoc{Dispersion of the Coloured Races}
 \author{Life Carrier}
 \vs p064 0:1 This is the story of the evolutionary races of Urantia from the days of Andon and Fonta, almost 1,000,000 years ago, down through the times of the Planetary Prince to the end of the ice age.
-\vs p064 0:2 The human race is almost 1,000,000 years old, and the first half of its story roughly corresponds to the pre\hyp{}Planetary Prince days of Urantia. The latter half of the history of mankind begins at the time of the arrival of the Planetary Prince and the appearance of the 6 coloured races and roughly corresponds to the period commonly regarded as the Old Stone Age.
+\vs p064 0:2 The human race is almost 1,000,000 years old, and the first half of its story roughly corresponds to the pre\hyp{}Planetary Prince days of Urantia. The latter half of the history of mankind begins at the time of the arrival of the Planetary Prince and the appearance of the six coloured races and roughly corresponds to the period commonly regarded as the Old Stone Age.
 \usection{The Andonic Aborigines}
 \vs p064 1:1 Primitive man made his evolutionary appearance on earth a little less than 1,000,000 years ago, and he had a vigorous experience. He instinctively sought to escape the danger of mingling with the inferior simian tribes. But he could not migrate eastward because of the arid Tibetan land elevations, 9\,km above sea level; neither could he go south nor west because of the expanded Mediterranean Sea, which then extended eastward to the Indian Ocean; and as he went north, he encountered the advancing ice. But even when further migration was blocked by the ice, and though the dispersing tribes became increasingly hostile, the more intelligent groups never entertained the idea of going southward to live among their hairy tree\hyp{}dwelling cousins of inferior intellect.
 \vs p064 1:2 Many of man’s earliest religious emotions grew out of his feeling of helplessness in the shut\hyp{}in environment of this geographic situation --- mountains to the right, water to the left, and ice in front. But these progressive Andonites would not turn back to their inferior tree\hyp{}dwelling relatives in the south.
@@ -48,11 +48,11 @@
 \vs p064 4:13 These early Neanderthalers could hardly be called sun worshippers. They rather lived in fear of the dark; they had a mortal dread of nightfall. As long as the moon shone a little, they managed to get along, but in the dark of the moon they grew panicky and began the sacrifice of their best specimens of manhood and womanhood in an effort to induce the moon again to shine. The sun, they early learned, would regularly return, but the moon they conjectured only returned because they sacrificed their fellow tribesmen. As the race advanced, the object and purpose of sacrifice progressively changed, but the offering of human sacrifice as a part of religious ceremonial long persisted.
 \usection{Origin of the Coloured Races}
 \vs p064 5:1 \bibemph{500,000} years ago the Badonan tribes of the north\hyp{}western highlands of India became involved in another great racial struggle. For more than 100 years this relentless warfare raged, and when the long fight was finished, only about 100 families were left. But these survivors were the most intelligent and desirable of all the then living descendants of Andon and Fonta.
-\vs p064 5:2 And now, among these highland Badonites there was a new and strange occurrence. A man and woman living in the north\hyp{}eastern part of the then inhabited highland region began \bibemph{suddenly} to produce a family of unusually intelligent children. This was the \bibemph{Sangik family,} the ancestors of all of the 6 coloured races of Urantia.
+\vs p064 5:2 And now, among these highland Badonites there was a new and strange occurrence. A man and woman living in the north\hyp{}eastern part of the then inhabited highland region began \bibemph{suddenly} to produce a family of unusually intelligent children. This was the \bibemph{Sangik family,} the ancestors of all of the six coloured races of Urantia.
 \vs p064 5:3 These Sangik children, 19 in number, were not only intelligent above their fellows, but their skins manifested a unique tendency to turn various colours upon exposure to sunlight. Among these 19 children were 5 red, 2 orange, 4 yellow, 2 green, 4 blue, and 2 indigo. These colours became more pronounced as the children grew older, and when these youths later mated with their fellow tribesmen, all of their offspring tended toward the skin colour of the Sangik parent.
-\vs p064 5:4 And now I interrupt the chronological narrative, after calling attention to the arrival of the Planetary Prince at about this time, while we separately consider the 6 Sangik races of Urantia.
+\vs p064 5:4 And now I interrupt the chronological narrative, after calling attention to the arrival of the Planetary Prince at about this time, while we separately consider the six Sangik races of Urantia.
 \usection{The Six Sangik Races of Urantia}
-\vs p064 6:1 On an average evolutionary planet the 6 evolutionary races of colour appear one by one; the red man is the first to evolve, and for ages he roams the world before the succeeding coloured races make their appearance. The simultaneous emergence of all 6 races on Urantia, \bibemph{and in one family,} was most unusual.
+\vs p064 6:1 On an average evolutionary planet the six evolutionary races of colour appear one by one; the red man is the first to evolve, and for ages he roams the world before the succeeding coloured races make their appearance. The simultaneous emergence of all six races on Urantia, \bibemph{and in one family,} was most unusual.
 \vs p064 6:2 The appearance of the earlier Andonites on Urantia was also something new in Satania. On no other world in the local system has such a race of will creatures evolved in advance of the evolutionary races of colour.
 \vs p064 6:3 \ublistelem{1.}\bibnobreakspace \bibemph{The red man.} These peoples were remarkable specimens of the human race, in many ways superior to Andon and Fonta. They were a most intelligent group and were the first of the Sangik children to develop a tribal civilization and government. They were always monogamous; even their mixed descendants seldom practised plural mating.
 \vs p064 6:4 In later times they had serious and prolonged trouble with their yellow brethren in Asia. They were aided by their early invention of the bow and arrow, but they had unfortunately inherited much of the tendency of their ancestors to fight among themselves, and this so weakened them that the yellow tribes were able to drive them off the Asiatic continent.
@@ -81,7 +81,7 @@
 \vs p064 6:27 Notwithstanding their backwardness, these indigo peoples have exactly the same standing before the celestial powers as any other earthly race.
 \vs p064 6:28 \pc These were ages of intense struggles between the various races, but near the headquarters of the Planetary Prince the more enlightened and more recently taught groups lived together in comparative harmony, though no great cultural conquest of the world races had been achieved up to the time of the serious disruption of this regime by the outbreak of the Lucifer rebellion.
 \vs p064 6:29 \pc From time to time all of these different peoples experienced cultural and spiritual revivals. Mansant was a great teacher of the post\hyp{}Planetary Prince days. But mention is made only of those outstanding leaders and teachers who markedly influenced and inspired a whole race. With the passing of time, many lesser teachers arose in different regions; and in the aggregate they contributed much to the sum total of those saving influences which prevented the total collapse of cultural civilization, especially during the long and dark ages between the Caligastia rebellion and the arrival of Adam.
-\vs p064 6:30 \pc There are many good and sufficient reasons for the plan of evolving either 3 or 6 coloured races on the worlds of space. Though Urantia mortals may not be in a position fully to appreciate all of these reasons, we would call attention to the following:
+\vs p064 6:30 \pc There are many good and sufficient reasons for the plan of evolving either three or six coloured races on the worlds of space. Though Urantia mortals may not be in a position fully to appreciate all of these reasons, we would call attention to the following:
 \vs p064 6:31 \ublistelem{1.}\bibnobreakspace Variety is indispensable to opportunity for the wide functioning of natural selection, differential survival of superior strains.
 \vs p064 6:32 \ublistelem{2.}\bibnobreakspace Stronger and better races are to be had from the interbreeding of diverse peoples when these different races are carriers of superior inheritance factors. And the Urantia races would have benefited by such an early amalgamation provided such a conjoint people could have been subsequently effectively upstepped by a thoroughgoing admixture with the superior Adamic stock. The attempt to execute such an experiment on Urantia under present racial conditions would be highly disastrous.
 \vs p064 6:33 \ublistelem{3.}\bibnobreakspace Competition is healthfully stimulated by diversification of races.
@@ -92,9 +92,9 @@
 \vs p064 7:2 Thus it was that for almost 100,000 years these Sangik peoples spread out around the foothills and mingled together more or less, notwithstanding the peculiar but natural antipathy which early manifested itself between the different races.
 \vs p064 7:3 Between the times of the Planetary Prince and Adam, India became the home of the most cosmopolitan population ever to be found on the face of the earth. But it was unfortunate that this mixture came to contain so much of the green, orange, and indigo races. These secondary Sangik peoples found existence more easy and agreeable in the southlands, and many of them subsequently migrated to Africa. The primary Sangik peoples, the superior races, avoided the tropics, the red man going north\hyp{}east to Asia, closely followed by the yellow man, while the blue race moved north\hyp{}west into Europe.
 \vs p064 7:4 The red men early began to migrate to the north\hyp{}east, on the heels of the retreating ice, passing around the highlands of India and occupying all of north\hyp{}eastern Asia. They were closely followed by the yellow tribes, who subsequently drove them out of Asia into North America.
-\vs p064 7:5 When the relatively pure\hyp{}line remnants of the red race forsook Asia, there were 11 tribes, and they numbered a little over 7,000 men, women, and children. These tribes were accompanied by three small groups of mixed ancestry, the largest of these being a combination of the orange and blue races. These three groups never fully fraternized with the red man and early journeyed southward to Mexico and Central America, where they were later joined by a small group of mixed yellows and reds. These peoples all intermarried and founded a new and amalgamated race, one which was much less warlike than the pure\hyp{}line red men. Within 5,000 years this amalgamated race broke up into three groups, establishing the civilizations respectively of Mexico, Central America, and South America. The South American offshoot did receive a faint touch of the blood of Adam.
+\vs p064 7:5 When the relatively pure\hyp{}line remnants of the red race forsook Asia, there were eleven tribes, and they numbered a little over 7,000 men, women, and children. These tribes were accompanied by three small groups of mixed ancestry, the largest of these being a combination of the orange and blue races. These three groups never fully fraternized with the red man and early journeyed southward to Mexico and Central America, where they were later joined by a small group of mixed yellows and reds. These peoples all intermarried and founded a new and amalgamated race, one which was much less warlike than the pure\hyp{}line red men. Within 5,000 years this amalgamated race broke up into three groups, establishing the civilizations respectively of Mexico, Central America, and South America. The South American offshoot did receive a faint touch of the blood of Adam.
 \vs p064 7:6 To a certain extent the early red and yellow men mingled in Asia, and the offspring of this union journeyed on to the east and along the southern seacoast and, eventually, were driven by the rapidly increasing yellow race onto the peninsulas and near\hyp{}by islands of the sea. They are the present\hyp{}day brown men.
-\vs p064 7:7 The yellow race has continued to occupy the central regions of eastern Asia. Of all the 6 coloured races they have survived in greatest numbers. While the yellow men now and then engaged in racial war, they did not carry on such incessant and relentless wars of extermination as were waged by the red, green, and orange men. These three races virtually destroyed themselves before they were finally all but annihilated by their enemies of other races.
+\vs p064 7:7 The yellow race has continued to occupy the central regions of eastern Asia. Of all the six coloured races they have survived in greatest numbers. While the yellow men now and then engaged in racial war, they did not carry on such incessant and relentless wars of extermination as were waged by the red, green, and orange men. These three races virtually destroyed themselves before they were finally all but annihilated by their enemies of other races.
 \vs p064 7:8 Since the fifth glacier did not extend so far south in Europe, the way was partially open for these Sangik peoples to migrate to the north\hyp{}west; and upon the retreat of the ice the blue men, together with a few other small racial groups, migrated westward along the old trails of the Andon tribes. They invaded Europe in successive waves, occupying most of the continent.
 \vs p064 7:9 In Europe they soon encountered the Neanderthal descendants of their early and common ancestor, Andon. These older European Neanderthalers had been driven south and east by the glacier and thus were in position quickly to encounter and absorb their invading cousins of the Sangik tribes.
 \vs p064 7:10 In general and to start with, the Sangik tribes were more intelligent than, and in most ways far superior to, the deteriorated descendants of the early Andonic plainsmen; and the mingling of these Sangik tribes with the Neanderthal peoples led to the immediate improvement of the older race. It was this infusion of Sangik blood, more especially that of the blue man, which produced that marked improvement in the Neanderthal peoples exhibited by the successive waves of increasingly intelligent tribes that swept over Europe from the east.
