--- a/tex/p065.tex
+++ b/tex/p065.tex
@@ -57,8 +57,8 @@
 \vs p065 4:4 This chemical action and reaction concerned in wound healing and cell reproduction represents the choice of the Life Carriers of a formula embracing over 100,000 phases and features of possible chemical reactions and biologic repercussions. More than 500,000 specific experiments were made by the Life Carriers in their laboratories before they finally settled upon this formula for the Urantia life experiment.
 \vs p065 4:5 When Urantia scientists know more of these healing chemicals, they will become more efficient in the treatment of injuries, and indirectly they will know more about controlling certain serious diseases.
 \vs p065 4:6 Since life was established on Urantia, the Life Carriers have improved this healing technique as it has been introduced on another Satania world, in that it affords more pain relief and exercises better control over the proliferation capacity of the associated normal cells.
-\vs p065 4:7 \pc There were many unique features of the Urantia life experiment, but the two outstanding episodes were the appearance of the Andonic race prior to the evolution of the 6 coloured peoples and the later simultaneous appearance of the Sangik mutants in a single family. Urantia is the first world in Satania where the 6 coloured races sprang from the same human family. They ordinarily arise in diversified strains from independent mutations within the prehuman animal stock and usually appear on earth one at a time and successively over long periods of time, beginning with the red man and passing on down through the colours to indigo.
-\vs p065 4:8 Another outstanding variation of procedure was the late arrival of the Planetary Prince. As a rule, the prince appears on a planet about the time of will development; and if such a plan had been followed, Caligastia might have come to Urantia even during the lifetimes of Andon and Fonta instead of almost 500,000 years later, simultaneously with the appearance of the 6 Sangik races.
+\vs p065 4:7 \pc There were many unique features of the Urantia life experiment, but the two outstanding episodes were the appearance of the Andonic race prior to the evolution of the six coloured peoples and the later simultaneous appearance of the Sangik mutants in a single family. Urantia is the first world in Satania where the six coloured races sprang from the same human family. They ordinarily arise in diversified strains from independent mutations within the prehuman animal stock and usually appear on earth one at a time and successively over long periods of time, beginning with the red man and passing on down through the colours to indigo.
+\vs p065 4:8 Another outstanding variation of procedure was the late arrival of the Planetary Prince. As a rule, the prince appears on a planet about the time of will development; and if such a plan had been followed, Caligastia might have come to Urantia even during the lifetimes of Andon and Fonta instead of almost 500,000 years later, simultaneously with the appearance of the six Sangik races.
 \vs p065 4:9 On an ordinary inhabited world a Planetary Prince would have been granted on the request of the Life Carriers at, or sometime after, the appearance of Andon and Fonta. But Urantia having been designated a life\hyp{}modification planet, it was by preagreement that the Melchizedek observers, twelve in number, were sent as advisers to the Life Carriers and as overseers of the planet until the subsequent arrival of the Planetary Prince. These Melchizedeks came at the time Andon and Fonta made the decisions which enabled Thought Adjusters to indwell their mortal minds.
 \vs p065 4:10 \pc On Urantia the endeavours of the Life Carriers to improve the Satania life patterns necessarily resulted in the production of many apparently useless forms of transition life. But the gains already accrued are sufficient to justify the Urantia modifications of the standard life designs.
 \vs p065 4:11 It was our intention to produce an early manifestation of will in the evolutionary life of Urantia, and we succeeded. Ordinarily, will does not emerge until the coloured races have long been in existence, usually first appearing among the superior types of the red man. Your world is the only planet in Satania where the human type of will has appeared in a precoloured race.
@@ -75,16 +75,16 @@
 \vs p065 6:4 One of the most serviceable and complex episodes in the evolution of the higher types of animals consisted in the development of the ability of the iron in the circulating blood cells to perform in the double role of oxygen carrier and carbon dioxide remover. And this performance of the red blood cells illustrates how evolving organisms are able to adapt their functions to varying or changing environment. The higher animals, including man, oxygenate their tissues by the action of the iron of the red blood cells, which carries oxygen to the living cells and just as efficiently removes the carbon dioxide. But other metals can be made to serve the same purpose. The cuttlefish employs copper for this function, and the sea squirt utilizes vanadium.
 \vs p065 6:5 The continuation of such biologic adjustments is illustrated by the evolution of teeth in the higher Urantia mammals; these attained to 36 in man’s remote ancestors, and then began an adaptative readjustment toward 32 in the dawn man and his near relatives. Now the human species is slowly gravitating toward 28. The process of evolution is still actively and adaptatively in progress on this planet.
 \vs p065 6:6 But many seemingly mysterious adjustments of living organisms are purely chemical, wholly physical. At any moment of time, in the blood stream of any human being there exists the possibility of upward of 15,000,000 chemical reactions between the hormone output of a dozen ductless glands.
-\vs p065 6:7 \pc The lower forms of plant life are wholly responsive to physical, chemical, and electrical environment. But as the scale of life ascends, one by one the mind ministries of the 7 adjutant spirits become operative, and the mind becomes increasingly adjustive, creative, co\hyp{}ordinative, and dominative. The ability of animals to adapt themselves to air, water, and land is not a supernatural endowment, but it is a superphysical adjustment.
+\vs p065 6:7 \pc The lower forms of plant life are wholly responsive to physical, chemical, and electrical environment. But as the scale of life ascends, one by one the mind ministries of the seven adjutant spirits become operative, and the mind becomes increasingly adjustive, creative, co\hyp{}ordinative, and dominative. The ability of animals to adapt themselves to air, water, and land is not a supernatural endowment, but it is a superphysical adjustment.
 \vs p065 6:8 Physics and chemistry alone cannot explain how a human being evolved out of the primeval protoplasm of the early seas. The ability to learn, memory and differential response to environment, is the endowment of mind. The laws of physics are not responsive to training; they are immutable and unchanging. The reactions of chemistry are not modified by education; they are uniform and dependable. Aside from the presence of the Unqualified Absolute, electrical and chemical reactions are predictable. But mind can profit from experience, can learn from reactive habits of behaviour in response to repetition of stimuli.
 \vs p065 6:9 Preintelligent organisms react to environmental stimuli, but those organisms which are reactive to mind ministry can adjust and manipulate the environment itself.
-\vs p065 6:10 The physical brain with its associated nervous system possesses innate capacity for response to mind ministry just as the developing mind of a personality possesses a certain innate capacity for spirit receptivity and therefore contains the potentials of spiritual progress and attainment. Intellectual, social, moral, and spiritual evolution are dependent on the mind ministry of the 7 adjutant spirits and their superphysical associates.
+\vs p065 6:10 The physical brain with its associated nervous system possesses innate capacity for response to mind ministry just as the developing mind of a personality possesses a certain innate capacity for spirit receptivity and therefore contains the potentials of spiritual progress and attainment. Intellectual, social, moral, and spiritual evolution are dependent on the mind ministry of the seven adjutant spirits and their superphysical associates.
 \usection{Evolutionary Mind Levels}
-\vs p065 7:1 The 7 adjutant mind\hyp{}spirits are the versatile mind ministers to the lower intelligent existences of a local universe. This order of mind is ministered from the local universe headquarters or from some world connected therewith, but there is influential direction of lower\hyp{}mind function from the system capitals.
-\vs p065 7:2 On an evolutionary world much, very much, depends on the work of these 7 adjutants. But they are mind ministers; they are not concerned in physical evolution, the domain of the Life Carriers. Nevertheless, the perfect integration of these spirit endowments with the ordained and natural procedure of the unfolding and inherent regime of the Life Carriers is responsible for the mortal inability to discern, in the phenomenon of mind, aught but the hand of nature and the outworking of natural processes, albeit you are occasionally somewhat perplexed in explaining all of everything connected with the natural reactions of mind as it is associated with matter. And if Urantia were operating more in accordance with the original plans, you would observe even less to arrest your attention in the phenomenon of mind.
-\vs p065 7:3 The 7 adjutant spirits are more circuitlike than entitylike, and on ordinary worlds they are encircuited with other adjutant functionings throughout the local universe. On life\hyp{}experiment planets, however, they are relatively isolated. And on Urantia, owing to the unique nature of the life patterns, the lower adjutants experienced far more difficulty in contacting with the evolutionary organisms than would have been the case in a more standardized type of life endowment.
-\vs p065 7:4 Again, on an average evolutionary world the 7 adjutant spirits are far better synchronized with the advancing stages of animal development than they were on Urantia. With but a single exception, the adjutants experienced the greatest difficulty in contacting with the evolving minds of Urantia organisms that they had ever had in all their functioning throughout the universe of Nebadon. On this world there developed many forms of border phenomena --- confusional combinations of the mechanical\hyp{}nonteachable and the nonmechanical\hyp{}teachable types of organismal response.
-\vs p065 7:5 The 7 adjutant spirits do not make contact with the purely mechanical orders of organismal environmental response. Such preintelligent responses of living organisms pertain purely to the energy domains of the power centres, the physical controllers, and their associates.
+\vs p065 7:1 The seven adjutant mind\hyp{}spirits are the versatile mind ministers to the lower intelligent existences of a local universe. This order of mind is ministered from the local universe headquarters or from some world connected therewith, but there is influential direction of lower\hyp{}mind function from the system capitals.
+\vs p065 7:2 On an evolutionary world much, very much, depends on the work of these seven adjutants. But they are mind ministers; they are not concerned in physical evolution, the domain of the Life Carriers. Nevertheless, the perfect integration of these spirit endowments with the ordained and natural procedure of the unfolding and inherent regime of the Life Carriers is responsible for the mortal inability to discern, in the phenomenon of mind, aught but the hand of nature and the outworking of natural processes, albeit you are occasionally somewhat perplexed in explaining all of everything connected with the natural reactions of mind as it is associated with matter. And if Urantia were operating more in accordance with the original plans, you would observe even less to arrest your attention in the phenomenon of mind.
+\vs p065 7:3 The seven adjutant spirits are more circuitlike than entitylike, and on ordinary worlds they are encircuited with other adjutant functionings throughout the local universe. On life\hyp{}experiment planets, however, they are relatively isolated. And on Urantia, owing to the unique nature of the life patterns, the lower adjutants experienced far more difficulty in contacting with the evolutionary organisms than would have been the case in a more standardized type of life endowment.
+\vs p065 7:4 Again, on an average evolutionary world the seven adjutant spirits are far better synchronized with the advancing stages of animal development than they were on Urantia. With but a single exception, the adjutants experienced the greatest difficulty in contacting with the evolving minds of Urantia organisms that they had ever had in all their functioning throughout the universe of Nebadon. On this world there developed many forms of border phenomena --- confusional combinations of the mechanical\hyp{}nonteachable and the nonmechanical\hyp{}teachable types of organismal response.
+\vs p065 7:5 The seven adjutant spirits do not make contact with the purely mechanical orders of organismal environmental response. Such preintelligent responses of living organisms pertain purely to the energy domains of the power centres, the physical controllers, and their associates.
 \vs p065 7:6 The acquisition of the potential of the ability to \bibemph{learn} from experience marks the beginning of the functioning of the adjutant spirits, and they function from the lowliest minds of primitive and invisible existences up to the highest types in the evolutionary scale of human beings. They are the source and pattern for the otherwise more or less mysterious behaviour and incompletely understood quick reactions of mind to the material environment. Long must these faithful and always dependable influences carry forward their preliminary ministry before the animal mind attains the human levels of spirit receptivity.
 \vs p065 7:7 The adjutants function exclusively in the evolution of experiencing mind up to the level of the 6\ts{th} phase, the spirit of worship. At this level there occurs that inevitable overlapping of ministry --- the phenomenon of the higher reaching down to co\hyp{}ordinate with the lower in anticipation of subsequent attainment of advanced levels of development. And still additional spirit ministry accompanies the action of the 7\ts{th} and last adjutant, the spirit of wisdom. Throughout the ministry of the spirit world the individual never experiences abrupt transitions of spirit co\hyp{}operation; always are these changes gradual and reciprocal.
 \vs p065 7:8 Always should the domains of the physical (electrochemical) and the mental response to environmental stimuli be differentiated, and in turn must they all be recognized as phenomena apart from spiritual activities. The domains of physical, mental, and spiritual gravity are distinct realms of cosmic reality, notwithstanding their intimate interrelations.
