--- a/tex/p072.tex
+++ b/tex/p072.tex
@@ -24,12 +24,12 @@
 \usection{Political Organization}
 \vs p072 2:1 This continental nation now has a representative government with a centrally located national capital. The central government consists of a strong federation of 100 comparatively free states. These states elect their governors and legislators for 10 years, and none are eligible for re\hyp{}election. State judges are appointed for life by the governors and confirmed by their legislatures, which consist of 1 representative for each 100,000 citizens.
 \vs p072 2:2 There are 5 different types of metropolitan government, depending on the size of the city, but no city is permitted to have more than 1,000,000 inhabitants. On the whole, these municipal governing schemes are very simple, direct, and economical. The few offices of city administration are keenly sought by the highest types of citizens.
-\vs p072 2:3 The federal government embraces three co\hyp{}ordinate divisions: executive, legislative, and judicial. The federal chief executive is elected every 6 years by universal territorial suffrage. He is not eligible for re\hyp{}election except upon the petition of at least 75 state legislatures concurred in by the respective state governors, and then but for one term. He is advised by a supercabinet composed of all living ex\hyp{}chief executives.
+\vs p072 2:3 The federal government embraces three co\hyp{}ordinate divisions: executive, legislative, and judicial. The federal chief executive is elected every six years by universal territorial suffrage. He is not eligible for re\hyp{}election except upon the petition of at least 75 state legislatures concurred in by the respective state governors, and then but for one term. He is advised by a supercabinet composed of all living ex\hyp{}chief executives.
 \vs p072 2:4 \pc The legislative division embraces three houses:
 \vs p072 2:5 \ublistelem{1.}\bibnobreakspace The \bibemph{upper house} is elected by industrial, professional, agricultural, and other groups of workers, balloting in accordance with economic function.
 \vs p072 2:6 \ublistelem{2.}\bibnobreakspace The \bibemph{lower house} is elected by certain organizations of society embracing the social, political, and philosophic groups not included in industry or the professions. All citizens in good standing participate in the election of both classes of representatives, but they are differently grouped, depending on whether the election pertains to the upper or lower house.
 \vs p072 2:7 \ublistelem{3.}\bibnobreakspace The \bibemph{third house ---} the elder statesmen --- embraces the veterans of civic service and includes many distinguished persons nominated by the chief executive, by the regional (subfederal) executives, by the chief of the supreme tribunal, and by the presiding officers of either of the other legislative houses. This group is limited to 100, and its members are elected by the majority action of the elder statesmen themselves. Membership is for life, and when vacancies occur, the person receiving the largest ballot among the list of nominees is thereby duly elected. The scope of this body is purely advisory, but it is a mighty regulator of public opinion and exerts a powerful influence upon all branches of the government.
-\vs p072 2:8 \pc Very much of the federal administrative work is carried on by the 10 regional (subfederal) authorities, each consisting of the association of 10 states. These regional divisions are wholly executive and administrative, having neither legislative nor judicial functions. The 10 regional executives are the personal appointees of the federal chief executive, and their term of office is concurrent with his --- 6 years. The federal supreme tribunal approves the appointment of these 10 regional executives, and while they may not be reappointed, the retiring executive automatically becomes the associate and adviser of his successor. Otherwise, these regional chiefs choose their own cabinets of administrative officials.
+\vs p072 2:8 \pc Very much of the federal administrative work is carried on by the 10 regional (subfederal) authorities, each consisting of the association of 10 states. These regional divisions are wholly executive and administrative, having neither legislative nor judicial functions. The 10 regional executives are the personal appointees of the federal chief executive, and their term of office is concurrent with his --- six years. The federal supreme tribunal approves the appointment of these 10 regional executives, and while they may not be reappointed, the retiring executive automatically becomes the associate and adviser of his successor. Otherwise, these regional chiefs choose their own cabinets of administrative officials.
 \vs p072 2:9 \pc This nation is adjudicated by two major court systems --- the law courts and the socio\hyp{}economic courts. The law courts function on the following three levels:
 \vs p072 2:10 \ublistelem{1.}\bibnobreakspace \bibemph{Minor courts} of municipal and local jurisdiction, whose decisions may be appealed to the high state tribunals.
 \vs p072 2:11 \ublistelem{2.}\bibnobreakspace \bibemph{State supreme courts,} whose decisions are final in all matters not involving the federal government or jeopardy of citizenship rights and liberties. The regional executives are empowered to bring any case at once to the bar of the federal supreme court.
@@ -93,7 +93,7 @@
 \vs p072 7:11 \ublistelem{3.}\bibnobreakspace \bibemph{Inheritance tax.} The federal government levies a graduated inheritance tax ranging from 1\% to 50\%, depending on the size of an estate as well as on other conditions.
 \vs p072 7:12 \ublistelem{4.}\bibnobreakspace \bibemph{Military equipment.} The government earns a considerable sum from the leasing of military and naval equipment for commercial and recreational usages.
 \vs p072 7:13 \ublistelem{5.}\bibnobreakspace \bibemph{Natural resources.} The income from natural resources, when not fully required for the specific purposes designated in the charter of federal statehood, is turned into the national treasury.
-\vs p072 7:14 \pc Federal appropriations, except war funds assessed by the National Council of Defence, are originated in the upper legislative house, concurred in by the lower house, approved by the chief executive, and finally validated by the federal budget commission of 100. The members of this commission are nominated by the state governors and elected by the state legislatures to serve for 24 years, one quarter being elected every 6 years. Every 6 years this body, by a three\hyp{}fourths ballot, chooses one of its number as chief, and he thereby becomes director\hyp{}controller of the federal treasury.
+\vs p072 7:14 \pc Federal appropriations, except war funds assessed by the National Council of Defence, are originated in the upper legislative house, concurred in by the lower house, approved by the chief executive, and finally validated by the federal budget commission of 100. The members of this commission are nominated by the state governors and elected by the state legislatures to serve for 24 years, one quarter being elected every six years. Every six years this body, by a three\hyp{}fourths ballot, chooses one of its number as chief, and he thereby becomes director\hyp{}controller of the federal treasury.
 \usection{The Special Colleges}
 \vs p072 8:1 In addition to the basic compulsory education program extending from the ages of 5 to 18, special schools are maintained as follows:
 \vs p072 8:2 \ublistelem{1.}\bibnobreakspace \bibemph{Statesmanship schools.} These schools are of three classes: national, regional, and state. The public offices of the nation are grouped in 4 divisions. The 1\ts{st} division of public trust pertains principally to the national administration, and all officeholders of this group must be graduates of both regional and national schools of statesmanship. Individuals may accept political, elective, or appointive office in the 2\ts{nd} division upon graduating from any one of the 10 regional schools of statesmanship; their trusts concern responsibilities in the regional administration and the state governments. Division 3 includes state responsibilities, and such officials are only required to have state degrees of statesmanship. The 4\ts{th} and last division of officeholders are not required to hold statesmanship degrees, such offices being wholly appointive. They represent minor positions of assistantship, secretaryships, and technical trusts which are discharged by the various learned professions functioning in governmental administrative capacities.
@@ -108,7 +108,7 @@
 \vs p072 9:3 \ublistelem{2.}\bibnobreakspace Upon nomination by the state governors or by the regional executives and by the mandate of the regional supreme councils, individuals who have rendered great service to society, or who have demonstrated extraordinary wisdom in government service, may have additional votes conferred upon them not oftener than every 5 years and not to exceed 9 such superfranchises. The maximum suffrage of any multiple voter is 10. Scientists, inventors, teachers, philosophers, and spiritual leaders are also thus recognized and honoured with augmented political power. These advanced civic privileges are conferred by the state and regional supreme councils much as degrees are bestowed by the special colleges, and the recipients are proud to attach the symbols of such civic recognition, along with their other degrees, to their lists of personal achievements.
 \vs p072 9:4 \ublistelem{3.}\bibnobreakspace All individuals sentenced to compulsory labour in the mines and all governmental servants supported by tax funds are, for the periods of such services, disenfranchised. This does not apply to aged persons who may be retired on pensions at 65.
 \vs p072 9:5 \ublistelem{4.}\bibnobreakspace There are 5 brackets of suffrage reflecting the average yearly taxes paid for each half\hyp{}decade period. Heavy taxpayers are permitted extra votes up to 5. This grant is independent of all other recognition, but in no case can any person cast over 10 ballots.
-\vs p072 9:6 \ublistelem{5.}\bibnobreakspace At the time this franchise plan was adopted, the territorial method of voting was abandoned in favour of the economic or functional system. All citizens now vote as members of industrial, social, or professional groups, regardless of their residence. Thus the electorate consists of solidified, unified, and intelligent groups who elect only their best members to positions of governmental trust and responsibility. There is one exception to this scheme of functional or group suffrage: The election of a federal chief executive every 6 years is by nation\hyp{}wide ballot, and no citizen casts over one vote.
+\vs p072 9:6 \ublistelem{5.}\bibnobreakspace At the time this franchise plan was adopted, the territorial method of voting was abandoned in favour of the economic or functional system. All citizens now vote as members of industrial, social, or professional groups, regardless of their residence. Thus the electorate consists of solidified, unified, and intelligent groups who elect only their best members to positions of governmental trust and responsibility. There is one exception to this scheme of functional or group suffrage: The election of a federal chief executive every six years is by nation\hyp{}wide ballot, and no citizen casts over one vote.
 \vs p072 9:7 \pc Thus, except in the election of the chief executive, suffrage is exercised by economic, professional, intellectual, and social groupings of the citizenry. The ideal state is organic, and every free and intelligent group of citizens represents a vital and functioning organ within the larger governmental organism.
 \vs p072 9:8 The schools of statesmanship have power to start proceedings in the state courts looking toward the disenfranchisement of any defective, idle, indifferent, or criminal individual. These people recognize that, when 50\% of a nation is inferior or defective and possesses the ballot, such a nation is doomed. They believe the dominance of mediocrity spells the downfall of any nation. Voting is compulsory, heavy fines being assessed against all who fail to cast their ballots.
 \usection{Dealing with Crime}
@@ -116,13 +116,13 @@
 \vs p072 10:2 These people are passing out of the negative into the positive era of law. Recently they have gone so far as to attempt the prevention of crime by sentencing those who are believed to be potential murderers and major criminals to life service in the detention colonies. If such convicts subsequently demonstrate that they have become more normal, they may be either paroled or pardoned. The homicide rate on this continent is only 1\% of that among the other nations.
 \vs p072 10:3 Efforts to prevent the breeding of criminals and defectives were begun over 100 years ago and have already yielded gratifying results. There are no prisons or hospitals for the insane. For one reason, there are only about 10\% as many of these groups as are found on Urantia.
 \usection{Military Preparedness}
-\vs p072 11:1 Graduates of the federal military schools may be commissioned as “guardians of civilization” in 7 ranks, in accordance with ability and experience, by the president of the National Council of Defence. This council consists of 25 members, nominated by the highest parental, educational, and industrial tribunals, confirmed by the federal supreme court, and presided over ex officio by the chief of staff of co\hyp{}ordinated military affairs. Such members serve until they are 70 years of age.
+\vs p072 11:1 Graduates of the federal military schools may be commissioned as “guardians of civilization” in seven ranks, in accordance with ability and experience, by the president of the National Council of Defence. This council consists of 25 members, nominated by the highest parental, educational, and industrial tribunals, confirmed by the federal supreme court, and presided over ex officio by the chief of staff of co\hyp{}ordinated military affairs. Such members serve until they are 70 years of age.
 \vs p072 11:2 The courses pursued by such commissioned officers are 4 years in length and are invariably correlated with the mastery of some trade or profession. Military training is never given without this associated industrial, scientific, or professional schooling. When military training is finished, the individual has, during his 4 years’ course, received one half of the education imparted in any of the special schools where the courses are likewise 4 years in length. In this way the creation of a professional military class is avoided by providing this opportunity for a large number of men to support themselves while securing the first half of a technical or professional training.
 \vs p072 11:3 Military service during peacetime is purely voluntary, and the enlistments in all branches of the service are for 4 years, during which every man pursues some special line of study in addition to the mastery of military tactics. Training in music is one of the chief pursuits of the central military schools and of the 25 training camps distributed about the periphery of the continent. During periods of industrial slackness many thousands of unemployed are automatically utilized in upbuilding the military defences of the continent on land and sea and in the air.
 \vs p072 11:4 \pc Although these people maintain a powerful war establishment as a defence against invasion by the surrounding hostile peoples, it may be recorded to their credit that they have not in over 100 years employed these military resources in an offensive war. They have become civilized to that point where they can vigorously defend civilization without yielding to the temptation to utilize their war powers in aggression. There have been no civil wars since the establishment of the united continental state, but during the last 2 centuries these people have been called upon to wage nine fierce defensive conflicts, three of which were against mighty confederations of world powers. Although this nation maintains adequate defence against attack by hostile neighbours, it pays far more attention to the training of statesmen, scientists, and philosophers.
 \vs p072 11:5 When at peace with the world, all mobile defence mechanisms are quite fully employed in trade, commerce, and recreation. When war is declared, the entire nation is mobilized. Throughout the period of hostilities military pay obtains in all industries, and the chiefs of all military departments become members of the chief executive’s cabinet.
 \usection{The Other Nations}
-\vs p072 12:1 Although the society and government of this unique people are in many respects superior to those of the Urantia nations, it should be stated that on the other continents (there are 11 on this planet) the governments are decidedly inferior to the more advanced nations of Urantia.
+\vs p072 12:1 Although the society and government of this unique people are in many respects superior to those of the Urantia nations, it should be stated that on the other continents (there are eleven on this planet) the governments are decidedly inferior to the more advanced nations of Urantia.
 \vs p072 12:2 Just now this superior government is planning to establish ambassadorial relations with the inferior peoples, and for the first time a great religious leader has arisen who advocates the sending of missionaries to these surrounding nations. We fear they are about to make the mistake that so many others have made when they have endeavoured to force a superior culture and religion upon other races. What a wonderful thing could be done on this world if this continental nation of advanced culture would only go out and bring to itself the best of the neighbouring peoples and then, after educating them, send them back as emissaries of culture to their benighted brethren! Of course, if a Magisterial Son should soon come to this advanced nation, great things could quickly happen on this world.
 \vs p072 12:3 \pc This recital of the affairs of a neighbouring planet is made by special permission with the intent of advancing civilization and augmenting governmental evolution on Urantia. Much more could be narrated that would no doubt interest and intrigue Urantians, but this disclosure covers the limits of our permissive mandate.
 \vs p072 12:4 \pc Urantians should, however, take note that their sister sphere in the Satania family has benefited by neither magisterial nor bestowal missions of the Paradise Sons. Neither are the various peoples of Urantia set off from each other by such disparity of culture as separates the continental nation from its planetary fellows.
