--- a/tex/p074.tex
+++ b/tex/p074.tex
@@ -38,7 +38,7 @@
 \vs p074 3:10 But circumstances dictated otherwise. The experience of the day just past in which Adam had so intelligently and so exhaustively discussed the animal life of Urantia, together with his masterly inaugural address and his charming manner, had so won the hearts and overcome the intellects of the Garden dwellers that they were not only wholeheartedly disposed to accept the newly arrived Son and Daughter of Jerusem as rulers, but the majority were about ready to fall down and worship them as gods.
 \usection{The First Upheaval}
 \vs p074 4:1 That night, the night following the sixth day, while Adam and Eve slumbered, strange things were transpiring in the vicinity of the Father’s temple in the central sector of Eden. There, under the rays of the mellow moon, hundreds of enthusiastic and excited men and women listened for hours to the impassioned pleas of their leaders. They meant well, but they simply could not understand the simplicity of the fraternal and democratic manner of their new rulers. And long before daybreak the new and temporary administrators of world affairs reached a virtually unanimous conclusion that Adam and his mate were altogether too modest and unassuming. They decided that Divinity had descended to earth in bodily form, that Adam and Eve were in reality gods or else so near such an estate as to be worthy of reverent worship.
-\vs p074 4:2 The amazing events of the first 6 days of Adam and Eve on earth were entirely too much for the unprepared minds of even the world’s best men; their heads were in a whirl; they were swept along with the proposal to bring the noble pair up to the Father’s temple at high noon in order that everyone might bow down in respectful worship and prostrate themselves in humble submission. And the Garden dwellers were really sincere in all of this.
+\vs p074 4:2 The amazing events of the first six days of Adam and Eve on earth were entirely too much for the unprepared minds of even the world’s best men; their heads were in a whirl; they were swept along with the proposal to bring the noble pair up to the Father’s temple at high noon in order that everyone might bow down in respectful worship and prostrate themselves in humble submission. And the Garden dwellers were really sincere in all of this.
 \vs p074 4:3 Van protested. Amadon was absent, being in charge of the guard of honour which had remained behind with Adam and Eve overnight. But Van’s protest was swept aside. He was told that he was likewise too modest, too unassuming; that he was not far from a god himself, else how had he lived so long on earth, and how had he brought about such a great event as the advent of Adam? And as the excited Edenites were about to seize him and carry him up to the mount for adoration, Van made his way out through the throng and, being able to communicate with the midwayers, sent their leader in great haste to Adam.
 \vs p074 4:4 It was near the dawn of their seventh day on earth that Adam and Eve heard the startling news of the proposal of these well\hyp{}meaning but misguided mortals; and then, even while the passenger birds were swiftly winging to bring them to the temple, the midwayers, being able to do such things, transported Adam and Eve to the Father’s temple. It was early on the morning of this seventh day and from the mount of their so recent reception that Adam held forth in explanation of the orders of divine sonship and made clear to these earth minds that only the Father and those whom he designates may be worshipped. Adam made it plain that he would accept any honour and receive all respect, but worship never!
 \vs p074 4:5 It was a momentous day, and just before noon, about the time of the arrival of the seraphic messenger bearing the Jerusem acknowledgement of the installation of the world’s rulers, Adam and Eve, moving apart from the throng, pointed to the Father’s temple and said: “Go you now to the material emblem of the Father’s invisible presence and bow down in worship of him who made us all and who keeps us living. And let this act be the sincere pledge that you never will again be tempted to worship anyone but God.” They all did as Adam directed. The Material Son and Daughter stood alone on the mount with bowed heads while the people prostrated themselves about the temple.
