--- a/tex/p119.tex
+++ b/tex/p119.tex
@@ -78,5 +78,5 @@
 \vs p119 8:7 In passing through the experience of revealing the Seven Master Spirit wills of the Trinity, the Creator Son has passed through the experience of revealing the will of the Supreme. In functioning as a revelator of the will of Supremacy, Michael, together with all other Master Sons, has identified himself eternally with the Supreme. In this universe age he reveals the Supreme and participates in the actualization of the sovereignty of Supremacy. But in the next universe age we believe he will be collaborating with the Supreme Being in the first experiential Trinity for and in the universes of outer space.
 \vs p119 8:8 \pc Urantia is the sentimental shrine of all Nebadon, the chief of 10,000,000 inhabited worlds, the mortal home of Christ Michael, sovereign of all Nebadon, a Melchizedek minister to the realms, a system saviour, an Adamic redeemer, a seraphic fellow, an associate of ascending spirits, a morontia progressor, a Son of Man in the likeness of mortal flesh, and the Planetary Prince of Urantia. And your record tells the truth when it says that this same Jesus has promised sometime to return to the world of his terminal bestowal, the World of the Cross.
 \vsetoff
-\vs p119 8:9 [This paper, depicting the 7 bestowals of Christ Michael, is the 63\ts{rd} of a series of presentations, sponsored by numerous personalities, narrating the history of Urantia down to the time of Michael’s appearance on earth in the likeness of mortal flesh. These papers were authorized by a Nebadon commission of twelve acting under the direction of Mantutia Melchizedek. We indited these narratives and put them in the English language, by a technique authorized by our superiors, in the year A.D.\,1935 of Urantia time.]
+\vs p119 8:9 [This paper, depicting the seven bestowals of Christ Michael, is the 63\ts{rd} of a series of presentations, sponsored by numerous personalities, narrating the history of Urantia down to the time of Michael’s appearance on earth in the likeness of mortal flesh. These papers were authorized by a Nebadon commission of twelve acting under the direction of Mantutia Melchizedek. We indited these narratives and put them in the English language, by a technique authorized by our superiors, in the year A.D.\,1935 of Urantia time.]
 \quizlink
