--- a/tex/p123.tex
+++ b/tex/p123.tex
@@ -41,7 +41,7 @@
 \vs p123 3:1 Already, with his mother’s help, Jesus had mastered the Galilean dialect of the Aramaic tongue; and now his father began teaching him Greek. Mary spoke little Greek, but Joseph was a fluent speaker of both Aramaic and Greek. The textbook for the study of the Greek language was the copy of the Hebrew scriptures --- a complete version of the law and the prophets, including the Psalms --- which had been presented to them on leaving Egypt. There were only two complete copies of the Scriptures in Greek in all Nazareth, and the possession of one of them by the carpenter’s family made Joseph’s home a much\hyp{}sought place and enabled Jesus, as he grew up, to meet an almost endless procession of earnest students and sincere truth seekers. Before this year ended, Jesus had assumed custody of this priceless manuscript, having been told on his sixth birthday that the sacred book had been presented to him by Alexandrian friends and relatives. And in a very short time he could read it readily.
 \vs p123 3:2 \pc The first great shock of Jesus’ young life occurred when he was not quite six years old. It had seemed to the lad that his father --- at least his father and mother together --- knew everything. Imagine, therefore, the surprise of this inquiring child, when he asked his father the cause of a mild earthquake which had just occurred, to hear Joseph say, “My son, I really do not know.” Thus began that long and disconcerting disillusionment in the course of which Jesus found out that his earthly parents were not all\hyp{}wise and all\hyp{}knowing.
 \vs p123 3:3 Joseph’s first thought was to tell Jesus that the earthquake had been caused by God, but a moment’s reflection admonished him that such an answer would immediately be provocative of further and still more embarrassing inquiries. Even at an early age it was very difficult to answer Jesus’ questions about physical or social phenomena by thoughtlessly telling him that either God or the devil was responsible. In harmony with the prevailing belief of the Jewish people, Jesus was long willing to accept the doctrine of good spirits and evil spirits as the possible explanation of mental and spiritual phenomena, but he very early became doubtful that such unseen influences were responsible for the physical happenings of the natural world.
-\vs p123 3:4 \pc Before Jesus was 6 years of age, in the early summer of 1\,B.C., Zacharias and Elizabeth and their son John came to visit the Nazareth family. Jesus and John had a happy time during this, their first visit within their memories. Although the visitors could remain only a few days, the parents talked over many things, including the future plans for their sons. While they were thus engaged, the lads played with blocks in the sand on top of the house and in many other ways enjoyed themselves in true boyish fashion.
+\vs p123 3:4 \pc Before Jesus was six years of age, in the early summer of 1\,B.C., Zacharias and Elizabeth and their son John came to visit the Nazareth family. Jesus and John had a happy time during this, their first visit within their memories. Although the visitors could remain only a few days, the parents talked over many things, including the future plans for their sons. While they were thus engaged, the lads played with blocks in the sand on top of the house and in many other ways enjoyed themselves in true boyish fashion.
 \vs p123 3:5 \pc Having met John, who came from near Jerusalem, Jesus began to evince an unusual interest in the history of Israel and to inquire in great detail as to the meaning of the Sabbath rites, the synagogue sermons, and the recurring feasts of commemoration. His father explained to him the meaning of all these seasons. The first was the midwinter festive illumination, lasting eight days, starting out with one candle the first night and adding one each successive night; this commemorated the dedication of the temple after the restoration of the Mosaic services by Judas Maccabee. Next came the early springtime celebration of Purim, the feast of Esther and Israel’s deliverance through her. Then followed the solemn Passover, which the adults celebrated in Jerusalem whenever possible, while at home the children would remember that no leavened bread was to be eaten for the whole week. Later came the feast of the first\hyp{}fruits, the harvest ingathering; and last, the most solemn of all, the feast of the new year, the day of atonement. While some of these celebrations and observances were difficult for Jesus’ young mind to understand, he pondered them seriously and then entered fully into the joy of the feast of tabernacles, the annual vacation season of the whole Jewish people, the time when they camped out in leafy booths and gave themselves up to mirth and pleasure.
 \vs p123 3:6 \pc During this year Joseph and Mary had trouble with Jesus about his prayers. He insisted on talking to his heavenly Father much as he would talk to Joseph, his earthly father. This departure from the more solemn and reverent modes of communication with Deity was a bit disconcerting to his parents, especially to his mother, but there was no persuading him to change; he would say his prayers just as he had been taught, after which he insisted on having \textcolour{ubdarkred}{“just a little talk with my Father in heaven.”}
 \vs p123 3:7 In June of this year Joseph turned the shop in Nazareth over to his brothers and formally entered upon his work as a builder. Before the year was over, the family income had more than trebled. Never again, until after Joseph’s death, did the Nazareth family feel the pinch of poverty. The family grew larger and larger, and they spent much money on extra education and travel, but always Joseph’s increasing income kept pace with the growing expenses.
