--- a/tex/p137.tex
+++ b/tex/p137.tex
@@ -47,7 +47,7 @@
 \vs p137 4:8 Throughout a period of many years, Mary had always turned to Jesus for help in every crisis of their home life at Nazareth so that it was only natural for her to think of him at this time. But this ambitious mother had still other motives for appealing to her eldest son on this occasion. As Jesus was standing alone in a corner of the garden, his mother approached him, saying, “My son, they have no wine.” And Jesus answered, \textcolour{ubdarkred}{“My good woman, what have I to do with that?”} Said Mary, “But I believe your hour has come; cannot you help us?” Jesus replied: \textcolour{ubdarkred}{“Again I declare that I have not come to do things in this wise. Why do you trouble me again with these matters?”} And then, breaking down in tears, Mary entreated him, “But, my son, I promised them that you would help us; won’t you please do something for me?” And then spoke Jesus: \textcolour{ubdarkred}{“Woman, what have you to do with making such promises? See that you do it not again. We must in all things wait upon the will of the Father in heaven.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.8}\columnwidth]{images/Wedding.jpg}\caption{The Wedding at Cana by William Hole}\end{figure}}
 \vs p137 4:9 Mary the mother of Jesus was crushed; she was stunned! As she stood there before him motionless, with the tears streaming down her face, the human heart of Jesus was overcome with compassion for the woman who had borne him in the flesh; and bending forward, he laid his hand tenderly upon her head, saying: \textcolour{ubdarkred}{“Now, now, Mother Mary, grieve not over my apparently hard sayings, for have I not many times told you that I have come only to do the will of my heavenly Father? Most gladly would I do what you ask of me if it were a part of the Father’s will --- “} and Jesus stopped short, he hesitated. Mary seemed to sense that something was happening. Leaping up, she threw her arms around Jesus’ neck, kissed him, and rushed off to the servants’ quarters, saying, “Whatever my son says, that do.” But Jesus said nothing. He now realized that he had already said --- or rather desirefully thought --- too much.
 \vs p137 4:10 Mary was dancing with glee. She did not know how the wine would be produced, but she confidently believed that she had finally persuaded her first\hyp{}born son to assert his authority, to dare to step forth and claim his position and exhibit his Messianic power. And, because of the presence and association of certain universe powers and personalities, of which all those present were wholly ignorant, she was not to be disappointed. The wine Mary desired and which Jesus, the God\hyp{}man, humanly and sympathetically wished for, was forthcoming.
-\vs p137 4:11 Near at hand stood 6 waterpots of stone, filled with water, holding about 75 litres apiece. This water was intended for subsequent use in the final purification ceremonies of the wedding celebration. The commotion of the servants about these huge stone vessels, under the busy direction of his mother, attracted Jesus’ attention, and going over, he observed that they were drawing wine out of them by the pitcherful.
+\vs p137 4:11 Near at hand stood six waterpots of stone, filled with water, holding about 75 litres apiece. This water was intended for subsequent use in the final purification ceremonies of the wedding celebration. The commotion of the servants about these huge stone vessels, under the busy direction of his mother, attracted Jesus’ attention, and going over, he observed that they were drawing wine out of them by the pitcherful.
 \vs p137 4:12 It was gradually dawning upon Jesus what had happened. Of all persons present at the marriage feast of Cana, Jesus was the most surprised. Others had expected him to work a wonder, but that was just what he had purposed not to do. And then the Son of Man recalled the admonition of his Personalized Thought Adjuster in the hills. He recounted how the Adjuster had warned him about the inability of any power or personality to deprive him of the creator prerogative of independence of time. On this occasion power transformers, midwayers, and all other required personalities were assembled near the water and other necessary elements, and in the face of the expressed wish of the Universe Creator Sovereign, there was no escaping the instantaneous appearance of \bibemph{wine.} And this occurrence was made doubly certain since the Personalized Adjuster had signified that the execution of the Son’s desire was in no way a contravention of the Father’s will.
 \vs p137 4:13 But this was in no sense a miracle. No law of nature was modified, abrogated, or even transcended. Nothing happened but the abrogation of \bibemph{time} in association with the celestial assembly of the chemical elements requisite for the elaboration of the wine. At Cana on this occasion the agents of the Creator made wine just as they do by the ordinary natural processes \bibemph{except} that they did it independently of time and with the intervention of superhuman agencies in the matter of the space assembly of the necessary chemical ingredients.
 \vs p137 4:14 Furthermore it was evident that the enactment of this so\hyp{}called miracle was not contrary to the will of the Paradise Father, else it would not have transpired, since Jesus had already subjected himself in all things to the Father’s will.
