--- a/tex/p139.tex
+++ b/tex/p139.tex
@@ -145,7 +145,7 @@
 \vs p139 12:1 Judas Iscariot, the 12\ts{th} apostle, was chosen by Nathaniel. He was born in Kerioth\fnst{In Hebrew \textheb{אִישׁ־קְרִיּוֹת} \textit{ish-keriyoth} means ``a man of Kerioth'', hence the surname ``Iscariot''.}, a small town in southern Judea. When he was a lad, his parents moved to Jericho, where he lived and had been employed in his father’s various business enterprises until he became interested in the preaching and work of John the Baptist. Judas’s parents were Sadducees, and when their son joined John’s disciples, they disowned him.
 \vs p139 12:2 \pc When Nathaniel met Judas at Tarichea, he was seeking employment with a fish\hyp{}drying enterprise at the lower end of the Sea of Galilee. He was 30 years of age and unmarried when he joined the apostles. He was probably the best\hyp{}educated man among the twelve and the only Judean in the Master’s apostolic family. Judas had no outstanding trait of personal strength, though he had many outwardly appearing traits of culture and habits of training. He was a good thinker but not always a truly \bibemph{honest} thinker. Judas did not really understand himself; he was not really sincere in dealing with himself.
 \vs p139 12:3 Andrew appointed Judas treasurer of the twelve, a position which he was eminently fitted to hold, and up to the time of the betrayal of his Master he discharged the responsibilities of his office honestly, faithfully, and most efficiently.
-\vs p139 12:4 \pc There was no special trait about Jesus which Judas admired above the generally attractive and exquisitely charming personality of the Master. Judas was never able to rise above his Judean prejudices against his Galilean associates; he would even criticize in his mind many things about Jesus. Him whom 11 of the apostles looked upon as the perfect man, as the “one altogether lovely and the chiefest among ten thousand,” this self\hyp{}satisfied Judean often dared to criticize in his own heart. He really entertained the notion that Jesus was timid and somewhat afraid to assert his own power and authority.
+\vs p139 12:4 \pc There was no special trait about Jesus which Judas admired above the generally attractive and exquisitely charming personality of the Master. Judas was never able to rise above his Judean prejudices against his Galilean associates; he would even criticize in his mind many things about Jesus. Him whom eleven of the apostles looked upon as the perfect man, as the “one altogether lovely and the chiefest among ten thousand,” this self\hyp{}satisfied Judean often dared to criticize in his own heart. He really entertained the notion that Jesus was timid and somewhat afraid to assert his own power and authority.
 \vs p139 12:5 \pc Judas was a good business man. It required tact, ability, and patience, as well as painstaking devotion, to manage the financial affairs of such an idealist as Jesus, to say nothing of wrestling with the helter\hyp{}skelter business methods of some of his apostles. Judas really was a great executive, a farseeing and able financier. And he was a stickler for organization. None of the twelve ever criticized Judas. As far as they could see, Judas Iscariot was a matchless treasurer, a learned man, a loyal (though sometimes critical) apostle, and in every sense of the word a great success. The apostles loved Judas; he was really one of them. He must have \bibemph{believed} in Jesus, but we doubt whether he really \bibemph{loved} the Master with a whole heart. The case of Judas illustrates the truthfulness of that saying: “There is a way that seems right to a man, but the end thereof is death.” It is altogether possible to fall victim to the peaceful deception of pleasant adjustment to the paths of sin and death. Be assured that Judas was always financially loyal to his Master and his fellow apostles. Money could never have been the motive for his betrayal of the Master.
 \vs p139 12:6 Judas was an only son of unwise parents. When very young, he was pampered and petted; he was a spoiled child. As he grew up, he had exaggerated ideas about his self\hyp{}importance. He was a poor loser. He had loose and distorted ideas about fairness; he was given to the indulgence of hate and suspicion. He was an expert at misinterpretation of the words and acts of his friends. All through his life Judas had cultivated the habit of getting even with those whom he fancied had mistreated him. His sense of values and loyalties was defective.
 \vs p139 12:7 \pc To Jesus, Judas was a faith adventure. From the beginning the Master fully understood the weakness of this apostle and well knew the dangers of admitting him to fellowship. But it is the nature of the Sons of God to give every created being a full and equal chance for salvation and survival. Jesus wanted not only the mortals of this world but the onlookers of innumerable other worlds to know that, when doubts exist as to the sincerity and wholeheartedness of a creature’s devotion to the kingdom, it is the invariable practice of the Judges of men fully to receive the doubtful candidate. The door of eternal life is wide open to all; “whosoever will may come”; there are no restrictions or qualifications save the \bibemph{faith} of the one who comes.
@@ -155,5 +155,5 @@
 \vs p139 12:11 The Master many times, both privately and publicly, had warned Judas that he was slipping, but divine warnings are usually useless in dealing with embittered human nature. Jesus did everything possible, consistent with man’s moral freedom, to prevent Judas’s choosing to go the wrong way. The great test finally came. The son of resentment failed; he yielded to the sour and sordid dictates of a proud and vengeful mind of exaggerated self\hyp{}importance and swiftly plunged on down into confusion, despair, and depravity.
 \vs p139 12:12 Judas then entered into the base and shameful intrigue to betray his Lord and Master and quickly carried the nefarious scheme into effect. During the outworking of his anger\hyp{}conceived plans of traitorous betrayal, he experienced moments of regret and shame, and in these lucid intervals he faintheartedly conceived, as a defence in his own mind, the idea that Jesus might possibly exert his power and deliver himself at the last moment.
 \vs p139 12:13 When the sordid and sinful business was all over, this renegade mortal, who thought lightly of selling his friend for 30 pieces of silver to satisfy his long\hyp{}nursed craving for revenge, rushed out and committed the final act in the drama of fleeing from the realities of mortal existence --- suicide.
-\vs p139 12:14 The 11 apostles were horrified, stunned. Jesus regarded the betrayer only with pity. The worlds have found it difficult to forgive Judas, and his name has become eschewed throughout a far\hyp{}flung universe.
+\vs p139 12:14 The eleven apostles were horrified, stunned. Jesus regarded the betrayer only with pity. The worlds have found it difficult to forgive Judas, and his name has become eschewed throughout a far\hyp{}flung universe.
 \quizlink
