--- a/tex/p143.tex
+++ b/tex/p143.tex
@@ -30,7 +30,7 @@
 \vs p143 2:8 \textcolour{ubdarkred}{“If, then, my children, you are born of the spirit, you are forever delivered from the self\hyp{}conscious bondage of a life of self\hyp{}denial and watchcare over the desires of the flesh, and you are translated into the joyous kingdom of the spirit, whence you spontaneously show forth the fruits of the spirit in your daily lives; and the fruits of the spirit are the essence of the highest type of enjoyable and ennobling self\hyp{}control, even the heights of terrestrial mortal attainment --- true self\hyp{}mastery.”}
 \usection{Diversion and Relaxation}
 \vs p143 3:1 About this time a state of great nervous and emotional tension developed among the apostles and their immediate disciple associates. They had hardly become accustomed to living and working together. They were experiencing increasing difficulties in maintaining harmonious relations with John’s disciples. The contact with the gentiles and the Samaritans was a great trial to these Jews. And besides all this, the recent utterances of Jesus had augmented their disturbed state of mind. Andrew was almost beside himself; he did not know what next to do, and so he went to the Master with his problems and perplexities. When Jesus had listened to the apostolic chief relate his troubles, he said: \textcolour{ubdarkred}{“Andrew, you cannot talk men out of their perplexities when they reach such a stage of involvement, and when so many persons with strong feelings are concerned. I cannot do what you ask of me --- I will not participate in these personal social difficulties --- but I will join you in the enjoyment of a three\hyp{}day period of rest and relaxation. Go to your brethren and announce that all of you are to go with me up on Mount Sartaba, where I desire to rest for a day or two.}
-\vs p143 3:2 \textcolour{ubdarkred}{“Now you should go to each of your 11 brethren and talk with him privately, saying: ‘The Master desires that we go apart with him for a season to rest and relax. Since we all have recently experienced much vexation of spirit and stress of mind, I suggest that no mention be made of our trials and troubles while on this holiday. Can I depend upon you to co\hyp{}operate with me in this matter?’ In this way privately and personally approach each of your brethren.”} And Andrew did as the Master had instructed him.
+\vs p143 3:2 \textcolour{ubdarkred}{“Now you should go to each of your eleven brethren and talk with him privately, saying: ‘The Master desires that we go apart with him for a season to rest and relax. Since we all have recently experienced much vexation of spirit and stress of mind, I suggest that no mention be made of our trials and troubles while on this holiday. Can I depend upon you to co\hyp{}operate with me in this matter?’ In this way privately and personally approach each of your brethren.”} And Andrew did as the Master had instructed him.
 \vs p143 3:3 \pc This was a marvellous occasion in the experience of each of them; they never forgot the day going up the mountain. Throughout the entire trip hardly a word was said about their troubles. Upon reaching the top of the mountain, Jesus seated them about him while he said: \textcolour{ubdarkred}{“My brethren, you must all learn the value of rest and the efficacy of relaxation. You must realize that the best method of solving some entangled problems is to forsake them for a time. Then when you go back fresh from your rest or worship, you are able to attack your troubles with a clearer head and a steadier hand, not to mention a more resolute heart. Again, many times your problem is found to have shrunk in size and proportions while you have been resting your mind and body.”}
 \vs p143 3:4 The next day Jesus assigned to each of the twelve a topic for discussion. The whole day was devoted to reminiscences and to talking over matters not related to their religious work. They were momentarily shocked when Jesus even neglected to give thanks --- verbally --- when he broke bread for their noontide lunch. This was the first time they had ever observed him to neglect such formalities.
 \vs p143 3:5 When they went up the mountain, Andrew’s head was full of problems. John was inordinately perplexed in his heart. James was grievously troubled in his soul. Matthew was hard pressed for funds inasmuch as they had been sojourning among the gentiles. Peter was overwrought and had recently been more temperamental than usual. Judas was suffering from a periodic attack of sensitiveness and selfishness. Simon was unusually upset in his efforts to reconcile his patriotism with the love of the brotherhood of man. Philip was more and more nonplussed by the way things were going. Nathaniel had been less humorous since they had come in contact with the gentile populations, and Thomas was in the midst of a severe season of depression. Only the twins were normal and unperturbed. All of them were exceedingly perplexed about how to get along peaceably with John’s disciples.
