--- a/tex/p150.tex
+++ b/tex/p150.tex
@@ -11,7 +11,7 @@
 \author{Midwayer Commission}
 \vs p150 0:1 On Sunday evening, January 16, A.D.\,29, Abner, with the apostles of John, reached Bethsaida and went into joint conference with Andrew and the apostles of Jesus the next day. Abner and his associates made their headquarters at Hebron and were in the habit of coming up to Bethsaida periodically for these conferences.
 \vs p150 0:2 Among the many matters considered by this joint conference was the practice of anointing the sick with certain forms of oil in connection with prayers for healing. Again did Jesus decline to participate in their discussions or to express himself regarding their conclusions. The apostles of John had always used the anointing oil in their ministry to the sick and afflicted, and they sought to establish this as a uniform practice for both groups, but the apostles of Jesus refused to bind themselves by such a regulation.
-\vs p150 0:3 \pc On Tuesday, January 18, the 24 were joined by the tested evangelists, about 75 in number, at the Zebedee house in Bethsaida preparatory to being sent forth on the third preaching tour of Galilee. This third mission continued for a period of 7 weeks.
+\vs p150 0:3 \pc On Tuesday, January 18, the 24 were joined by the tested evangelists, about 75 in number, at the Zebedee house in Bethsaida preparatory to being sent forth on the third preaching tour of Galilee. This third mission continued for a period of seven weeks.
 \vs p150 0:4 The evangelists were sent out in groups of five, while Jesus and the twelve travelled together most of the time, the apostles going out two and two to baptize believers as occasion required. For a period of almost three weeks Abner and his associates also worked with the evangelistic groups, advising them and baptizing believers. They visited Magdala, Tiberias, Nazareth, and all the principal cities and villages of central and southern Galilee, all the places previously visited and many others. This was their last message to Galilee, except to the northern portions.
 \usection{The Women’s Evangelistic Corps}
 \vs p150 1:1 Of all the daring things which Jesus did in connection with his earth career, the most amazing was his sudden announcement on the evening of January 16: \textcolour{ubdarkred}{“On the morrow we will set apart ten women for the ministering work of the kingdom.”} At the beginning of the two weeks’ period during which the apostles and the evangelists were to be absent from Bethsaida on their furlough, Jesus requested David to summon his parents back to their home and to dispatch messengers calling to Bethsaida ten devout women who had served in the administration of the former encampment and the tented infirmary. These women had all listened to the instruction given the young evangelists, but it had never occurred to either themselves or their teachers that Jesus would dare to commission women to teach the gospel of the kingdom and minister to the sick. These ten women selected and commissioned by Jesus were: Susanna, the daughter of the former chazan of the Nazareth synagogue; Joanna, the wife of Chuza, the steward of Herod Antipas; Elizabeth, the daughter of a wealthy Jew of Tiberias and Sepphoris; Martha, the elder sister of Andrew and Peter; Rachel, the sister\hyp{}in\hyp{}law of Jude, the Master’s brother in the flesh; Nasanta, the daughter of Elman, the Syrian physician; Milcha, a cousin of the Apostle Thomas; Ruth, the eldest daughter of Matthew Levi; Celta, the daughter of a Roman centurion; and Agaman, a widow of Damascus. Subsequently, Jesus added two other women to this group --- Mary Magdalene and Rebecca, the daughter of Joseph of Arimathea.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.85}\columnwidth]{images/Womens.jpg}\caption{Gathering the Women's Corps by Del Parson}\end{figure}}
