--- a/tex/p155.tex
+++ b/tex/p155.tex
@@ -20,7 +20,7 @@
 \vs p155 2:3 When it appeared that no more people were minded to seek entrance into the kingdom, Peter, on Tuesday, June 7, called his associates together and departed for Caesarea\hyp{}Philippi to join Jesus and the apostles. They arrived about noontime on Wednesday and spent the entire evening in rehearsing their experiences among the unbelievers of Chorazin. During the discussions of this evening Jesus made further reference to the parable of the sower and taught them much about the meaning of the apparent failure of life undertakings.
 \usection{At Caesarea\hyp{}Philippi}
 \vs p155 3:1 Although Jesus did no public work during this two weeks’ sojourn near Caesarea\hyp{}Philippi, the apostles held numerous quiet evening meetings in the city, and many of the believers came out to the camp to talk with the Master. Very few were added to the group of believers as a result of this visit. Jesus talked with the apostles each day, and they more clearly discerned that a new phase of the work of preaching the kingdom of heaven was now beginning. They were commencing to comprehend that the “kingdom of heaven is not meat and drink but the realization of the spiritual joy of the acceptance of divine sonship.”
-\vs p155 3:2 The sojourn at Caesarea\hyp{}Philippi was a real test to the 11 apostles; it was a difficult two weeks for them to live through. They were well\hyp{}nigh depressed, and they missed the periodic stimulation of Peter’s enthusiastic personality. In these times it was truly a great and testing adventure to believe in Jesus and go forth to follow after him. Though they made few converts during these two weeks, they did learn much that was highly profitable from their daily conferences with the Master.
+\vs p155 3:2 The sojourn at Caesarea\hyp{}Philippi was a real test to the eleven apostles; it was a difficult two weeks for them to live through. They were well\hyp{}nigh depressed, and they missed the periodic stimulation of Peter’s enthusiastic personality. In these times it was truly a great and testing adventure to believe in Jesus and go forth to follow after him. Though they made few converts during these two weeks, they did learn much that was highly profitable from their daily conferences with the Master.
 \vs p155 3:3 The apostles learned that the Jews were spiritually stagnant and dying because they had crystallized truth into a creed; that when truth becomes formulated as a boundary line of self\hyp{}righteous exclusiveness instead of serving as signposts of spiritual guidance and progress, such teachings lose their creative and life\hyp{}giving power and ultimately become merely preservative and fossilizing.
 \vs p155 3:4 Increasingly they learned from Jesus to look upon human personalities in terms of their possibilities in time and in eternity. They learned that many souls can best be led to love the unseen God by being first taught to love their brethren whom they can see. And it was in this connection that new meaning became attached to the Master’s pronouncement concerning unselfish service for one’s fellows: \textcolour{ubdarkred}{“Inasmuch as you did it to one of the least of my brethren, you did it to me.”}
 \vs p155 3:5 One of the great lessons of this sojourn at Caesarea had to do with the origin of religious traditions, with the grave danger of allowing a sense of sacredness to become attached to nonsacred things, common ideas, or everyday events. From one conference they emerged with the teaching that true religion was man’s heartfelt loyalty to his highest and truest convictions.
