--- a/tex/p157.tex
+++ b/tex/p157.tex
@@ -23,7 +23,7 @@
 \vs p157 3:2 Jesus had gone to Mount Hermon in his early experience with the affairs of the kingdom, and now that he was entering upon the final epoch of his work, he desired to return to this mount of trial and triumph, where he hoped the apostles might gain a new vision of their responsibilities and acquire new strength for the trying times just ahead. As they journeyed along the way, about the time of passing south of the Waters of Merom, the apostles fell to talking among themselves about their recent experiences in Phoenicia and elsewhere and to recounting how their message had been received, and how the different peoples regarded their Master.
 \vs p157 3:3 As they paused for lunch, Jesus suddenly confronted the twelve with the first question he had ever addressed to them concerning himself. He asked this surprising question, \textcolour{ubdarkred}{“Who do men say that I am?”}
 \vs p157 3:4 \pc Jesus had spent long months in training these apostles as to the nature and character of the kingdom of heaven, and he well knew the time had come when he must begin to teach them more about his own nature and his personal relationship to the kingdom. And now, as they were seated under the mulberry trees, the Master made ready to hold one of the most momentous sessions of his long association with the chosen apostles.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Peter-Confession.jpg}\caption{The Son of the Living God --- Peter's Confession by Michael Dudash}\end{figure}}
-\vs p157 3:5 \pc More than half the apostles participated in answering Jesus’ question. They told him that he was regarded as a prophet or as an extraordinary man by all who knew him; that even his enemies greatly feared him, accounting for his powers by the indictment that he was in league with the prince of devils. They told him that some in Judea and Samaria who had not met him personally believed he was John the Baptist risen from the dead. Peter explained that he had been, at sundry times and by various persons, compared with Moses, Elijah, Isaiah, and Jeremiah. When Jesus had listened to this report, he drew himself upon his feet, and looking down upon the twelve sitting about him in a semicircle, with startling emphasis he pointed to them with a sweeping gesture of his hand and asked, \textcolour{ubdarkred}{“But who say you that I am?”} There was a moment of tense silence. The twelve never took their eyes off the Master, and then Simon Peter, springing to his feet, exclaimed: “You are the Deliverer, the Son of the living God.” And the 11 sitting apostles arose to their feet with one accord, thereby indicating that Peter had spoken for all of them.
+\vs p157 3:5 \pc More than half the apostles participated in answering Jesus’ question. They told him that he was regarded as a prophet or as an extraordinary man by all who knew him; that even his enemies greatly feared him, accounting for his powers by the indictment that he was in league with the prince of devils. They told him that some in Judea and Samaria who had not met him personally believed he was John the Baptist risen from the dead. Peter explained that he had been, at sundry times and by various persons, compared with Moses, Elijah, Isaiah, and Jeremiah. When Jesus had listened to this report, he drew himself upon his feet, and looking down upon the twelve sitting about him in a semicircle, with startling emphasis he pointed to them with a sweeping gesture of his hand and asked, \textcolour{ubdarkred}{“But who say you that I am?”} There was a moment of tense silence. The twelve never took their eyes off the Master, and then Simon Peter, springing to his feet, exclaimed: “You are the Deliverer, the Son of the living God.” And the eleven sitting apostles arose to their feet with one accord, thereby indicating that Peter had spoken for all of them.
 \vs p157 3:6 When Jesus had beckoned them again to be seated, and while still standing before them, he said: \textcolour{ubdarkred}{“This has been revealed to you by my Father. The hour has come when you should know the truth about me. But for the time being I charge you that you tell this to no man. Let us go hence.”}
 \vs p157 3:7 And so they resumed their journey to Caesarea\hyp{}Philippi, arriving late that evening and stopping at the home of Celsus, who was expecting them. The apostles slept little that night; they seemed to sense that a great event in their lives and in the work of the kingdom had transpired.
 \usection{The Talk about the Kingdom}
