--- a/tex/p159.tex
+++ b/tex/p159.tex
@@ -15,7 +15,7 @@
 \vs p159 1:4 \pc Simon Peter was the apostle in charge of the workers at Hippos, and when he heard Jesus thus speak, he asked: “Lord, how often shall my brother sin against me, and I forgive him? Until seven times?” And Jesus answered Peter: \textcolour{ubdarkred}{“Not only seven times but even to seventy times and seven. Therefore may the kingdom of heaven be likened to a certain king who ordered a financial reckoning with his stewards. And when they had begun to conduct this examination of accounts, one of his chief retainers was brought before him confessing that he owed his king 10,000 talents. Now this officer of the king’s court pleaded that hard times had come upon him, and that he did not have wherewith to pay this obligation. And so the king commanded that his property be confiscated, and that his children be sold to pay his debt. When this chief steward heard this stern decree, he fell down on his face before the king and implored him to have mercy and grant him more time, saying, ‘Lord, have a little more patience with me, and I will pay you all.’ And when the king looked upon this negligent servant and his family, he was moved with compassion. He ordered that he should be released, and that the loan should be wholly forgiven.}
 \vs p159 1:5 \textcolour{ubdarkred}{“And this chief steward, having thus received mercy and forgiveness at the hands of the king, went about his business, and finding one of his subordinate stewards who owed him a mere hundred denarii, he laid hold upon him and, taking him by the throat, said, ‘Pay me all you owe.’ And then did this fellow steward fall down before the chief steward and, beseeching him, said: ‘Only have patience with me, and I will presently be able to pay you.’ But the chief steward would not show mercy to his fellow steward but rather had him cast in prison until he should pay his debt. When his fellow servants saw what had happened, they were so distressed that they went and told their lord and master, the king. When the king heard of the doings of his chief steward, he called this ungrateful and unforgiving man before him and said: ‘You are a wicked and unworthy steward. When you sought for compassion, I freely forgave you your entire debt. Why did you not also show mercy to your fellow steward, even as I showed mercy to you?’ And the king was so very angry that he delivered his ungrateful chief steward to the jailers that they might hold him until he had paid all that was due. And even so shall my heavenly Father show the more abundant mercy to those who freely show mercy to their fellows. How can you come to God asking consideration for your shortcomings when you are wont to chastise your brethren for being guilty of these same human frailties? I say to all of you: Freely you have received the good things of the kingdom; therefore freely give to your fellows on earth.”}
 \vs p159 1:6 \pc Thus did Jesus teach the dangers and illustrate the unfairness of sitting in personal judgment upon one’s fellows. Discipline must be maintained, justice must be administered, but in all these matters the wisdom of the brotherhood should prevail. Jesus invested legislative and judicial authority in the \bibemph{group,} not in the \bibemph{individual.} Even this investment of authority in the group must not be exercised as personal authority. There is always danger that the verdict of an individual may be warped by prejudice or distorted by passion. Group judgment is more likely to remove the dangers and eliminate the unfairness of personal bias. Jesus sought always to minimize the elements of unfairness, retaliation, and vengeance.
-\vs p159 1:7 \pc [The use of the term 77 as an illustration of mercy and forbearance was derived from the Scriptures referring to Lamech’s exultation because of the metal weapons of his son Tubal\hyp{}Cain, who, comparing these superior instruments with those of his enemies, exclaimed: “If Cain, with no weapon in his hand, was avenged 7 times, I shall now be avenged 77.”]
+\vs p159 1:7 \pc [The use of the term 77 as an illustration of mercy and forbearance was derived from the Scriptures referring to Lamech’s exultation because of the metal weapons of his son Tubal\hyp{}Cain, who, comparing these superior instruments with those of his enemies, exclaimed: “If Cain, with no weapon in his hand, was avenged seven times, I shall now be avenged seventy\hyp{}seven.”]
 \usection{The Strange Preacher}
 \vs p159 2:1 Jesus went over to Gamala to visit John and those who worked with him at that place. That evening, after the session of questions and answers, John said to Jesus: “Master, yesterday I went over to Ashtaroth to see a man who was teaching in your name and even claiming to be able to cast out devils. Now this fellow had never been with us, neither does he follow after us; therefore I forbade him to do such things.” Then said Jesus: \textcolour{ubdarkred}{“Forbid him not. Do you not perceive that this gospel of the kingdom shall presently be proclaimed in all the world? How can you expect that all who will believe the gospel shall be subject to your direction? Rejoice that already our teaching has begun to manifest itself beyond the bounds of our personal influence. Do you not see, John, that those who profess to do great works in my name must eventually support our cause? They certainly will not be quick to speak evil of me. My son, in matters of this sort it would be better for you to reckon that he who is not against us is for us. In the generations to come many who are not wholly worthy will do many strange things in my name, but I will not forbid them. I tell you that, even when a cup of cold water is given to a thirsty soul, the Father’s messengers shall ever make record of such a service of love.”}
 \vs p159 2:2 This instruction greatly perplexed John. Had he not heard the Master say, \textcolour{ubdarkred}{“He who is not with me is against me”?} And he did not perceive that in this case Jesus was referring to man’s personal relation to the spiritual teachings of the kingdom, while in the other case reference was made to the outward and far\hyp{}flung social relations of believers regarding the questions of administrative control and the jurisdiction of one group of believers over the work of other groups which would eventually compose the forthcoming world\hyp{}wide brotherhood.
