--- a/tex/p162.tex
+++ b/tex/p162.tex
@@ -74,7 +74,7 @@
 \vs p162 9:2 \pc At this time, Abner was making his headquarters at Bethlehem, and from that centre many workers had been sent to the cities of Judea and southern Samaria and even to Alexandria. Within a few days of his arrival, Jesus and Abner completed the arrangements for the consolidation of the work of the two groups of apostles.
 \vs p162 9:3 Throughout his visit to the feast of tabernacles, Jesus had divided his time about equally between Bethany and Bethlehem. At Bethany he spent considerable time with his apostles; at Bethlehem he gave much instruction to Abner and the other former apostles of John. And it was this intimate contact that finally led them to believe in him. These former apostles of John the Baptist were influenced by the courage he displayed in his public teaching in Jerusalem as well as by the sympathetic understanding they experienced in his private teaching at Bethlehem. These influences finally and fully won over each of Abner’s associates to a wholehearted acceptance of the kingdom and all that such a step implied.
 \vs p162 9:4 \pc Before leaving Bethlehem for the last time, the Master made arrangements for them all to join him in the united effort which was to precede the ending of his earth career in the flesh. It was agreed that Abner and his associates were to join Jesus and the twelve in the near future at Magadan Park.
-\vs p162 9:5 In accordance with this understanding, early in November Abner and his 11 fellows cast their lot with Jesus and the twelve and laboured with them as one organization right on down to the crucifixion.
+\vs p162 9:5 In accordance with this understanding, early in November Abner and his eleven fellows cast their lot with Jesus and the twelve and laboured with them as one organization right on down to the crucifixion.
 \vs p162 9:6 In the latter part of October Jesus and the twelve withdrew from the immediate vicinity of Jerusalem. On Sunday, October 30, Jesus and his associates left the city of Ephraim, where he had been resting in seclusion for a few days, and, going by the west Jordan highway directly to Magadan Park, arrived late on the afternoon of Wednesday, November 2.
 \vs p162 9:7 The apostles were greatly relieved to have the Master back on friendly soil; no more did they urge him to go up to Jerusalem to proclaim the gospel of the kingdom.
 \quizlink
