--- a/tex/p163.tex
+++ b/tex/p163.tex
@@ -15,7 +15,7 @@
 \vs p163 1:3 Before Jesus laid his hands upon the heads of the seventy to set them apart as gospel messengers, addressing them, he said: \textcolour{ubdarkred}{“The harvest is indeed plenteous, but the labourers are few; therefore I exhort all of you to pray that the Lord of the harvest will send still other labourers into his harvest. I am about to set you apart as messengers of the kingdom; I am about to send you to Jew and gentile as lambs among wolves. As you go your ways, two and two, I instruct you to carry neither purse nor extra clothing, for you go forth on this first mission for only a short season. Salute no man by the way, attend only to your work. Whenever you go to stay at a home, first say: Peace be to this household. If those who love peace live therein, you shall abide there; if not, then shall you depart. And having selected this home, remain there for your stay in that city, eating and drinking whatever is set before you. And you do this because the labourer is worthy of his sustenance. Move not from house to house because a better lodging may be offered. Remember, as you go forth proclaiming peace on earth and good will among men, you must contend with bitter and self\hyp{}deceived enemies; therefore be as wise as serpents while you are also as harmless as doves.}
 \vs p163 1:4 \textcolour{ubdarkred}{“And everywhere you go, preach, saying, ‘The kingdom of heaven is at hand,’ and minister to all who may be sick in either mind or body. Freely you have received of the good things of the kingdom; freely give. If the people of any city receive you, they shall find an abundant entrance into the Father’s kingdom; but if the people of any city refuse to receive this gospel, still shall you proclaim your message as you depart from that unbelieving community, saying, even as you leave, to those who reject your teaching: ‘Notwithstanding you reject the truth, it remains that the kingdom of God has come near you.’ He who hears you hears me. And he who hears me hears Him who sent me. He who rejects your gospel message rejects me. And he who rejects me rejects Him who sent me.”}
 \vs p163 1:5 When Jesus had thus spoken to the seventy, he began with Abner and, as they knelt in a circle about him, laid his hands upon the head of every man.
-\vs p163 1:6 Early the next morning Abner sent the seventy messengers into all the cities of Galilee, Samaria, and Judea. And these 35 couples went forth preaching and teaching for about 6 weeks, all of them returning to the new camp near Pella, in Perea, on Friday, December 30.
+\vs p163 1:6 Early the next morning Abner sent the seventy messengers into all the cities of Galilee, Samaria, and Judea. And these 35 couples went forth preaching and teaching for about six weeks, all of them returning to the new camp near Pella, in Perea, on Friday, December 30.
 \usection{The Rich Young Man and Others}
 \vs p163 2:1 Over 50 disciples who sought ordination and appointment to membership in the seventy were rejected by the committee appointed by Jesus to select these candidates. This committee consisted of Andrew, Abner, and the acting head of the evangelistic corps. In all cases where this committee of three were not unanimous in agreement, they brought the candidate to Jesus, and while the Master never rejected a single person who craved ordination as a gospel messenger, there were more than a dozen who, when they had talked with Jesus, no more desired to become gospel messengers.
 \vs p163 2:2 \pc One earnest disciple came to Jesus, saying: “Master, I would be one of your new apostles, but my father is very old and near death; could I be permitted to return home to bury him?” To this man Jesus said: \textcolour{ubdarkred}{“My son, the foxes have holes, and the birds of heaven have nests, but the Son of Man has nowhere to lay his head. You are a faithful disciple, and you can remain such while you return home to minister to your loved ones, but not so with my gospel messengers. They have forsaken all to follow me and proclaim the kingdom. If you would be an ordained teacher, you must let others bury the dead while you go forth to publish the good news.”} And this man went away in great disappointment.
