--- a/tex/p168.tex
+++ b/tex/p168.tex
@@ -57,7 +57,7 @@
 \vs p168 4:2 The apostles were much stirred up in their minds and spent considerable time discussing their recent experiences as they were related to prayer and its answering. They all recalled Jesus’ statement to the Bethany messenger at Philadelphia, when he said plainly, \textcolour{ubdarkred}{“This sickness is not really to the death.”} And yet, in spite of this promise, Lazarus actually died. All that day, again and again, they reverted to the discussion of this question of the answer to prayer.
 \vs p168 4:3 Jesus’ answers to their many questions may be summarized as follows:
 \vs p168 4:4 \ublistelem{1.}\bibnobreakspace Prayer is an expression of the finite mind in an effort to approach the Infinite. The making of a prayer must, therefore, be limited by the knowledge, wisdom, and attributes of the finite; likewise must the answer be conditioned by the vision, aims, ideals, and prerogatives of the Infinite. There never can be observed an unbroken continuity of material phenomena between the making of a prayer and the reception of the full spiritual answer thereto.
-\vs p168 4:5 \ublistelem{2.}\bibnobreakspace When a prayer is apparently unanswered, the delay often betokens a better answer, although one which is for some good reason greatly delayed. When Jesus said that Lazarus’s sickness was really not to the death, he had already been dead 11 hours. No sincere prayer is denied an answer except when the superior viewpoint of the spiritual world has devised a better answer, an answer which meets the petition of the spirit of man as contrasted with the prayer of the mere mind of man.
+\vs p168 4:5 \ublistelem{2.}\bibnobreakspace When a prayer is apparently unanswered, the delay often betokens a better answer, although one which is for some good reason greatly delayed. When Jesus said that Lazarus’s sickness was really not to the death, he had already been dead eleven hours. No sincere prayer is denied an answer except when the superior viewpoint of the spiritual world has devised a better answer, an answer which meets the petition of the spirit of man as contrasted with the prayer of the mere mind of man.
 \vs p168 4:6 \ublistelem{3.}\bibnobreakspace The prayers of time, when indited by the spirit and expressed in faith, are often so vast and all\hyp{}encompassing that they can be answered only in eternity; the finite petition is sometimes so fraught with the grasp of the Infinite that the answer must long be postponed to await the creation of adequate capacity for receptivity; the prayer of faith may be so all\hyp{}embracing that the answer can be received only on Paradise.
 \vs p168 4:7 \ublistelem{4.}\bibnobreakspace The answers to the prayer of the mortal mind are often of such a nature that they can be received and recognized only after that same praying mind has attained the immortal state. The prayer of the material being can many times be answered only when such an individual has progressed to the spirit level.
 \vs p168 4:8 \ublistelem{5.}\bibnobreakspace The prayer of a God\hyp{}knowing person may be so distorted by ignorance and so deformed by superstition that the answer thereto would be highly undesirable. Then must the intervening spirit beings so translate such a prayer that, when the answer arrives, the petitioner wholly fails to recognize it as the answer to his prayer.
