--- a/tex/p175.tex
+++ b/tex/p175.tex
@@ -4,7 +4,7 @@
 \uminitoc{The Fateful Sanhedrin Meeting}
 \uminitoc{The Situation in Jerusalem}
 \author{Midwayer Commission}
-\vs p175 0:1 Shortly after 14:00 on Tuesday, Jesus, accompanied by 11 apostles, Joseph of Arimathea, the 30 Greeks, and certain other disciples, arrived at the temple and began the delivery of his last address in the courts of the sacred edifice. This discourse was intended to be his last appeal to the Jewish people and the final indictment of his vehement enemies and would\hyp{}be destroyers --- the scribes, Pharisees, Sadducees, and the chief rulers of Israel. Throughout the forenoon the various groups had had an opportunity to question Jesus; this afternoon no one asked him a question.
+\vs p175 0:1 Shortly after 14:00 on Tuesday, Jesus, accompanied by eleven apostles, Joseph of Arimathea, the 30 Greeks, and certain other disciples, arrived at the temple and began the delivery of his last address in the courts of the sacred edifice. This discourse was intended to be his last appeal to the Jewish people and the final indictment of his vehement enemies and would\hyp{}be destroyers --- the scribes, Pharisees, Sadducees, and the chief rulers of Israel. Throughout the forenoon the various groups had had an opportunity to question Jesus; this afternoon no one asked him a question.
 \vs p175 0:2 As the Master began to speak, the temple court was quiet and orderly. The money\hyp{}changers and the merchandisers had not dared again to enter the temple since Jesus and the aroused multitude had driven them out the previous day. Before beginning the discourse, Jesus tenderly looked down upon this audience which was so soon to hear his farewell public address of mercy to mankind coupled with his last denunciation of the false teachers and the bigoted rulers of the Jews.
 \usection{The Discourse}
 \vs p175 1:1 \textcolour{ubdarkred}{“This long time have I been with you, going up and down in the land proclaiming the Father’s love for the children of men, and many have seen the light and, by faith, have entered into the kingdom of heaven. In connection with this teaching and preaching the Father has done many wonderful works, even to the resurrection of the dead. Many sick and afflicted have been made whole because they believed; but all of this proclamation of truth and healing of disease has not opened the eyes of those who refuse to see light, those who are determined to reject this gospel of the kingdom.}
