--- a/tex/p179.tex
+++ b/tex/p179.tex
@@ -13,7 +13,7 @@
 \usection{The Desire for Preference}
 \vs p179 1:1 When the apostles had been shown upstairs by John Mark, they beheld a large and commodious chamber, which was completely furnished for the supper, and observed that the bread, wine, water, and herbs were all in readiness on one end of the table. Except for the end on which rested the bread and wine, this long table was surrounded by 13 reclining couches, just such as would be provided for the celebration of the Passover in a well\hyp{}to\hyp{}do Jewish household.
 \vs p179 1:2 As the twelve entered this upper chamber, they noticed, just inside the door, the pitchers of water, the basins, and towels for laving their dusty feet; and since no servant had been provided to render this service, the apostles began to look at one another as soon as John Mark had left them, and each began to think within himself, Who shall wash our feet? And each likewise thought that it would not be he who would thus seem to act as the servant of the others.
-\vs p179 1:3 As they stood there, debating in their hearts, they surveyed the seating arrangement of the table, taking note of the higher divan of the host with one couch on the right and 11 arranged around the table on up to opposite this second seat of honour on the host’s right.
+\vs p179 1:3 As they stood there, debating in their hearts, they surveyed the seating arrangement of the table, taking note of the higher divan of the host with one couch on the right and eleven arranged around the table on up to opposite this second seat of honour on the host’s right.
 \vs p179 1:4 They expected the Master to arrive any moment, but they were in a quandary as to whether they should seat themselves or await his coming and depend on him to assign them their places. While they hesitated, Judas stepped over to the seat of honour, at the left of the host, and signified that he intended there to recline as the preferred guest. This act of Judas immediately stirred up a heated dispute among the other apostles. Judas had no sooner seized the seat of honour than John Zebedee laid claim to the next preferred seat, the one on the right of the host. Simon Peter was so enraged at this assumption of choice positions by Judas and John that, as the other angry apostles looked on, he marched clear around the table and took his place on the lowest couch, the end of the seating order and just opposite to that chosen by John Zebedee. Since others had seized the high seats, Peter thought to choose the lowest, and he did this, not merely in protest against the unseemly pride of his brethren, but with the hope that Jesus, when he should come and see him in the place of least honour, would call him up to a higher one, thus displacing one who had presumed to honour himself.
 \vs p179 1:5 With the highest and the lowest positions thus occupied, the rest of the apostles chose places, some near Judas and some near Peter, until all were located. They were seated about the U\hyp{}shaped table on these reclining divans in the following order: on the right of the Master, John; on the left, Judas, Simon Zelotes, Matthew, James Zebedee, Andrew, the Alpheus twins, Philip, Nathaniel, Thomas, and Simon Peter.
 \vs p179 1:6 \pc They are gathered together to celebrate, at least in spirit, an institution which antedated even Moses and referred to the times when their fathers were slaves in Egypt. This supper is their last rendezvous with Jesus, and even in such a solemn setting, under the leadership of Judas the apostles are led once more to give way to their old predilection for honour, preference, and personal exaltation.
@@ -41,7 +41,7 @@
 \vs p179 4:4 Peter was highly excited by what had been said, and leaning forward over the table, he addressed John, “Ask him who it is, or if he has told you, tell me who is the betrayer.”
 \vs p179 4:5 Jesus brought their whisperings to an end by saying: \textcolour{ubdarkred}{“I sorrow that this evil should have come to pass and hoped even up to this hour that the power of truth might triumph over the deceptions of evil, but such victories are not won without the faith of the sincere love of truth. I would not have told you these things at this, our last supper, but I desire to warn you of these sorrows and so prepare you for what is now upon us. I have told you of this because I desire that you should recall, after I have gone, that I knew about all these evil plottings, and that I forewarned you of my betrayal. And I do all this only that you may be strengthened for the temptations and trials which are just ahead.”}
 \vs p179 4:6 When Jesus had thus spoken, leaning over toward Judas, he said: \textcolour{ubdarkred}{“What you have decided to do, do quickly.”} And when Judas heard these words, he arose from the table and hastily left the room, going out into the night to do what he had set his mind to accomplish. When the other apostles saw Judas hasten off after Jesus had spoken to him, they thought he had gone to procure something additional for the supper or to do some other errand for the Master since they supposed he still carried the bag.
-\vs p179 4:7 \pc Jesus now knew that nothing could be done to keep Judas from turning traitor. He started with twelve --- now he had 11. He chose 6 of these apostles, and though Judas was among those nominated by his first\hyp{}chosen apostles, still the Master accepted him and had, up to this very hour, done everything possible to sanctify and save him, even as he had wrought for the peace and salvation of the others.
+\vs p179 4:7 \pc Jesus now knew that nothing could be done to keep Judas from turning traitor. He started with twelve --- now he had eleven. He chose six of these apostles, and though Judas was among those nominated by his first\hyp{}chosen apostles, still the Master accepted him and had, up to this very hour, done everything possible to sanctify and save him, even as he had wrought for the peace and salvation of the others.
 \vs p179 4:8 This supper, with its tender episodes and softening touches, was Jesus’ last appeal to the deserting Judas, but it was of no avail. Warning, even when administered in the most tactful manner and conveyed in the most kindly spirit, as a rule, only intensifies hatred and fires the evil determination to carry out to the full one’s own selfish projects, when love is once really dead.
 \usection{Establishing the Remembrance Supper}
 \vs p179 5:1 As they brought Jesus the third cup of wine, the “cup of blessing,” he arose from the couch and, taking the cup in his hands, blessed it, saying: \textcolour{ubdarkred}{“Take this cup, all of you, and drink of it. This shall be the cup of my remembrance. This is the cup of the blessing of a new dispensation of grace and truth. This shall be to you the emblem of the bestowal and ministry of the divine Spirit of Truth. And I will not again drink this cup with you until I drink in new form with you in the Father’s eternal kingdom.”}
