--- a/tex/p180.tex
+++ b/tex/p180.tex
@@ -25,7 +25,7 @@
 \vs p180 2:6 And when the Father’s hand of discipline is laid upon the vine, it is done in love, in order that the branches may bear much fruit. And a wise husbandman cuts away only the dead and fruitless branches.
 \vs p180 2:7 Jesus had great difficulty in leading even his apostles to recognize that prayer is a function of spirit\hyp{}born believers in the spirit\hyp{}dominated kingdom.
 \usection{Enmity of the World}
-\vs p180 3:1 The 11 had scarcely ceased their discussions of the discourse on the vine and the branches when the Master, indicating that he was desirous of speaking to them further and knowing that his time was short, said: “When I have left you, be not discouraged by the enmity of the world. Be not downcast even when fainthearted believers turn against you and join hands with the enemies of the kingdom. If the world shall hate you, you should recall that it hated me even before it hated you. If you were of this world, then would the world love its own, but because you are not, the world refuses to love you. You are in this world, but your lives are not to be worldlike. I have chosen you out of the world to represent the spirit of another world even to this world from which you have been chosen. But always remember the words I have spoken to you: The servant is not greater than his master. If they dare to persecute me, they will also persecute you. If my words offend the unbelievers, so also will your words offend the ungodly. And all of this will they do to you because they believe not in me nor in Him who sent me; so will you suffer many things for the sake of my gospel. But when you endure these tribulations, you should recall that I also suffered before you for the sake of this gospel of the heavenly kingdom.
+\vs p180 3:1 The eleven had scarcely ceased their discussions of the discourse on the vine and the branches when the Master, indicating that he was desirous of speaking to them further and knowing that his time was short, said: “When I have left you, be not discouraged by the enmity of the world. Be not downcast even when fainthearted believers turn against you and join hands with the enemies of the kingdom. If the world shall hate you, you should recall that it hated me even before it hated you. If you were of this world, then would the world love its own, but because you are not, the world refuses to love you. You are in this world, but your lives are not to be worldlike. I have chosen you out of the world to represent the spirit of another world even to this world from which you have been chosen. But always remember the words I have spoken to you: The servant is not greater than his master. If they dare to persecute me, they will also persecute you. If my words offend the unbelievers, so also will your words offend the ungodly. And all of this will they do to you because they believe not in me nor in Him who sent me; so will you suffer many things for the sake of my gospel. But when you endure these tribulations, you should recall that I also suffered before you for the sake of this gospel of the heavenly kingdom.
 \vs p180 3:2 \textcolour{ubdarkred}{“Many of those who will assail you are ignorant of the light of heaven, but this is not true of some who now persecute us. If we had not taught them the truth, they might do many strange things without falling under condemnation, but now, since they have known the light and presumed to reject it, they have no excuse for their attitude. He who hates me hates my Father. It cannot be otherwise; the light which would save you if accepted can only condemn you if it is knowingly rejected. And what have I done to these men that they should hate me with such a terrible hatred? Nothing, save to offer them fellowship on earth and salvation in heaven. But have you not read in the Scripture the saying: ‘And they hated me without a cause’?}
 \vs p180 3:3 \textcolour{ubdarkred}{“But I will not leave you alone in the world. Very soon, after I have gone, I will send you a spirit helper. You shall have with you one who will take my place among you, one who will continue to teach you the way of truth, who will even comfort you.}
 \vs p180 3:4 “Let not your hearts be troubled. You believe in God; continue to believe also in me. Even though I must leave you, I will not be far from you. I have already told you that in my Father’s universe there are many tarrying\hyp{}places. If this were not true, I would not have repeatedly told you about them. I am going to return to these worlds of light, stations in the Father’s heaven to which you shall sometime ascend. From these places I came into this world, and the hour is now at hand when I must return to my Father’s work in the spheres on high.
@@ -34,7 +34,7 @@
 \vs p180 3:7 When Jesus heard Thomas, he answered:\tunemarkup{pgauraone}{\linebreak} \textcolour{ubdarkred}{“Thomas, I am the way, the truth, and the life. No man goes to the Father except through me. All who find the Father, first find me. If you know me, you know the way to the Father. And you do know me, for you have lived with me and you now see me.”}
 \vs p180 3:8 But this teaching was too deep for many of the apostles, especially for Philip, who, after speaking a few words with Nathaniel, arose and said: “Master, show us the Father, and everything you have said will be made plain.”
 \vs p180 3:9 And when Philip had spoken, Jesus said: \textcolour{ubdarkred}{“Philip, have I been so long with you and yet you do not even now know me? Again do I declare: He who has seen me has seen the Father. How can you then say, Show us the Father? Do you not believe that I am in the Father and the Father in me? Have I not taught you that the words which I speak are not my words but the words of the Father? I speak for the Father and not of myself. I am in this world to do the Father’s will, and that I have done. My Father abides in me and works through me. Believe me when I say that the Father is in me, and that I am in the Father, or else believe me for the sake of the very life I have lived --- for the work’s sake.”}
-\vs p180 3:10 As the Master went aside to refresh himself with water, the 11 engaged in a spirited discussion of these teachings, and Peter was beginning to deliver himself of an extended speech when Jesus returned and beckoned them to be seated.
+\vs p180 3:10 As the Master went aside to refresh himself with water, the eleven engaged in a spirited discussion of these teachings, and Peter was beginning to deliver himself of an extended speech when Jesus returned and beckoned them to be seated.
 \usection{The Promised Helper}
 \vs p180 4:1 Jesus continued to teach, saying: \textcolour{ubdarkred}{“When I have gone to the Father, and after he has fully accepted the work I have done for you on earth, and after I have received the final sovereignty of my own domain, I shall say to my Father: Having left my children alone on earth, it is in accordance with my promise to send them another teacher. And when the Father shall approve, I will pour out the Spirit of Truth upon all flesh. Already is my Father’s spirit in your hearts, and when this day shall come, you will also have me with you even as you now have the Father. This new gift is the spirit of living truth. The unbelievers will not at first listen to the teachings of this spirit, but the sons of light will all receive him gladly and with a whole heart. And you shall know this spirit when he comes even as you have known me, and you will receive this gift in your hearts, and he will abide with you. You thus perceive that I am not going to leave you without help and guidance. I will not leave you desolate. Today I can be with you only in person. In the times to come I will be with you and all other men who desire my presence, wherever you may be, and with each of you at the same time. Do you not discern that it is better for me to go away; that I leave you in the flesh so that I may the better and the more fully be with you in the spirit?}
 \vs p180 4:2 \textcolour{ubdarkred}{“In just a few hours the world will see me no more; but you will continue to know me in your hearts even until I send you this new teacher, the Spirit of Truth. As I have lived with you in person, then shall I live in you; I shall be one with your personal experience in the spirit kingdom. And when this has come to pass, you shall surely know that I am in the Father, and that, while your life is hid with the Father in me, I am also in you. I have loved the Father and have kept his word; you have loved me, and you will keep my word. As my Father has given me of his spirit, so will I give you of my spirit. And this Spirit of Truth which I will bestow upon you shall guide and comfort you and shall eventually lead you into all truth.}
@@ -64,5 +64,5 @@
 \vs p180 6:6 While he paused for a moment, the apostles began to talk with each other: “What is this that he tells us? ‘In just a little while I will leave you,’ and ‘When you see me again it will not be for long, for I will be on my way to the Father.’ What can he mean by this ‘little while’ and ‘not for long’? We cannot understand what he is telling us.”
 \vs p180 6:7 And since Jesus knew they asked these questions, he said: \textcolour{ubdarkred}{“Do you inquire among yourselves about what I meant when I said that in a little while I would not be with you, and that, when you would see me again, I would be on my way to the Father? I have plainly told you that the Son of Man must die, but that he will rise again. Can you not then discern the meaning of my words? You will first be made sorrowful, but later on will you rejoice with many who will understand these things after they have come to pass. A woman is indeed sorrowful in the hour of her travail, but when she is once delivered of her child, she immediately forgets her anguish in the joy of the knowledge that a man has been born into the world. And so are you about to sorrow over my departure, but I will soon see you again, and then will your sorrow be turned into rejoicing, and there shall come to you a new revelation of the salvation of God which no man can ever take away from you. And all the worlds will be blessed in this same revelation of life in effecting the overthrow of death. Hitherto have you made all your requests in my Father’s name. After you see me again, you may also ask in my name, and I will hear you.}
 \vs p180 6:8 \textcolour{ubdarkred}{“Down here I have taught you in proverbs and spoken to you in parables. I did so because you were only children in the spirit; but the time is coming when I will talk to you plainly concerning the Father and his kingdom. And I shall do this because the Father himself loves you and desires to be more fully revealed to you. Mortal man cannot see the spirit Father; therefore have I come into the world to show the Father to your creature eyes. But when you have become perfected in spirit growth, you shall then see the Father himself.”}
-\vs p180 6:9 When the 11 had heard him speak, they said to each other: “Behold, he does speak plainly to us. Surely the Master did come forth from God. But why does he say he must return to the Father?” And Jesus saw that they did not even yet comprehend him. These 11 men could not get away from their long\hyp{}nourished ideas of the Jewish concept of the Messiah. The more fully they believed in Jesus as the Messiah, the more troublesome became these deep\hyp{}rooted notions regarding the glorious material triumph of the kingdom on earth.
+\vs p180 6:9 When the eleven had heard him speak, they said to each other: “Behold, he does speak plainly to us. Surely the Master did come forth from God. But why does he say he must return to the Father?” And Jesus saw that they did not even yet comprehend him. These eleven men could not get away from their long\hyp{}nourished ideas of the Jewish concept of the Messiah. The more fully they believed in Jesus as the Messiah, the more troublesome became these deep\hyp{}rooted notions regarding the glorious material triumph of the kingdom on earth.
 \quizlink
