--- a/tex/p182.tex
+++ b/tex/p182.tex
@@ -3,16 +3,16 @@
 \uminitoc{Last Hour Before the Betrayal}
 \uminitoc{Alone in Gethsemane}
 \author{Midwayer Commission}
-\vs p182 0:1 It was about 22:00 Thursday when Jesus led the 11 apostles from the home of Elijah and Mary Mark on their way back to the Gethsemane camp. Ever since that day in the hills, John Mark had made it his business to keep a watchful eye on Jesus. John, being in need of sleep, had obtained several hours of rest while the Master had been with his apostles in the upper room, but on hearing them coming downstairs, he arose and, quickly throwing a linen coat about himself, followed them through the city, over the brook Kidron, and on to their private encampment adjacent to Gethsemane Park. And John Mark remained so near the Master throughout this night and the next day that he witnessed everything and overheard much of what the Master said from this time on to the hour of the crucifixion.
-\vs p182 0:2 As Jesus and the 11 made their way back to camp, the apostles began to wonder about the meaning of Judas’s prolonged absence, and they spoke to one another concerning the Master’s prediction that one of them would betray him, and for the first time they suspected that all was not well with Judas Iscariot. But they did not engage in open comment about Judas until they reached the camp and observed that he was not there, waiting to receive them. When they all besieged Andrew to know what had become of Judas, their chief remarked only, “I do not know where Judas is, but I fear he has deserted us.”
+\vs p182 0:1 It was about 22:00 Thursday when Jesus led the eleven apostles from the home of Elijah and Mary Mark on their way back to the Gethsemane camp. Ever since that day in the hills, John Mark had made it his business to keep a watchful eye on Jesus. John, being in need of sleep, had obtained several hours of rest while the Master had been with his apostles in the upper room, but on hearing them coming downstairs, he arose and, quickly throwing a linen coat about himself, followed them through the city, over the brook Kidron, and on to their private encampment adjacent to Gethsemane Park. And John Mark remained so near the Master throughout this night and the next day that he witnessed everything and overheard much of what the Master said from this time on to the hour of the crucifixion.
+\vs p182 0:2 As Jesus and the eleven made their way back to camp, the apostles began to wonder about the meaning of Judas’s prolonged absence, and they spoke to one another concerning the Master’s prediction that one of them would betray him, and for the first time they suspected that all was not well with Judas Iscariot. But they did not engage in open comment about Judas until they reached the camp and observed that he was not there, waiting to receive them. When they all besieged Andrew to know what had become of Judas, their chief remarked only, “I do not know where Judas is, but I fear he has deserted us.”
 \usection{The Last Group Prayer}
 \vs p182 1:1 A few moments after arriving at camp, Jesus said to them: \textcolour{ubdarkred}{“My friends and brethren, my time with you is now very short, and I desire that we draw apart by ourselves while we pray to our Father in heaven for strength to sustain us in this hour and henceforth in all the work we must do in his name.”}
 \vs p182 1:2 When Jesus had thus spoken, he led the way a short distance up on Olivet, and in full view of Jerusalem he bade them kneel on a large flat rock in a circle about him as they had done on the day of their ordination; and then, as he stood there in the midst of them glorified in the mellow moonlight, he lifted up his eyes toward heaven and prayed:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.85}\columnwidth]{images/He-Lifted-His-Eyes-toward-Heaven.jpg}\caption{He Lifted His Eyes toward Heaven by Michael Dudash}\end{figure}}
 \vs p182 1:3 \textcolour{ubdarkred}{“Father, my hour has come; now glorify your Son that the Son may glorify you. I know that you have given me full authority over all living creatures in my realm, and I will give eternal life to all who will become faith sons of God. And this is eternal life, that my creatures should know you as the only true God and Father of all, and that they should believe in him whom you sent into the world. Father, I have exalted you on earth and have accomplished the work which you gave me to do. I have almost finished my bestowal upon the children of our own creation; there remains only for me to lay down my life in the flesh. And now, O my Father, glorify me with the glory which I had with you before this world was and receive me once more at your right hand.}
 \vs p182 1:4 \textcolour{ubdarkred}{“I have manifested you to the men whom you chose from the world and gave to me. They are yours --- as all life is in your hands --- you gave them to me, and I have lived among them, teaching them the way of life, and they have believed. These men are learning that all I have comes from you, and that the life I live in the flesh is to make known my Father to the worlds. The truth which you have given to me I have revealed to them. These, my friends and ambassadors, have sincerely willed to receive your word. I have told them that I came forth from you, that you sent me into this world, and that I am about to return to you. Father, I do pray for these chosen men. And I pray for them not as I would pray for the world, but as for those whom I have chosen out of the world to represent me to the world after I have returned to your work, even as I have represented you in this world during my sojourn in the flesh. These men are mine; you gave them to me; but all things which are mine are ever yours, and all that which was yours you have now caused to be mine. You have been exalted in me, and I now pray that I may be honoured in these men. I can no longer be in this world; I am about to return to the work you have given me to do. I must leave these men behind to represent us and our kingdom among men. Father, keep these men faithful as I prepare to yield up my life in the flesh. Help these, my friends, to be one in spirit, even as we are one. As long as I could be with them, I could watch over them and guide them, but now am I about to go away. Be near them, Father, until we can send the new teacher to comfort and strengthen them.}
 \vs p182 1:5 \textcolour{ubdarkred}{“You gave me twelve men, and I have kept them all save one, the son of revenge, who would not have further fellowship with us. These men are weak and frail, but I know we can trust them; I have proved them; they love me, even as they reverence you. While they must suffer much for my sake, I desire that they should also be filled with the joy of the assurance of sonship in the heavenly kingdom. I have given these men your word and have taught them the truth. The world may hate them, even as it has hated me, but I do not ask that you take them out of the world, only that you keep them from the evil in the world. Sanctify them in the truth; your word is truth. And as you sent me into this world, even so am I about to send these men into the world. For their sakes I have lived among men and have consecrated my life to your service that I might inspire them to be purified through the truth I have taught them and the love I have revealed to them. I well know, my Father, that there is no need for me to ask you to watch over these brethren after I have gone; I know you love them even as I, but I do this that they may the better realize the Father loves mortal men even as does the Son.}
-\vs p182 1:6 \textcolour{ubdarkred}{“And now, my Father, I would pray not only for these 11 men but also for all others who now believe, or who may hereafter believe the gospel of the kingdom through the word of their future ministry. I want them all to be one, even as you and I are one. You are in me and I am in you, and I desire that these believers likewise be in us; that both of our spirits indwell them. If my children are one as we are one, and if they love one another as I have loved them, all men will then believe that I came forth from you and be willing to receive the revelation of truth and glory which I have made. The glory which you gave me I have revealed to these believers. As you have lived with me in spirit, so have I lived with them in the flesh. As you have been one with me, so have I been one with them, and so will the new teacher ever be one with them and in them. And all this have I done that my brethren in the flesh may know that the Father loves them even as does the Son, and that you love them even as you love me. Father, work with me to save these believers that they may presently come to be with me in glory and then go on to join you in the Paradise embrace. Those who serve with me in humiliation, I would have with me in glory so that they may see all you have given into my hands as the eternal harvest of the seed sowing of time in the likeness of mortal flesh. I long to show my earthly brethren the glory I had with you before the founding of this world. This world knows very little of you, righteous Father, but I know you, and I have made you known to these believers, and they will make known your name to other generations. And now I promise them that you will be with them in the world even as you have been with me --- even so.”}
-\vs p182 1:7 The 11 remained kneeling in this circle about Jesus for several minutes before they arose and in silence made their way back to the near\hyp{}by camp.
+\vs p182 1:6 \textcolour{ubdarkred}{“And now, my Father, I would pray not only for these eleven men but also for all others who now believe, or who may hereafter believe the gospel of the kingdom through the word of their future ministry. I want them all to be one, even as you and I are one. You are in me and I am in you, and I desire that these believers likewise be in us; that both of our spirits indwell them. If my children are one as we are one, and if they love one another as I have loved them, all men will then believe that I came forth from you and be willing to receive the revelation of truth and glory which I have made. The glory which you gave me I have revealed to these believers. As you have lived with me in spirit, so have I lived with them in the flesh. As you have been one with me, so have I been one with them, and so will the new teacher ever be one with them and in them. And all this have I done that my brethren in the flesh may know that the Father loves them even as does the Son, and that you love them even as you love me. Father, work with me to save these believers that they may presently come to be with me in glory and then go on to join you in the Paradise embrace. Those who serve with me in humiliation, I would have with me in glory so that they may see all you have given into my hands as the eternal harvest of the seed sowing of time in the likeness of mortal flesh. I long to show my earthly brethren the glory I had with you before the founding of this world. This world knows very little of you, righteous Father, but I know you, and I have made you known to these believers, and they will make known your name to other generations. And now I promise them that you will be with them in the world even as you have been with me --- even so.”}
+\vs p182 1:7 The eleven remained kneeling in this circle about Jesus for several minutes before they arose and in silence made their way back to the near\hyp{}by camp.
 \vs p182 1:8 \pc Jesus prayed for \bibemph{unity} among his followers, but he did not desire uniformity. Sin creates a dead level of evil inertia, but righteousness nourishes the creative spirit of individual experience in the living realities of eternal truth and in the progressive communion of the divine spirits of the Father and the Son. In the spiritual fellowship of the believer\hyp{}son with the divine Father there can never be doctrinal finality and sectarian superiority of group consciousness.
 \vs p182 1:9 The Master, during the course of this final prayer with his apostles, alluded to the fact that he had manifested the Father’s \bibemph{name} to the world. And that is truly what he did by the revelation of God through his perfected life in the flesh. The Father in heaven had sought to reveal himself to Moses, but he could proceed no further than to cause it to be said, “I AM.” And when pressed for further revelation of himself, it was only disclosed, “I AM that I AM.” But when Jesus had finished his earth life, this name of the Father had been so revealed that the Master, who was the Father incarnate, could truly say:
 \vs p182 1:10 \textcolour{ubdarkred}{I am the bread of life.}
@@ -33,7 +33,7 @@
 \vs p182 1:25 \textcolour{ubdarkred}{I am the living link between time and eternity.}
 \vs p182 1:26 \pc Thus did Jesus enlarge the living revelation of the name of God to all generations. As divine love reveals the nature of God, eternal truth discloses his name in ever\hyp{}enlarging proportions.
 \usection{Last Hour Before the Betrayal}
-\vs p182 2:1 The apostles were greatly shocked when they returned to their camp and found Judas absent. While the 11 were engaged in a heated discussion of their traitorous fellow apostle, David Zebedee and John Mark took Jesus to one side and revealed that they had kept Judas under observation for several days, and that they knew he intended to betray him into the hands of his enemies. Jesus listened to them but only said: \textcolour{ubdarkred}{“My friends, nothing can happen to the Son of Man unless the Father in heaven so wills. Let not your hearts be troubled; all things will work together for the glory of God and the salvation of men.”}
+\vs p182 2:1 The apostles were greatly shocked when they returned to their camp and found Judas absent. While the eleven were engaged in a heated discussion of their traitorous fellow apostle, David Zebedee and John Mark took Jesus to one side and revealed that they had kept Judas under observation for several days, and that they knew he intended to betray him into the hands of his enemies. Jesus listened to them but only said: \textcolour{ubdarkred}{“My friends, nothing can happen to the Son of Man unless the Father in heaven so wills. Let not your hearts be troubled; all things will work together for the glory of God and the salvation of men.”}
 \vs p182 2:2 The cheerful attitude of Jesus was waning. As the hour passed, he grew more and more serious, even sorrowful. The apostles, being much agitated, were loath to return to their tents even when requested to do so by the Master himself. Returning from his talk with David and John, he addressed his last words to all 11, saying: \textcolour{ubdarkred}{“My friends, go to your rest. Prepare yourselves for the work of tomorrow. Remember, we should all submit ourselves to the will of the Father in heaven. My peace I leave with you.”} And having thus spoken, he motioned them to their tents, but as they went, he called to Peter, James, and John, saying, \textcolour{ubdarkred}{“I desire that you remain with me for a little while.”}
 \vs p182 2:3 The apostles fell asleep only because they were literally exhausted; they had been running short on sleep ever since their arrival in Jerusalem. Before they went to their separate sleeping quarters, Simon Zelotes led them all over to his tent, where were stored the swords and other arms, and supplied each of them with this fighting equipment. All of them received these arms and girded themselves therewith except Nathaniel. Nathaniel, in refusing to arm himself, said: “My brethren, the Master has repeatedly told us that his kingdom is not of this world, and that his disciples should not fight with the sword to bring about its establishment. I believe this; I do not think the Master needs to have us employ the sword in his defence. We have all seen his mighty power and know that he could defend himself against his enemies if he so desired. If he will not resist his enemies, it must be that such a course represents his attempt to fulfil his Father’s will. I will pray, but I will not wield the sword.” When Andrew heard Nathaniel’s speech, he handed his sword back to Simon Zelotes. And so nine of them were armed as they separated for the night.
 \vs p182 2:4 Resentment of Judas’s being a traitor for the moment eclipsed everything else in the apostles’ minds. The Master’s comment in reference to Judas, spoken in the course of the last prayer, opened their eyes to the fact that he had forsaken them.
