--- a/tex/p183.tex
+++ b/tex/p183.tex
@@ -14,8 +14,8 @@
 \vs p183 1:1 There is great danger of misunderstanding the meaning of numerous sayings and many events associated with the termination of the Master’s career in the flesh. The cruel treatment of Jesus by the ignorant servants and the calloused soldiers, the unfair conduct of his trials, and the unfeeling attitude of the professed religious leaders, must not be confused with the fact that Jesus, in patiently submitting to all this suffering and humiliation, was truly doing the will of the Father in Paradise. It was, indeed and in truth, the will of the Father that his Son should drink to the full the cup of mortal experience, from birth to death, but the Father in heaven had nothing whatever to do with instigating the barbarous behaviour of those supposedly civilized human beings who so brutally tortured the Master and so horribly heaped successive indignities upon his nonresisting person. These inhuman and shocking experiences which Jesus was called upon to endure in the final hours of his mortal life were not in any sense a part of the divine will of the Father, which his human nature had so triumphantly pledged to carry out at the time of the final surrender of man to God as signified in the threefold prayer which he indited in the garden while his weary apostles slept the sleep of physical exhaustion.
 \vs p183 1:2 The Father in heaven desired the bestowal Son to finish his earth career \bibemph{naturally,} just as all mortals must finish up their lives on earth and in the flesh. Ordinary men and women cannot expect to have their last hours on earth and the supervening episode of death made easy by a special dispensation. Accordingly, Jesus elected to lay down his life in the flesh in the manner which was in keeping with the outworking of natural events, and he steadfastly refused to extricate himself from the cruel clutches of a wicked conspiracy of inhuman events which swept on with horrible certainty toward his unbelievable humiliation and ignominious death. And every bit of all this astounding manifestation of hatred and this unprecedented demonstration of cruelty was the work of evil men and wicked mortals. God in heaven did not will it, neither did the archenemies of Jesus dictate it, though they did much to ensure that unthinking and evil mortals would thus reject the bestowal Son. Even the father of sin turned his face away from the excruciating horror of the scene of the crucifixion.
 \usection{Judas in the City}
-\vs p183 2:1 After Judas so abruptly left the table while eating the Last Supper, he went directly to the home of his cousin, and then did the two go straight to the captain of the temple guards. Judas requested the captain to assemble the guards and informed him that he was ready to lead them to Jesus. Judas having appeared on the scene a little before he was expected, there was some delay in getting started for the Mark home, where Judas expected to find Jesus still visiting with the apostles. The Master and the 11 left the home of Elijah Mark fully 15 minutes before the betrayer and the guards arrived. By the time the apprehenders reached the Mark home, Jesus and the 11 were well outside the walls of the city and on their way to the Olivet camp.
-\vs p183 2:2 Judas was much perturbed by this failure to find Jesus at the Mark residence and in the company of 11 men, only two of whom were armed for resistance. He happened to know that, in the afternoon when they had left camp, only Simon Peter and Simon Zelotes were girded with swords; Judas had hoped to take Jesus when the city was quiet, and when there was little chance of resistance. The betrayer feared that, if he waited for them to return to their camp, more than threescore of devoted disciples would be encountered, and he also knew that Simon Zelotes had an ample store of arms in his possession. Judas was becoming increasingly nervous as he meditated how the 11 loyal apostles would detest him, and he feared they would all seek to destroy him. He was not only disloyal, but he was a real coward at heart.
+\vs p183 2:1 After Judas so abruptly left the table while eating the Last Supper, he went directly to the home of his cousin, and then did the two go straight to the captain of the temple guards. Judas requested the captain to assemble the guards and informed him that he was ready to lead them to Jesus. Judas having appeared on the scene a little before he was expected, there was some delay in getting started for the Mark home, where Judas expected to find Jesus still visiting with the apostles. The Master and the eleven left the home of Elijah Mark fully 15 minutes before the betrayer and the guards arrived. By the time the apprehenders reached the Mark home, Jesus and the eleven were well outside the walls of the city and on their way to the Olivet camp.
+\vs p183 2:2 Judas was much perturbed by this failure to find Jesus at the Mark residence and in the company of eleven men, only two of whom were armed for resistance. He happened to know that, in the afternoon when they had left camp, only Simon Peter and Simon Zelotes were girded with swords; Judas had hoped to take Jesus when the city was quiet, and when there was little chance of resistance. The betrayer feared that, if he waited for them to return to their camp, more than threescore of devoted disciples would be encountered, and he also knew that Simon Zelotes had an ample store of arms in his possession. Judas was becoming increasingly nervous as he meditated how the eleven loyal apostles would detest him, and he feared they would all seek to destroy him. He was not only disloyal, but he was a real coward at heart.
 \vs p183 2:3 When they failed to find Jesus in the upper chamber, Judas asked the captain of the guard to return to the temple. By this time the rulers had begun to assemble at the high priest’s home preparatory to receiving Jesus, seeing that their bargain with the traitor called for Jesus’ arrest by midnight of that day. Judas explained to his associates that they had missed Jesus at the Mark home, and that it would be necessary to go to Gethsemane to arrest him. The betrayer then went on to state that more than threescore devoted followers were encamped with him, and that they were all well armed. The rulers of the Jews reminded Judas that Jesus had always preached nonresistance, but Judas replied that they could not depend upon all Jesus’ followers obeying such teaching. He really feared for himself and therefore made bold to ask for a company of 40 armed soldiers. Since the Jewish authorities had no such force of armed men under their jurisdiction, they went at once to the fortress of Antonia and requested the Roman commander to give them this guard; but when he learned that they intended to arrest Jesus, he promptly refused to accede to their request and referred them to his superior officer. In this way more than an hour was consumed in going from one authority to another until they finally were compelled to go to Pilate himself in order to obtain permission to employ the armed Roman guards. It was late when they arrived at Pilate’s house, and he had retired to his private chambers with his wife. He hesitated to have anything to do with the enterprise, all the more so since his wife had asked him not to grant the request. But inasmuch as the presiding officer of the Jewish Sanhedrin was present and making personal request for this assistance, the governor thought it wise to grant the petition, thinking he could later on right any wrong they might be disposed to commit.
 \vs p183 2:4 Accordingly, when Judas Iscariot started out from the temple, about 23:30, he was accompanied by more than 60 persons --- temple guards, Roman soldiers, and curious servants of the chief priests and rulers.
 \usection{The Master’s Arrest}
