--- a/tex/p187.tex
+++ b/tex/p187.tex
@@ -29,7 +29,7 @@
 \vs p187 2:4 Before Jesus was put on his cross, the two brigands had already been placed on their crosses, all the while cursing and spitting upon their executioners. Jesus’ only words, as they nailed him to the crossbeam, were, \textcolour{ubdarkred}{“Father, forgive them, for they know not what they do.”} He could not have so mercifully and lovingly interceded for his executioners if such thoughts of affectionate devotion had not been the mainspring of all his life of unselfish service. The ideas, motives, and longings of a lifetime are openly revealed in a crisis.
 \vs p187 2:5 After the Master was hoisted on the cross, the captain nailed the title up above his head, and it read in three languages, “Jesus of Nazareth --- the King of the Jews.” The Jews were infuriated by this believed insult. But Pilate was chafed by their disrespectful manner; he felt he had been intimidated and humiliated, and he took this method of obtaining petty revenge. He could have written “Jesus, a rebel.” But he well knew how these Jerusalem Jews detested the very name of Nazareth, and he was determined thus to humiliate them. He knew that they would also be cut to the very quick by seeing this executed Galilean called “The King of the Jews.”
 \vs p187 2:6 Many of the Jewish leaders, when they learned how Pilate had sought to deride them by placing this inscription on the cross of Jesus, hastened out to Golgotha, but they dared not attempt to remove it since the Roman soldiers were standing on guard. Not being able to remove the title, these leaders mingled with the crowd and did their utmost to incite derision and ridicule, lest any give serious regard to the inscription.
-\vs p187 2:7 The Apostle John, with Mary the mother of Jesus, Ruth, and Jude, arrived on the scene just after Jesus had been hoisted to his position on the cross, and just as the captain was nailing the title above the Master’s head. John was the only one of the 11 apostles to witness the crucifixion, and even he was not present all of the time since he ran into Jerusalem to bring back his mother and her friends soon after he had brought Jesus’ mother to the scene.
+\vs p187 2:7 The Apostle John, with Mary the mother of Jesus, Ruth, and Jude, arrived on the scene just after Jesus had been hoisted to his position on the cross, and just as the captain was nailing the title above the Master’s head. John was the only one of the eleven apostles to witness the crucifixion, and even he was not present all of the time since he ran into Jerusalem to bring back his mother and her friends soon after he had brought Jesus’ mother to the scene.
 \vs p187 2:8 As Jesus saw his mother, with John and his brother and sister, he smiled but said nothing. Meanwhile the four soldiers assigned to the Master’s crucifixion, as was the custom, had divided his clothes among them, one taking the sandals, one the turban, one the girdle, and the fourth the cloak. This left the tunic, or seamless vestment reaching down to near the knees, to be cut up into four pieces, but when the soldiers saw what an unusual garment it was, they decided to cast lots for it. Jesus looked down on them while they divided his garments, and the thoughtless crowd jeered at him.
 \vs p187 2:9 \pc It was well that the Roman soldiers took possession of the Master’s clothing. Otherwise, if his followers had gained possession of these garments, they would have been tempted to resort to superstitious relic worship. The Master desired that his followers should have nothing material to associate with his life on earth. He wanted to leave mankind only the memory of a human life dedicated to the high spiritual ideal of being consecrated to doing the Father’s will.
 \usection{Those Who Saw the Crucifixion}
