--- a/tex/p188.tex
+++ b/tex/p188.tex
@@ -23,7 +23,7 @@
 \vs p188 2:3 When Pilate heard this request of the Sanhedrists, he said: “I will give you a guard of ten soldiers. Go your way and make the tomb secure.” They went back to the temple, secured ten of their own guards, and then marched out to Joseph’s tomb with these ten Jewish guards and ten Roman soldiers, even on this Sabbath morning, to set them as watchmen before the tomb. These men rolled yet another stone before the tomb and set the seal of Pilate on and around these stones, lest they be disturbed without their knowledge. And these 20 men remained on watch up to the hour of the resurrection, the Jews carrying them their food and drink.
 \usection{During the Sabbath Day}
 \vs p188 3:1 Throughout this Sabbath day the disciples and the apostles remained in hiding, while all Jerusalem discussed the death of Jesus on the cross. There were almost 1,500,000 Jews present in Jerusalem at this time, hailing from all parts of the Roman Empire and from Mesopotamia. This was the beginning of the Passover week, and all these pilgrims would be in the city to learn of the resurrection of Jesus and to carry the report back to their homes.
-\vs p188 3:2 Late Saturday night, John Mark summoned the 11 apostles secretly to come to the home of his father, where, just before midnight, they all assembled in the same upper chamber where they had partaken of the Last Supper with their Master two nights previously.
+\vs p188 3:2 Late Saturday night, John Mark summoned the eleven apostles secretly to come to the home of his father, where, just before midnight, they all assembled in the same upper chamber where they had partaken of the Last Supper with their Master two nights previously.
 \vs p188 3:3 Mary the mother of Jesus, with Ruth and Jude, returned to Bethany to join their family this Saturday evening just before sunset. David Zebedee remained at the home of Nicodemus, where he had arranged for his messengers to assemble early Sunday morning. The women of Galilee, who prepared spices for the further embalming of Jesus’ body, tarried at the home of Joseph of Arimathea.
 \vs p188 3:4 \pc We are not able fully to explain just what happened to Jesus of Nazareth during this period of a day and a half when he was supposed to be resting in Joseph’s new tomb. Apparently he died the same natural death on the cross as would any other mortal in the same circumstances. We heard him say, \textcolour{ubdarkred}{“Father, into your hands I commend my spirit.”} We do not fully understand the meaning of such a statement inasmuch as his Thought Adjuster had long since been personalized and so maintained an existence apart from Jesus’ mortal being. The Master’s Personalized Adjuster could in no sense be affected by his physical death on the cross. That which Jesus put in the Father’s hands for the time being must have been the spirit counterpart of the Adjuster’s early work in spiritizing the mortal mind so as to provide for the transfer of the transcript of the human experience to the mansion worlds. There must have been some spiritual reality in the experience of Jesus which was analogous to the spirit nature, or soul, of the faith\hyp{}growing mortals of the spheres. But this is merely our opinion --- we do not really know what Jesus commended to his Father.
 \vs p188 3:5 We know that the physical form of the Master rested there in Joseph’s tomb until about 03:00 Sunday, but we are wholly uncertain regarding the status of the personality of Jesus during that period of 36 hours. We have sometimes dared to explain these things to ourselves somewhat as follows:
