--- a/tex/p189.tex
+++ b/tex/p189.tex
@@ -9,7 +9,7 @@
 \vs p189 0:2 “Not one of you can do aught to assist your Creator\hyp{}father in the return to life. As a mortal of the realm he has experienced mortal death; as the Sovereign of a universe he still lives. That which you observe is the mortal transit of Jesus of Nazareth from life in the flesh to life in the morontia. The spirit transit of this Jesus was completed at the time I separated myself from his personality and became your temporary director. Your Creator\hyp{}father has elected to pass through the whole of the experience of his mortal creatures, from birth on the material worlds, on through natural death and the resurrection of the morontia, into the status of true spirit existence. A certain phase of this experience you are about to observe, but you may not participate in it. Those things which you ordinarily do for the creature, you may not do for the Creator. A Creator Son has within himself the power to bestow himself in the likeness of any of his created sons; he has within himself the power to lay down his observable life and to take it up again; and he has this power because of the direct command of the Paradise Father, and I know whereof I speak.”
 \vs p189 0:3 When they heard the Personalized Adjuster so speak, they all assumed the attitude of anxious expectancy, from Gabriel down to the most humble cherubim. They saw the mortal body of Jesus in the tomb; they detected evidences of the universe activity of their beloved Sovereign; and not understanding such phenomena, they waited patiently for developments.
 \usection{The Morontia Transit}
-\vs p189 1:1 At 02:45 Sunday morning, the Paradise incarnation commission, consisting of 7 unidentified Paradise personalities, arrived on the scene and immediately deployed themselves about the tomb. At 02:50, intense vibrations of commingled material and morontia activities began to issue from Joseph’s new tomb, and at 03:02, this Sunday morning, April 9, A.D.\,30, the resurrected morontia form and personality of Jesus of Nazareth came forth from the tomb.
+\vs p189 1:1 At 02:45 Sunday morning, the Paradise incarnation commission, consisting of seven unidentified Paradise personalities, arrived on the scene and immediately deployed themselves about the tomb. At 02:50, intense vibrations of commingled material and morontia activities began to issue from Joseph’s new tomb, and at 03:02, this Sunday morning, April 9, A.D.\,30, the resurrected morontia form and personality of Jesus of Nazareth came forth from the tomb.
 \vs p189 1:2 After the resurrected Jesus emerged from his burial tomb, the body of flesh in which he had lived and wrought on earth for almost 36 years was still lying there in the sepulchre niche, undisturbed and wrapped in the linen sheet, just as it had been laid to rest by Joseph and his associates on Friday afternoon. Neither was the stone before the entrance of the tomb in any way disturbed; the seal of Pilate was still unbroken; the soldiers were still on guard. The temple guards had been on continuous duty; the Roman guard had been changed at midnight. None of these watchers suspected that the object of their vigil had risen to a new and higher form of existence, and that the body which they were guarding was now a discarded outer covering which had no further connection with the delivered and resurrected morontia personality of Jesus.
 \vs p189 1:3 \pc Mankind is slow to perceive that, in all that is personal, matter is the skeleton of morontia, and that both are the reflected shadow of enduring spirit reality. How long before you will regard time as the moving image of eternity\fnst{This is a quote from Plato's ``Tim\ae us'' 37d. In Cooper's translation it reads: \bibemph{And so he began to think of making a moving image of eternity: at the same time as he brought order to the universe, he would make an eternal image, moving according to number, of eternity remaining in unity. This number, of course, is what we now call ``time.''}} and space as the fleeting shadow of Paradise realities?
 \vs p189 1:4 As far as we can judge, no creature of this universe nor any personality from another universe had anything to do with this morontia resurrection of Jesus of Nazareth. On Friday he laid down his life as a mortal of the realm; on Sunday morning he took it up again as a morontia being of the system of Satania in Norlatiadek. There is much about the resurrection of Jesus which we do not understand. But we know that it occurred as we have stated and at about the time indicated. We can also record that all known phenomena associated with this mortal transit, or morontia resurrection, occurred right there in Joseph’s new tomb, where the mortal material remains of Jesus lay wrapped in burial cloths.
@@ -23,7 +23,7 @@
 \vs p189 1:12 Jesus now began the contacts of the morontia level, being introduced, as a creature, to the requirements of the life he had chosen to live for a short time on Urantia. This initiation into the morontia world required more than an hour of earth time and was twice interrupted by his desire to communicate with his former associates in the flesh as they came out from Jerusalem wonderingly to peer into the empty tomb to discover what they considered evidence of his resurrection.
 \vs p189 1:13 Now is the mortal transit of Jesus --- the morontia resurrection of the Son of Man --- completed. The transitory experience of the Master as a personality midway between the material and the spiritual has begun. And he has done all this through power inherent within himself; no personality has rendered him any assistance. He now lives as Jesus of morontia, and as he begins this morontia life, the material body of his flesh lies there undisturbed in the tomb. The soldiers are still on guard, and the seal of the governor about the rocks has not yet been broken.
 \usection{The Material Body of Jesus}
-\vs p189 2:1 At 03:10, as the resurrected Jesus fraternized with the assembled morontia personalities from the 7 mansion worlds of Satania, the chief of archangels --- the angels of the resurrection --- approached Gabriel and asked for the mortal body of Jesus. Said the chief of the archangels: “We may not participate in the morontia resurrection of the bestowal experience of Michael our sovereign, but we would have his mortal remains put in our custody for immediate dissolution. We do not propose to employ our technique of dematerialization; we merely wish to invoke the process of accelerated time\fnst{Both this and the ``turning of water into wine'' can be explained by invoking the \bibemph{locally-coherent time hypothesis}, presented in the book А.~Бич ``Природа времени: Гипотеза о происхождении и физической сущности времени'', 2002, АСТ.}. It is enough that we have seen the Sovereign live and die on Urantia; the hosts of heaven would be spared the memory of enduring the sight of the slow decay of the human form of the Creator and Upholder of a universe. In the name of the celestial intelligences of all Nebadon, I ask for a mandate giving me the custody of the mortal body of Jesus of Nazareth and empowering us to proceed with its immediate dissolution.”
+\vs p189 2:1 At 03:10, as the resurrected Jesus fraternized with the assembled morontia personalities from the seven mansion worlds of Satania, the chief of archangels --- the angels of the resurrection --- approached Gabriel and asked for the mortal body of Jesus. Said the chief of the archangels: “We may not participate in the morontia resurrection of the bestowal experience of Michael our sovereign, but we would have his mortal remains put in our custody for immediate dissolution. We do not propose to employ our technique of dematerialization; we merely wish to invoke the process of accelerated time\fnst{Both this and the ``turning of water into wine'' can be explained by invoking the \bibemph{locally-coherent time hypothesis}, presented in the book А.~Бич ``Природа времени: Гипотеза о происхождении и физической сущности времени'', 2002, АСТ.}. It is enough that we have seen the Sovereign live and die on Urantia; the hosts of heaven would be spared the memory of enduring the sight of the slow decay of the human form of the Creator and Upholder of a universe. In the name of the celestial intelligences of all Nebadon, I ask for a mandate giving me the custody of the mortal body of Jesus of Nazareth and empowering us to proceed with its immediate dissolution.”
 \vs p189 2:2 And when Gabriel had conferred with the senior Most High of Edentia, the archangel spokesman for the celestial hosts was given permission to make such disposition of the physical remains of Jesus as he might determine.
 \vs p189 2:3 After the chief of archangels had been granted this request, he summoned to his assistance many of his fellows, together with a numerous host of the representatives of all orders of celestial personalities, and then, with the aid of the Urantia midwayers, proceeded to take possession of Jesus’ physical body. This body of death was a purely material creation; it was physical and literal; it could not be removed from the tomb as the morontia form of the resurrection had been able to escape the sealed sepulchre. By the aid of certain morontia auxiliary personalities, the morontia form can be made at one time as of the spirit so that it can become indifferent to ordinary matter, while at another time it can become discernible and contactable to material beings, such as the mortals of the realm.
 \vs p189 2:4 As they made ready to remove the body of Jesus from the tomb preparatory to according it the dignified and reverent disposal of near\hyp{}instantaneous dissolution, it was assigned the secondary Urantia midwayers to roll away the stones from the entrance of the tomb. The larger of these two stones was a huge circular affair, much like a millstone, and it moved in a groove chiselled out of the rock, so that it could be rolled back and forth to open or close the tomb. When the watching Jewish guards and the Roman soldiers, in the dim light of the morning, saw this huge stone begin to roll away from the entrance of the tomb, apparently of its own accord --- without any visible means to account for such motion --- they were seized with fear and panic, and they fled in haste from the scene. The Jews fled to their homes, afterwards going back to report these doings to their captain at the temple. The Romans fled to the fortress of Antonia and reported what they had seen to the centurion as soon as he arrived on duty.
