--- a/tex/p191.tex
+++ b/tex/p191.tex
@@ -48,9 +48,9 @@
 \vs p191 5:4 When the Master had so spoken, he looked down into the face of Thomas and said: \textcolour{ubdarkred}{“And you, Thomas, who said you would not believe unless you could see me and put your finger in the nail marks of my hands, have now beheld me and heard my words; and though you see no nail marks on my hands, since I am raised in the form that you also shall have when you depart from this world, what will you say to your brethren? You will acknowledge the truth, for already in your heart you had begun to believe even when you so stoutly asserted your unbelief. Your doubts, Thomas, always most stubbornly assert themselves just as they are about to crumble. Thomas, I bid you be not faithless but believing --- and I know you will believe, even with a whole heart.”}
 \vs p191 5:5 When Thomas heard these words, he fell on his knees before the morontia Master and exclaimed, “I believe! My Lord and my Master!” Then said Jesus to Thomas: \textcolour{ubdarkred}{“You have believed, Thomas, because you have really seen and heard me. Blessed are those in the ages to come who will believe even though they have not seen with the eye of flesh nor heard with the mortal ear.”}
 \vs p191 5:6 And then, as the Master’s form moved over near the head of the table, he addressed them all, saying: \textcolour{ubdarkred}{“And now go all of you to Galilee, where I will presently appear to you.”} After he said this, he vanished from their sight.
-\vs p191 5:7 \pc The 11 apostles were now fully convinced that Jesus had risen from the dead, and very early the next morning, before the break of day, they started out for Galilee.
+\vs p191 5:7 \pc The eleven apostles were now fully convinced that Jesus had risen from the dead, and very early the next morning, before the break of day, they started out for Galilee.
 \usection{The Alexandrian Appearance}
-\vs p191 6:1 While the 11 apostles were on the way to Galilee, drawing near their journey’s end, on Tuesday evening, April 18, at about 20:30, Jesus appeared to Rodan and some 80 other believers, in Alexandria. This was the Master’s 12\ts{th} appearance in morontia form. Jesus appeared before these Greeks and Jews at the conclusion of the report of David’s messenger regarding the crucifixion. This messenger, being the 5\ts{th} in the Jerusalem\hyp{}Alexandria relay of runners, had arrived in Alexandria late that afternoon, and when he had delivered his message to Rodan, it was decided to call the believers together to receive this tragic word from the messenger himself. At about 20:00, the messenger, Nathan of Busiris, came before this group and told them in detail all that had been told him by the preceding runner. Nathan ended his touching recital with these words: “But David, who sends us this word, reports that the Master, in foretelling his death, declared that he would rise again.” Even as Nathan spoke, the morontia Master appeared there in full view of all. And when Nathan sat down, Jesus said:
+\vs p191 6:1 While the eleven apostles were on the way to Galilee, drawing near their journey’s end, on Tuesday evening, April 18, at about 20:30, Jesus appeared to Rodan and some 80 other believers, in Alexandria. This was the Master’s 12\ts{th} appearance in morontia form. Jesus appeared before these Greeks and Jews at the conclusion of the report of David’s messenger regarding the crucifixion. This messenger, being the 5\ts{th} in the Jerusalem\hyp{}Alexandria relay of runners, had arrived in Alexandria late that afternoon, and when he had delivered his message to Rodan, it was decided to call the believers together to receive this tragic word from the messenger himself. At about 20:00, the messenger, Nathan of Busiris, came before this group and told them in detail all that had been told him by the preceding runner. Nathan ended his touching recital with these words: “But David, who sends us this word, reports that the Master, in foretelling his death, declared that he would rise again.” Even as Nathan spoke, the morontia Master appeared there in full view of all. And when Nathan sat down, Jesus said:
 \vs p191 6:2 \textcolour{ubdarkred}{“Peace be upon you. That which my Father sent me into the world to establish belongs not to a race, a nation, nor to a special group of teachers or preachers. This gospel of the kingdom belongs to both Jew and gentile, to rich and poor, to free and bond, to male and female, even to the little children. And you are all to proclaim this gospel of love and truth by the lives which you live in the flesh. You shall love one another with a new and startling affection, even as I have loved you. You will serve mankind with a new and amazing devotion, even as I have served you. And when men see you so love them, and when they behold how fervently you serve them, they will perceive that you have become faith\hyp{}fellows of the kingdom of heaven, and they will follow after the Spirit of Truth which they see in your lives, to the finding of eternal salvation.}
 \vs p191 6:3 \textcolour{ubdarkred}{“As the Father sent me into this world, even so now send I you. You are all called to carry the good news to those who sit in darkness. This gospel of the kingdom belongs to all who believe it; it shall not be committed to the custody of mere priests. Soon will the Spirit of Truth come upon you, and he shall lead you into all truth. Go you, therefore, into all the world preaching this gospel, and lo, I am with you always, even to the end of the ages.”}
 \vs p191 6:4 When the Master had so spoken, he vanished from their sight. All that night these believers remained there together recounting their experiences as kingdom believers and listening to the many words of Rodan and his associates. And they all believed that Jesus had risen from the dead. Imagine the surprise of David’s herald of the resurrection, who arrived the second day after this, when they replied to his announcement, saying: “Yes, we know, for we have seen him. He appeared to us day before yesterday.”
