--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -64,7 +64,7 @@
 \vs p015 3:11 \ublistelem{4.}\bibnobreakspace The swing of the local star cloud of Nebadon and its associated creations around the Sagittarius centre of their minor sector.
 \vs p015 3:12 \ublistelem{5.}\bibnobreakspace The rotation of 100 minor sectors, including Sagittarius, about their major sector.
 \vs p015 3:13 \ublistelem{6.}\bibnobreakspace The whirl of 10 major sectors, the so\hyp{}called star drifts, about the Uversa headquarters of Orvonton.
-\vs p015 3:14 \ublistelem{7.}\bibnobreakspace The movement of Orvonton and 6 associated superuniverses around Paradise and Havona, the counterclockwise processional of the superuniverse space level.
+\vs p015 3:14 \ublistelem{7.}\bibnobreakspace The movement of Orvonton and six associated superuniverses around Paradise and Havona, the counterclockwise processional of the superuniverse space level.
 \vs p015 3:15 \pc These multiple motions are of several orders: The space paths of your planet and your solar system are genetic, inherent in origin. The absolute counterclockwise motion of Orvonton is also genetic, inherent in the architectural plans of the master universe. But the intervening motions are of composite origin, being derived in part from the constitutive segmentation of matter\hyp{}energy into the superuniverses and in part produced by the intelligent and purposeful action of the Paradise force organizers.
 \vs p015 3:16 \pc The local universes are in closer proximity as they approach Havona; the circuits are greater in number, and there is increased superimposition, layer upon layer. But farther out from the eternal centre there are fewer and fewer systems, layers, circuits, and universes.
 \usection{Nebulae --- The Ancestors of Universes}
@@ -112,16 +112,16 @@
 \usection{The Architectural Spheres}
 \vs p015 7:1 While each superuniverse government presides near the centre of the evolutionary universes of its space segment, it occupies a world made to order and is peopled by accredited personalities. These headquarters worlds are architectural spheres, space bodies specifically constructed for their special purpose. While sharing the light of near\hyp{}by suns, these spheres are independently lighted and heated. Each has a sun which gives forth light without heat, like the satellites of Paradise, while each is supplied with heat by the circulation of certain energy currents near the surface of the sphere. These headquarters worlds belong to one of the greater systems situated near the astronomical centre of their respective superuniverses.
 \vs p015 7:2 \pc Time is standardized on the headquarters of the superuniverses. The standard day of the superuniverse of Orvonton is equal to almost 30 days of Urantia time, and the Orvonton year equals 100 standard days. This Uversa year is standard in the 7\ts{th} superuniverse, and it is 22 minutes short of 3,000 days of Urantia time, about 8.2 of your years.
-\vs p015 7:3 \pc The headquarters worlds of the 7 superuniverses partake of the nature and grandeur of Paradise, their central pattern of perfection. In reality, all headquarters worlds are paradisiacal. They are indeed heavenly abodes, and they increase in material size, morontia beauty, and spirit glory from Jerusem to the central Isle. And all the satellites of these headquarters worlds are also architectural spheres.
+\vs p015 7:3 \pc The headquarters worlds of the seven superuniverses partake of the nature and grandeur of Paradise, their central pattern of perfection. In reality, all headquarters worlds are paradisiacal. They are indeed heavenly abodes, and they increase in material size, morontia beauty, and spirit glory from Jerusem to the central Isle. And all the satellites of these headquarters worlds are also architectural spheres.
 \vs p015 7:4 The various headquarters worlds are provided with every phase of material and spiritual creation. All kinds of material, morontial, and spiritual beings are at home on these rendezvous worlds of the universes. As mortal creatures ascend the universe, passing from the material to the spiritual realms, they never lose their appreciation for, and enjoyment of, their former levels of existence.
-\vs p015 7:5 \pc \bibemph{Jerusem,} the headquarters of your local system of Satania, has its 7 worlds of transition culture, each of which is encircled by 7 satellites, among which are the 7 mansion worlds of morontia detention, man’s first postmortal residence. As the term heaven has been used on Urantia, it has sometimes meant these 7 mansion worlds, the first mansion world being denominated the 1\ts{st} heaven, and so on to the 7\ts{th}.
+\vs p015 7:5 \pc \bibemph{Jerusem,} the headquarters of your local system of Satania, has its seven worlds of transition culture, each of which is encircled by seven satellites, among which are the seven mansion worlds of morontia detention, man’s first postmortal residence. As the term heaven has been used on Urantia, it has sometimes meant these seven mansion worlds, the first mansion world being denominated the 1\ts{st} heaven, and so on to the 7\ts{th}.
 \vs p015 7:6 \pc \bibemph{Edentia,} the headquarters of your constellation of Norlatiadek, has its 70 satellites of socializing culture and training, on which ascenders sojourn upon the completion of the Jerusem regime of personality mobilization, unification, and realization.
 \vs p015 7:7 \pc \bibemph{Salvington,} the capital of Nebadon, your local universe, is surrounded by 10 university clusters of 49 spheres each. Hereon is man spiritualized following his constellation socialization.
-\vs p015 7:8 \pc \bibemph{Uminor the third,} the headquarters of your minor sector, Ensa, is surrounded by the 7 spheres of the higher physical studies of the ascendant life.
+\vs p015 7:8 \pc \bibemph{Uminor the third,} the headquarters of your minor sector, Ensa, is surrounded by the seven spheres of the higher physical studies of the ascendant life.
 \vs p015 7:9 \pc \bibemph{Umajor the fifth,} the headquarters of your major sector, Splandon, is surrounded by the 70 spheres of the advancing intellectual training of the superuniverse.
-\vs p015 7:10 \pc \bibemph{Uversa,} the headquarters of Orvonton, your superuniverse, is immediately surrounded by the 7 higher universities of advanced spiritual training for ascending will creatures. Each of these 7 clusters of wonder spheres consists of 70 specialized worlds containing thousands upon thousands of replete institutions and organizations devoted to universe training and spirit culture wherein the pilgrims of time are re\hyp{}educated and re\hyp{}examined preparatory to their long flight to Havona. The arriving pilgrims of time are always received on these associated worlds, but the departing graduates are always dispatched for Havona direct from the shores of Uversa.
+\vs p015 7:10 \pc \bibemph{Uversa,} the headquarters of Orvonton, your superuniverse, is immediately surrounded by the seven higher universities of advanced spiritual training for ascending will creatures. Each of these seven clusters of wonder spheres consists of 70 specialized worlds containing thousands upon thousands of replete institutions and organizations devoted to universe training and spirit culture wherein the pilgrims of time are re\hyp{}educated and re\hyp{}examined preparatory to their long flight to Havona. The arriving pilgrims of time are always received on these associated worlds, but the departing graduates are always dispatched for Havona direct from the shores of Uversa.
 \vs p015 7:11 Uversa is the spiritual and administrative headquarters for approximately one trillion inhabited or inhabitable worlds. The glory, grandeur, and perfection of the Orvonton capital surpass any of the wonders of the time\hyp{}space creations.
-\vs p015 7:12 \pc If all the projected local universes and their component parts were established, there would be slightly less than 500 billion\fnst{The exact number is: $7\times(1 + 7\times 70 + 10\times(70+1) + 1000\times(7+1) + 100000\times 647591) = 453,313,764,407$.} architectural worlds in the 7 superuniverses.
+\vs p015 7:12 \pc If all the projected local universes and their component parts were established, there would be slightly less than 500 billion\fnst{The exact number is: $7\times(1 + 7\times 70 + 10\times(70+1) + 1000\times(7+1) + 100000\times 647591) = 453,313,764,407$.} architectural worlds in the seven superuniverses.
 \usection{Energy Control and Regulation}
 \vs p015 8:1 The headquarters spheres of the superuniverses are so constructed that they are able to function as efficient power\hyp{}energy regulators for their various sectors, serving as focal points for the directionization of energy to their component local universes. They exert a powerful influence over the balance and control of the physical energies circulating through organized space.
 \vs p015 8:2 Further regulative functions are performed by the superuniverse power centres and physical controllers, living and semiliving intelligent entities constituted for this express purpose. These power centres and controllers are difficult of understanding; the lower orders are not volitional, they do not possess will, they do not choose, their functions are very intelligent but apparently automatic and inherent in their highly specialized organization. The power centres and physical controllers of the superuniverses assume direction and partial control of the 30 energy systems which comprise the gravita domain. The physical\hyp{}energy circuits administered by the power centres of Uversa require a little over 968,000,000 years to complete the encirclement of the superuniverse.
@@ -200,7 +200,7 @@
 \vs p015 14:5 \pc Your world is called Urantia, and it is number 606\index{606 of Satania|see{Urantia}} in the planetary group, or system, of Satania. This system has at present 619 inhabited worlds, and more than 200 additional planets are evolving favourably toward becoming inhabited worlds at some future time.
 \vs p015 14:6 Satania has a headquarters world called Jerusem, and it is system number 24 in the constellation of Norlatiadek. Your constellation, Norlatiadek, consists of 100 local systems and has a headquarters world called Edentia. Norlatiadek is number 70 in the universe of Nebadon. The local universe of Nebadon consists of 100 constellations and has a capital known as Salvington. The universe of Nebadon is number 84 in the minor sector of Ensa.
 \vs p015 14:7 The minor sector of Ensa consists of 100 local universes and has a capital called Uminor the 3\ts{rd}. This minor sector is number 3 in the major sector of Splandon. Splandon consists of 100 minor sectors and has a headquarters world called Umajor the 5\ts{th}. It is the 5\ts{th} major sector of the superuniverse of Orvonton, the 7\ts{th} segment of the grand universe. Thus you can locate your planet in the scheme of the organization and administration of the universe of universes.
-\vs p015 14:8 The grand universe number of your world, Urantia, is 5,342,482,337,666\fnst{How are the 7 celestial coordinates of our planet just given (7, 5, 3, 84, 70, 24, 606) encoded in the registry number? It is possible that the \bibemph{decimal} status is included as well and, together with the planet's number 606, it is represented in the final digits 666, see the note on \bibref[58:1.1]{p058 1:1}.}. That is the registry number on Uversa and on Paradise, your number in the catalogue of the inhabited worlds. I know the physical\hyp{}sphere registry number, but it is of such an extraordinary size that it is of little practical significance to the mortal mind.
+\vs p015 14:8 The grand universe number of your world, Urantia, is 5,342,482,337,666\fnst{How are the seven celestial coordinates of our planet just given (7, 5, 3, 84, 70, 24, 606) encoded in the registry number? It is possible that the \bibemph{decimal} status is included as well and, together with the planet's number 606, it is represented in the final digits 666, see the note on \bibref[58:1.1]{p058 1:1}.}. That is the registry number on Uversa and on Paradise, your number in the catalogue of the inhabited worlds. I know the physical\hyp{}sphere registry number, but it is of such an extraordinary size that it is of little practical significance to the mortal mind.
 \vs p015 14:9 \pc Your planet is a member of an enormous cosmos; you belong to a well\hyp{}nigh infinite family of worlds, but your sphere is just as precisely administered and just as lovingly fostered as if it were the only inhabited world in all existence.
 \vsetoff
 \vs p015 14:10 [Presented by a Universal Censor hailing from Uversa.]
