--- a/tex/p036.tex
+++ b/tex/p036.tex
@@ -13,7 +13,7 @@
 \vs p036 1:3 Life Carriers are graded into three grand divisions: The first division is the senior Life Carriers, the second, assistants, and the third, custodians. The primary division is subdivided into 12 groups of specialists in the various forms of life manifestation. The segregation of these three divisions was effected by the Melchizedeks, who conducted tests for such purposes on the Life Carriers’ headquarters sphere. The Melchizedeks have ever since been closely associated with the Life Carriers and always accompany them when they go forth to establish life on a new planet.
 \vs p036 1:4 When an evolutionary planet is finally settled in light and life, the Life Carriers are organized into the higher deliberative bodies of advisory capacity to assist in the further administration and development of the world and its glorified beings. In the later and settled ages of an evolving universe these Life Carriers are entrusted with many new duties.
 \usection{The Life Carrier Worlds}
-\vs p036 2:1 The Melchizedeks have the general oversight of the 4\ts{th} group of 7 primary spheres in the Salvington circuit. These worlds of the Life Carriers are designated as follows:
+\vs p036 2:1 The Melchizedeks have the general oversight of the 4\ts{th} group of seven primary spheres in the Salvington circuit. These worlds of the Life Carriers are designated as follows:
 \vs p036 2:2 \ublistelem{1.}\bibnobreakspace The Life Carrier headquarters.
 \vs p036 2:3 \ublistelem{2.}\bibnobreakspace The life\hyp{}planning sphere.
 \vs p036 2:4 \ublistelem{3.}\bibnobreakspace The life\hyp{}conservation sphere.
@@ -22,15 +22,15 @@
 \vs p036 2:7 \ublistelem{6.}\bibnobreakspace The sphere of mind and spirit in living beings.
 \vs p036 2:8 \ublistelem{7.}\bibnobreakspace The sphere of unrevealed life.
 \vs p036 2:9 \pc Each of these primary spheres is surrounded by six satellites, on which the special phases of all the Life Carrier activities in the universe are centred.
-\vs p036 2:10 \pc \bibemph{World Number One,} the headquarters sphere, together with its 6 tributary satellites, is devoted to the study of universal life, life in all of its known phases of manifestation. Here is located the college of life planning, wherein function teachers and advisers from Uversa and Havona, even from Paradise. And I am permitted to reveal that the 7 central emplacements of the adjutant mind\hyp{}spirits are situated on this world of the Life Carriers.
-\vs p036 2:11 The number 10 --- the decimal system --- is inherent in the physical universe but not in the spiritual. The domain of life is characterized by 3, 7, and 12 or by multiples and combinations of these basic numbers. There are three primal and essentially different life plans, after the order of the three Paradise Sources and Centres, and in the universe of Nebadon these three basic forms of life are segregated on three different types of planets\fnst{These three different types of planets and the corresponding three different life plans are: evolutionary planets --- material life, system and constellation spheres (cf. \bibref[48:1.2]{p048 1:2}) --- morontia life and the worlds of the Salvington cluster --- spirit life.}. There were, originally, 12 distinct and divine concepts of transmissible life. This number 12, with its subdivisions and multiples, runs throughout all basic life patterns of all 7 superuniverses. There are also 7 architectural types of life design, fundamental arrangements of the reproducing configurations of living matter. The Orvonton life patterns are configured as 12 inheritance carriers. The differing orders of will creatures are configured as 12, 24, 48, 96, 192, 384, and 768. On Urantia there are 48\fnst{The ``trait determiners'' and ``chromosomes'' are not the same thing, because the number of chromosome pairs in a single human sex cell is 23, not 48. There are 24 different chromosomes in human cells: 22 autosomes, the X, and the Y. Each chromosome contains a single DNA molecule, which contains two gene strands and thus represents two trait determiners. Therefore, there are really 48 (24$\times$2) trait determiners in sex cells, despite the fact that no single sex cell contains all 48. It is curious to note that the accepted number of chromosomes for humans at the time of revelation (1935) was 48, but the role of DNA in trait determination was as yet unknown. The authors of this revelation were able to present us with information which was consistent with the accepted scientific truth of the day in which it appeared and also remained consistent in the light of new discoveries.} units of pattern control --- trait determiners --- in the sex cells of human reproduction.
+\vs p036 2:10 \pc \bibemph{World Number One,} the headquarters sphere, together with its six tributary satellites, is devoted to the study of universal life, life in all of its known phases of manifestation. Here is located the college of life planning, wherein function teachers and advisers from Uversa and Havona, even from Paradise. And I am permitted to reveal that the seven central emplacements of the adjutant mind\hyp{}spirits are situated on this world of the Life Carriers.
+\vs p036 2:11 The number 10 --- the decimal system --- is inherent in the physical universe but not in the spiritual. The domain of life is characterized by 3, 7, and 12 or by multiples and combinations of these basic numbers. There are three primal and essentially different life plans, after the order of the three Paradise Sources and Centres, and in the universe of Nebadon these three basic forms of life are segregated on three different types of planets\fnst{These three different types of planets and the corresponding three different life plans are: evolutionary planets --- material life, system and constellation spheres (cf. \bibref[48:1.2]{p048 1:2}) --- morontia life and the worlds of the Salvington cluster --- spirit life.}. There were, originally, 12 distinct and divine concepts of transmissible life. This number 12, with its subdivisions and multiples, runs throughout all basic life patterns of all seven superuniverses. There are also seven architectural types of life design, fundamental arrangements of the reproducing configurations of living matter. The Orvonton life patterns are configured as 12 inheritance carriers. The differing orders of will creatures are configured as 12, 24, 48, 96, 192, 384, and 768. On Urantia there are 48\fnst{The ``trait determiners'' and ``chromosomes'' are not the same thing, because the number of chromosome pairs in a single human sex cell is 23, not 48. There are 24 different chromosomes in human cells: 22 autosomes, the X, and the Y. Each chromosome contains a single DNA molecule, which contains two gene strands and thus represents two trait determiners. Therefore, there are really 48 (24$\times$2) trait determiners in sex cells, despite the fact that no single sex cell contains all 48. It is curious to note that the accepted number of chromosomes for humans at the time of revelation (1935) was 48, but the role of DNA in trait determination was as yet unknown. The authors of this revelation were able to present us with information which was consistent with the accepted scientific truth of the day in which it appeared and also remained consistent in the light of new discoveries.} units of pattern control --- trait determiners --- in the sex cells of human reproduction.
 \vs p036 2:12 \pc \bibemph{The Second World} is the life\hyp{}designing sphere; here all new modes of life organization are worked out. While the original life designs are provided by the Creator Son, the actual outworking of these plans is entrusted to the Life Carriers and their associates. When the general life plans for a new world have been formulated, they are transmitted to the headquarters sphere, where they are minutely scrutinized by the supreme council of the senior Life Carriers in collaboration with a corps of consulting Melchizedeks. If the plans are a departure from previously accepted formulas, they must be passed upon, and endorsed by, the Creator Son. The chief of Melchizedeks often represents the Creator Son in these deliberations.
 \vs p036 2:13 Planetary life, therefore, while similar in some respects, differs in many ways on each evolutionary world. Even in a uniform life series in a single family of worlds, life is not exactly the same on any two planets; there is always a planetary type, for the Life Carriers work constantly in an effort to improve the vital formulas committed to their keeping.
 \vs p036 2:14 There are over 1,000,000 fundamental or cosmic chemical formulas which constitute the parent patterns and the numerous basic functional variations of life manifestations. Satellite number one of the life\hyp{}planning sphere is the realm of the universe physicists and electrochemists who serve as technical assistants to the Life Carriers in the work of capturing, organizing, and manipulating the essential units of energy which are employed in building up the material vehicles of life transmission, the so\hyp{}called germ plasm.
 \vs p036 2:15 The planetary life\hyp{}planning laboratories are situated on the second satellite of this world number two. In these laboratories the Life Carriers and all their associates collaborate with the Melchizedeks in the effort to modify and possibly improve the life designed for implantation on the \bibemph{decimal planets} of Nebadon. The life now evolving on Urantia was planned and partially worked out on this very world, for Urantia is a decimal planet, a life\hyp{}experiment world. On 1 world in each 10 a greater variance in the standard life designs is permitted than on the other (nonexperimental) worlds.
 \vs p036 2:16 \pc \bibemph{World Number Three} is devoted to the conservation of life. Here various modes of life protection and preservation are studied and developed by the assistants and custodians of the Life Carrier corps. The life plans for every new world always provide for the early establishment of the life\hyp{}conservation commission, consisting of custodian specialists in the expert manipulation of the basic life patterns. On Urantia there were 24 such custodian commissioners, two for each fundamental or parent pattern of the architectural organization of the life material. On planets such as yours the highest form of life is reproduced by a life\hyp{}carrying bundle which possesses 24 pattern units. (And since the intellectual life grows out of, and upon the foundation of, the physical, there come into existence the four and twenty basic orders of psychic organization.)
 \vs p036 2:17 \pc \bibemph{Sphere Number Four} and its tributary satellites are devoted to the study of the evolution of creature life in general and to the evolutionary antecedents of any one life level in particular. The original life plasm of an evolutionary world must contain the full potential for all future developmental variations and for all subsequent evolutionary changes and modifications. The provision for such far\hyp{}reaching projects of life metamorphosis may require the appearance of many apparently useless forms of animal and vegetable life. Such by\hyp{}products of planetary evolution, foreseen or unforeseen, appear upon the stage of action only to disappear, but in and through all this long process there runs the thread of the wise and intelligent formulations of the original designers of the planetary life plan and species scheme. The manifold by\hyp{}products of biologic evolution are all essential to the final and full function of the higher intelligent forms of life, notwithstanding that great outward disharmony may prevail from time to time in the long upward struggle of the higher creatures to effect the mastery of the lower forms of life, many of which are sometimes so antagonistic to the peace and comfort of the evolving will creatures.
-\vs p036 2:18 \pc \bibemph{Number Five World} is concerned wholly with life associated with mind. Each of its satellites is devoted to the study of a single phase of creature mind correlated with creature life. Mind such as man comprehends is an endowment of the 7 adjutant mind\hyp{}spirits superimposed on the nonteachable or mechanical levels of mind\fnst{That is the level of individual cells or organs composed of similar cells (or, more correctly, of tissues, which are made up of cells). Thus, when an esoteric guru ``asks'' his own (or someone else's!) heart to slow down or the liver to heal itself, he in effect communes with such nonteachable or mechanical level of mind.} by the agencies of the Infinite Spirit. The life patterns are variously responsive to these adjutants and to the different spirit ministries operating throughout the universes of time and space. The capacity of material creatures to effect spirit response is entirely dependent on the associated mind endowment, which, in turn, has directionized the course of the biologic evolution of these same mortal creatures.
+\vs p036 2:18 \pc \bibemph{Number Five World} is concerned wholly with life associated with mind. Each of its satellites is devoted to the study of a single phase of creature mind correlated with creature life. Mind such as man comprehends is an endowment of the seven adjutant mind\hyp{}spirits superimposed on the nonteachable or mechanical levels of mind\fnst{That is the level of individual cells or organs composed of similar cells (or, more correctly, of tissues, which are made up of cells). Thus, when an esoteric guru ``asks'' his own (or someone else's!) heart to slow down or the liver to heal itself, he in effect communes with such nonteachable or mechanical level of mind.} by the agencies of the Infinite Spirit. The life patterns are variously responsive to these adjutants and to the different spirit ministries operating throughout the universes of time and space. The capacity of material creatures to effect spirit response is entirely dependent on the associated mind endowment, which, in turn, has directionized the course of the biologic evolution of these same mortal creatures.
 \vs p036 2:19 \pc \bibemph{World Number Six} is dedicated to the correlation of mind with spirit as they are associated with living forms and organisms. This world and its six tributaries embrace the schools of creature co\hyp{}ordination, wherein teachers from both the central universe and the superuniverse collaborate with the Nebadon instructors in presenting the highest levels of creature attainment in time and space.
 \vs p036 2:20 \pc \bibemph{The Seventh Sphere} of the Life Carriers is dedicated to the unrevealed domains of evolutionary creature life as it is related to the cosmic philosophy of the expanding factualization of the Supreme Being.
 \usection{Life Transplantation}
@@ -49,15 +49,15 @@
 \vs p036 4:3 The midsonite creatures live and function as reproducing beings on their magnificent worlds until they are one thousand standard years of age; whereupon they are translated by seraphic transport. Midsoniters are nonreproducing beings thereafter because the technique of dematerialization which they pass through in preparation for enseraphiming forever deprives them of reproductive prerogatives\fnst{Is this also true of normal human mortals? If so, then it would appear that the experiences of Betty Andreasson cannot be explained as a journey in the transport seraphim. Rather, they were more likely to be the projections of the Thought Adjuster of this highly spiritually developed person, permeated by love and unselfish service. The evidence for Betty being enseraphimed is based solely on her perception of immersion in the white liquid-like cloudy substance during the trip, which also formed a part of my own \bibemph{very similar} experiences. However, we know too little about the mechanism of the detachment of Thought Adjuster from the body to conclude that ``passing through the white cloud'' (as was witnessed by several other prophets, both ancient and modern) is necessarily an indication of being transport-enseraphimed. For more information I recommend the series of five books by Raymond~E. Fowler which document the numerous contacts of Betty Andreasson with what appears to be the seraphic Planetary Government, namely: 1. \bibemph{The Andreasson Affair}, 2. \bibemph{The Andreasson Affair: Phase Two}, 3. \bibemph{The Watchers}, 4. \bibemph{The Watchers II}, 5. \bibemph{The Andreasson Legacy}. Note, however, that 99\% of the information presented in these books is sheer imagination (due to inevitable \bibemph{hypnotic confabulation}), so one has to exercise wisdom to extract the precious remaining 1\% of real truth.}.
 \vs p036 4:4 The present status of these beings can hardly be reckoned as either mortal or immortal, neither can they be definitely classified as human or divine. These creatures are not Adjuster indwelt, hence hardly immortal. But neither do they seem to be mortal; no midsoniter has experienced death. All midsoniters ever born in Nebadon are alive today, functioning on their native worlds, on some intervening sphere, or on the Salvington midsonite sphere in the finaliters’ group of worlds.
 \vs p036 4:5 \pc \bibemph{The Salvington Worlds of the Finaliters.} The Melchizedek life carriers, as well as the associated Mother Eves, go from the system midsonite spheres to the finaliters’ worlds of the Salvington circuit, where their offspring are also destined to forgather.
-\vs p036 4:6 It should be explained in this connection that the fifth group of 7 primary worlds in the Salvington circuit are the Nebadon worlds of the finaliters. The children of the Melchizedek life carriers and the Material Daughters are domiciled on the 7\ts{th} world of the finaliters, the Salvington midsonite sphere.
-\vs p036 4:7 The satellites of the 7 primary worlds of the finaliters are the rendezvous of the personalities of the super\hyp{} and central universes who may be executing assignments in Nebadon. While the ascending mortals go about freely on all of the cultural worlds and training spheres of the 490 worlds comprising the Melchizedek University, there are certain special schools and numerous restricted zones which they are not permitted to enter. This is especially true of the 49 spheres under the jurisdiction of the finaliters.
+\vs p036 4:6 It should be explained in this connection that the fifth group of seven primary worlds in the Salvington circuit are the Nebadon worlds of the finaliters. The children of the Melchizedek life carriers and the Material Daughters are domiciled on the 7\ts{th} world of the finaliters, the Salvington midsonite sphere.
+\vs p036 4:7 The satellites of the seven primary worlds of the finaliters are the rendezvous of the personalities of the super\hyp{} and central universes who may be executing assignments in Nebadon. While the ascending mortals go about freely on all of the cultural worlds and training spheres of the 490 worlds comprising the Melchizedek University, there are certain special schools and numerous restricted zones which they are not permitted to enter. This is especially true of the 49 spheres under the jurisdiction of the finaliters.
 \vs p036 4:8 \pc The purpose of the midsonite creatures is not at present known, but it would appear that these personalities are forgathering on the 7\ts{th} finaliter world in preparation for some future eventuality in universe evolution. Our inquiries concerning the midsonite races are always referred to the finaliters, and always do the finaliters decline to discuss the destiny of their wards. Regardless of our uncertainty as to the future of the midsoniters, we do know that every local universe in Orvonton harbours such an accumulating corps of these mysterious beings. It is the belief of the Melchizedek life carriers that their midsonite children will some day be endowed with the transcendental and eternal spirit of absonity by God the Ultimate.
 \usection{The Seven Adjutant Mind\hyp{}Spirits}
-\vs p036 5:1 It is the presence of the 7 adjutant mind\hyp{}spirits on the primitive worlds that conditions the course of organic evolution; that explains why evolution is purposeful and not accidental. These adjutants represent that function of the mind ministry of the Infinite Spirit which is extended to the lower orders of intelligent life through the operations of a local universe Mother Spirit. The adjutants are the children of the Universe Mother Spirit and constitute her personal ministry to the material minds of the realms. Wherever and whenever such mind is manifest, these spirits are variously functioning.
-\vs p036 5:2 The 7 adjutant mind\hyp{}spirits are called by names which are the equivalents of the following designations: intuition, understanding, courage, knowledge, counsel, worship, and wisdom. These mind\hyp{}spirits send forth their influence into all the inhabited worlds as a differential urge, each seeking receptivity capacity for manifestation quite apart from the degree to which its fellows may find reception and opportunity for function.
+\vs p036 5:1 It is the presence of the seven adjutant mind\hyp{}spirits on the primitive worlds that conditions the course of organic evolution; that explains why evolution is purposeful and not accidental. These adjutants represent that function of the mind ministry of the Infinite Spirit which is extended to the lower orders of intelligent life through the operations of a local universe Mother Spirit. The adjutants are the children of the Universe Mother Spirit and constitute her personal ministry to the material minds of the realms. Wherever and whenever such mind is manifest, these spirits are variously functioning.
+\vs p036 5:2 The seven adjutant mind\hyp{}spirits are called by names which are the equivalents of the following designations: intuition, understanding, courage, knowledge, counsel, worship, and wisdom. These mind\hyp{}spirits send forth their influence into all the inhabited worlds as a differential urge, each seeking receptivity capacity for manifestation quite apart from the degree to which its fellows may find reception and opportunity for function.
 \vs p036 5:3 The central lodgements of the adjutant spirits on the Life Carrier headquarters world indicate to the Life Carrier supervisors the extent and quality of the mind function of the adjutants on any world and in any given living organism of intellect status. These life\hyp{}mind emplacements are perfect indicators of living mind function for the first 5 adjutants. But with regard to the 6\ts{th} and 7\ts{th} adjutant spirits --- worship and wisdom --- these central lodgements record only a qualitative function. The quantitative activity of the adjutant of worship and the adjutant of wisdom is registered in the immediate presence of the Divine Minister on Salvington, being a personal experience of the Universe Mother Spirit.
-\vs p036 5:4 \pc The 7 adjutant mind\hyp{}spirits always accompany the Life Carriers to a new planet, but they should not be regarded as entities; they are more like circuits. The spirits of the 7 universe adjutants do not function as personalities apart from the universe presence of the Divine Minister; they are in fact a level of consciousness of the Divine Minister and are always subordinate to the action and presence of their creative mother.
-\vs p036 5:5 We are handicapped for words adequately to designate these 7 adjutant mind\hyp{}spirits. They are ministers of the lower levels of experiential mind, and they may be described, in the order of evolutionary attainment, as follows:
+\vs p036 5:4 \pc The seven adjutant mind\hyp{}spirits always accompany the Life Carriers to a new planet, but they should not be regarded as entities; they are more like circuits. The spirits of the seven universe adjutants do not function as personalities apart from the universe presence of the Divine Minister; they are in fact a level of consciousness of the Divine Minister and are always subordinate to the action and presence of their creative mother.
+\vs p036 5:5 We are handicapped for words adequately to designate these seven adjutant mind\hyp{}spirits. They are ministers of the lower levels of experiential mind, and they may be described, in the order of evolutionary attainment, as follows:
 \vs p036 5:6 \ublistelem{1.}\bibnobreakspace \bibemph{The spirit of intuition ---} quick perception, the primitive physical and inherent reflex instincts, the directional and other self\hyp{}preservative endowments of all mind creations; the only one of the adjutants to function so largely in the lower orders of animal life and the only one to make extensive functional contact with the nonteachable levels of mechanical mind.
 \vs p036 5:7 \ublistelem{2.}\bibnobreakspace \bibemph{The spirit of understanding ---} the impulse of co\hyp{}ordination, the spontaneous and apparently automatic association of ideas. This is the gift of the co\hyp{}ordination of acquired knowledge, the phenomenon of quick reasoning, rapid judgment, and prompt decision.
 \vs p036 5:8 \ublistelem{3.}\bibnobreakspace \bibemph{The spirit of courage ---} the fidelity endowment --- in personal beings, the basis of character acquirement and the intellectual root of moral stamina and spiritual bravery. When enlightened by facts and inspired by truth, this becomes the secret of the urge of evolutionary ascension by the channels of intelligent and conscientious self\hyp{}direction.
@@ -65,7 +65,7 @@
 \vs p036 5:10 \ublistelem{5.}\bibnobreakspace \bibemph{The spirit of counsel ---} the social urge, the endowment of species co\hyp{}operation; the ability of will creatures to harmonize with their fellows; the origin of the gregarious instinct among the more lowly creatures.
 \vs p036 5:11 \ublistelem{6.}\bibnobreakspace \bibemph{The spirit of worship ---} the religious impulse, the first differential urge separating mind creatures into the two basic classes of mortal existence. The spirit of worship forever distinguishes the animal of its association from the soulless creatures of mind endowment. Worship is the badge of spiritual\hyp{}ascension candidacy.
 \vs p036 5:12 \ublistelem{7.}\bibnobreakspace \bibemph{The spirit of wisdom ---} the inherent tendency of all moral creatures towards orderly and progressive evolutionary advancement. This is the highest of the adjutants, the spirit co\hyp{}ordinator and articulator of the work of all the others. This spirit is the secret of that inborn urge of mind creatures which initiates and maintains the practical and effective program of the ascending scale of existence; that gift of living things which accounts for their inexplicable ability to survive and, in survival, to utilize the co\hyp{}ordination of all their past experience and present opportunities for the acquisition of all of everything that all of the other six mental ministers can mobilize in the mind of the organism concerned. Wisdom is the acme of intellectual performance. Wisdom is the goal of a purely mental and moral existence.
-\vs p036 5:13 \pc The adjutant mind\hyp{}spirits experientially grow, but they never become personal. They evolve in function, and the function of the first 5 in the animal orders is to a certain extent essential to the function of all 7 as human intellect. This animal relationship makes the adjutants more practically effective as human mind; hence animals are to a certain extent indispensable to man’s intellectual as well as to his physical evolution.
+\vs p036 5:13 \pc The adjutant mind\hyp{}spirits experientially grow, but they never become personal. They evolve in function, and the function of the first 5 in the animal orders is to a certain extent essential to the function of all seven as human intellect. This animal relationship makes the adjutants more practically effective as human mind; hence animals are to a certain extent indispensable to man’s intellectual as well as to his physical evolution.
 \vs p036 5:14 These mind\hyp{}adjutants of a local universe Mother Spirit are related to creature life of intelligence status much as the power centres and physical controllers are related to the nonliving forces of the universe. They perform invaluable service in the mind circuits on the inhabited worlds and are effective collaborators with the Master Physical Controllers, who also serve as controllers and directors of the preadjutant mind levels, the levels of nonteachable or mechanical mind.
 \vs p036 5:15 Living mind, prior to the appearance of capacity to learn from experience, is the ministry domain of the Master Physical Controllers. Creature mind, before acquiring the ability to recognize divinity and worship Deity, is the exclusive domain of the adjutant spirits. With the appearance of the spiritual response of the creature intellect, such created minds at once become superminded, being instantly encircuited in the spirit cycles of the local universe Mother Spirit.
 \vs p036 5:16 The adjutant mind\hyp{}spirits are in no manner directly related to the diverse and highly spiritual function of the spirit of the personal presence of the Divine Minister, the Holy Spirit of the inhabited worlds; but they are functionally antecedent to, and preparatory for, the appearance of this very spirit in evolutionary man. The adjutants afford the Universe Mother Spirit a varied contact with, and control over, the material living creatures of a local universe, but they do not repercuss in the Supreme Being when acting on prepersonality levels.
@@ -73,7 +73,7 @@
 \usection{Living Forces}
 \vs p036 6:1 Life is both mechanistic and vitalistic --- material and spiritual. Ever will Urantia physicists and chemists progress in their understanding of the protoplasmic forms of vegetable and animal life, but never will they be able to produce living organisms. Life is something different from all energy manifestations; even the material life of physical creatures is not inherent in matter.
 \vs p036 6:2 Things material may enjoy an independent existence, but life springs only from life. Mind can be derived only from pre\hyp{}existent mind. Spirit takes origin only from spirit ancestors. The creature may produce the forms of life, but only a creator personality or a creative force can supply the activating living spark.
-\vs p036 6:3 Life Carriers can organize the material forms, or physical patterns, of living beings, but the Spirit provides the initial spark of life and bestows the endowment of mind. Even the living forms of experimental life which the Life Carriers organize on their Salvington worlds are always devoid of reproductive powers. When the life formulas and the vital patterns are correctly assembled and properly organized, the presence of a Life Carrier is sufficient to initiate life, but all such living organisms are lacking in two essential attributes --- mind endowment and reproductive powers. Animal mind and human mind are gifts of the local universe Mother Spirit, functioning through the 7 adjutant mind\hyp{}spirits, while creature ability to reproduce is the specific and personal impartation of the Universe Spirit to the ancestral life plasm inaugurated by the Life Carriers.
+\vs p036 6:3 Life Carriers can organize the material forms, or physical patterns, of living beings, but the Spirit provides the initial spark of life and bestows the endowment of mind. Even the living forms of experimental life which the Life Carriers organize on their Salvington worlds are always devoid of reproductive powers. When the life formulas and the vital patterns are correctly assembled and properly organized, the presence of a Life Carrier is sufficient to initiate life, but all such living organisms are lacking in two essential attributes --- mind endowment and reproductive powers. Animal mind and human mind are gifts of the local universe Mother Spirit, functioning through the seven adjutant mind\hyp{}spirits, while creature ability to reproduce is the specific and personal impartation of the Universe Spirit to the ancestral life plasm inaugurated by the Life Carriers.
 \vs p036 6:4 \pc When the Life Carriers have designed the patterns of life, after they have organized the energy systems, there must occur an additional phenomenon; the “breath of life” must be imparted to these lifeless forms. The Sons of God can construct the forms of life, but it is the Spirit of God who really contributes the vital spark. And when the life thus imparted is spent, then again the remaining material body becomes dead matter. When the bestowed life is exhausted, the body returns to the bosom of the material universe from which it was borrowed by the Life Carriers to serve as a transient vehicle for that life endowment which they conveyed to such a visible association of energy\hyp{}matter.
 \vs p036 6:5 The life bestowed upon plants and animals by the Life Carriers does not return to the Life Carriers upon the death of plant or animal. The departing life of such a living thing possesses neither identity nor personality; it does not individually survive death. During its existence and the time of its sojourn in the body of matter, it has undergone a change; it has undergone energy evolution and survives only as a part of the cosmic forces of the universe; it does not survive as individual life. The survival of mortal creatures is wholly predicated on the evolvement of an immortal soul within the mortal mind.
 \vs p036 6:6 \pc We speak of life as “energy” and as “force,” but it is really neither. Force\hyp{}energy is variously gravity responsive; life is not. Pattern is also nonresponsive to gravity, being a configuration of energies that have already fulfilled all gravity\hyp{}responsive obligations. Life, as such, constitutes the animation of some pattern\hyp{}configured or otherwise segregated system of energy --- material, mindal, or spiritual.
