--- a/tex/p047.tex
+++ b/tex/p047.tex
@@ -10,7 +10,7 @@
 \uminitoc{The Seventh Mansion World}
 \uminitoc{Jerusem Citizenship}
 \author{Brilliant Evening Star}
-\vs p047 0:1 The Creator Son, when on Urantia, spoke of the “many mansions in the Father’s universe.” In a certain sense, all 56 of the encircling worlds of Jerusem are devoted to the transitional culture of ascending mortals, but the 7 satellites of world number one are more specifically known as the mansion worlds.
+\vs p047 0:1 The Creator Son, when on Urantia, spoke of the “many mansions in the Father’s universe.” In a certain sense, all 56 of the encircling worlds of Jerusem are devoted to the transitional culture of ascending mortals, but the seven satellites of world number one are more specifically known as the mansion worlds.
 \vs p047 0:2 Transition world number one itself is quite exclusively devoted to ascendant activities, being the headquarters of the finaliter corps assigned to Satania. This world now serves as the headquarters for more than 100,000 companies of finaliters, and there are one thousand glorified beings in each of these groups.
 \vs p047 0:3 When a system is settled in light and life, and as the mansion worlds one by one cease to serve as mortal\hyp{}training stations, they are taken over by the increasing finaliter population which accumulates in these older and more highly perfected systems.
 \vs p047 0:4 The seven mansion worlds are in charge of the morontia supervisors and the Melchizedeks. There is an acting governor on each world who is directly responsible to the Jerusem rulers. The Uversa conciliators maintain headquarters on each of the mansion worlds, while adjoining is the local rendezvous of the Technical Advisers. The reversion directors and celestial artisans maintain group headquarters on each of these worlds. The spironga function from mansion world number two onward, while all seven, in common with the other transitional\hyp{}culture planets and the headquarters world, are abundantly provided with spornagia of standard creation.
@@ -35,7 +35,7 @@
 \vs p047 3:2 The very centre of all activities on the first mansion world is the resurrection hall, the enormous temple of personality assembly. This gigantic structure consists of the central rendezvous of the seraphic destiny guardians, the Thought Adjusters, and the archangels of the resurrection. The Life Carriers also function with these celestial beings in the resurrection of the dead.
 \vs p047 3:3 The mortal\hyp{}mind transcripts and the active creature\hyp{}memory patterns as transformed from the material levels to the spiritual are the individual possession of the detached Thought Adjusters; these spiritized factors of mind, memory, and creature personality are forever a part of such Adjusters. The creature mind\hyp{}matrix and the passive potentials of identity are present in the morontia soul entrusted to the keeping of the seraphic destiny guardians. And it is the reuniting of the morontia\hyp{}soul trust of the seraphim and the spirit\hyp{}mind trust of the Adjuster that reassembles creature personality and constitutes resurrection of a sleeping survivor.
 \vs p047 3:4 If a transitory personality of mortal origin should never be thus reassembled, the spirit elements of the nonsurviving mortal creature would forever continue as an integral part of the individual experiential endowment of the onetime indwelling Adjuster.
-\vs p047 3:5 From the Temple of New Life there extend 7 radial wings, the resurrection halls of the mortal races. Each of these structures is devoted to the assembly of one of the 7 races of time. There are 100,000 personal resurrection chambers in each of these 7 wings terminating in the circular class assembly halls, which serve as the awakening chambers for as many as 1,000,000 individuals. These halls are surrounded by the personality assembly chambers of the blended races of the normal post\hyp{}Adamic worlds. Regardless of the technique which may be employed on the individual worlds of time in connection with special or dispensational resurrections, the real and conscious reassembly of actual and complete personality takes place in the resurrection halls of mansonia number one. Throughout all eternity you will recall the profound memory impressions of your first witnessing of these resurrection mornings.
+\vs p047 3:5 From the Temple of New Life there extend seven radial wings, the resurrection halls of the mortal races. Each of these structures is devoted to the assembly of one of the seven races of time. There are 100,000 personal resurrection chambers in each of these seven wings terminating in the circular class assembly halls, which serve as the awakening chambers for as many as 1,000,000 individuals. These halls are surrounded by the personality assembly chambers of the blended races of the normal post\hyp{}Adamic worlds. Regardless of the technique which may be employed on the individual worlds of time in connection with special or dispensational resurrections, the real and conscious reassembly of actual and complete personality takes place in the resurrection halls of mansonia number one. Throughout all eternity you will recall the profound memory impressions of your first witnessing of these resurrection mornings.
 \vs p047 3:6 \pc From the resurrection halls you proceed to the Melchizedek sector, where you are assigned permanent residence. Then you enter upon ten days of personal liberty. You are free to explore the immediate vicinity of your new home and to familiarize yourself with the program which lies immediately ahead. You also have time to gratify your desire to consult the registry and call upon your loved ones and other earth friends who may have preceded you to these worlds. At the end of your ten\hyp{}day period of leisure you begin the second step in the Paradise journey, for the mansion worlds are actual training spheres, not merely detention planets.
 \vs p047 3:7 \pc On mansion world number one (or another in case of advanced status) you will resume your intellectual training and spiritual development at the exact level whereon they were interrupted by death. Between the time of planetary death or translation and resurrection on the mansion world, mortal man gains absolutely nothing aside from experiencing the fact of survival. You begin over there right where you leave off down here.
 \vs p047 3:8 Almost the entire experience of mansion world number one pertains to deficiency ministry. Survivors arriving on this first of the detention spheres present so many and such varied defects of creature character and deficiencies of mortal experience that the major activities of the realm are occupied with the correction and cure of these manifold legacies of the life in the flesh on the material evolutionary worlds of time and space.
