--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -20,7 +20,7 @@
 \vs p049 1:6 The early stages of life evolution are not altogether in conformity with your present\hyp{}day views. \bibemph{Mortal man is not an evolutionary accident.} There is a precise system, a universal law, which determines the unfolding of the planetary life plan on the spheres of space. Time and the production of large numbers of a species are not the controlling influences. Mice reproduce much more rapidly than elephants, yet elephants evolve more rapidly than mice.
 \vs p049 1:7 The process of planetary evolution is orderly and controlled. The development of higher organisms from lower groupings of life is not accidental. Sometimes evolutionary progress is temporarily delayed by the destruction of certain favourable lines of life plasm carried in a selected species. It often requires ages upon ages to recoup the damage occasioned by the loss of a single superior strain of human heredity. These selected and superior strains of living protoplasm should be jealously and intelligently guarded when once they make their appearance. And on most of the inhabited worlds these superior potentials of life are valued much more highly than on Urantia.
 \usection{Planetary Physical Types}
-\vs p049 2:1 There is a standard and basic pattern of vegetable and animal life in each system. But the Life Carriers are oftentimes confronted with the necessity of modifying these basic patterns to conform to the varying physical conditions which confront them on numerous worlds of space. They foster a generalized system type of mortal creature, but there are 7 distinct physical types as well as thousands upon thousands of minor variants of these 7 outstanding differentiations:
+\vs p049 2:1 There is a standard and basic pattern of vegetable and animal life in each system. But the Life Carriers are oftentimes confronted with the necessity of modifying these basic patterns to conform to the varying physical conditions which confront them on numerous worlds of space. They foster a generalized system type of mortal creature, but there are seven distinct physical types as well as thousands upon thousands of minor variants of these seven outstanding differentiations:
 \vs p049 2:2 \ublistelem{1.}\bibnobreakspace Atmospheric types.
 \vs p049 2:3 \ublistelem{2.}\bibnobreakspace Elemental types.
 \vs p049 2:4 \ublistelem{3.}\bibnobreakspace Gravity types.
@@ -93,7 +93,7 @@
 \vs p049 5:27 As a result of the ministry of all the successive orders of divine sonship, the inhabited worlds and their advancing races begin to approach the apex of planetary evolution. Such worlds now become ripe for the culminating mission, the arrival of the Trinity Teacher Sons. This epoch of the Teacher Sons is the vestibule to the final planetary age --- evolutionary utopia --- the age of light and life.
 \vs p049 5:28 This classification of human beings will receive particular attention in a succeeding paper.
 \vs p049 5:29 \ublistelem{5.}\bibnobreakspace \bibemph{Creature\hyp{}kinship serials.} Planets are not only organized vertically into systems, constellations, and so on, but the universe administration also provides for horizontal groupings according to type, series, and other relationships. This lateral administration of the universe pertains more particularly to the co\hyp{}ordination of activities of a kindred nature which have been independently fostered on different spheres. These related classes of universe creatures are periodically inspected by certain composite corps of high personalities presided over by long\hyp{}experienced finaliters.
-\vs p049 5:30 These kinship factors are manifest on all levels, for kinship serials exist among nonhuman personalities as well as among mortal creatures --- even between human and superhuman orders. Intelligent beings are vertically related in 12 great groups of 7 major divisions each. The co\hyp{}ordination of these uniquely related groups of living beings is probably effected by some not fully comprehended technique of the Supreme Being.
+\vs p049 5:30 These kinship factors are manifest on all levels, for kinship serials exist among nonhuman personalities as well as among mortal creatures --- even between human and superhuman orders. Intelligent beings are vertically related in twelve great groups of seven major divisions each. The co\hyp{}ordination of these uniquely related groups of living beings is probably effected by some not fully comprehended technique of the Supreme Being.
 \vs p049 5:31 \ublistelem{6.}\bibnobreakspace \bibemph{Adjuster\hyp{}fusion series.} The spiritual classification or grouping of all mortals during their prefusion experience is wholly determined by the relation of the personality status to the indwelling Mystery Monitor. Almost 90\% of the inhabited worlds of Nebadon are peopled with Adjuster\hyp{}fusion mortals in contrast with a near\hyp{}by universe where scarcely more than one half of the worlds harbour beings who are Adjuster\hyp{}indwelt candidates for eternal fusion.
 \vs p049 5:32 \ublistelem{7.}\bibnobreakspace \bibemph{Techniques of terrestrial escape.} There is fundamentally only one way in which individual human life can be initiated on the inhabited worlds, and that is through creature procreation and natural birth; but there are numerous techniques whereby man escapes his terrestrial status and gains access to the inward moving stream of Paradise ascenders.
 \usection{Terrestrial Escape}
