--- a/tex/p055.tex
+++ b/tex/p055.tex
@@ -15,7 +15,7 @@
 \vs p055 0:1 The age of light and life is the final evolutionary attainment of a world of time and space. From the early times of primitive man, such an inhabited world has passed through the successive planetary ages --- the pre\hyp{} and the post\hyp{}Planetary Prince ages, the post\hyp{}Adamic age, the post\hyp{}Magisterial Son age, and the postbestowal Son age. And then is such a world made ready for the culminating evolutionary attainment, the settled status of light and life, by the ministry of the successive planetary missions of the Trinity Teacher Sons with their ever\hyp{}advancing revelations of divine truth and cosmic wisdom. In these endeavours the Teacher Sons enjoy the assistance of the Brilliant Evening Stars always, and the Melchizedeks sometimes, in establishing the final planetary age.
 \vs p055 0:2 This era of light and life, inaugurated by the Teacher Sons at the conclusion of their final planetary mission, continues indefinitely on the inhabited worlds. Each advancing stage of settled status may be segregated by the judicial actions of the Magisterial Sons into a succession of dispensations; but all such judicial actions are purely technical, in no way modifying the course of planetary events.
 \vs p055 0:3 \pc Only those planets which attain existence in the main circuits of the superuniverse are assured of continuous survival, but as far as we know, these worlds settled in light and life are destined to go on throughout the eternal ages of all future time.
-\vs p055 0:4 \pc There are 7 stages in the unfoldment of the era of light and life on an evolutionary world, and in this connection it should be noted that the worlds of the Spirit\hyp{}fused mortals evolve along lines identical with those of the Adjuster\hyp{}fusion series. These 7 stages of light and life are:
+\vs p055 0:4 \pc There are seven stages in the unfoldment of the era of light and life on an evolutionary world, and in this connection it should be noted that the worlds of the Spirit\hyp{}fused mortals evolve along lines identical with those of the Adjuster\hyp{}fusion series. These seven stages of light and life are:
 \vs p055 0:5 \ublistelem{1.}\bibnobreakspace The first or planetary stage.
 \vs p055 0:6 \ublistelem{2.}\bibnobreakspace The second or system stage.
 \vs p055 0:7 \ublistelem{3.}\bibnobreakspace The third or constellation stage.
@@ -42,7 +42,7 @@
 \vs p055 2:8 By the time a world attains the fourth stage of light and life, more than half the mortals leave the planet by translation from among the living. Such diminishment of death continues on and on, but I know of no system whose inhabited worlds, even though long settled in life, are entirely free from natural death as the technique of escape from the bonds of flesh. And until such a high state of planetary evolution is uniformly attained, the morontia\hyp{}training worlds of the local universe must continue in service as educational and cultural spheres for the evolving morontia progressors. The elimination of death is theoretically possible, but it has not yet occurred according to my observation. Perhaps such a status may be attained during the faraway stretches of the succeeding epochs of the seventh stage of settled planetary life.
 \vs p055 2:9 \pc The translated souls of the flowering ages of the settled spheres do not pass through the mansion worlds. Neither do they sojourn, as students, on the morontia worlds of the system or constellation. They do not pass through any of the earlier phases of morontia life. They are the only ascending mortals who so nearly escape the morontia transition from material existence to semispirit status. The initial experience of such \bibemph{Son\hyp{}seized} mortals in the ascension career is in the services of the progression worlds of the universe headquarters. And from these study worlds of Salvington they go back as teachers to the very worlds they passed by, subsequently going on inward to Paradise by the established route of mortal ascension.
 \vs p055 2:10 Could you but visit a planet in an advanced stage of development, you would quickly grasp the reasons for providing for the differential reception of ascending mortals on the mansion and higher morontia worlds. You would readily understand that beings passing on from such highly evolved spheres are prepared to resume their Paradise ascent far in advance of the average mortal arriving from a disordered and backward world like Urantia.
-\vs p055 2:11 No matter from what level of planetary attainment human beings may ascend to the morontia worlds, the 7 mansion spheres afford them ample opportunity to gain in experience as teacher\hyp{}students all of everything which they failed to pass through because of the advanced status of their native planets.
+\vs p055 2:11 No matter from what level of planetary attainment human beings may ascend to the morontia worlds, the seven mansion spheres afford them ample opportunity to gain in experience as teacher\hyp{}students all of everything which they failed to pass through because of the advanced status of their native planets.
 \vs p055 2:12 The universe is unfailing in the application of these equalizing techniques designed to ensure that no ascender shall be deprived of aught which is essential to his ascension experience.
 \usection{The Golden Ages}
 \vs p055 3:1 During this age of light and life the world increasingly prospers under the fatherly rule of the Planetary Sovereign. By this time the worlds are progressing under the momentum of one language, one religion, and, on normal spheres, one race. But this age is not perfect. These worlds still have well\hyp{}appointed hospitals, homes for the care of the sick. There still remain the problems of caring for accidental injuries and the inescapable infirmities attendant upon the decrepitude of old age and the disorders of senility. Disease has not been entirely vanquished, neither have the earth animals been subdued in perfection; but such worlds are like Paradise in comparison with the early times of primitive man during the pre\hyp{}Planetary Prince age. You would instinctively describe such a realm --- could you be suddenly transported to a planet in this stage of development --- as heaven on earth.
@@ -147,20 +147,20 @@
 \vs p055 10:10 If Michael should ever leave Nebadon, Gabriel would undoubtedly become chief administrator with the Father Melchizedek as his associate. At the same time new status would be imparted to all orders of permanent citizenship, such as Material Sons, univitatia, midsoniters, susatia, and Spirit\hyp{}fused mortals. But as long as evolution continues, the seraphim and the archangels will be required in universe administration.
 \vs p055 10:11 We are, however, satisfied regarding two features of our speculations: If the Creator Sons are destined to the outer universes, the Divine Ministers will undoubtedly accompany them. We are equally sure that the Melchizedeks are to remain with the universes of their origin. We hold that the Melchizedeks are destined to play ever\hyp{}increasingly responsible parts in local universe government and administration.
 \usection{The Minor and Major Sector Stages}
-\vs p055 11:1 Minor and major sectors of the superuniverse do not figure directly in the plan of being settled in light and life. Such an evolutionary progression pertains primarily to the local universe as a unit and concerns only the components of a local universe. A superuniverse is settled in light and life when all of its component local universes are thus perfected. But not 1 of the 7 superuniverses has attained a level of progression even approaching this.
+\vs p055 11:1 Minor and major sectors of the superuniverse do not figure directly in the plan of being settled in light and life. Such an evolutionary progression pertains primarily to the local universe as a unit and concerns only the components of a local universe. A superuniverse is settled in light and life when all of its component local universes are thus perfected. But not one of the seven superuniverses has attained a level of progression even approaching this.
 \vs p055 11:2 \pc \bibemph{The minor sector age.} As far as observations can penetrate, the fifth or minor sector stage of stabilization has exclusively to do with physical status and with the co\hyp{}ordinate settling of the 100 associated local universes in the established circuits of the superuniverse. Apparently none but the power centres and their associates are concerned in these realignments of the material creation.
 \vs p055 11:3 \pc \bibemph{The major sector age.} Concerning the sixth stage, or major sector stabilization, we can only conjecture since none of us have witnessed such an event. Nevertheless, we can postulate much concerning the administrative and other readjustments which would probably accompany such an advanced status of inhabited worlds and their universe groupings.
 \vs p055 11:4 Since the minor sector status has to do with co\hyp{}ordinate physical equilibrium, we infer that major sector unification will be concerned with certain new intellectual levels of attainment, possibly some advanced achievements in the supreme realization of cosmic wisdom.
 \vs p055 11:5 \pc We arrive at conclusions regarding the readjustments which would probably attend the realization of hitherto unattained levels of evolutionary progress by observing the results of such achievements on the individual worlds and in the experiences of individual mortals living on these older and highly developed spheres.
 \vs p055 11:6 Let it be made clear that the administrative mechanisms and governmental techniques of a universe or a superuniverse cannot in any manner limit or retard the evolutionary development or spiritual progress of an individual inhabited planet or of any individual mortal on such a sphere.
 \vs p055 11:7 In some of the older universes we find worlds settled in the fifth and the sixth stages of light and life --- even far extended into the seventh epoch --- whose local systems are not yet settled in light. Younger planets may delay system unification, but this does not in the least handicap the progress of an older and advanced world. Neither can environmental limitations, even on an isolated world, thwart the personal attainment of the individual mortal; Jesus of Nazareth, as a man among men, personally achieved the status of light and life over 1900 years ago on Urantia.
-\vs p055 11:8 It is by observing what takes place on long\hyp{}settled worlds that we arrive at fairly reliable conclusions as to what will happen when a whole superuniverse is settled in light, even if we cannot safely postulate the event of the stabilization of the 7 superuniverses.
+\vs p055 11:8 It is by observing what takes place on long\hyp{}settled worlds that we arrive at fairly reliable conclusions as to what will happen when a whole superuniverse is settled in light, even if we cannot safely postulate the event of the stabilization of the seven superuniverses.
 \usection{The Seventh or Superuniverse Stage}
 \vs p055 12:1 We cannot positively forecast what would occur when a superuniverse became settled in light because such an event has never factualized. From the teachings of the Melchizedeks, which have never been contradicted, we infer that sweeping changes would be made in the entire organization and administration of every unit of the creations of time and space extending from the inhabited worlds to the superuniverse headquarters.
 \vs p055 12:2 It is generally believed that large numbers of the otherwise unattached creature\hyp{}trinitized sons are to be assembled on the headquarters and divisional capitals of the settled superuniverses. This may be in anticipation of the sometime arrival of outer\hyp{}spacers on their way in to Havona and Paradise; but we really do not know.
 \vs p055 12:3 \pc If and when a superuniverse should be settled in light and life, we believe that the now advisory Unqualified Supervisors of the Supreme would become the high administrative body on the headquarters world of the superuniverse. These are the personalities who are able to contact directly with the absonite administrators, who will forthwith become active in the settled superuniverse. Although these Unqualified Supervisors have long functioned as advisers and counsellors in advanced evolutionary units of creation, they do not assume administrative responsibilities until the authority of the Supreme Being becomes sovereign.
 \vs p055 12:4 The Unqualified Supervisors of the Supreme, who function more extensively during this epoch, are not finite, absonite, ultimate, or infinite; they \bibemph{are} supremacy and only represent God the Supreme. They are the personalization of time\hyp{}space supremacy and therefore do not function in Havona. They function only as supreme unifiers. They may possibly be involved in the technique of universe reflectivity, but we are not certain.
-\vs p055 12:5 \pc None of us entertain a satisfactory concept of what will happen when the grand universe (the 7 superuniverses as dependent on Havona) becomes entirely settled in light and life. That event will undoubtedly be the most profound occurrence in the annals of eternity since the appearance of the central universe. There are those who hold that the Supreme Being himself will emerge from the Havona mystery enshrouding his spirit person and will become residential on the headquarters of the seventh superuniverse as the almighty and experiential sovereign of the perfected creations of time and space. But we really do not know.
+\vs p055 12:5 \pc None of us entertain a satisfactory concept of what will happen when the grand universe (the seven superuniverses as dependent on Havona) becomes entirely settled in light and life. That event will undoubtedly be the most profound occurrence in the annals of eternity since the appearance of the central universe. There are those who hold that the Supreme Being himself will emerge from the Havona mystery enshrouding his spirit person and will become residential on the headquarters of the seventh superuniverse as the almighty and experiential sovereign of the perfected creations of time and space. But we really do not know.
 \vsetoff
 \vs p055 12:6 [Presented by a Mighty Messenger temporarily assigned to the Archangel Council on Urantia.]
 \quizlink
