--- a/tex/p062.tex
+++ b/tex/p062.tex
@@ -28,7 +28,7 @@
 \vs p062 3:6 \pc Compared with the ancestral species, the mid\hyp{}mammals were an improvement in every way. Even their potential life span was longer, being about 25 years. A number of rudimentary human traits appeared in this new species. In addition to the innate propensities exhibited by their ancestors, these mid\hyp{}mammals were capable of showing disgust in certain repulsive situations. They further possessed a well\hyp{}defined hoarding instinct; they would hide food for subsequent use and were greatly given to the collection of smooth round pebbles and certain types of round stones suitable for defensive and offensive ammunition.
 \vs p062 3:7 These mid\hyp{}mammals were the first to exhibit a definite construction propensity, as shown in their rivalry in the building of both treetop homes and their many\hyp{}tunnelled subterranean retreats; they were the first species of mammals ever to provide for safety in both arboreal and underground shelters. They largely forsook the trees as places of abode, living on the ground during the day and sleeping in the treetops at night.
 \vs p062 3:8 As time passed, the natural increase in numbers eventually resulted in serious food competition and sex rivalry, all of which culminated in a series of internecine battles that nearly destroyed the entire species. These struggles continued until only one group of less than 100 individuals was left alive. But peace once more prevailed, and this lone surviving tribe built anew its treetop bedrooms and once again resumed a normal and semipeaceful existence.
-\vs p062 3:9 \pc You can hardly realize by what narrow margins your prehuman ancestors missed extinction from time to time. Had the ancestral frog of all humanity jumped 5\,cm less on a certain occasion, the whole course of evolution would have been markedly changed. The immediate lemurlike mother of the dawn\hyp{}mammal species escaped death no less than 5 times by mere hairbreadth margins before she gave birth to the father of the new and higher mammalian order. But the closest call of all was when lightning struck the tree in which the prospective mother of the Primates twins was sleeping. Both of these mid\hyp{}mammal parents were severely shocked and badly burned; 3 of their 7 children were killed by this bolt from the skies. These evolving animals were almost superstitious. This couple whose treetop home had been struck were really the leaders of the more progressive group of the mid\hyp{}mammal species; and following their example, more than half the tribe, embracing the more intelligent families, moved about 3\,km away from this locality and began the construction of new treetop abodes and new ground shelters --- their transient retreats in time of sudden danger.
+\vs p062 3:9 \pc You can hardly realize by what narrow margins your prehuman ancestors missed extinction from time to time. Had the ancestral frog of all humanity jumped 5\,cm less on a certain occasion, the whole course of evolution would have been markedly changed. The immediate lemurlike mother of the dawn\hyp{}mammal species escaped death no less than 5 times by mere hairbreadth margins before she gave birth to the father of the new and higher mammalian order. But the closest call of all was when lightning struck the tree in which the prospective mother of the Primates twins was sleeping. Both of these mid\hyp{}mammal parents were severely shocked and badly burned; three of their seven children were killed by this bolt from the skies. These evolving animals were almost superstitious. This couple whose treetop home had been struck were really the leaders of the more progressive group of the mid\hyp{}mammal species; and following their example, more than half the tribe, embracing the more intelligent families, moved about 3\,km away from this locality and began the construction of new treetop abodes and new ground shelters --- their transient retreats in time of sudden danger.
 \vs p062 3:10 Soon after the completion of their home, this couple, veterans of so many struggles, found themselves the proud parents of twins, the most interesting and important animals ever to have been born into the world up to that time, for they were the first of the new species of \bibemph{Primates} constituting the next vital step in prehuman evolution.
 \vs p062 3:11 \pc Contemporaneously with the birth of these Primates twins, another couple --- a peculiarly retarded male and female of the mid\hyp{}mammal tribe, a couple that were both mentally and physically inferior --- also gave birth to twins. These twins, one male and one female, were indifferent to conquest; they were concerned only with obtaining food and, since they would not eat flesh, soon lost all interest in seeking prey. These retarded twins became the founders of the modern simian tribes. Their descendants sought the warmer southern regions with their mild climates and an abundance of tropical fruits, where they have continued much as of that day except for those branches which mated with the earlier types of gibbons and apes and have greatly deteriorated in consequence.
 \vs p062 3:12 And so it may be readily seen that man and the ape are related only in that they sprang from the mid\hyp{}mammals, a tribe in which there occurred the contemporaneous birth and subsequent segregation of two pairs of twins: the inferior pair destined to produce the modern types of monkey, baboon, chimpanzee, and gorilla; the superior pair destined to continue the line of ascent which evolved into man himself.
@@ -55,18 +55,18 @@
 \vs p062 5:11 Soon after this young couple forsook their associates to found the human race, their Primates father became disconsolate --- he was heartbroken. He refused to eat, even when food was brought to him by his other children. His brilliant offspring having been lost, life did not seem worth living among his ordinary fellows; so he wandered off into the forest, was set upon by hostile gibbons and beaten to death.
 \usection{Evolution of the Human Mind}
 \vs p062 6:1 We, the Life Carriers on Urantia, had passed through the long vigil of watchful waiting since the day we first planted the life plasm in the planetary waters, and naturally the appearance of the first really intelligent and volitional beings brought to us great joy and supreme satisfaction.
-\vs p062 6:2 We had been watching the twins develop mentally through our observation of the functioning of the 7 adjutant mind\hyp{}spirits assigned to Urantia at the time of our arrival on the planet. Throughout the long evolutionary development of planetary life, these tireless mind ministers had ever registered their increasing ability to contact with the successively expanding brain capacities of the progressively superior animal creatures.
+\vs p062 6:2 We had been watching the twins develop mentally through our observation of the functioning of the seven adjutant mind\hyp{}spirits assigned to Urantia at the time of our arrival on the planet. Throughout the long evolutionary development of planetary life, these tireless mind ministers had ever registered their increasing ability to contact with the successively expanding brain capacities of the progressively superior animal creatures.
 \vs p062 6:3 At first only the \bibemph{spirit of intuition} could function in the instinctive and reflex behaviour of the primordial animal life. With the differentiation of higher types, the \bibemph{spirit of understanding} was able to endow such creatures with the gift of spontaneous association of ideas. Later on we observed the \bibemph{spirit of courage} in operation; evolving animals really developed a crude form of protective self\hyp{}consciousness. Subsequent to the appearance of the mammalian groups, we beheld the \bibemph{spirit of knowledge} manifesting itself in increased measure. And the evolution of the higher mammals brought the function of the \bibemph{spirit of counsel,} with the resulting growth of the herd instinct and the beginnings of primitive social development.
 \vs p062 6:4 Increasingly, on down through the dawn mammals, the mid\hyp{}mammals, and the Primates, we had observed the augmented service of the first 5 adjutants. But never had the remaining two, the highest mind ministers, been able to function in the Urantia type of evolutionary mind.
 \vs p062 6:5 Imagine our joy one day --- the twins were about ten years old --- when the \bibemph{spirit of worship} made its first contact with the mind of the female twin and shortly thereafter with the male. We knew that something closely akin to human mind was approaching culmination; and when, about a year later, they finally resolved, as a result of meditative thought and purposeful decision, to flee from home and journey north, then did the \bibemph{spirit of wisdom} begin to function on Urantia and in these two now recognized human minds.
-\vs p062 6:6 There was an immediate and new order of mobilization of the 7 adjutant mind\hyp{}spirits. We were alive with expectation; we realized that the long\hyp{}waited\hyp{}for hour was approaching; we knew we were upon the threshold of the realization of our protracted effort to evolve will creatures on Urantia.
+\vs p062 6:6 There was an immediate and new order of mobilization of the seven adjutant mind\hyp{}spirits. We were alive with expectation; we realized that the long\hyp{}waited\hyp{}for hour was approaching; we knew we were upon the threshold of the realization of our protracted effort to evolve will creatures on Urantia.
 \usection{Recognition as an Inhabited World}
 \vs p062 7:1 We did not have to wait long. At noon, the day after the runaway of the twins, there occurred the initial test flash of the universe circuit signals at the planetary reception\hyp{}focus of Urantia. We were, of course, all astir with the realization that a great event was impending; but since this world was a life\hyp{}experiment station, we had not the slightest idea of just how we would be apprised of the recognition of intelligent life on the planet. But we were not long in suspense. On the third day after the elopement of the twins, and before the Life Carrier corps departed, there arrived the Nebadon archangel of initial planetary circuit establishment.
 \vs p062 7:2 It was an eventful day on Urantia when our small group gathered about the planetary pole of space communication and received the first message from Salvington over the newly established mind circuit of the planet. And this first message, dictated by the chief of the archangel corps, said:
 \vs p062 7:3 “To the Life Carriers on Urantia --- Greetings! We transmit assurance of great pleasure on Salvington, Edentia, and Jerusem in honour of the registration on the headquarters of Nebadon of the signal of the existence on Urantia of mind of will dignity. The purposeful decision of the twins to flee northward and segregate their offspring from their inferior ancestors has been noted. This is the first decision of mind --- the human type of mind --- on Urantia and automatically establishes the circuit of communication over which this initial message of acknowledgement is transmitting.”
 \vs p062 7:4 Next over this new circuit came the greetings of the Most Highs of Edentia, containing instructions for the resident Life Carriers forbidding us to interfere with the pattern of life we had established. We were directed not to intervene in the affairs of human progress. It should not be inferred that Life Carriers ever arbitrarily and mechanically interfere with the natural outworking of the planetary evolutionary plans, for we do not. But up to this time we had been permitted to manipulate the environment and shield the life plasm in a special manner, and it was this extraordinary, but wholly natural, supervision that was to be discontinued.
 \vs p062 7:5 And no sooner had the Most Highs left off speaking than the beautiful message of Lucifer, then sovereign of the Satania system, began to planetize. Now the Life Carriers heard the welcome words of their own chief and received his permission to return to Jerusem. This message from Lucifer contained the official acceptance of the Life Carriers’ work on Urantia and absolved us from all future criticism of any of our efforts to improve the life patterns of Nebadon as established in the Satania system.
-\vs p062 7:6 These messages from Salvington, Edentia, and Jerusem formally marked the termination of the Life Carriers’ agelong supervision of the planet. For ages we had been on duty, assisted only by the 7 adjutant mind\hyp{}spirits and the Master Physical Controllers. And now, will, the power of choosing to worship and to ascend, having appeared in the evolutionary creatures of the planet, we realized that our work was finished, and our group prepared to depart. Urantia being a life\hyp{}modification world, permission was granted to leave behind two senior Life Carriers with 12 assistants, and I was chosen as one of this group and have ever since been on Urantia.
+\vs p062 7:6 These messages from Salvington, Edentia, and Jerusem formally marked the termination of the Life Carriers’ agelong supervision of the planet. For ages we had been on duty, assisted only by the seven adjutant mind\hyp{}spirits and the Master Physical Controllers. And now, will, the power of choosing to worship and to ascend, having appeared in the evolutionary creatures of the planet, we realized that our work was finished, and our group prepared to depart. Urantia being a life\hyp{}modification world, permission was granted to leave behind two senior Life Carriers with 12 assistants, and I was chosen as one of this group and have ever since been on Urantia.
 \vs p062 7:7 It is just 993,408 years ago (from the year A.D.\,1934) that Urantia was formally recognized as a planet of human habitation in the universe of Nebadon. Biologic evolution had once again achieved the human levels of will dignity; man had arrived on planet 606 of Satania.
 \vsetoff
 \vs p062 7:8 [Sponsored by a Life Carrier of Nebadon resident on Urantia.]
