--- a/tex/p077.tex
+++ b/tex/p077.tex
@@ -53,7 +53,7 @@
 \vs p077 4:8 The elaborate records left by the Sumerians describe the site of a remarkable settlement which was located on the Persian Gulf near the earlier city of Dilmun. The Egyptians called this city of ancient glory Dilmat, while the later Adamized Sumerians confused both the first and second Nodite cities with Dalamatia and called all three Dilmun. And already have archaeologists found these ancient Sumerian clay tablets which tell of this earthly paradise “where the Gods first blessed mankind with the example of civilized and cultured life.” And these tablets, descriptive of Dilmun, the paradise of men and God, are now silently resting on the dusty shelves of many museums.
 \vs p077 4:9 The Sumerians well knew of the first and second Edens but, despite extensive intermarriage with the Adamites, continued to regard the garden dwellers to the north as an alien race. Sumerian pride in the more ancient Nodite culture led them to ignore these later vistas of glory in favour of the grandeur and paradisiacal traditions of the city of Dilmun.
 \vs p077 4:10 \ublistelem{4.}\bibnobreakspace \bibemph{The northern Nodites and Amadonites --- the Vanites.} This group arose prior to the Bablot conflict. These northernmost Nodites were descendants of those who had forsaken the leadership of Nod and his successors for that of Van and Amadon.
-\vs p077 4:11 \pc Some of the early associates of Van subsequently settled about the shores of the lake which still bears his name, and their traditions grew up about this locality. Ararat became their sacred mountain, having much the same meaning to later\hyp{}day Vanites that Sinai had to the Hebrews. 10,000 years ago the Vanite ancestors of the Assyrians taught that their moral law of 7 commandments had been given to Van by the Gods upon Mount Ararat. They firmly believed that Van and his associate Amadon were taken alive from the planet while they were up on the mountain engaged in worship.
+\vs p077 4:11 \pc Some of the early associates of Van subsequently settled about the shores of the lake which still bears his name, and their traditions grew up about this locality. Ararat became their sacred mountain, having much the same meaning to later\hyp{}day Vanites that Sinai had to the Hebrews. 10,000 years ago the Vanite ancestors of the Assyrians taught that their moral law of seven commandments had been given to Van by the Gods upon Mount Ararat. They firmly believed that Van and his associate Amadon were taken alive from the planet while they were up on the mountain engaged in worship.
 \vs p077 4:12 Mount Ararat was the sacred mountain of northern Mesopotamia, and since much of your tradition of these ancient times was acquired in connection with the Babylonian story of the flood, it is not surprising that Mount Ararat and its region were woven into the later Jewish story of Noah and the universal flood.
 \vs p077 4:13 About 35,000\,B.C. Adamson visited one of the easternmost of the old Vanite settlements to found his centre of civilization.
 \usection{Adamson and Ratta}
@@ -63,7 +63,7 @@
 \vs p077 5:4 Adamson would not desert his parents on Urantia, he was disinclined to flee from hardship or danger, but he found the associations of the second garden far from satisfying. He did much to forward the early activities of defence and construction but decided to leave for the north at the earliest opportunity. And though his departure was wholly pleasant, Adam and Eve were much grieved to lose their eldest son, to have him go out into a strange and hostile world, as they feared, never to return.
 \vs p077 5:5 A company of 27 followed Adamson northward in quest of these people of his childhood fantasies. In a little over three years Adamson’s party actually found the object of their adventure, and among these people he discovered a wonderful and beautiful woman, 20 years old, who claimed to be the last pure\hyp{}line descendant of the Prince’s staff. This woman, Ratta, said that her ancestors were all descendants of two of the fallen staff of the Prince. She was the last of her race, having no living brothers or sisters. She had about decided not to mate, had about made up her mind to die without issue, but she lost her heart to the majestic Adamson. And when she heard the story of Eden, how the predictions of Van and Amadon had really come to pass, and as she listened to the recital of the Garden default, she was encompassed with but a single thought --- to marry this son and heir of Adam. And quickly the idea grew upon Adamson. In a little more than three months they were married.
 \vs p077 5:6 \pc Adamson and Ratta had a family of 67 children. They gave origin to a great line of the world’s leadership, but they did something more. It should be remembered that both of these beings were really superhuman. Every fourth child born to them was of a unique order. It was often invisible. Never in the world’s history had such a thing occurred. Ratta was greatly perturbed --- even superstitious --- but Adamson well knew of the existence of the primary midwayers, and he concluded that something similar was transpiring before his eyes. When the second strangely behaving offspring arrived, he decided to mate them, since one was male and the other female, and this is the origin of the secondary order of midwayers. Within 100 years, before this phenomenon ceased, almost 2,000 were brought into being.
-\vs p077 5:7 \pc Adamson lived for 396 years. Many times he returned to visit his father and mother. Every 7 years he and Ratta journeyed south to the second garden, and meanwhile the midwayers kept him informed regarding the welfare of his people. During Adamson’s life they did great service in upbuilding a new and independent world centre for truth and righteousness.
+\vs p077 5:7 \pc Adamson lived for 396 years. Many times he returned to visit his father and mother. Every seven years he and Ratta journeyed south to the second garden, and meanwhile the midwayers kept him informed regarding the welfare of his people. During Adamson’s life they did great service in upbuilding a new and independent world centre for truth and righteousness.
 \vs p077 5:8 Adamson and Ratta thus had at their command this corps of marvellous helpers, who laboured with them throughout their long lives to assist in the propagation of advanced truth and in the spread of higher standards of spiritual, intellectual, and physical living. And the results of this effort at world betterment never did become fully eclipsed by subsequent retrogressions.
 \vs p077 5:9 \pc The Adamsonites maintained a high culture for almost 7,000 years from the times of Adamson and Ratta. Later on they became admixed with the neighbouring Nodites and Andonites and were also included among the “mighty men of old.” And some of the advances of that age persisted to become a latent part of the cultural potential which later blossomed into European civilization.
 \vs p077 5:10 This centre of civilization was situated in the region east of the southern end of the Caspian Sea, near the Kopet Dagh. A short way up in the foothills of Turkestan are the vestiges of what was onetime the Adamsonite headquarters of the violet race. In these highland sites, situated in a narrow and ancient fertile belt lying in the lower foothills of the Kopet range, there successively arose at various periods four diverse cultures respectively fostered by four different groups of Adamson’s descendants. It was the second of these groups which migrated westward to Greece and the islands of the Mediterranean. The residue of Adamson’s descendants migrated north and west to enter Europe with the blended stock of the last Andite wave coming out of Mesopotamia, and they were also numbered among the Andite\hyp{}Aryan invaders of India.
