--- a/tex/p135.tex
+++ b/tex/p135.tex
@@ -14,7 +14,7 @@
 \author{Midwayer Commission}
 \vs p135 0:1 John the Baptist was born March 25, 7\,B.C., in accordance with the promise that Gabriel made to Elizabeth in June of the previous year. For five months Elizabeth kept secret Gabriel’s visitation; and when she told her husband, Zacharias, he was greatly troubled and fully believed her narrative only after he had an unusual dream about six weeks before the birth of John. Excepting the visit of Gabriel to Elizabeth and the dream of Zacharias, there was nothing unusual or supernatural connected with the birth of John the Baptist.
 \vs p135 0:2 On the eighth day John was circumcised according to the Jewish custom. He grew up as an ordinary child, day by day and year by year, in the small village known in those days as the City of Judah, about 6.4\,km west of Jerusalem.
-\vs p135 0:3 The most eventful occurrence in John’s early childhood was the visit, in company with his parents, to Jesus and the Nazareth family. This visit occurred in the month of June, 1\,B.C., when he was a little over 6 years of age.
+\vs p135 0:3 The most eventful occurrence in John’s early childhood was the visit, in company with his parents, to Jesus and the Nazareth family. This visit occurred in the month of June, 1\,B.C., when he was a little over six years of age.
 \vs p135 0:4 After their return from Nazareth John’s parents began the systematic education of the lad. There was no synagogue school in this little village; however, as he was a priest, Zacharias was fairly well educated, and Elizabeth was far better educated than the average Judean woman; she was also of the priesthood, being a descendant of the “daughters of Aaron.” Since John was an only child, they spent a great deal of time on his mental and spiritual training. Zacharias had only short periods of service at the temple in Jerusalem so that he devoted much of his time to teaching his son.
 \vs p135 0:5 Zacharias and Elizabeth had a small farm on which they raised sheep. They hardly made a living on this land, but Zacharias received a regular allowance from the temple funds dedicated to the priesthood.
 \usection{John Becomes a Nazarite}
