--- a/tex/p178.tex
+++ b/tex/p178.tex
@@ -24,7 +24,7 @@
 \vs p178 1:17 Throughout the vicissitudes of life, remember always to love one another. Do not strive with men, even with unbelievers. Show mercy even to those who despitefully abuse you. Show yourselves to be loyal citizens, upright artisans, praiseworthy neighbours, devoted kinsmen, understanding parents, and sincere believers in the brotherhood of the Father’s kingdom. And my spirit shall be upon you, now and even to the end of the world.
 \vs p178 1:18 \pc When Jesus had concluded his teaching, it was almost 13:00, and they immediately went back to the camp, where David and his associates had lunch ready for them.
 \usection{After the Noontime Meal}
-\vs p178 2:1 Not many of the Master’s hearers were able to take in even a part of his forenoon address. Of all who heard him, the Greeks comprehended most. Even the 11 apostles were bewildered by his allusions to future political kingdoms and to successive generations of kingdom believers. Jesus’ most devoted followers could not reconcile the impending end of his earthly ministry with these references to an extended future of gospel activities. Some of these Jewish believers were beginning to sense that earth’s greatest tragedy was about to take place, but they could not reconcile such an impending disaster with either the Master’s cheerfully indifferent personal attitude or his forenoon discourse, wherein he repeatedly alluded to the future transactions of the heavenly kingdom, extending over vast stretches of time and embracing relations with many and successive temporal kingdoms on earth.
+\vs p178 2:1 Not many of the Master’s hearers were able to take in even a part of his forenoon address. Of all who heard him, the Greeks comprehended most. Even the eleven apostles were bewildered by his allusions to future political kingdoms and to successive generations of kingdom believers. Jesus’ most devoted followers could not reconcile the impending end of his earthly ministry with these references to an extended future of gospel activities. Some of these Jewish believers were beginning to sense that earth’s greatest tragedy was about to take place, but they could not reconcile such an impending disaster with either the Master’s cheerfully indifferent personal attitude or his forenoon discourse, wherein he repeatedly alluded to the future transactions of the heavenly kingdom, extending over vast stretches of time and embracing relations with many and successive temporal kingdoms on earth.
 \vs p178 2:2 By noon of this day all the apostles and disciples had learned about the hasty flight of Lazarus from Bethany. They began to sense the grim determination of the Jewish rulers to exterminate Jesus and his teachings.
 \vs p178 2:3 David Zebedee, through the work of his secret agents in Jerusalem, was fully advised concerning the progress of the plan to arrest and kill Jesus. He knew all about the part of Judas in this plot, but he never disclosed this knowledge to the other apostles nor to any of the disciples. Shortly after lunch he did lead Jesus aside and, making bold, asked him whether he knew --- but he never got further with his question. The Master, holding up his hand, stopped him, saying: \textcolour{ubdarkred}{“Yes, David, I know all about it, and I know that you know, but see to it that you tell no man. Only doubt not in your own heart that the will of God will prevail in the end.”}
 \vs p178 2:4 This conversation with David was interrupted by the arrival of a messenger from Philadelphia bringing word that Abner had heard of the plot to kill Jesus and asking if he should depart for Jerusalem. This runner hastened off for Philadelphia with this word for Abner: \textcolour{ubdarkred}{“Go on with your work. If I depart from you in the flesh, it is only that I may return in the spirit. I will not forsake you. I will be with you to the end.”}
