--- a/tex/p181.tex
+++ b/tex/p181.tex
@@ -5,7 +5,7 @@
 \vs p181 0:1 After the conclusion of the farewell discourse to the 11, Jesus visited informally with them and recounted many experiences which concerned them as a group and as individuals. At last it was beginning to dawn upon these Galileans that their friend and teacher was going to leave them, and their hope grasped at the promise that, after a little while, he would again be with them, but they were prone to forget that this return visit was also for a little while. Many of the apostles and the leading disciples really thought that this promise to return for a short season (the short interval between the resurrection and the ascension) indicated that Jesus was just going away for a brief visit with his Father, after which he would return to establish the kingdom. And such an interpretation of his teaching conformed both with their preconceived beliefs and with their ardent hopes. Since their lifelong beliefs and hopes of wish fulfilment were thus agreed, it was not difficult for them to find an interpretation of the Master’s words which would justify their intense longings.
 \vs p181 0:2 After the farewell discourse had been discussed and had begun to settle down in their minds, Jesus again called the apostles to order and began the impartation of his final admonitions and warnings.
 \usection{Last Words of Comfort}
-\vs p181 1:1 When the 11 had taken their seats, Jesus stood and addressed them: \textcolour{ubdarkred}{“As long as I am with you in the flesh, I can be but one individual in your midst or in the entire world. But when I have been delivered from this investment of mortal nature, I will be able to return as a spirit indweller of each of you and of all other believers in this gospel of the kingdom. In this way the Son of Man will become a spiritual incarnation in the souls of all true believers.}
+\vs p181 1:1 When the eleven had taken their seats, Jesus stood and addressed them: \textcolour{ubdarkred}{“As long as I am with you in the flesh, I can be but one individual in your midst or in the entire world. But when I have been delivered from this investment of mortal nature, I will be able to return as a spirit indweller of each of you and of all other believers in this gospel of the kingdom. In this way the Son of Man will become a spiritual incarnation in the souls of all true believers.}
 \vs p181 1:2 \textcolour{ubdarkred}{“When I have returned to live in you and work through you, I can the better lead you on through this life and guide you through the many abodes in the future life in the heaven of heavens. Life in the Father’s eternal creation is not an endless rest of idleness and selfish ease but rather a ceaseless progression in grace, truth, and glory. Each of the many, many stations in my Father’s house is a stopping place, a life designed to prepare you for the next one ahead. And so will the children of light go on from glory to glory until they attain the divine estate wherein they are spiritually perfected even as the Father is perfect in all things.}
 \vs p181 1:3 \textcolour{ubdarkred}{“If you would follow after me when I leave you, put forth your earnest efforts to live in accordance with the spirit of my teachings and with the ideal of my life --- the doing of my Father’s will. This do instead of trying to imitate my natural life in the flesh as I have, perforce, been required to live it on this world.}
 \vs p181 1:4 \textcolour{ubdarkred}{“The Father sent me into this world, but only a few of you have chosen fully to receive me. I will pour out my spirit upon all flesh, but all men will not choose to receive this new teacher as the guide and counsellor of the soul. But as many as do receive him shall be enlightened, cleansed, and comforted. And this Spirit of Truth will become in them a well of living water springing up into eternal life.}
