--- a/tex/p192.tex
+++ b/tex/p192.tex
@@ -13,13 +13,13 @@
 \vs p192 1:1 About 6:00 Friday morning, April 21, the morontia Master made his 13\ts{th} appearance, the first in Galilee, to the 10 apostles as their boat drew near the shore close to the usual landing place at Bethsaida.
 \vs p192 1:2 After the apostles had spent the afternoon and early evening of Thursday in waiting at the Zebedee home, Simon Peter suggested that they go fishing. When Peter proposed the fishing trip, all of the apostles decided to go along. All night they toiled with the nets but caught no fish. They did not much mind the failure to make a catch, for they had many interesting experiences to talk over, things which had so recently happened to them at Jerusalem. But when daylight came, they decided to return to Bethsaida. As they neared the shore, they saw someone on the beach, near the boat landing, standing by a fire. At first they thought it was John Mark, who had come down to welcome them back with their catch, but as they drew nearer the shore, they saw they were mistaken --- the man was too tall for John. It had occurred to none of them that the person on the shore was the Master. They did not altogether understand why Jesus wanted to meet with them amidst the scenes of their earlier associations and out in the open in contact with nature, far away from the shut\hyp{}in environment of Jerusalem with its tragic associations of fear, betrayal, and death. He had told them that, if they would go into Galilee, he would meet them there, and he was about to fulfil that promise.
 \vs p192 1:3 As they dropped anchor and prepared to enter the small boat for going ashore, the man on the beach called to them, \textcolour{ubdarkred}{“Lads, have you caught anything?”} And when they answered, “No,” he spoke again. \textcolour{ubdarkred}{“Cast the net on the right side of the boat, and you will find fish.”} While they did not know it was Jesus who had directed them, with one accord they cast in the net as they had been instructed, and immediately it was filled, so much so that they were hardly able to draw it up. Now, John Zebedee was quick of perception, and when he saw the heavy\hyp{}laden net, he perceived that it was the Master who had spoken to them. When this thought came into his mind, he leaned over and whispered to Peter, “It is the Master.” Peter was ever a man of thoughtless action and impetuous devotion; so when John whispered this in his ear, he quickly arose and cast himself into the water that he might the sooner reach the Master’s side. His brethren came up close behind him, having come ashore in the small boat, hauling the net of fishes after them.
-\vs p192 1:4 By this time John Mark was up and, seeing the apostles coming ashore with the heavy\hyp{}laden net, ran down the beach to greet them; and when he saw 11 men instead of ten, he surmised that the unrecognized one was the risen Jesus, and as the astonished ten stood by in silence, the youth rushed up to the Master and, kneeling at his feet, said, “My Lord and my Master.” And then Jesus spoke, not as he had in Jerusalem, when he greeted them with \textcolour{ubdarkred}{“Peace be upon you,”} but in commonplace tones he addressed John Mark: \textcolour{ubdarkred}{“Well, John, I am glad to see you again and in carefree Galilee, where we can have a good visit. Stay with us, John, and have breakfast.”}
+\vs p192 1:4 By this time John Mark was up and, seeing the apostles coming ashore with the heavy\hyp{}laden net, ran down the beach to greet them; and when he saw eleven men instead of ten, he surmised that the unrecognized one was the risen Jesus, and as the astonished ten stood by in silence, the youth rushed up to the Master and, kneeling at his feet, said, “My Lord and my Master.” And then Jesus spoke, not as he had in Jerusalem, when he greeted them with \textcolour{ubdarkred}{“Peace be upon you,”} but in commonplace tones he addressed John Mark: \textcolour{ubdarkred}{“Well, John, I am glad to see you again and in carefree Galilee, where we can have a good visit. Stay with us, John, and have breakfast.”}
 \vs p192 1:5 As Jesus talked with the young man, the ten were so astonished and surprised that they neglected to haul the net of fish in upon the beach. Now spoke Jesus: \textcolour{ubdarkred}{“Bring in your fish and prepare some for breakfast. Already we have the fire and much bread.”}
 \vs p192 1:6 While John Mark had paid homage to the Master, Peter had for a moment been shocked at the sight of the coals of fire glowing there on the beach; the scene reminded him so vividly of the midnight fire of charcoal in the courtyard of Annas, where he had disowned the Master, but he shook himself and, kneeling at the Master’s feet, exclaimed, “My Lord and my Master!”
 \vs p192 1:7 Peter then joined his comrades as they hauled in the net. When they had landed their catch, they counted the fish, and there were 153 large ones. And again was the mistake made of calling this another miraculous catch of fish. There was no miracle connected with this episode. It was merely an exercise of the Master’s preknowledge. He knew the fish were there and accordingly directed the apostles where to cast the net.
 \vs p192 1:8 Jesus spoke to them, saying: \textcolour{ubdarkred}{“Come now, all of you, to breakfast. Even the twins should sit down while I visit with you; John Mark will dress the fish.”} John Mark brought seven good\hyp{}sized fish, which the Master put on the fire, and when they were cooked, the lad served them to the ten. Then Jesus broke the bread and handed it to John, who in turn served it to the hungry apostles. When they had all been served, Jesus bade John Mark sit down while he himself served the fish and the bread to the lad. And as they ate, Jesus visited with them and recounted their many experiences in Galilee and by this very lake.
 \vs p192 1:9 \pc This was the third time Jesus had manifested himself to the apostles as a group. When Jesus first addressed them, asking if they had any fish, they did not suspect who he was because it was a common experience for these fishermen on the Sea of Galilee, when they came ashore, to be thus accosted by the fish merchants of Tarichea, who were usually on hand to buy the fresh catches for the drying establishments.
-\vs p192 1:10 \pc Jesus visited with the ten apostles and John Mark for more than an hour, and then he walked up and down the beach, talking with them two and two --- but not the same couples he had at first sent out together to teach. All 11 of the apostles had come down from Jerusalem together, but Simon Zelotes grew more and more despondent as they drew near Galilee, so that, when they reached Bethsaida, he forsook his brethren and returned to his home.
+\vs p192 1:10 \pc Jesus visited with the ten apostles and John Mark for more than an hour, and then he walked up and down the beach, talking with them two and two --- but not the same couples he had at first sent out together to teach. All eleven of the apostles had come down from Jerusalem together, but Simon Zelotes grew more and more despondent as they drew near Galilee, so that, when they reached Bethsaida, he forsook his brethren and returned to his home.
 \vs p192 1:11 Before taking leave of them this morning, Jesus directed that two of the apostles should volunteer to go to Simon Zelotes and bring him back that very day. And Peter and Andrew did so.
 \usection{Visiting with the Apostles Two and Two}
 \vs p192 2:1 When they had finished breakfast, and while the others sat by the fire, Jesus beckoned to Peter and to John that they should come with him for a stroll on the beach. As they walked along, Jesus said to John, \textcolour{ubdarkred}{“John, do you love me?”} And when John answered, “Yes, Master, with all my heart,” the Master said: \textcolour{ubdarkred}{“Then, John, give up your intolerance and learn to love men as I have loved you. Devote your life to proving that love is the greatest thing in the world. It is the love of God that impels men to seek salvation. Love is the ancestor of all spiritual goodness, the essence of the true and the beautiful.”}
@@ -37,15 +37,15 @@
 \vs p192 2:13 \pc Then he walked and talked with the Alpheus twins, James and Judas, and speaking to both of them, he asked, \textcolour{ubdarkred}{“James and Judas, do you believe in me?”} And when they both answered, “Yes, Master, we do believe,” he said: \textcolour{ubdarkred}{“I will soon leave you. You see that I have already left you in the flesh. I tarry only a short time in this form before I go to my Father. You believe in me --- you are my apostles, and you always will be. Go on believing and remembering your association with me, when I am gone, and after you have, perchance, returned to the work you used to do before you came to live with me. Never allow a change in your outward work to influence your allegiance. Have faith in God to the end of your days on earth. Never forget that, when you are a faith son of God, all upright work of the realm is sacred. Nothing which a son of God does can be common. Do your work, therefore, from this time on, as for God. And when you are through on this world, I have other and better worlds where you shall likewise work for me. And in all of this work, on this world and on other worlds, I will work with you, and my spirit shall dwell within you.”}
 \vs p192 2:14 \pc It was almost 10:00 when Jesus returned from his visit with the Alpheus twins, and as he left the apostles, he said: \textcolour{ubdarkred}{“Farewell, until I meet you all on the mount of your ordination tomorrow at noontime.”} When he had thus spoken, he vanished from their sight.
 \usection{On the Mount of Ordination}
-\vs p192 3:1 At noon on Saturday, April 22, the 11 apostles assembled by appointment on the hill near Capernaum, and Jesus appeared among them. This meeting occurred on the very mount where the Master had set them apart as his apostles and as ambassadors of the Father’s kingdom on earth. And this was the Master’s 14\ts{th} morontia manifestation.
-\vs p192 3:2 At this time the 11 apostles knelt in a circle about the Master and heard him repeat the charges and saw him re\hyp{}enact the ordination scene even as when they were first set apart for the special work of the kingdom. And all of this was to them as a memory of their former consecration to the Father’s service, except the Master’s prayer. When the Master --- the morontia Jesus --- now prayed, it was in tones of majesty and with words of power such as the apostles had never before heard. Their Master now spoke with the rulers of the universes as one who, in his own universe, had had all power and authority committed to his hand. And these 11 men never forgot this experience of the morontia rededication to the former pledges of ambassadorship. The Master spent just one hour on this mount with his ambassadors, and when he had taken an affectionate farewell of them, he vanished from their sight.
+\vs p192 3:1 At noon on Saturday, April 22, the eleven apostles assembled by appointment on the hill near Capernaum, and Jesus appeared among them. This meeting occurred on the very mount where the Master had set them apart as his apostles and as ambassadors of the Father’s kingdom on earth. And this was the Master’s 14\ts{th} morontia manifestation.
+\vs p192 3:2 At this time the eleven apostles knelt in a circle about the Master and heard him repeat the charges and saw him re\hyp{}enact the ordination scene even as when they were first set apart for the special work of the kingdom. And all of this was to them as a memory of their former consecration to the Father’s service, except the Master’s prayer. When the Master --- the morontia Jesus --- now prayed, it was in tones of majesty and with words of power such as the apostles had never before heard. Their Master now spoke with the rulers of the universes as one who, in his own universe, had had all power and authority committed to his hand. And these eleven men never forgot this experience of the morontia rededication to the former pledges of ambassadorship. The Master spent just one hour on this mount with his ambassadors, and when he had taken an affectionate farewell of them, he vanished from their sight.
 \vs p192 3:3 \pc And no one saw Jesus for a full week. The apostles really had no idea what to do, not knowing whether the Master had gone to the Father. In this state of uncertainty they tarried at Bethsaida. They were afraid to go fishing lest he come to visit them and they miss seeing him. During this entire week Jesus was occupied with the morontia creatures on earth and with the affairs of the morontia transition which he was experiencing on this world.
 \usection{The Lakeside Gathering}
 \vs p192 4:1 Word of the appearances of Jesus was spreading throughout Galilee, and every day increasing numbers of believers arrived at the Zebedee home to inquire about the Master’s resurrection and to find out the truth about these reputed appearances. Peter, early in the week, sent out word that a public meeting would be held by the seaside the next Sabbath at 15:00.
 \vs p192 4:2 Accordingly, on Saturday, April 29, at 15:00, more than 500 believers from the environs of Capernaum assembled at Bethsaida to hear Peter preach his first public sermon since the resurrection. The apostle was at his best, and after he had finished his appealing discourse, few of his hearers doubted that the Master had risen from the dead.
 \vs p192 4:3 Peter ended his sermon, saying: “We affirm that Jesus of Nazareth is not dead; we declare that he has risen from the tomb; we proclaim that we have seen him and talked with him.” Just as he finished making this declaration of faith, there by his side, in full view of all these people, the Master appeared in morontia form and, speaking to them in familiar accents, said, \textcolour{ubdarkred}{“Peace be upon you, and my peace I leave with you.”} When he had thus appeared and had so spoken to them, he vanished from their sight. This was the 15\ts{th} morontia manifestation of the risen Jesus.
-\vs p192 4:4 \pc Because of certain things said to the 11 while they were in conference with the Master on the mount of ordination, the apostles received the impression that their Master would presently make a public appearance before a group of the Galilean believers, and that, after he had done so, they were to return to Jerusalem. Accordingly, early the next day, Sunday, April 30, the 11 left Bethsaida for Jerusalem. They did considerable teaching and preaching on the way down the Jordan, so that they did not arrive at the home of the Marks in Jerusalem until late on Wednesday, May 3.
-\vs p192 4:5 \pc This was a sad home\hyp{}coming for John Mark. Just a few hours before he reached home, his father, Elijah Mark, suddenly died from a haemorrhage in the brain. Although the thought of the certainty of the resurrection of the dead did much to comfort the apostles in their grief, at the same time they truly mourned the loss of their good friend, who had been their staunch supporter even in the times of great trouble and disappointment. John Mark did all he could to comfort his mother and, speaking for her, invited the apostles to continue to make their home at her house. And the 11 made this upper chamber their headquarters until after the day of Pentecost.
+\vs p192 4:4 \pc Because of certain things said to the eleven while they were in conference with the Master on the mount of ordination, the apostles received the impression that their Master would presently make a public appearance before a group of the Galilean believers, and that, after he had done so, they were to return to Jerusalem. Accordingly, early the next day, Sunday, April 30, the eleven left Bethsaida for Jerusalem. They did considerable teaching and preaching on the way down the Jordan, so that they did not arrive at the home of the Marks in Jerusalem until late on Wednesday, May 3.
+\vs p192 4:5 \pc This was a sad home\hyp{}coming for John Mark. Just a few hours before he reached home, his father, Elijah Mark, suddenly died from a haemorrhage in the brain. Although the thought of the certainty of the resurrection of the dead did much to comfort the apostles in their grief, at the same time they truly mourned the loss of their good friend, who had been their staunch supporter even in the times of great trouble and disappointment. John Mark did all he could to comfort his mother and, speaking for her, invited the apostles to continue to make their home at her house. And the eleven made this upper chamber their headquarters until after the day of Pentecost.
 \vs p192 4:6 \pc The apostles had purposely entered Jerusalem after nightfall that they might not be seen by the Jewish authorities. Neither did they publicly appear in connection with the funeral of Elijah Mark. All the next day they remained in quiet seclusion in this eventful upper chamber.
 \vs p192 4:7 On Thursday night the apostles had a wonderful meeting in this upper chamber and all pledged themselves to go forth in the public preaching of the new gospel of the risen Lord except Thomas, Simon Zelotes, and the Alpheus twins. Already had begun the first steps of changing the gospel of the kingdom --- sonship with God and brotherhood with man --- into the proclamation of the resurrection of Jesus. Nathaniel opposed this shift in the burden of their public message, but he could not withstand Peter’s eloquence, neither could he overcome the enthusiasm of the disciples, especially the women believers.
 \vs p192 4:8 And so, under the vigorous leadership of Peter and ere the Master ascended to the Father, his well\hyp{}meaning representatives began that subtle process of gradually and certainly changing the religion \bibemph{of} Jesus into a new and modified form of religion \bibemph{about} Jesus.
